* Bumped version at the "Project-Id-Version: ".
* Discarded obsolete translations.

* Added fall back address at the "Language-Team: ", according to the
    http://www.iro.umontreal.ca/translation/registry.cgi?team=index

* Modified initial comment strings using template by "msginit".


(Old svn revision: 17904)

--- a/po/be.po
+++ b/po/be.po
@@ -1,15 +1,14 @@
-# translation of xfce4-panel.po to Belarusian
-# Беларускі пераклад xfce4-panel.
-# This file is distributed under the same license as the PACKAGE package.
-# Copyright (C) 2004 THE PACKAGE'S COPYRIGHT HOLDER.
+# Belarusian translations for xfce4-panel package.
+# Copyright (C) 2005 Jasper Huijsmans.
+# This file is distributed under the same license as the xfce4-panel package.
 # Ales Nyakhaychyk <nab@mail.by>, 2004.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel\n"
+"Project-Id-Version: xfce4-panel 4.3.22\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-09-28 10:01+0200\n"
-"PO-Revision-Date: 2004-09-12 03:12+0300\n"
+"POT-Creation-Date: 2005-09-29 20:47+0900\n"
+"PO-Revision-Date: 2005-09-29 20:16+0900\n"
 "Last-Translator: Ales Nyakhaychyk <nab@mail.by>\n"
 "Language-Team: Belarusian <i18n@mova.org>\n"
 "MIME-Version: 1.0\n"
@@ -86,7 +85,7 @@ msgstr ""
 msgid "Restart"
 msgstr "Пераза_пусьціць"
 
-#: ../panel/panel-item-manager.c:327 ../panel/panel-item-manager.c:335
+#: ../panel/panel-item-manager.c:353 ../panel/panel-item-manager.c:361
 #, fuzzy, c-format
 msgid "Could not open \"%s\" module"
 msgstr "Немагчыма стварыць элемэнт панэлі \"%s\"."
@@ -632,406 +631,3 @@ msgstr "Паказваць назвы дас_тасаваньняў"
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
 msgstr ""
-
-#, fuzzy
-#~ msgid "Panel Settings"
-#~ msgstr "Наладкі панэлі XFce"
-
-#, fuzzy
-#~ msgid "Xfce 4 Panel Settings"
-#~ msgstr "Наладкі панэлі XFce"
-
-#~ msgid "No data was found. The panel will be empty."
-#~ msgstr "Даньні ня знойдзены. Панэля нічога ня будзе ўтрымліваць."
-
-#~ msgid "Position:"
-#~ msgstr "Становішча:"
-
-#~ msgid "Command:"
-#~ msgstr "Загад:"
-
-#~ msgid "Use startup _notification"
-#~ msgstr "Выкарыстоўваць папяр_эджаньне пад час запуску"
-
-#~ msgid "Other Icon"
-#~ msgstr "Іншая значка"
-
-#~ msgid "Drag file onto this frame to change the icon"
-#~ msgstr "Перацягніце файл у гэты кадар каб зьмяніць значку"
-
-#~ msgid "%s: Successfully started without session management"
-#~ msgstr "%s: пасьпяхова запушчана без падтрымкі кіраваньня сэансам"
-
-#~ msgid "%s: Successfully started with session management"
-#~ msgstr "%s: пасьпяхова запушчана з падтрымкай кіраваньня сэансам"
-
-#~ msgid "Could not create panel item \"%s\"."
-#~ msgstr "Немагчыма стварыць элемэнт панэлі \"%s\"."
-
-#~ msgid "_Properties..."
-#~ msgstr "_Уласьцівасьці..."
-
-#~ msgid "_Remove"
-#~ msgstr "В_ыдаліць"
-
-#~ msgid "Add _new item"
-#~ msgstr "Дадаць _новы элемэнт"
-
-#~ msgid "This item has no configuration options"
-#~ msgstr "Гэты элемэнт ня мае выбараў наладкі"
-
-#~ msgid "_About Xfce"
-#~ msgstr "_Аб XFce"
-
-#~ msgid "_Help"
-#~ msgstr "_Даведка"
-
-#~ msgid "E_xit"
-#~ msgstr "Вы_йсьці"
-
-#, fuzzy
-#~ msgid "icons|Terminal"
-#~ msgstr "Тэрмінал"
-
-#~ msgid "Settings manager not available"
-#~ msgstr "Кіраўнік усталёвак недаступны"
-
-#~ msgid "Taskbar"
-#~ msgstr "Панэля задач"
-
-#~ msgid "Cannot create MCS client channel"
-#~ msgstr "Немагчыма стварыць канал для кліента MCS"
-
-#, fuzzy
-#~ msgid "_About"
-#~ msgstr "_Аб XFce"
-
-#~ msgid "Medium"
-#~ msgstr "звычайная"
-
-#~ msgid "Huge"
-#~ msgstr "Найвялікшая"
-
-#~ msgid "Panel size:"
-#~ msgstr "Памер панэлі:"
-
-#~ msgid "Autohide:"
-#~ msgstr "Аўтахаваньне:"
-
-#~ msgid "Behaviour"
-#~ msgstr "Паводзіны"
-
-#~ msgid "_Top"
-#~ msgstr "У_гары"
-
-#~ msgid "_Bottom"
-#~ msgstr "До_лу"
-
-#, fuzzy
-#~ msgid "Alignment:"
-#~ msgstr "Выроўніваньне"
-
-#~ msgid "_Left"
-#~ msgstr "_Леваруч"
-
-#~ msgid "_Center"
-#~ msgstr "Па_сярэдзіне"
-
-#~ msgid "_Right"
-#~ msgstr "_Праваруч"
-
-#, fuzzy
-#~ msgid "Height:"
-#~ msgstr "Вышыня:"
-
-#~ msgid "Width:"
-#~ msgstr "Шырыня:"
-
-#~ msgid "Auto _hide taskbar"
-#~ msgstr "Аўтаматычна _хаваць панэлю задач"
-
-#~ msgid "Show _pager in taskbar"
-#~ msgstr "Паказваць перакл_ючальнік прастораў на панэлі задач"
-
-#, fuzzy
-#~ msgid "Status area"
-#~ msgstr "Субота"
-
-#, fuzzy
-#~ msgid "Icon size"
-#~ msgstr "Перадпрагляд значкі"
-
-#~ msgid "%A, %d %B %Y"
-#~ msgstr "%A, %d %B %Y"
-
-#~ msgid "Clock type:"
-#~ msgstr "Від гадзіньніка:"
-
-#~ msgid "Hour mode:"
-#~ msgstr "Рэжым гадзін:"
-
-#~ msgid "24 hour"
-#~ msgstr "24 гадзіны"
-
-#~ msgid "12 hour"
-#~ msgstr "12 гадзін"
-
-#~ msgid "Show seconds:"
-#~ msgstr "Паказваць сэкунды:"
-
-#, fuzzy
-#~ msgid "Settings"
-#~ msgstr "Наладкі панэлі XFce"
-
-#, fuzzy
-#~ msgid "Edit launcher"
-#~ msgstr "Дадаць запускальнік"
-
-#, fuzzy
-#~ msgid "_Edit"
-#~ msgstr "Рэдактар"
-
-#~ msgid "Mail box:"
-#~ msgstr "Паштовая скрыня:"
-
-#~ msgid "New mail command:"
-#~ msgstr "Паштовы загад:"
-
-#~ msgid "Command to run when new mail arrives"
-#~ msgstr "Загад, які трэба выканаць, калі атрымана новая пошта"
-
-#~ msgid "Command to run when the button on the panel is clicked"
-#~ msgstr "Загад на выкананьне, калі пстрыкнулі па кнопачцы на панэлі"
-
-#~ msgid "Interval (sec):"
-#~ msgstr "Прамежак (сэк.):"
-
-#~ msgid "Mail checker"
-#~ msgstr "Праверка пошты"
-
-#~ msgid "Graphical pager"
-#~ msgstr "Графічныя старонкі"
-
-#~ msgid "Desktop switcher"
-#~ msgstr "Пераключальнік стальцоў"
-
-#~ msgid ""
-#~ "Access to the configuration system has been disabled.\n"
-#~ "\n"
-#~ "Ask your system administrator for more information"
-#~ msgstr ""
-#~ "Доступ да сыстэмы наладак быў выключаны.\n"
-#~ "\n"
-#~ "За даведкамі зьвяртайцеся да вашага сыстэмнага адміністратара"
-
-#, fuzzy
-#~ msgid "tip|Exit"
-#~ msgstr "Выхад"
-
-#, fuzzy
-#~ msgid "tip|Setup"
-#~ msgstr "Наладкі"
-
-#, fuzzy
-#~ msgid "tip|Info"
-#~ msgstr "Зьвесткі"
-
-#~ msgid "Exit"
-#~ msgstr "Выхад"
-
-#~ msgid "Setup"
-#~ msgstr "Наладкі"
-
-#~ msgid "Info"
-#~ msgstr "Зьвесткі"
-
-#~ msgid "Button 1:"
-#~ msgstr "Кнопка №1:"
-
-#~ msgid "Button 2:"
-#~ msgstr "Кнопка №2:"
-
-#~ msgid "_Hide"
-#~ msgstr "С_хаваць"
-
-#~ msgid "System buttons"
-#~ msgstr "Сыстэмныя кнопкі"
-
-#, fuzzy
-#~ msgid "Iconbox Settings"
-#~ msgstr "Наладкі панэлі XFce"
-
-#, fuzzy
-#~ msgid "Xfce 4 Iconbox Settings"
-#~ msgstr "Наладкі панэлі XFce"
-
-#, fuzzy
-#~ msgid "Taskbar Settings"
-#~ msgstr "Панэля задач"
-
-#, fuzzy
-#~ msgid "Xfce 4 Taskbar Settings"
-#~ msgstr "Наладкі панэлі XFce"
-
-#, fuzzy
-#~ msgid "File manager"
-#~ msgstr "Кіраваньне файламі"
-
-#, fuzzy
-#~ msgid "Manual"
-#~ msgstr "Студзень"
-
-#, fuzzy
-#~ msgid "Printer Management"
-#~ msgstr "Кіраваньне файламі"
-
-#~ msgid "Removing the item will also remove its popup menu."
-#~ msgstr "Выдаленьне элемэнта выкліча выдаленьне ўсплыўнога мэню."
-
-#~ msgid "Caption:"
-#~ msgstr "Загаловак:"
-
-#~ msgid "Tooltip:"
-#~ msgstr "Падказка:"
-
-#~ msgid "Attach menu to launcher"
-#~ msgstr "Далучыць мэню да запускальніка"
-
-#~ msgid "Change menu item"
-#~ msgstr "Зьмяніць элемэнт мэню"
-
-#~ msgid "Click mouse button 3 to change item"
-#~ msgstr "Пстрыкніце трэцюю кнопку мышы, каб зьмяніць элемэнт"
-
-#~ msgid "Add launcher"
-#~ msgstr "Дадаць запускальнік"
-
-#~ msgid "Left"
-#~ msgstr "леваруч"
-
-#~ msgid "Right"
-#~ msgstr "праваруч"
-
-#~ msgid "Top"
-#~ msgstr "зьверху"
-
-#~ msgid "Bottom"
-#~ msgstr "зьнізу"
-
-#~ msgid "Popup position:"
-#~ msgstr "Становішча ўсплыўнога мэню:"
-
-#, fuzzy
-#~ msgid "Notification Area"
-#~ msgstr "Прастора паведамленьняў"
-
-#~ msgid "Menu"
-#~ msgstr "Мэню"
-
-#~ msgid "Always on top:"
-#~ msgstr "Заўсёды зьверху:"
-
-#~ msgid "Show _system tray in taskbar"
-#~ msgstr "Паказваць прастору пав_едамленьняў на панэлі задач"
-
-#~ msgid "Cannot get initial style"
-#~ msgstr "Немагчыма атрымаць пачатковы стыль"
-
-#~ msgid "This should not happen"
-#~ msgstr "Гэта непавінна было здарыцца"
-
-#~ msgid "Cannot get default screen\n"
-#~ msgstr "Немагчыма атрымаць дапомны экран\n"
-
-#~ msgid "Cannot connect to session manager"
-#~ msgstr "Немагчыма далучыцца да кіраўніка сэансаў"
-
-#~ msgid "Change item"
-#~ msgstr "Рэдагаваньне элемэнта"
-
-#~ msgid "Menu:"
-#~ msgstr "Мэню:"
-
-#~ msgid ""
-#~ "Your window manager does not seem to support the new window manager hints "
-#~ "as defined on http://www.freedesktop.org. \n"
-#~ "Some XFce features may not work as intended."
-#~ msgstr ""
-#~ "Ваш ваконны кіраўнік не падтрымлівае новыя ваконныя парады, як гэта "
-#~ "вызначана на http://www.freedesktop.org.\n"
-#~ "Некаторыя магчымасьці XFce могуць працаваць ня так як трэба."
-
-#~ msgid "/XFce Panel"
-#~ msgstr "/Панэля XFce"
-
-#~ msgid "/_Settings manager"
-#~ msgstr "/К_іраўнік усталёвак"
-
-#~ msgid "Tiny"
-#~ msgstr "вельмі маленькая"
-
-#~ msgid "Icon theme:"
-#~ msgstr "Тэма значак"
-
-#~ msgid "Normal"
-#~ msgstr "звычайны"
-
-#~ msgid "Center the panel:"
-#~ msgstr "Цэнтар панэлі:"
-
-#~ msgid "Set"
-#~ msgstr "Усталяваць"
-
-#~ msgid "Sunday"
-#~ msgstr "Нядзеля"
-
-#~ msgid "Monday"
-#~ msgstr "Панядзелак"
-
-#~ msgid "Tuesday"
-#~ msgstr "Аўторак"
-
-#~ msgid "Wednesday"
-#~ msgstr "Серада"
-
-#~ msgid "Thursday"
-#~ msgstr "Чацьвер"
-
-#~ msgid "Friday"
-#~ msgstr "Пятніца"
-
-#~ msgid "February"
-#~ msgstr "Люты"
-
-#~ msgid "March"
-#~ msgstr "Сакавік"
-
-#~ msgid "April"
-#~ msgstr "Красавік"
-
-#~ msgid "May"
-#~ msgstr "Травень"
-
-#~ msgid "June"
-#~ msgstr "Чэрвень"
-
-#~ msgid "July"
-#~ msgstr "Ліпень"
-
-#~ msgid "August"
-#~ msgstr "Жнівень"
-
-#~ msgid "September"
-#~ msgstr "Верасень"
-
-#~ msgid "October"
-#~ msgstr "Кастрычнік"
-
-#~ msgid "November"
-#~ msgstr "Лістапад"
-
-#~ msgid "December"
-#~ msgstr "Сьнежань"
-
-#~ msgid "Show two buttons:"
-#~ msgstr "Паказваць дзьве кнопкі:"
