--- a/po/bg.po
+++ b/po/bg.po
@@ -1,13 +1,13 @@
 # Bulgarian translation of xfce4-panel.
-# Copyright (C) 2002-2005 The Xfce development team.
+# Copyright (C) 2005 Jasper Huijsmans.
 # This file is distributed under the same license as the xfce4-panel package.
 # Miroslav Yordanov <miordanov@i-space.org>, 2004.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel 4.3.2\n"
+"Project-Id-Version: xfce4-panel 4.3.22\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-09-28 10:01+0200\n"
+"POT-Creation-Date: 2005-09-29 20:47+0900\n"
 "PO-Revision-Date: 2005-08-21 17:27+0900\n"
 "Last-Translator: Miroslav Yordanov <miordanov@i-space.org>\n"
 "Language-Team: Bulgarian <bg@li.org>\n"
@@ -84,7 +84,7 @@ msgstr ""
 msgid "Restart"
 msgstr ""
 
-#: ../panel/panel-item-manager.c:327 ../panel/panel-item-manager.c:335
+#: ../panel/panel-item-manager.c:353 ../panel/panel-item-manager.c:361
 #, c-format
 msgid "Could not open \"%s\" module"
 msgstr ""
@@ -623,224 +623,3 @@ msgstr ""
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
 msgstr ""
-
-#, fuzzy
-#~ msgid "Panel Settings"
-#~ msgstr "Xfce·настройки за панела"
-
-#, fuzzy
-#~ msgid "Xfce 4 Panel Settings"
-#~ msgstr "Xfce·настройки за панела"
-
-#~ msgid "Position:"
-#~ msgstr "Позиция"
-
-#~ msgid "Command:"
-#~ msgstr "Команда:"
-
-#~ msgid "Use startup _notification"
-#~ msgstr "Използва съобщение при стартиране"
-
-#~ msgid "Other Icon"
-#~ msgstr "Друга икона"
-
-#~ msgid "Drag file onto this frame to change the icon"
-#~ msgstr "Дръпнете файл в тази рамка за се промени иконата"
-
-#, fuzzy
-#~ msgid "_Properties..."
-#~ msgstr "/_Настройки"
-
-#~ msgid "This item has no configuration options"
-#~ msgstr "Този обект няма опции за настройване"
-
-#, fuzzy
-#~ msgid "_About Xfce"
-#~ msgstr "/_Относно Xfce"
-
-#, fuzzy
-#~ msgid "_Help"
-#~ msgstr "/_Помощ"
-
-#, fuzzy
-#~ msgid "E_xit"
-#~ msgstr "/Изход"
-
-#, fuzzy
-#~ msgid "icons|Terminal"
-#~ msgstr "Терминал"
-
-#~ msgid "Settings manager not available"
-#~ msgstr "Мениджъра за настройки не е достъпен"
-
-#~ msgid "Taskbar"
-#~ msgstr "Лента за задачи"
-
-#~ msgid "Cannot create MCS client channel"
-#~ msgstr "Не мога да създам канала на клиента MCS"
-
-#, fuzzy
-#~ msgid "_About"
-#~ msgstr "/_Относно Xfce"
-
-#~ msgid "Medium"
-#~ msgstr "Среден"
-
-#~ msgid "Autohide:"
-#~ msgstr "Автоматично скриване:"
-
-#~ msgid "Behaviour"
-#~ msgstr "Вид"
-
-#, fuzzy
-#~ msgid "_Top"
-#~ msgstr "Горе"
-
-#, fuzzy
-#~ msgid "_Bottom"
-#~ msgstr "Долу"
-
-#, fuzzy
-#~ msgid "Height:"
-#~ msgstr "Широчина :"
-
-#, fuzzy
-#~ msgid "Auto _hide taskbar"
-#~ msgstr "Автоматично скриване на лентата със задачи"
-
-#, fuzzy
-#~ msgid "Show _pager in taskbar"
-#~ msgstr "Показва пейджъра на лентата със задачи"
-
-#, fuzzy
-#~ msgid "Status area"
-#~ msgstr "Събота"
-
-#, fuzzy
-#~ msgid "Icon size"
-#~ msgstr "Преглед на икона"
-
-#~ msgid "Clock type:"
-#~ msgstr "Тип на часовника:"
-
-#~ msgid "Hour mode:"
-#~ msgstr "Часови режим:"
-
-#~ msgid "24 hour"
-#~ msgstr "24 часов"
-
-#~ msgid "12 hour"
-#~ msgstr "12 часов"
-
-#~ msgid "Show seconds:"
-#~ msgstr "Показва секунди:"
-
-#, fuzzy
-#~ msgid "Settings"
-#~ msgstr "Xfce·настройки за панела"
-
-#, fuzzy
-#~ msgid "Edit launcher"
-#~ msgstr "Добавяне на обект"
-
-#, fuzzy
-#~ msgid "_Edit"
-#~ msgstr "Редактор"
-
-#~ msgid "Mail box:"
-#~ msgstr "Пощенска кутия:"
-
-#, fuzzy
-#~ msgid "New mail command:"
-#~ msgstr "Пощенска команда:"
-
-#, fuzzy
-#~ msgid "Command to run when new mail arrives"
-#~ msgstr "Команда която да се стартира при натискане на бутона на панела"
-
-#~ msgid "Command to run when the button on the panel is clicked"
-#~ msgstr "Команда която да се стартира при натискане на бутона на панела"
-
-#~ msgid "Interval (sec):"
-#~ msgstr "Интервал (сек):"
-
-#, fuzzy
-#~ msgid "Mail checker"
-#~ msgstr "Проверка на пощата"
-
-#~ msgid "Graphical pager"
-#~ msgstr "Графичен пейджър"
-
-#~ msgid "Desktop switcher"
-#~ msgstr "Превключвач на работното място"
-
-#~ msgid ""
-#~ "Access to the configuration system has been disabled.\n"
-#~ "\n"
-#~ "Ask your system administrator for more information"
-#~ msgstr ""
-#~ "Достъпът до системата за конфигуриране е изключен.\n"
-#~ "\n"
-#~ "Питайте вашия системен администратор за повече инфорцмация"
-
-#, fuzzy
-#~ msgid "tip|Exit"
-#~ msgstr "Изход"
-
-#, fuzzy
-#~ msgid "tip|Setup"
-#~ msgstr "Настройки"
-
-#, fuzzy
-#~ msgid "tip|Info"
-#~ msgstr "Информация"
-
-#~ msgid "Exit"
-#~ msgstr "Изход"
-
-#~ msgid "Setup"
-#~ msgstr "Настройки"
-
-#~ msgid "Info"
-#~ msgstr "Информация"
-
-#~ msgid "Button 1:"
-#~ msgstr "Бутон 1:"
-
-#~ msgid "Button 2:"
-#~ msgstr "Бутон 2:"
-
-#, fuzzy
-#~ msgid "_Hide"
-#~ msgstr "/_Помощ"
-
-#~ msgid "System buttons"
-#~ msgstr "Системни бутони"
-
-#, fuzzy
-#~ msgid "Iconbox Settings"
-#~ msgstr "Xfce·настройки за панела"
-
-#, fuzzy
-#~ msgid "Xfce 4 Iconbox Settings"
-#~ msgstr "Xfce·настройки за панела"
-
-#, fuzzy
-#~ msgid "Taskbar Settings"
-#~ msgstr "Лента за задачи"
-
-#, fuzzy
-#~ msgid "Xfce 4 Taskbar Settings"
-#~ msgstr "Xfce·настройки за панела"
-
-#, fuzzy
-#~ msgid "File manager"
-#~ msgstr "Управление на файловете"
-
-#, fuzzy
-#~ msgid "Manual"
-#~ msgstr "Януари"
-
-#, fuzzy
-#~ msgid "Printer Management"
-#~ msgstr "Управление на файловете"
