--- a/po/bn_IN.po
+++ b/po/bn_IN.po
@@ -1,14 +1,14 @@
-# translation of xfce4-panel.po to Bangla INDIA
+# translation of xfce4-panel.po to Bangla INDIA.
+# Copyright (C) 2005 Jasper Huijsmans.
 # This file is distributed under the same license as the xfce4-panel package.
-# Copyright (C) 2005 Free Software Foundation
 # Runa Bhattacharjee <runab@redhat.com>, 2005.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel\n"
+"Project-Id-Version: xfce4-panel 4.3.22\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-09-28 10:01+0200\n"
-"PO-Revision-Date: 2005-04-06 15:54+0530\n"
+"POT-Creation-Date: 2005-09-29 20:47+0900\n"
+"PO-Revision-Date: 2005-09-29 20:17+0900\n"
 "Last-Translator: Runa Bhattacharjee <runab@redhat.com>\n"
 "Language-Team: Bangla INDIA <LL@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -86,7 +86,7 @@ msgstr ""
 msgid "Restart"
 msgstr "রিস্টার্ট (_R)"
 
-#: ../panel/panel-item-manager.c:327 ../panel/panel-item-manager.c:335
+#: ../panel/panel-item-manager.c:353 ../panel/panel-item-manager.c:361
 #, fuzzy, c-format
 msgid "Could not open \"%s\" module"
 msgstr "প্যানেলের বস্তু নির্মাণ করা সম্ভব হয়নি \"%s\"।"
@@ -634,310 +634,3 @@ msgstr "শুধুমাত্র ছোট করা অ্যাপ্লি
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
 msgstr ""
-
-#~ msgid "Panel Settings"
-#~ msgstr "প্যানেলের বৈশিষ্ট্যাবলী"
-
-#~ msgid "Xfce 4 Panel Settings"
-#~ msgstr "Xfce 4 প্যানেলের বৈশিষ্ট্যাবলী"
-
-#~ msgid "No data was found. The panel will be empty."
-#~ msgstr "কোনো ডাটা পাওয়া যায়নি। প্যানেলটি ফাঁকা রাখা হবে।"
-
-#~ msgid "Position:"
-#~ msgstr "অবস্থান:"
-
-#~ msgid "Command:"
-#~ msgstr "কমান্ড:"
-
-#~ msgid "Use startup _notification"
-#~ msgstr "স্টার্ট-আপ নোটিফিকেশন ব্যবহার করা হবে (_n)"
-
-#~ msgid "Other Icon"
-#~ msgstr "পৃথক আইকন"
-
-#~ msgid "Drag file onto this frame to change the icon"
-#~ msgstr "আইকন পরিবর্তন করতে হলে সংশ্লিষ্ট ফাইলটি এই ফ্রেমের মধ্যে টেনে আনুন"
-
-#~ msgid "%s: Successfully started without session management"
-#~ msgstr "%s: সেশান পরিচালকবিনা সাফল্যের সাথে আরম্ভ করা হয়েছে"
-
-#~ msgid "%s: Successfully started with session management"
-#~ msgstr "%s: সেশান পরিচালকসহ সাফল্যের সাথে আরম্ভ করা হয়েছে"
-
-#~ msgid "Could not create panel item \"%s\"."
-#~ msgstr "প্যানেলের বস্তু নির্মাণ করা সম্ভব হয়নি \"%s\"।"
-
-#~ msgid "_Properties..."
-#~ msgstr "বৈশিষ্ট্যাবলী...(_P)"
-
-#~ msgid "This item has no configuration options"
-#~ msgstr "এই বস্তুর জন্য কোনো কনফিগারেশনের অপশন উপস্থিত নেই"
-
-#~ msgid "_About Xfce"
-#~ msgstr "Xfce পরিচিতি (_A)"
-
-#~ msgid "_Help"
-#~ msgstr "সহায়িকা (_H)"
-
-#~ msgid "E_xit"
-#~ msgstr "প্রস্থান (_x)"
-
-#~ msgid "icons|Terminal"
-#~ msgstr "আইকন|টার্মিনাল"
-
-#~ msgid "Settings manager not available"
-#~ msgstr "বৈশিষ্ট্যাবলী পরিচালক উপস্থিত নেই"
-
-#~ msgid "%H:%M"
-#~ msgstr "%H:%M"
-
-#~ msgid "Taskbar"
-#~ msgstr "টাস্কবার"
-
-#~ msgid "Cannot create MCS client channel"
-#~ msgstr "MCS ক্লায়েন্ট চ্যানেল নির্মাণ করা যায়নি"
-
-#~ msgid "_About"
-#~ msgstr "পরিচিতি (_A)"
-
-#~ msgid "Medium"
-#~ msgstr "মাঝারি"
-
-#~ msgid "Huge"
-#~ msgstr "অতিকায়"
-
-#~ msgid "Autohide:"
-#~ msgstr "অটোহাইড:"
-
-#~ msgid "Behaviour"
-#~ msgstr "আচরণ"
-
-#~ msgid "_Top"
-#~ msgstr "উপরে (_T)"
-
-#~ msgid "_Bottom"
-#~ msgstr "নীচে (_B)"
-
-#~ msgid "Alignment:"
-#~ msgstr "দিশা:"
-
-#~ msgid "_Left"
-#~ msgstr "বাঁদিক (_L)"
-
-#~ msgid "_Center"
-#~ msgstr "কেন্দ্রস্থিত (_C)"
-
-#~ msgid "_Right"
-#~ msgstr "ডানদিক(_R)"
-
-#~ msgid "Height:"
-#~ msgstr "উচ্চতা:"
-
-#~ msgid "Width:"
-#~ msgstr "প্রস্থ:"
-
-#~ msgid "_Shrink to fit"
-#~ msgstr "যথাযত মাপ অনুসারে পরিবর্তন করুন (_S)"
-
-#~ msgid "Auto _hide taskbar"
-#~ msgstr "অটোহাইড টাস্কবার (_h)"
-
-#~ msgid "Show tasklist"
-#~ msgstr "কর্মতালিকা প্রদর্শন করুন"
-
-#~ msgid "Show _pager in taskbar"
-#~ msgstr "টাস্কবারে পেজার প্রদর্শন করা হবে (_p)"
-
-#~ msgid "Status area"
-#~ msgstr "অবস্থা চিহ্নকারী অঞ্চল"
-
-#~ msgid "General"
-#~ msgstr "সাধারণ"
-
-#~ msgid "Components"
-#~ msgstr "বিষয়বস্তু"
-
-#~ msgid "Icon size"
-#~ msgstr "আইকনের মাপ"
-
-#~ msgid "%A, %d %B %Y"
-#~ msgstr "%A, %d %B %Y"
-
-#~ msgid "Clock type:"
-#~ msgstr "ঘড়ির ধরন:"
-
-#~ msgid "Hour mode:"
-#~ msgstr "ঘন্টা প্রদর্শনের পদ্ধতি:"
-
-#~ msgid "24 hour"
-#~ msgstr "২৪ ঘন্টা"
-
-#~ msgid "12 hour"
-#~ msgstr "১২ ঘন্টা"
-
-#~ msgid "Show seconds:"
-#~ msgstr "সেকেন্ড প্রদর্শন করা হবে:"
-
-#, fuzzy
-#~ msgid "Development"
-#~ msgstr "ডিভেলপার"
-
-#~ msgid "Settings"
-#~ msgstr "বৈশিষ্ট্যাবলী"
-
-#, fuzzy
-#~ msgid "System"
-#~ msgstr "সিস্টেমের বাটন"
-
-#, fuzzy
-#~ msgid "Edit launcher"
-#~ msgstr "লঞ্চার যোগ করুন"
-
-#, fuzzy
-#~ msgid "_Edit"
-#~ msgstr "এডিটর"
-
-#~ msgid "Mail box:"
-#~ msgstr "মেইল-বক্স:"
-
-#~ msgid "New mail command:"
-#~ msgstr "নতুন মেইল কমান্ড:"
-
-#~ msgid "Command to run when new mail arrives"
-#~ msgstr "নতুন মেইল গৃহীত হলে উল্লিখিত কমান্ডটি চালানো হবে"
-
-#~ msgid "Command to run when the button on the panel is clicked"
-#~ msgstr "প্যানেলের উপরে বাটন ক্লিক করা হলে উল্লিখিত কমান্ডটি চালানো হবে"
-
-#~ msgid "Interval (sec):"
-#~ msgstr "বিরতি (সেকেন্ডে):"
-
-#~ msgid "Mail checker"
-#~ msgstr "মেইল পরীক্ষক"
-
-#~ msgid "Graphical pager"
-#~ msgstr "গ্রাফিকাল পেজার"
-
-#~ msgid "Desktop switcher"
-#~ msgstr "ডেস্কটপ অদলবদলকারী"
-
-#~ msgid ""
-#~ "Access to the configuration system has been disabled.\n"
-#~ "\n"
-#~ "Ask your system administrator for more information"
-#~ msgstr ""
-#~ "কনফিগারেশন সিস্টেমে প্রবেশাধিকার নিষ্ক্রিয় করা হয়েছে।\n"
-#~ "\n"
-#~ "অধিক তথ্যের জন্য আপনার সিস্টেম অ্যাডমিনিস্ট্রেটরের সাথে যোগাযোগ করুন"
-
-#~ msgid "tip|Exit"
-#~ msgstr "টিপ|প্রস্থান"
-
-#~ msgid "tip|Setup"
-#~ msgstr "টিপ|স্থাপনা"
-
-#~ msgid "tip|Info"
-#~ msgstr "টিপ|তথ্য"
-
-#~ msgid "Exit"
-#~ msgstr "প্রস্থান"
-
-#~ msgid "Setup"
-#~ msgstr "স্থাপনা"
-
-#~ msgid "Info"
-#~ msgstr "তথ্য"
-
-#~ msgid "Button 1:"
-#~ msgstr "বাটন ১:"
-
-#~ msgid "Button 2:"
-#~ msgstr "বাটন ২:"
-
-#~ msgid "_Hide"
-#~ msgstr "লুকিয়ে ফেলুন (_H)"
-
-#~ msgid "System buttons"
-#~ msgstr "সিস্টেমের বাটন"
-
-#~ msgid "Iconbox Settings"
-#~ msgstr "আইকনবক্সের বৈশিষ্ট্যাবলী"
-
-#~ msgid "Xfce 4 Iconbox Settings"
-#~ msgstr "Xfce 4 আইকনবক্সের বৈশিষ্ট্যাবলী"
-
-#~ msgid "Taskbar Settings"
-#~ msgstr "টাস্কবারের বৈশিষ্ট্যাবলী"
-
-#~ msgid "Xfce 4 Taskbar Settings"
-#~ msgstr "Xfce 4 টাস্কবারের বৈশিষ্ট্যাবলী"
-
-#~ msgid "Appfinder"
-#~ msgstr "Appfinder"
-
-#~ msgid "Drag file to print"
-#~ msgstr "প্রিন্ট করার উদ্দেশ্যে ফাইল টেনে আনুন"
-
-#~ msgid "File manager"
-#~ msgstr "ফাইল পরিচালক"
-
-#~ msgid "Find and run applications"
-#~ msgstr "অ্যাপ্লিকেশন অনুসন্ধান করুন ও চালান"
-
-#~ msgid "Konqueror"
-#~ msgstr "Konqueror"
-
-#~ msgid "Konqueror File Manager"
-#~ msgstr "Konqueror ফাইল পরিচালন ব্যবস্থা"
-
-#~ msgid "Manual"
-#~ msgstr "সহায়িকা"
-
-#~ msgid "Mozilla Web Browser"
-#~ msgstr "Mozilla ওয়েব ব্রাউজার"
-
-#~ msgid "Music player"
-#~ msgstr "সঙ্গীত বাদক"
-
-#~ msgid "Nautilus"
-#~ msgstr "Nautilus"
-
-#~ msgid "Nautilus File Manager"
-#~ msgstr "Nautilus ফাইল পরিচালন ব্যবস্থা"
-
-#~ msgid "Printer Management"
-#~ msgstr "প্রিন্টার পরিচালনা"
-
-#~ msgid "Removing the item will also remove its popup menu."
-#~ msgstr "বস্তুটি মোছা হলে এর সাথে যুক্ত পপ-আপ মেনুটিও মুছে যাবে।"
-
-#~ msgid "Caption:"
-#~ msgstr "শিরোনাম:"
-
-#~ msgid "Tooltip:"
-#~ msgstr "টুলটিপ:"
-
-#~ msgid "Attach menu to launcher"
-#~ msgstr "লঞ্চারের সাথে মেনু সংযুক্ত করুন"
-
-#~ msgid "Change menu item"
-#~ msgstr "মেনুর বস্তু পরিবর্তন করুন"
-
-#~ msgid "Click mouse button 3 to change item"
-#~ msgstr "বিষয়বস্তু পরিবর্তন করার জন্য মাউসের তৃতীয় বোতামটি টিপুন"
-
-#~ msgid "Left"
-#~ msgstr "বাঁদিক"
-
-#~ msgid "Right"
-#~ msgstr "ডানদিক"
-
-#~ msgid "Top"
-#~ msgstr "উপরে"
-
-#~ msgid "Bottom"
-#~ msgstr "নীচে"
-
-#~ msgid "Popup position:"
-#~ msgstr "পপ-আপের অবস্থান:"
