--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -1,17 +1,16 @@
 # British English translations for xfce4-panel package.
-# Copyright (C) 2004 Zuza Software Foundation (Translate.org.za)
+# Copyright (C) 2005 Jasper Huijsmans.
 # This file is distributed under the same license as the xfce4-panel package.
-#
 # Zuza Software Foundation (Translate.org.za), 2004.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel\n"
+"Project-Id-Version: xfce4-panel 4.3.22\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-09-28 10:01+0200\n"
-"PO-Revision-Date: 2004-12-03 18:06+0200\n"
+"POT-Creation-Date: 2005-09-29 20:47+0900\n"
+"PO-Revision-Date: 2005-09-29 20:21+0900\n"
 "Last-Translator: Translate.org.za <info@translate.org.za>\n"
-"Language-Team: \n"
+"Language-Team: British English <en_gb@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -87,7 +86,7 @@ msgstr ""
 msgid "Restart"
 msgstr "_Restart"
 
-#: ../panel/panel-item-manager.c:327 ../panel/panel-item-manager.c:335
+#: ../panel/panel-item-manager.c:353 ../panel/panel-item-manager.c:361
 #, fuzzy, c-format
 msgid "Could not open \"%s\" module"
 msgstr "Could not create panel item \"%s\"."
@@ -626,261 +625,3 @@ msgstr ""
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
 msgstr ""
-
-#, fuzzy
-#~ msgid "Panel Settings"
-#~ msgstr "Xfce Panel Settings"
-
-#, fuzzy
-#~ msgid "Xfce 4 Panel Settings"
-#~ msgstr "Xfce Panel Settings"
-
-#~ msgid "No data was found. The panel will be empty."
-#~ msgstr "No data was found. The panel will be empty."
-
-#~ msgid "Position:"
-#~ msgstr "Position:"
-
-#~ msgid "Command:"
-#~ msgstr "Command:"
-
-#~ msgid "Use startup _notification"
-#~ msgstr "Use startup _notification"
-
-#~ msgid "Other Icon"
-#~ msgstr "Other Icon"
-
-#~ msgid "Drag file onto this frame to change the icon"
-#~ msgstr "Drag file onto this frame to change the icon"
-
-#~ msgid "%s: Successfully started without session management"
-#~ msgstr "%s: Successfully started without session management"
-
-#~ msgid "%s: Successfully started with session management"
-#~ msgstr "%s: Successfully started with session management"
-
-#~ msgid "Could not create panel item \"%s\"."
-#~ msgstr "Could not create panel item \"%s\"."
-
-#~ msgid "_Properties..."
-#~ msgstr "_Properties..."
-
-#~ msgid "Add _new item"
-#~ msgstr "Add _new item"
-
-#~ msgid "This item has no configuration options"
-#~ msgstr "This item has no configuration options"
-
-#~ msgid "_About Xfce"
-#~ msgstr "_About Xfce"
-
-#~ msgid "_Help"
-#~ msgstr "_Help"
-
-#~ msgid "E_xit"
-#~ msgstr "E_xit"
-
-#, fuzzy
-#~ msgid "icons|Terminal"
-#~ msgstr "Terminal"
-
-#~ msgid "Settings manager not available"
-#~ msgstr "Settings manager not available"
-
-#, fuzzy
-#~ msgid "_About"
-#~ msgstr "_About Xfce"
-
-#~ msgid "Medium"
-#~ msgstr "Medium"
-
-#~ msgid "Huge"
-#~ msgstr "Huge"
-
-#~ msgid "Autohide:"
-#~ msgstr "Autohide:"
-
-#~ msgid "Behaviour"
-#~ msgstr "Behaviour"
-
-#, fuzzy
-#~ msgid "_Top"
-#~ msgstr "Top"
-
-#, fuzzy
-#~ msgid "_Bottom"
-#~ msgstr "Bottom"
-
-#, fuzzy
-#~ msgid "_Left"
-#~ msgstr "Left"
-
-#, fuzzy
-#~ msgid "_Right"
-#~ msgstr "Right"
-
-#, fuzzy
-#~ msgid "Height:"
-#~ msgstr "Right"
-
-#~ msgid "%A, %d %B %Y"
-#~ msgstr "%A, %-e %B %Y"
-
-#~ msgid "Clock type:"
-#~ msgstr "Clock type:"
-
-#~ msgid "Hour mode:"
-#~ msgstr "Hour mode:"
-
-#~ msgid "24 hour"
-#~ msgstr "24 hour"
-
-#~ msgid "12 hour"
-#~ msgstr "12 hour"
-
-#~ msgid "Show seconds:"
-#~ msgstr "Show seconds:"
-
-#, fuzzy
-#~ msgid "Settings"
-#~ msgstr "Xfce Panel Settings"
-
-#, fuzzy
-#~ msgid "Edit launcher"
-#~ msgstr "Add launcher"
-
-#, fuzzy
-#~ msgid "_Edit"
-#~ msgstr "Editor"
-
-#~ msgid "Mail box:"
-#~ msgstr "Mail box:"
-
-#~ msgid "New mail command:"
-#~ msgstr "New mail command:"
-
-#~ msgid "Command to run when new mail arrives"
-#~ msgstr "Command to run when new mail arrives"
-
-#~ msgid "Command to run when the button on the panel is clicked"
-#~ msgstr "Command to run when the button on the panel is clicked"
-
-#~ msgid "Interval (sec):"
-#~ msgstr "Interval (sec):"
-
-#~ msgid "Mail checker"
-#~ msgstr "Mail checker"
-
-#~ msgid "Graphical pager"
-#~ msgstr "Graphical pager"
-
-#~ msgid "Desktop switcher"
-#~ msgstr "Desktop switcher"
-
-#~ msgid ""
-#~ "Access to the configuration system has been disabled.\n"
-#~ "\n"
-#~ "Ask your system administrator for more information"
-#~ msgstr ""
-#~ "Access to the configuration system has been disabled.\n"
-#~ "\n"
-#~ "Ask your system administrator for more information"
-
-#, fuzzy
-#~ msgid "tip|Exit"
-#~ msgstr "Exit"
-
-#, fuzzy
-#~ msgid "tip|Setup"
-#~ msgstr "Setup"
-
-#, fuzzy
-#~ msgid "tip|Info"
-#~ msgstr "Info"
-
-#~ msgid "Exit"
-#~ msgstr "Exit"
-
-#~ msgid "Setup"
-#~ msgstr "Setup"
-
-#~ msgid "Info"
-#~ msgstr "Info"
-
-#~ msgid "Button 1:"
-#~ msgstr "Button 1:"
-
-#~ msgid "Button 2:"
-#~ msgstr "Button 2:"
-
-#~ msgid "_Hide"
-#~ msgstr "_Hide"
-
-#~ msgid "System buttons"
-#~ msgstr "System buttons"
-
-#, fuzzy
-#~ msgid "Iconbox Settings"
-#~ msgstr "Xfce Panel Settings"
-
-#, fuzzy
-#~ msgid "Xfce 4 Iconbox Settings"
-#~ msgstr "Xfce Panel Settings"
-
-#, fuzzy
-#~ msgid "Taskbar Settings"
-#~ msgstr "Xfce Panel Settings"
-
-#, fuzzy
-#~ msgid "Xfce 4 Taskbar Settings"
-#~ msgstr "Xfce Panel Settings"
-
-#, fuzzy
-#~ msgid "File manager"
-#~ msgstr "File management"
-
-#, fuzzy
-#~ msgid "Printer Management"
-#~ msgstr "File management"
-
-#~ msgid "Removing the item will also remove its popup menu."
-#~ msgstr "Removing the item will also remove its popup menu."
-
-#~ msgid "Caption:"
-#~ msgstr "Caption:"
-
-#~ msgid "Tooltip:"
-#~ msgstr "Tooltip:"
-
-#~ msgid "Attach menu to launcher"
-#~ msgstr "Attach menu to launcher"
-
-#~ msgid "Change menu item"
-#~ msgstr "Change menu item"
-
-#~ msgid "Click mouse button 3 to change item"
-#~ msgstr "Click mouse button 3 to change item"
-
-#~ msgid "Add launcher"
-#~ msgstr "Add launcher"
-
-#~ msgid "Left"
-#~ msgstr "Left"
-
-#~ msgid "Right"
-#~ msgstr "Right"
-
-#~ msgid "Top"
-#~ msgstr "Top"
-
-#~ msgid "Bottom"
-#~ msgstr "Bottom"
-
-#~ msgid "Popup position:"
-#~ msgstr "Popup position:"
-
-#~ msgid "Menu"
-#~ msgstr "Menu"
-
-#~ msgid "Always on top:"
-#~ msgstr "Always on top:"
