--- a/po/eo.po
+++ b/po/eo.po
@@ -1,16 +1,16 @@
 # Esperanto translations for the xfce4-panel package.
-# Copyright (C) 2005 Sylvain Vedrenne
+# Copyright (C) 2005 Jasper Huijsmans.
 # This file is distributed under the same license as the xfce4-panel package.
 # Sylvain Vedrenne <sylvain.vedrenne@free.fr>, 2005.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel\n"
+"Project-Id-Version: xfce4-panel 4.3.22\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-09-28 10:01+0200\n"
-"PO-Revision-Date: 2005-07-16 16:17+0200\n"
+"POT-Creation-Date: 2005-09-29 20:47+0900\n"
+"PO-Revision-Date: 2005-09-29 20:22+0900\n"
 "Last-Translator: Sylvain Vedrenne <sylvain.vedrenne@free.fr>\n"
-"Language-Team: \n"
+"Language-Team: Esperanto <translation-team-eo@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -87,7 +87,7 @@ msgstr ""
 msgid "Restart"
 msgstr "_Restartigu"
 
-#: ../panel/panel-item-manager.c:327 ../panel/panel-item-manager.c:335
+#: ../panel/panel-item-manager.c:353 ../panel/panel-item-manager.c:361
 #, fuzzy, c-format
 msgid "Could not open \"%s\" module"
 msgstr ""
@@ -634,291 +634,3 @@ msgstr "_Montru nur la aplikaĵojn etigitajn"
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
 msgstr ""
-
-#~ msgid "Panel Settings"
-#~ msgstr "Parametroj de la Panelo"
-
-#~ msgid "Xfce 4 Panel Settings"
-#~ msgstr "Parametroj de la Xfce 4 Panelo"
-
-#~ msgid "No data was found. The panel will be empty."
-#~ msgstr "Malsukcesis trovi ian datumon. La panelo estos malplena."
-
-#~ msgid "Position:"
-#~ msgstr "Pozicio:"
-
-#~ msgid "Command:"
-#~ msgstr "Komando:"
-
-#~ msgid "Use startup _notification"
-#~ msgstr "Uzi lanĉa _informigo"
-
-#~ msgid "Other Icon"
-#~ msgstr "Alia Piktogramo"
-
-#~ msgid "Drag file onto this frame to change the icon"
-#~ msgstr "Treni dosieron sur tiun kadron por ŝanĝi la piktogramon"
-
-#~ msgid "%s: Successfully started without session management"
-#~ msgstr "%s: Sukcese startis sen seancadministrado"
-
-#~ msgid "%s: Successfully started with session management"
-#~ msgstr "%s: Sukcese startis kun seancadministrado"
-
-#~ msgid "Could not create panel item \"%s\"."
-#~ msgstr "Malsukcesis krei tiun panelan elementon \"%s\"."
-
-#~ msgid "_Properties..."
-#~ msgstr "_Parametroj..."
-
-#~ msgid "_Remove"
-#~ msgstr "_Forigi"
-
-#~ msgid "This item has no configuration options"
-#~ msgstr "Ĉi tiu elemento ne havas konfigurajn opciojn"
-
-#~ msgid "_About Xfce"
-#~ msgstr "_Pri Xfce"
-
-#~ msgid "_Help"
-#~ msgstr "_Helpo"
-
-#~ msgid "E_xit"
-#~ msgstr "A_diaŭu"
-
-#~ msgid "icons|Terminal"
-#~ msgstr "icons|Terminalo"
-
-#~ msgid "Settings manager not available"
-#~ msgstr "La parametradministrilo ne estas disponebla"
-
-#~ msgid "%H:%M"
-#~ msgstr "%H:%M"
-
-#~ msgid "Taskbar"
-#~ msgstr "Taskostrio"
-
-#~ msgid "Cannot create MCS client channel"
-#~ msgstr "Ne eblas krei MCS klientan kanalon"
-
-#~ msgid "_About"
-#~ msgstr "_Pri"
-
-#~ msgid "Medium"
-#~ msgstr "Meza"
-
-#~ msgid "Huge"
-#~ msgstr "Grandega"
-
-#~ msgid "Autohide:"
-#~ msgstr "Aŭtomate kaŝu:"
-
-#~ msgid "Behaviour"
-#~ msgstr "Konduto"
-
-#~ msgid "_Top"
-#~ msgstr "_Supre"
-
-#~ msgid "_Bottom"
-#~ msgstr "_Malsupre"
-
-#~ msgid "Alignment:"
-#~ msgstr "Alliniigo:"
-
-#~ msgid "_Left"
-#~ msgstr "_Maldekstre"
-
-#~ msgid "_Center"
-#~ msgstr "_Centre"
-
-#~ msgid "_Right"
-#~ msgstr "_Dekstre"
-
-#~ msgid "Height:"
-#~ msgstr "Staturo:"
-
-#~ msgid "Width:"
-#~ msgstr "Larĝo:"
-
-#~ msgid "_Shrink to fit"
-#~ msgstr "_Etiĝu por konveni (\"Shrink to fit\")"
-
-#~ msgid "Auto _hide taskbar"
-#~ msgstr "Aŭtomate _kaŝu la taskostrion"
-
-#~ msgid "Show tasklist"
-#~ msgstr "Montru la taskoliston"
-
-#~ msgid "Show _pager in taskbar"
-#~ msgstr "Montru la _paĝilon en la taskostrio"
-
-#~ msgid "Status area"
-#~ msgstr "Statusregiono"
-
-#~ msgid "General"
-#~ msgstr "Generale"
-
-#~ msgid "Components"
-#~ msgstr "Elementoj"
-
-#~ msgid "Icon size"
-#~ msgstr "Grando de piktogramo"
-
-#~ msgid "%A, %d %B %Y"
-#~ msgstr "%A, %Y %B %d"
-
-#~ msgid "Clock type:"
-#~ msgstr "Speco de horloĝo:"
-
-#~ msgid "Hour mode:"
-#~ msgstr "Reĝimo de horo:"
-
-#~ msgid "24 hour"
-#~ msgstr "Internacia (24 horoj)"
-
-#~ msgid "12 hour"
-#~ msgstr "12 horoj"
-
-#~ msgid "Show seconds:"
-#~ msgstr "Montru la sekundojn"
-
-#~ msgid "Flexible space"
-#~ msgstr "Fleksebla spaco"
-
-#~ msgid "Development"
-#~ msgstr "Programado"
-
-#~ msgid "Settings"
-#~ msgstr "Parametroj"
-
-#~ msgid "System"
-#~ msgstr "Sistemo"
-
-#~ msgid "Windows programs"
-#~ msgstr "Aliaj programoj (\"Windows programs\")"
-
-#~ msgid "Edit launcher"
-#~ msgstr "Modifu la lanĉilon"
-
-#~ msgid "_Edit"
-#~ msgstr "_Redaktadi"
-
-#~ msgid "_Up"
-#~ msgstr "_Supren"
-
-#~ msgid "_Down"
-#~ msgstr "_Malsupren"
-
-#~ msgid "_Add"
-#~ msgstr "_Aldoni"
-
-#~ msgid "Mail box:"
-#~ msgstr "Retpoŝtkesto:"
-
-#~ msgid "New mail command:"
-#~ msgstr "Komando por novan mesaĝon:"
-
-#~ msgid "Command to run when new mail arrives"
-#~ msgstr "Komando startiginda kiam nova poŝto alvenas"
-
-#~ msgid "Command to run when the button on the panel is clicked"
-#~ msgstr "Komando startiginda kiam oni alklakas la butonon ĉe la panelo"
-
-#~ msgid "Interval (sec):"
-#~ msgstr "Intertempo (sek):"
-
-#~ msgid "Mail checker"
-#~ msgstr "Poŝtkontrolilo"
-
-#~ msgid "Graphical pager"
-#~ msgstr "Grafika paĝilo"
-
-#~ msgid "Desktop switcher"
-#~ msgstr "Labortabloŝanĝilo"
-
-#~ msgid ""
-#~ "Access to the configuration system has been disabled.\n"
-#~ "\n"
-#~ "Ask your system administrator for more information"
-#~ msgstr ""
-#~ "Nuntempe ne estas permesita konfiguri la sistemon.\n"
-#~ "\n"
-#~ "Por pli da informo, demandu vian sistemestron"
-
-#~ msgid "tip|Exit"
-#~ msgstr "tip|Adiaŭo"
-
-#~ msgid "tip|Setup"
-#~ msgstr "tip|Konfigurado"
-
-#~ msgid "tip|Info"
-#~ msgstr "tip|Informo"
-
-#~ msgid "Exit"
-#~ msgstr "Adiaŭu"
-
-#~ msgid "Setup"
-#~ msgstr "Konfigurado"
-
-#~ msgid "Info"
-#~ msgstr "Informo"
-
-#~ msgid "Button 1:"
-#~ msgstr "Butono 1:"
-
-#~ msgid "Button 2:"
-#~ msgstr "Butono 2:"
-
-#~ msgid "_Hide"
-#~ msgstr "_Kaŝu"
-
-#~ msgid "System buttons"
-#~ msgstr "Sistemaj butonoj"
-
-#~ msgid "Iconbox Settings"
-#~ msgstr "Parametroj de la Piktogramkesto"
-
-#~ msgid "Xfce 4 Iconbox Settings"
-#~ msgstr "Xfce 4 Parametroj de la Piktogramkesto"
-
-#~ msgid "Taskbar Settings"
-#~ msgstr "Parametroj de la Taskostrio"
-
-#~ msgid "Xfce 4 Taskbar Settings"
-#~ msgstr "Xfce 4 Parametroj de la Taskostrio"
-
-#~ msgid "Appfinder"
-#~ msgstr "Aplikaĵtrovilo"
-
-#~ msgid "Drag file to print"
-#~ msgstr "Trenu printindan dosieron"
-
-#~ msgid "File manager"
-#~ msgstr "Dosieradministrilo"
-
-#~ msgid "Find and run applications"
-#~ msgstr "Trovu kaj startigu aplikaĵojn"
-
-#~ msgid "Konqueror"
-#~ msgstr "Konkeroro (\"Konqueror\")"
-
-#~ msgid "Konqueror File Manager"
-#~ msgstr "La Dosieradministrilo Konkeroro (\"Konqueror\")"
-
-#~ msgid "Manual"
-#~ msgstr "Manlibro"
-
-#~ msgid "Mozilla Web Browser"
-#~ msgstr "La Retumilo Mozilo (\"Mozilla\")"
-
-#~ msgid "Music player"
-#~ msgstr "Musiklegilo"
-
-#~ msgid "Nautilus"
-#~ msgstr "Naŭtiluso (\"Nautilus\")"
-
-#~ msgid "Nautilus File Manager"
-#~ msgstr "La Dosieradministrilo Naŭtiluso (\"Nautilus\")"
-
-#~ msgid "Printer Management"
-#~ msgstr "Administrado de la Printiloj"
