--- a/po/es.po
+++ b/po/es.po
@@ -1,13 +1,13 @@
 # Spanish translations for xfce4-panel package.
-# Copyright (C) 2002-2005 The Xfce development team.
+# Copyright (C) 2005 Jasper Huijsmans.
 # This file is distributed under the same license as the xfce4-panelpackage.
 # Edscott Wilson García <edscott@xfce.org>, 2003-2004.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel 4.3.2\n"
+"Project-Id-Version: xfce4-panel 4.3.22\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-09-28 10:01+0200\n"
+"POT-Creation-Date: 2005-09-29 20:47+0900\n"
 "PO-Revision-Date: 2005-08-18 01:07+0900\n"
 "Last-Translator: Edscott Wilson García <edscott@xfce.org>\n"
 "Language-Team: Spanish <es@li.org>\n"
@@ -85,7 +85,7 @@ msgstr ""
 msgid "Restart"
 msgstr "_Recomenzar"
 
-#: ../panel/panel-item-manager.c:327 ../panel/panel-item-manager.c:335
+#: ../panel/panel-item-manager.c:353 ../panel/panel-item-manager.c:361
 #, fuzzy, c-format
 msgid "Could not open \"%s\" module"
 msgstr "No se pudo crear el elemento de panel \"%s\"."
@@ -631,332 +631,3 @@ msgstr "Mostrar únicamente tareas minimizadas"
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
 msgstr ""
-
-#~ msgid "Panel Settings"
-#~ msgstr "Configuración del panel"
-
-#~ msgid "Xfce 4 Panel Settings"
-#~ msgstr "Configuración del panel de Xfce4"
-
-#~ msgid "No data was found. The panel will be empty."
-#~ msgstr "No se encontró información. El panel estará vacío"
-
-#~ msgid "Position:"
-#~ msgstr "Posición"
-
-#~ msgid "Command:"
-#~ msgstr "Comando:"
-
-#~ msgid "Use startup _notification"
-#~ msgstr "Usar notificación de arranque"
-
-#~ msgid "Other Icon"
-#~ msgstr "Otro Ícono"
-
-#~ msgid "Drag file onto this frame to change the icon"
-#~ msgstr "Arrastre el fichero a este marco para cambiar el icono"
-
-#~ msgid "%s: Successfully started without session management"
-#~ msgstr "%s: Se inició de manera correcta sin gerente de sessión"
-
-#~ msgid "%s: Successfully started with session management"
-#~ msgstr "%s: Se inició de manera correcta con gerente de sessión"
-
-#~ msgid "Could not create panel item \"%s\"."
-#~ msgstr "No se pudo crear el elemento de panel \"%s\"."
-
-#~ msgid "_Properties..."
-#~ msgstr "_Propiedades..."
-
-#~ msgid "Add _new item"
-#~ msgstr "Añadir _nuevo elemento"
-
-#~ msgid "This item has no configuration options"
-#~ msgstr "Este elemento no tiene opciones de configuración"
-
-#~ msgid "_About Xfce"
-#~ msgstr "_Acerca de Xfce"
-
-#~ msgid "_Help"
-#~ msgstr "Ayuda"
-
-#~ msgid "E_xit"
-#~ msgstr "Salir"
-
-#, fuzzy
-#~ msgid "icons|Terminal"
-#~ msgstr "Terminal"
-
-#~ msgid "Settings manager not available"
-#~ msgstr "Administrador de sesión no está disponible"
-
-#~ msgid "%H:%M"
-#~ msgstr "%H:%M"
-
-#~ msgid "Taskbar"
-#~ msgstr "Barra de Tareas"
-
-#~ msgid "Cannot create MCS client channel"
-#~ msgstr "No se puede crear el canal MCS cliente"
-
-#~ msgid "_About"
-#~ msgstr "_Acerca de"
-
-#~ msgid "Medium"
-#~ msgstr "Mediano"
-
-#~ msgid "Huge"
-#~ msgstr "Enorme"
-
-#~ msgid "Autohide:"
-#~ msgstr "Ocultar automáticamente:"
-
-#~ msgid "Behaviour"
-#~ msgstr "Comportamiento"
-
-#~ msgid "_Top"
-#~ msgstr "Arriba"
-
-#~ msgid "_Bottom"
-#~ msgstr "Abajo"
-
-#~ msgid "Alignment:"
-#~ msgstr "Alineación:"
-
-#~ msgid "_Left"
-#~ msgstr "Izquierda"
-
-#~ msgid "_Center"
-#~ msgstr "Centro"
-
-#~ msgid "_Right"
-#~ msgstr "Derecha"
-
-#~ msgid "Height:"
-#~ msgstr "Altura:"
-
-#~ msgid "Width:"
-#~ msgstr "Ancho:"
-
-#~ msgid "_Shrink to fit"
-#~ msgstr "Encoger al tamaño"
-
-#~ msgid "Auto _hide taskbar"
-#~ msgstr "Esconder automáticamente la barra de tareas"
-
-#~ msgid "Show tasklist"
-#~ msgstr "Mostrar tareas"
-
-#~ msgid "Show _pager in taskbar"
-#~ msgstr "Mostrar paginador en la barra de tareas"
-
-#~ msgid "Status area"
-#~ msgstr "Área de información"
-
-#~ msgid "General"
-#~ msgstr "General"
-
-#~ msgid "Components"
-#~ msgstr "Componentes"
-
-#~ msgid "Icon size"
-#~ msgstr "Tamaño de ícono"
-
-#~ msgid "%A, %d %B %Y"
-#~ msgstr "%A, %d %B %Y"
-
-#~ msgid "Clock type:"
-#~ msgstr "Tipo de reloj:"
-
-#~ msgid "Hour mode:"
-#~ msgstr "Modo Horario:"
-
-#~ msgid "24 hour"
-#~ msgstr "24 horas"
-
-#~ msgid "12 hour"
-#~ msgstr "12 horas"
-
-#~ msgid "Show seconds:"
-#~ msgstr "Mostrar segundos:"
-
-#, fuzzy
-#~ msgid "Development"
-#~ msgstr "Desarrollador"
-
-#~ msgid "Settings"
-#~ msgstr "Configuración"
-
-#, fuzzy
-#~ msgid "Edit launcher"
-#~ msgstr "Añadir lanzador"
-
-#, fuzzy
-#~ msgid "_Edit"
-#~ msgstr "Editor"
-
-#~ msgid "Mail box:"
-#~ msgstr "Buzón de correo:"
-
-#~ msgid "New mail command:"
-#~ msgstr "Nuevo commando de correo:"
-
-#~ msgid "Command to run when new mail arrives"
-#~ msgstr "Comando a ejecutar cuando llega correo"
-
-#~ msgid "Command to run when the button on the panel is clicked"
-#~ msgstr "Comando a ejecutar cuando se pinche en el botón del panel"
-
-#~ msgid "Interval (sec):"
-#~ msgstr "Intervalo (seg):"
-
-#~ msgid "Mail checker"
-#~ msgstr "Revisador de correo"
-
-#~ msgid "Graphical pager"
-#~ msgstr "Paginador gráfico"
-
-#~ msgid "Desktop switcher"
-#~ msgstr "Cambiador de escritorio"
-
-#~ msgid ""
-#~ "Access to the configuration system has been disabled.\n"
-#~ "\n"
-#~ "Ask your system administrator for more information"
-#~ msgstr ""
-#~ "El acceso al sistema de configuración está inhabilitado.\n"
-#~ "\n"
-#~ "Para más información consulte con su administrador de sistemas"
-
-#, fuzzy
-#~ msgid "tip|Exit"
-#~ msgstr "Salir"
-
-#, fuzzy
-#~ msgid "tip|Setup"
-#~ msgstr "Configuración"
-
-#, fuzzy
-#~ msgid "tip|Info"
-#~ msgstr "Información"
-
-#~ msgid "Exit"
-#~ msgstr "Salir"
-
-#~ msgid "Setup"
-#~ msgstr "Configuración"
-
-#~ msgid "Info"
-#~ msgstr "Información"
-
-#~ msgid "Button 1:"
-#~ msgstr "Botón 1:"
-
-#~ msgid "Button 2:"
-#~ msgstr "Botón 2:"
-
-#~ msgid "_Hide"
-#~ msgstr "Ocultar"
-
-#~ msgid "System buttons"
-#~ msgstr "Botones de sistema"
-
-#~ msgid "Iconbox Settings"
-#~ msgstr "Configuración de la caja de íconos"
-
-#~ msgid "Xfce 4 Iconbox Settings"
-#~ msgstr "Configuración de la caja de íconos  de Xfce4"
-
-#~ msgid "Taskbar Settings"
-#~ msgstr "Configuración de la barra de tareas"
-
-#~ msgid "Xfce 4 Taskbar Settings"
-#~ msgstr "Configuración de la barra de tareas de Xfce4"
-
-#~ msgid "Drag file to print"
-#~ msgstr "Arrastre archivo para imprimir"
-
-#~ msgid "File manager"
-#~ msgstr "Administrador de archivos"
-
-#~ msgid "Find and run applications"
-#~ msgstr "Encontrar y ejecutar programa"
-
-#~ msgid "Konqueror File Manager"
-#~ msgstr "Administrador de archivos de KDE"
-
-#~ msgid "Manual"
-#~ msgstr "Manual"
-
-#~ msgid "Mozilla Web Browser"
-#~ msgstr "Navegador Mozilla"
-
-#~ msgid "Music player"
-#~ msgstr "Toca música"
-
-#~ msgid "Nautilus File Manager"
-#~ msgstr "Administrador de archivos Nautilus"
-
-#~ msgid "Printer Management"
-#~ msgstr "Administración de impresoras"
-
-#~ msgid "Removing the item will also remove its popup menu."
-#~ msgstr "Quitar el elemento también quitará su menú emergente."
-
-#~ msgid "Caption:"
-#~ msgstr "Etiqueta:"
-
-#~ msgid "Tooltip:"
-#~ msgstr "Etiqueta emergente"
-
-#~ msgid "Attach menu to launcher"
-#~ msgstr "Anexarle un menú al lanzador"
-
-#~ msgid "Change menu item"
-#~ msgstr "Cambiar elemento del menú"
-
-#~ msgid "Click mouse button 3 to change item"
-#~ msgstr "Pinche el botón 3 del ratón para cambiar elemento"
-
-#~ msgid "Add launcher"
-#~ msgstr "Añadir lanzador"
-
-#~ msgid "Left"
-#~ msgstr "Izquierda"
-
-#~ msgid "Right"
-#~ msgstr "Derecha"
-
-#~ msgid "Top"
-#~ msgstr "Arriba"
-
-#~ msgid "Bottom"
-#~ msgstr "Abajo"
-
-#~ msgid "Popup position:"
-#~ msgstr "Posición del menú emergente:"
-
-#, fuzzy
-#~ msgid "Notification Area"
-#~ msgstr "Área de notificación"
-
-#~ msgid "Menu"
-#~ msgstr "Menú"
-
-#~ msgid "Always on top:"
-#~ msgstr "Siempre arriba:"
-
-#~ msgid "Show _system tray in taskbar"
-#~ msgstr "Mostrar la bandeja de sistema en la barra de tareas"
-
-#~ msgid "Cannot get initial style"
-#~ msgstr "No se puede obtener el estilo inicial"
-
-#~ msgid "This should not happen"
-#~ msgstr "Esto no debiera ocurrir"
-
-#~ msgid "Cannot get default screen\n"
-#~ msgstr "No se puede obtener la pantalla preestablecida\n"
-
-#~ msgid "Cannot connect to session manager"
-#~ msgstr "No se puede conectar con el administrador de sesiones"
