--- a/po/eu.po
+++ b/po/eu.po
@@ -1,16 +1,15 @@
-# translation of es.po to euskera
-# This file is distributed under the same license as the PACKAGE package.
-# Copyright (C) 2004 THE PACKAGE'S COPYRIGHT HOLDER.
-# Jon Latorre Martinez <edscott@imp.mx>, 2003.
+# Euskera translations for xfce4-panel package.
+# Copyright (C) 2005 Jasper Huijsmans.
+# This file is distributed under the same license as the xfce4-panel package.
 # Jon Latorre Martinez <patataman@airtel.net>, 2003.
 # Piarres Beobide Egaña <pi@beobide.net>, 2004.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: es\n"
+"Project-Id-Version: xfce4-panel 4.3.22\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-09-28 10:01+0200\n"
-"PO-Revision-Date: 2004-09-13 15:35+0200\n"
+"POT-Creation-Date: 2005-09-29 20:47+0900\n"
+"PO-Revision-Date: 2005-09-29 20:24+0900\n"
 "Last-Translator: Piarres Beobide Egaña <pi@beobide.net>\n"
 "Language-Team: Euskara <librezale@librezale.org>\n"
 "MIME-Version: 1.0\n"
@@ -89,7 +88,7 @@ msgstr ""
 msgid "Restart"
 msgstr "_Desegin"
 
-#: ../panel/panel-item-manager.c:327 ../panel/panel-item-manager.c:335
+#: ../panel/panel-item-manager.c:353 ../panel/panel-item-manager.c:361
 #, fuzzy, c-format
 msgid "Could not open \"%s\" module"
 msgstr "Ezin da \"%s\" panel elementua sortu."
@@ -636,460 +635,3 @@ msgstr "Bistarazi aplikazio _izenak"
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
 msgstr ""
-
-#, fuzzy
-#~ msgid "Panel Settings"
-#~ msgstr "/Configuración del _Panel"
-
-#, fuzzy
-#~ msgid "Xfce 4 Panel Settings"
-#~ msgstr "Xfce Panelaren Ezarpenak"
-
-#~ msgid "No data was found. The panel will be empty."
-#~ msgstr "Ez da datarik aurkitu. Panela hutsik egongo da."
-
-#~ msgid "Position:"
-#~ msgstr "Kokalekua:"
-
-#~ msgid "Command:"
-#~ msgstr "Komandoa:"
-
-#~ msgid "Use startup _notification"
-#~ msgstr "Erabili notifikazioak"
-
-#~ msgid "Other Icon"
-#~ msgstr "Beste ikono bat"
-
-#~ msgid "Drag file onto this frame to change the icon"
-#~ msgstr "Ekarri fitxategia marko honetara ikono aldatzeko"
-
-#~ msgid "%s: Successfully started without session management"
-#~ msgstr "%s: saio kudeatzaile gabe arrakastatsuki abiarazia"
-
-#~ msgid "%s: Successfully started with session management"
-#~ msgstr "%s: saio kudeatzailea erabiliaz arrakastatsuki abiarazia"
-
-#~ msgid "Could not create panel item \"%s\"."
-#~ msgstr "Ezin da \"%s\" panel elementua sortu."
-
-#~ msgid "_Properties..."
-#~ msgstr "_Propietateak"
-
-#~ msgid "_Remove"
-#~ msgstr "_Ezabatu"
-
-#~ msgid "Add _new item"
-#~ msgstr "Elementu _berria gehitu"
-
-#~ msgid "This item has no configuration options"
-#~ msgstr "Elementu honek ez ditu ezarpen aukerak"
-
-#~ msgid "_About Xfce"
-#~ msgstr "_Xfce-i buruz"
-
-#~ msgid "_Help"
-#~ msgstr "_Laguntza"
-
-#~ msgid "E_xit"
-#~ msgstr "I_rten"
-
-#, fuzzy
-#~ msgid "icons|Terminal"
-#~ msgstr "Terminala"
-
-#~ msgid "Settings manager not available"
-#~ msgstr "Saio kudeatzailea ez dago erabilgarri"
-
-#~ msgid "Taskbar"
-#~ msgstr "Eginbeharren barra"
-
-#~ msgid "Cannot create MCS client channel"
-#~ msgstr "MCS bezeroa ezin da sortu"
-
-#, fuzzy
-#~ msgid "_About"
-#~ msgstr "_Xfce-i buruz"
-
-#~ msgid "Medium"
-#~ msgstr "Ertaina"
-
-#~ msgid "Huge"
-#~ msgstr "Itzela"
-
-#~ msgid "Panel size:"
-#~ msgstr "Panelaren tamaina:"
-
-#~ msgid "Autohide:"
-#~ msgstr "Automatikoki ezkutatu:"
-
-#~ msgid "Behaviour"
-#~ msgstr "Portamoldea"
-
-#~ msgid "_Top"
-#~ msgstr "_Goia"
-
-#~ msgid "_Bottom"
-#~ msgstr "_Behea"
-
-#, fuzzy
-#~ msgid "Alignment:"
-#~ msgstr "Lerrokatu"
-
-#~ msgid "_Left"
-#~ msgstr "_Ezker"
-
-#~ msgid "_Center"
-#~ msgstr "_Erdia"
-
-#~ msgid "_Right"
-#~ msgstr "_Eskuin"
-
-#, fuzzy
-#~ msgid "Height:"
-#~ msgstr "Altuera :"
-
-#~ msgid "Width:"
-#~ msgstr "Zabalera:"
-
-#~ msgid "Auto _hide taskbar"
-#~ msgstr "Auto-izkutatu eginbeharren barra"
-
-#~ msgid "Show _pager in taskbar"
-#~ msgstr "Erakutsi _orrialdekatzailea menu barran"
-
-#, fuzzy
-#~ msgid "Status area"
-#~ msgstr "Larunbata"
-
-#, fuzzy
-#~ msgid "Icon size"
-#~ msgstr "Ikonoaren aurre bista"
-
-#~ msgid "%A, %d %B %Y"
-#~ msgstr "%A, %Y %B %d"
-
-#~ msgid "Clock type:"
-#~ msgstr "Erloju mota:"
-
-#~ msgid "Hour mode:"
-#~ msgstr "Ordutegi mota"
-
-#~ msgid "24 hour"
-#~ msgstr "24 ordu"
-
-#~ msgid "12 hour"
-#~ msgstr "12 ordu"
-
-#~ msgid "Show seconds:"
-#~ msgstr "Erakutsi segunduak"
-
-#, fuzzy
-#~ msgid "Settings"
-#~ msgstr "/Configuración del _Panel"
-
-#, fuzzy
-#~ msgid "Edit launcher"
-#~ msgstr "Abiarazlea gehitu"
-
-#, fuzzy
-#~ msgid "_Edit"
-#~ msgstr "Editorea"
-
-#~ msgid "Mail box:"
-#~ msgstr "Posta zorroa:"
-
-#~ msgid "New mail command:"
-#~ msgstr "Posta berri komandoa:"
-
-#~ msgid "Command to run when new mail arrives"
-#~ msgstr "Posta berriak ailatzean exekutatu behar den komandoa"
-
-#~ msgid "Command to run when the button on the panel is clicked"
-#~ msgstr "Paneleko botoia sakatzean exekutatu behar dena"
-
-#~ msgid "Interval (sec):"
-#~ msgstr "Interbaloa (seg):"
-
-#~ msgid "Mail checker"
-#~ msgstr "Posta egiaztatzailea"
-
-#~ msgid "Graphical pager"
-#~ msgstr "Paginatzaile grafikoa"
-
-#~ msgid "Desktop switcher"
-#~ msgstr "Mahaigain aldaketa"
-
-#~ msgid ""
-#~ "Access to the configuration system has been disabled.\n"
-#~ "\n"
-#~ "Ask your system administrator for more information"
-#~ msgstr ""
-#~ "Ezarpen sistemarara sartzea desaktibatua dago.\n"
-#~ "\n"
-#~ "Informazio gehiagorako zure sistema administratzaileari galdegin"
-
-#, fuzzy
-#~ msgid "tip|Exit"
-#~ msgstr "Irten"
-
-#, fuzzy
-#~ msgid "tip|Setup"
-#~ msgstr "Konfigurazioa"
-
-#, fuzzy
-#~ msgid "tip|Info"
-#~ msgstr "Informazioa"
-
-#~ msgid "Exit"
-#~ msgstr "Irten"
-
-#~ msgid "Setup"
-#~ msgstr "Konfigurazioa"
-
-#~ msgid "Info"
-#~ msgstr "Informazioa"
-
-#~ msgid "Button 1:"
-#~ msgstr "1 botoia:"
-
-#~ msgid "Button 2:"
-#~ msgstr "2 botoia:"
-
-#~ msgid "_Hide"
-#~ msgstr "_Ezkutatu"
-
-#~ msgid "System buttons"
-#~ msgstr "Sistema botoiak"
-
-#, fuzzy
-#~ msgid "Iconbox Settings"
-#~ msgstr "Xfce Panelaren Ezarpenak"
-
-#, fuzzy
-#~ msgid "Xfce 4 Iconbox Settings"
-#~ msgstr "Xfce Panelaren Ezarpenak"
-
-#, fuzzy
-#~ msgid "Taskbar Settings"
-#~ msgstr "Eginbeharren barra"
-
-#, fuzzy
-#~ msgid "Xfce 4 Taskbar Settings"
-#~ msgstr "Xfce Panelaren Ezarpenak"
-
-#, fuzzy
-#~ msgid "File manager"
-#~ msgstr "Fitxategi kudeatzailea"
-
-#, fuzzy
-#~ msgid "Manual"
-#~ msgstr "Urtarrila"
-
-#, fuzzy
-#~ msgid "Printer Management"
-#~ msgstr "Fitxategi kudeatzailea"
-
-#~ msgid "Removing the item will also remove its popup menu."
-#~ msgstr "Elementua ezabatzeak popup menua ere kenduko du."
-
-#~ msgid "Caption:"
-#~ msgstr "Jaso"
-
-#~ msgid "Tooltip:"
-#~ msgstr "Etiketa esplitatiboa"
-
-#~ msgid "Attach menu to launcher"
-#~ msgstr "Abiarazleari menua gehitu"
-
-#~ msgid "Change menu item"
-#~ msgstr "Menuaren elementua aldatu"
-
-#~ msgid "Click mouse button 3 to change item"
-#~ msgstr "Saguaren 3. botoia sakatu elementua aldatzeko"
-
-#~ msgid "Add launcher"
-#~ msgstr "Abiarazlea gehitu"
-
-#~ msgid "Add new item"
-#~ msgstr "Elementu berria gehitu"
-
-#~ msgid "Left"
-#~ msgstr "Ezkerrean"
-
-#~ msgid "Right"
-#~ msgstr "Eskuinean"
-
-#~ msgid "Top"
-#~ msgstr "Goia"
-
-#~ msgid "Bottom"
-#~ msgstr "Behea"
-
-#~ msgid "Popup position:"
-#~ msgstr "Bapateko mezuen kokalekua:"
-
-#, fuzzy
-#~ msgid "Notification Area"
-#~ msgstr "Notifikazio eremua"
-
-#~ msgid "Menu"
-#~ msgstr "Menua"
-
-#~ msgid "Always on top:"
-#~ msgstr "Beti gainean:"
-
-#~ msgid "Show _system tray in taskbar"
-#~ msgstr "Lan barran erakutsi sistemaren mezuak"
-
-#~ msgid "Cannot get initial style"
-#~ msgstr "Ezin da hasierako estiloa lortu"
-
-#~ msgid "This should not happen"
-#~ msgstr "Hau ez du gertatu behar"
-
-#~ msgid "Cannot get default screen\n"
-#~ msgstr "Ezin lehenetsitako pantaila eskuratu\n"
-
-#~ msgid "Cannot connect to session manager"
-#~ msgstr "Ezin da saio administratzailearekin konektatu"
-
-#~ msgid "Show two buttons:"
-#~ msgstr "Erakutsi botoiak"
-
-#~ msgid "Change item"
-#~ msgstr "Osagaia aldatu"
-
-#~ msgid "Menu:"
-#~ msgstr "Menua:"
-
-#~ msgid "/Xfce Panel"
-#~ msgstr "/Xfce Panela"
-
-#~ msgid "/Add _new item"
-#~ msgstr "/Elementu berria gehitu"
-
-#~ msgid "/_Properties..."
-#~ msgstr "/_Propietateak"
-
-#~ msgid ""
-#~ "Your window manager does not seem to support the new window manager hints "
-#~ "as defined on http://www.freedesktop.org. \n"
-#~ "Some Xfce features may not work as intended."
-#~ msgstr ""
-#~ "Zure lehio kudeatzaileak badirudi ez dituela funtzio berriak onartzen "
-#~ "http://www.freedesktop.org.-en agertzen den bezala \n"
-#~ "Agian ezauarri batzuk ez dute behar bezala funtzionatuko."
-
-#~ msgid "/_Settings manager"
-#~ msgstr "/Konfigurazio administratzailea"
-
-#~ msgid "Tiny"
-#~ msgstr "Oso txikia"
-
-#~ msgid "Icon theme:"
-#~ msgstr "Ikonoen gaia:"
-
-#~ msgid "Normal"
-#~ msgstr "Normala"
-
-#~ msgid "Center the panel:"
-#~ msgstr "Panela itxi:"
-
-#~ msgid "Set"
-#~ msgstr "Konfiguratu"
-
-#~ msgid "Sunday"
-#~ msgstr "Igandea"
-
-#~ msgid "Monday"
-#~ msgstr "Astelehena"
-
-#~ msgid "Tuesday"
-#~ msgstr "Asteartea"
-
-#~ msgid "Wednesday"
-#~ msgstr "Asteazkena"
-
-#~ msgid "Thursday"
-#~ msgstr "Osteguna"
-
-#~ msgid "Friday"
-#~ msgstr "Ostirala"
-
-#~ msgid "February"
-#~ msgstr "Otsaila"
-
-#~ msgid "March"
-#~ msgstr "Martxoa"
-
-#~ msgid "April"
-#~ msgstr "Apirila"
-
-#~ msgid "May"
-#~ msgstr "Maiatza"
-
-#~ msgid "June"
-#~ msgstr "Ekaina"
-
-#~ msgid "July"
-#~ msgstr "Uztaila"
-
-#~ msgid "August"
-#~ msgstr "Abuztua"
-
-#~ msgid "September"
-#~ msgstr "Iraila"
-
-#~ msgid "October"
-#~ msgstr "Urria"
-
-#~ msgid "November"
-#~ msgstr "Azaroa"
-
-#~ msgid "December"
-#~ msgstr "Abendua"
-
-#~ msgid "Type:"
-#~ msgstr "Tipo:"
-
-#~ msgid "Xfce Desktop Environment"
-#~ msgstr "Entorno de Escritorio Xfce"
-
-#~ msgid "Copyright 2002-2003 by Olivier Fourdan"
-#~ msgstr "Copyright 2002-2003, Olivier Fourdan"
-
-#~ msgid "Credits"
-#~ msgstr "Créditos"
-
-#~ msgid "License"
-#~ msgstr "Licencia"
-
-#~ msgid "Trashcan: 0 files"
-#~ msgstr "Cubo de basura: 0 archivos"
-
-#~ msgid "Trashcan: %d files / %d %s"
-#~ msgstr "Cubo de basura: %d archivos / %d %s"
-
-#~ msgid "Trash can"
-#~ msgstr "Cubo de basura"
-
-#~ msgid "Xfce 4"
-#~ msgstr "Xfce 4"
-
-#~ msgid "By Olivier Fourdan (c) 1997-2003"
-#~ msgstr "Por Olivier Fourdan (c) 1997-2003"
-
-#~ msgid "Toggle AM PM mode :"
-#~ msgstr "Intercambiar modo AM PM"
-
-#~ msgid "/_Edit ..."
-#~ msgstr "/_Editar ..."
-
-#~ msgid "Traditional"
-#~ msgstr "Tradicional"
-
-#~ msgid "Modern"
-#~ msgstr "Moderno"
-
-#~ msgid "Show minibuttons"
-#~ msgstr "Mostrar minibotones"
