--- a/po/fa.po
+++ b/po/fa.po
@@ -1,18 +1,16 @@
-# translation of fa_IR.po to Persian
-# translation of xfce4-panel.po to Persian
-# Persian translation of PACKAGE.
-# Copyright (C) 2003 THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# Persian translations for xfce4-panel package.
+# Copyright (C) 2005 Jasper Huijsmans.
+# This file is distributed under the same license as the xfce4-panel package.
 # Abbas Izad <abbasizad@hotmail.com>, 2003, 2004.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: fa_IR\n"
+"Project-Id-Version: xfce4-panel 4.3.22\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-09-28 10:01+0200\n"
-"PO-Revision-Date: 2004-09-28 20:20+0330\n"
+"POT-Creation-Date: 2005-09-29 20:47+0900\n"
+"PO-Revision-Date: 2005-09-29 20:25+0900\n"
 "Last-Translator: Abbas Izad <abbasizad@hotmail.com>\n"
-"Language-Team: Persian\n"
+"Language-Team: Persian <translation-team-fa@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -88,7 +86,7 @@ msgstr ""
 msgid "Restart"
 msgstr "_راه‌اندازی مجدد"
 
-#: ../panel/panel-item-manager.c:327 ../panel/panel-item-manager.c:335
+#: ../panel/panel-item-manager.c:353 ../panel/panel-item-manager.c:361
 #, fuzzy, c-format
 msgid "Could not open \"%s\" module"
 msgstr "نمی‌توان آیتم \"%s\" تابلو را ایجاد کرد."
@@ -631,298 +629,3 @@ msgstr "نشان دادن _نام‌های برنامه"
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
 msgstr ""
-
-#, fuzzy
-#~ msgid "Panel Settings"
-#~ msgstr "تنظیمات تابلوی Xfce"
-
-#, fuzzy
-#~ msgid "Xfce 4 Panel Settings"
-#~ msgstr "تنظیمات تابلوی Xfce"
-
-#~ msgid "No data was found. The panel will be empty."
-#~ msgstr "هیچ داده‌ای یافت نشد. تابلو خالی خواهد بود."
-
-#~ msgid "Position:"
-#~ msgstr "موقعیت:"
-
-#~ msgid "Command:"
-#~ msgstr "فرمان:"
-
-#~ msgid "Use startup _notification"
-#~ msgstr "استفاده کردن از یادآوری _آغازین"
-
-#~ msgid "Other Icon"
-#~ msgstr "شمایل دیگر"
-
-#~ msgid "Drag file onto this frame to change the icon"
-#~ msgstr "پرونده را برای تغییر شمایل بر روی این قاب بکشانید"
-
-#~ msgid "%s: Successfully started without session management"
-#~ msgstr "%s: با موفقیت بدون مدیریت نشست شروع گردید"
-
-#~ msgid "%s: Successfully started with session management"
-#~ msgstr "%s: با موفقیت با مدیریت نشست شروع گردید"
-
-#~ msgid "Could not create panel item \"%s\"."
-#~ msgstr "نمی‌توان آیتم \"%s\" تابلو را ایجاد کرد."
-
-#~ msgid "_Properties..."
-#~ msgstr "_مشخصات..."
-
-#~ msgid "Add _new item"
-#~ msgstr "افزودن آیتم _جدید"
-
-#~ msgid "This item has no configuration options"
-#~ msgstr "این آیتم هیچ گزینه‌های تنظیمی ندارد"
-
-#~ msgid "_About Xfce"
-#~ msgstr "_درباره‌ی Xfce"
-
-#~ msgid "_Help"
-#~ msgstr "_راهنما"
-
-#~ msgid "E_xit"
-#~ msgstr "_خروج"
-
-#, fuzzy
-#~ msgid "icons|Terminal"
-#~ msgstr "پایانه"
-
-#~ msgid "Settings manager not available"
-#~ msgstr "مدیر تنظیمات در دسترس نیست"
-
-#~ msgid "Taskbar"
-#~ msgstr "نوارکاری"
-
-#~ msgid "Cannot create MCS client channel"
-#~ msgstr "نمی‌توان کانال کارگیر MCS را ایجاد کرد"
-
-#, fuzzy
-#~ msgid "_About"
-#~ msgstr "_درباره‌ی Xfce"
-
-#~ msgid "Medium"
-#~ msgstr "متوسط"
-
-#~ msgid "Huge"
-#~ msgstr "عظیم"
-
-#~ msgid "Autohide:"
-#~ msgstr "پنهان‌سازی خودکار:"
-
-#~ msgid "Behaviour"
-#~ msgstr "رفتار"
-
-#~ msgid "_Top"
-#~ msgstr "_بالا"
-
-#~ msgid "_Bottom"
-#~ msgstr "_پایین"
-
-#, fuzzy
-#~ msgid "Alignment:"
-#~ msgstr "همترازی"
-
-#~ msgid "_Left"
-#~ msgstr "_چپ"
-
-#~ msgid "_Center"
-#~ msgstr "_مرکز"
-
-#~ msgid "_Right"
-#~ msgstr "_راست"
-
-#, fuzzy
-#~ msgid "Height:"
-#~ msgstr "ارتفاع :"
-
-#~ msgid "Width:"
-#~ msgstr "پهنا:"
-
-#~ msgid "Auto _hide taskbar"
-#~ msgstr "_پنهان‌سازی خودکار نوارکاری"
-
-#~ msgid "Show _pager in taskbar"
-#~ msgstr "نشان دادن _صفحه‌نما در نوارکار"
-
-#~ msgid "%A, %d %B %Y"
-#~ msgstr "%A, %d %B %Y"
-
-#~ msgid "Clock type:"
-#~ msgstr "نوع ساعت:"
-
-#~ msgid "Hour mode:"
-#~ msgstr "حالت ساعت:"
-
-#~ msgid "24 hour"
-#~ msgstr "۲۴ ساعتی"
-
-#~ msgid "12 hour"
-#~ msgstr "۱۲ ساعتی"
-
-#~ msgid "Show seconds:"
-#~ msgstr "نشان دادن ثانیه‌ها:"
-
-#, fuzzy
-#~ msgid "Settings"
-#~ msgstr "تنظیمات تابلوی Xfce"
-
-#, fuzzy
-#~ msgid "Edit launcher"
-#~ msgstr "افزودن پرتابگر"
-
-#, fuzzy
-#~ msgid "_Edit"
-#~ msgstr "ویرایشگر"
-
-#~ msgid "Mail box:"
-#~ msgstr "جعبه‌ی پست:"
-
-#~ msgid "New mail command:"
-#~ msgstr "فرمان جدید پست:"
-
-#~ msgid "Command to run when new mail arrives"
-#~ msgstr "فرمان برای اجرا وقتی که پست جدید می‌آید"
-
-#~ msgid "Command to run when the button on the panel is clicked"
-#~ msgstr "فرمان برای اجرا وقتی که دکمه‌ی بر روی تابلو کلیک شده باشد"
-
-#~ msgid "Interval (sec):"
-#~ msgstr "بازه (ثانیه)"
-
-#~ msgid "Mail checker"
-#~ msgstr "بررسی‌گر پست"
-
-#~ msgid "Graphical pager"
-#~ msgstr "صفحه‌نمای گرافیکی"
-
-#~ msgid "Desktop switcher"
-#~ msgstr "عوض کننده‌ی رومیزی"
-
-#~ msgid ""
-#~ "Access to the configuration system has been disabled.\n"
-#~ "\n"
-#~ "Ask your system administrator for more information"
-#~ msgstr ""
-#~ "دستیابی به سیستم تنظیم از کار انداخته شده است.\n"
-#~ "\n"
-#~ "برای اطلاعات بیشتر از مدیر سیستم خود سؤال کنید"
-
-#, fuzzy
-#~ msgid "tip|Exit"
-#~ msgstr "خروج"
-
-#, fuzzy
-#~ msgid "tip|Setup"
-#~ msgstr "برپاسازی"
-
-#, fuzzy
-#~ msgid "tip|Info"
-#~ msgstr "اطلاعات"
-
-#~ msgid "Exit"
-#~ msgstr "خروج"
-
-#~ msgid "Setup"
-#~ msgstr "برپاسازی"
-
-#~ msgid "Info"
-#~ msgstr "اطلاعات"
-
-#~ msgid "Button 1:"
-#~ msgstr "دکمه‌ی ۱:"
-
-#~ msgid "Button 2:"
-#~ msgstr "دکمه ۲:"
-
-#~ msgid "_Hide"
-#~ msgstr "_پنهان کردن"
-
-#~ msgid "System buttons"
-#~ msgstr "دکمه‌های سیستم"
-
-#, fuzzy
-#~ msgid "Iconbox Settings"
-#~ msgstr "تنظیمات تابلوی Xfce"
-
-#, fuzzy
-#~ msgid "Xfce 4 Iconbox Settings"
-#~ msgstr "تنظیمات تابلوی Xfce"
-
-#, fuzzy
-#~ msgid "Taskbar Settings"
-#~ msgstr "نوارکاری"
-
-#, fuzzy
-#~ msgid "Xfce 4 Taskbar Settings"
-#~ msgstr "تنظیمات تابلوی Xfce"
-
-#, fuzzy
-#~ msgid "File manager"
-#~ msgstr "مدیریت پرونده"
-
-#, fuzzy
-#~ msgid "Printer Management"
-#~ msgstr "مدیریت پرونده"
-
-#~ msgid "Removing the item will also remove its popup menu."
-#~ msgstr "برداشتن آیتمی فهرست واشوی آن را نیز برخواهد داشت."
-
-#~ msgid "Caption:"
-#~ msgstr "عنوان:"
-
-#~ msgid "Tooltip:"
-#~ msgstr "راهنمای‌ابزار:"
-
-#~ msgid "Attach menu to launcher"
-#~ msgstr "پیوست فهرست به پرتابگر"
-
-#~ msgid "Change menu item"
-#~ msgstr "تغییر دادن آیتم فهرست"
-
-#~ msgid "Click mouse button 3 to change item"
-#~ msgstr "دکمه‌ی سوم موشی را برای تغییر دادن آیتم کلیک کنید"
-
-#~ msgid "Add launcher"
-#~ msgstr "افزودن پرتابگر"
-
-#~ msgid "Left"
-#~ msgstr "چپ"
-
-#~ msgid "Right"
-#~ msgstr "راست"
-
-#~ msgid "Top"
-#~ msgstr "بالا"
-
-#~ msgid "Bottom"
-#~ msgstr "پایین"
-
-#~ msgid "Popup position:"
-#~ msgstr "موقعیت واشو:"
-
-#, fuzzy
-#~ msgid "Notification Area"
-#~ msgstr "ناحیه‌ی یادآوری"
-
-#~ msgid "Menu"
-#~ msgstr "فهرست"
-
-#~ msgid "Always on top:"
-#~ msgstr "همیشه در جلو:"
-
-#~ msgid "Show _system tray in taskbar"
-#~ msgstr "نشان دادن _سینی سیستم در نوارکاری"
-
-#~ msgid "Cannot get initial style"
-#~ msgstr "نمی‌توان سبک آغازین را دریافت کرد"
-
-#~ msgid "This should not happen"
-#~ msgstr "این نمی‌بایست اتفاق می‌افتاد"
-
-#~ msgid "Cannot get default screen\n"
-#~ msgstr "نمی‌توان صفحه پیش‌فرض را دریافت کرد\n"
-
-#~ msgid "Cannot connect to session manager"
-#~ msgstr "نمی‌توان به مدیر نشست متصل شد "
