--- a/po/fi.po
+++ b/po/fi.po
@@ -1,16 +1,17 @@
 # Translation of xfce4-panel into Finnish.
+# Copyright (C) 2005 Jasper Huijsmans.
 # This file is distributed under the same license as the xfce4-panel package.
-# Copyright (C) 2002-2005 The Xfce Development Team.
-# Ilkka Ollakka <ilkka.j.ollakka@students.oamk.fi>, 2003
+# Ilkka Ollakka <ilkka.ollakka@iki.fi>, 2003
+# Jari Rahkonen <jari.rahkonen@pp1.inet.fi>, 2005.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: XFCE4\n"
+"Project-Id-Version: xfce4-panel 4.3.22\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-09-28 10:01+0200\n"
-"PO-Revision-Date: 2005-08-11 14:24+0200\n"
+"POT-Creation-Date: 2005-09-29 20:47+0900\n"
+"PO-Revision-Date: 2005-09-29 20:27+0900\n"
 "Last-Translator: Jari Rahkonen <jari.rahkonen@pp1.inet.fi>\n"
-"Language-Team: \n"
+"Language-Team: Finnish <translation-team-fi@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -86,7 +87,7 @@ msgstr ""
 msgid "Restart"
 msgstr "Pala_uta"
 
-#: ../panel/panel-item-manager.c:327 ../panel/panel-item-manager.c:335
+#: ../panel/panel-item-manager.c:353 ../panel/panel-item-manager.c:361
 #, fuzzy, c-format
 msgid "Could not open \"%s\" module"
 msgstr ""
@@ -633,291 +634,3 @@ msgstr "Näytä vain _pienennetyt sovellukset"
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
 msgstr ""
-
-#~ msgid "Panel Settings"
-#~ msgstr "Paneelin asetukset"
-
-#~ msgid "Xfce 4 Panel Settings"
-#~ msgstr "Xfce 4 paneelin asetukset"
-
-#~ msgid "No data was found. The panel will be empty."
-#~ msgstr "Tietoja ei löytynyt, paneeli on tyhjä."
-
-#~ msgid "Position:"
-#~ msgstr "Sijainti:"
-
-#~ msgid "Command:"
-#~ msgstr "Komento:"
-
-#~ msgid "Use startup _notification"
-#~ msgstr "Käytä käy_nnistyksen huomautusta"
-
-#~ msgid "Other Icon"
-#~ msgstr "Muu kuvake"
-
-#~ msgid "Drag file onto this frame to change the icon"
-#~ msgstr "Raahaa tiedosto tähän kehykseen vaihtaaksesi kuvaketta"
-
-#~ msgid "%s: Successfully started without session management"
-#~ msgstr "%s: Onnistuneesti käynnistetty ilman istunnonhallintaa"
-
-#~ msgid "%s: Successfully started with session management"
-#~ msgstr "%s: Onnistuneesti käynnistetty istunnonhallinnan alaisuuteen"
-
-#~ msgid "Could not create panel item \"%s\"."
-#~ msgstr "Ei voitu luoda paneelin osaa \"%s\"."
-
-#~ msgid "_Properties..."
-#~ msgstr "O_minaisuudet..."
-
-#~ msgid "_Remove"
-#~ msgstr "P_oista"
-
-#~ msgid "This item has no configuration options"
-#~ msgstr "Tällä osalla ei ole muokattavia ominaisuuksia"
-
-#~ msgid "_About Xfce"
-#~ msgstr "Tietoja _Xfce:stä"
-
-#~ msgid "_Help"
-#~ msgstr "_Apua"
-
-#~ msgid "E_xit"
-#~ msgstr "_Poistu"
-
-#~ msgid "icons|Terminal"
-#~ msgstr "Pääte"
-
-#~ msgid "Settings manager not available"
-#~ msgstr "Asetustenhallintaa ei saatavilla"
-
-#~ msgid "%H:%M"
-#~ msgstr "%H:%M"
-
-#~ msgid "Taskbar"
-#~ msgstr "Tehtäväpalkki"
-
-#~ msgid "Cannot create MCS client channel"
-#~ msgstr "Ei voi luoda MCS-asiakaskanavaa"
-
-#~ msgid "_About"
-#~ msgstr "T_ietoja"
-
-#~ msgid "Medium"
-#~ msgstr "Keskikokoinen"
-
-#~ msgid "Huge"
-#~ msgstr "Todella suuri"
-
-#~ msgid "Autohide:"
-#~ msgstr "Piilota automaattisesti:"
-
-#~ msgid "Behaviour"
-#~ msgstr "Käytös"
-
-#~ msgid "_Top"
-#~ msgstr "_Yläreuna"
-
-#~ msgid "_Bottom"
-#~ msgstr "_Alareuna"
-
-#~ msgid "Alignment:"
-#~ msgstr "Tasaa:"
-
-#~ msgid "_Left"
-#~ msgstr "_Vasemmalle"
-
-#~ msgid "_Center"
-#~ msgstr "_Keskelle"
-
-#~ msgid "_Right"
-#~ msgstr "_Oikealle"
-
-#~ msgid "Height:"
-#~ msgstr "Korkeus:"
-
-#~ msgid "Width:"
-#~ msgstr "Leveys:"
-
-#~ msgid "_Shrink to fit"
-#~ msgstr "_Mahdollisimman pieni"
-
-#~ msgid "Auto _hide taskbar"
-#~ msgstr "Piilota te_htäväpalkki automaattisesti"
-
-#~ msgid "Show tasklist"
-#~ msgstr "Näytä tehtävälista"
-
-#~ msgid "Show _pager in taskbar"
-#~ msgstr "Näytä työpöydän_vaihtaja tehtäväpalkissa"
-
-#~ msgid "Status area"
-#~ msgstr "Tila-alue"
-
-#~ msgid "General"
-#~ msgstr "Yleiset"
-
-#~ msgid "Components"
-#~ msgstr "Komponentit"
-
-#~ msgid "Icon size"
-#~ msgstr "Kuvakkeen koko"
-
-#~ msgid "%A, %d %B %Y"
-#~ msgstr "%A, %d %Bta %Y"
-
-#~ msgid "Clock type:"
-#~ msgstr "Kellon tyyppi:"
-
-#~ msgid "Hour mode:"
-#~ msgstr "Tuntinäyttö:"
-
-#~ msgid "24 hour"
-#~ msgstr "24-tuntinen"
-
-#~ msgid "12 hour"
-#~ msgstr "12-tuntinen"
-
-#~ msgid "Show seconds:"
-#~ msgstr "Näytä sekunnit:"
-
-#~ msgid "Flexible space"
-#~ msgstr "Venyvä erotin"
-
-#~ msgid "Development"
-#~ msgstr "Kehitys"
-
-#~ msgid "Settings"
-#~ msgstr "Asetukset"
-
-#~ msgid "System"
-#~ msgstr "Järjestelmä"
-
-#~ msgid "Windows programs"
-#~ msgstr "Windows-ohjelmat"
-
-#~ msgid "Edit launcher"
-#~ msgstr "Muokkaa käynnistintä"
-
-#~ msgid "_Edit"
-#~ msgstr "_Muokkaa"
-
-#~ msgid "_Up"
-#~ msgstr "_Ylös"
-
-#~ msgid "_Down"
-#~ msgstr "_Alas"
-
-#~ msgid "_Add"
-#~ msgstr "_Lisää"
-
-#~ msgid "Mail box:"
-#~ msgstr "Postilaatikko:"
-
-#~ msgid "New mail command:"
-#~ msgstr "Uuden postin komento:"
-
-#~ msgid "Command to run when new mail arrives"
-#~ msgstr "Komento, joka suoritetaan kun uutta postia on saapunut"
-
-#~ msgid "Command to run when the button on the panel is clicked"
-#~ msgstr "Komento, joka suoritetaan kuvaketta painettaessa"
-
-#~ msgid "Interval (sec):"
-#~ msgstr "Väli (sekuntia):"
-
-#~ msgid "Mail checker"
-#~ msgstr "Postintarkistin"
-
-#~ msgid "Graphical pager"
-#~ msgstr "Graafinen työpöydänvaihtaja"
-
-#~ msgid "Desktop switcher"
-#~ msgstr "Työpöydänvaihtaja"
-
-#~ msgid ""
-#~ "Access to the configuration system has been disabled.\n"
-#~ "\n"
-#~ "Ask your system administrator for more information"
-#~ msgstr ""
-#~ "Pääsysi konfigurointijärjestelmään on estetty.\n"
-#~ "\n"
-#~ "Kysy järjestelmäsi ylläpitäjältä lisätietoa asiasta"
-
-#~ msgid "tip|Exit"
-#~ msgstr "Lopeta"
-
-#~ msgid "tip|Setup"
-#~ msgstr "Asetukset"
-
-#~ msgid "tip|Info"
-#~ msgstr "Tietoja"
-
-#~ msgid "Exit"
-#~ msgstr "Lopeta"
-
-#~ msgid "Setup"
-#~ msgstr "Asetukset"
-
-#~ msgid "Info"
-#~ msgstr "Tietoja"
-
-#~ msgid "Button 1:"
-#~ msgstr "Painike 1:"
-
-#~ msgid "Button 2:"
-#~ msgstr "Painike 2:"
-
-#~ msgid "_Hide"
-#~ msgstr "_Piilota"
-
-#~ msgid "System buttons"
-#~ msgstr "Järjestelmäpainikkeet"
-
-#~ msgid "Iconbox Settings"
-#~ msgstr "Kuvakelaatikon asetukset"
-
-#~ msgid "Xfce 4 Iconbox Settings"
-#~ msgstr "Xfce4 kuvakelaatikon asetukset"
-
-#~ msgid "Taskbar Settings"
-#~ msgstr "Tehtäväpalkin asetukset"
-
-#~ msgid "Xfce 4 Taskbar Settings"
-#~ msgstr "Xfce 4 tehtäväpalkin asetukset"
-
-#~ msgid "Appfinder"
-#~ msgstr "Sovellushaku"
-
-#~ msgid "Drag file to print"
-#~ msgstr "Raahaa tulostettava tiedosto"
-
-#~ msgid "File manager"
-#~ msgstr "Tiedostonhallinta"
-
-#~ msgid "Find and run applications"
-#~ msgstr "Etsi ja suorita sovelluksia"
-
-#~ msgid "Konqueror"
-#~ msgstr "Konqueror"
-
-#~ msgid "Konqueror File Manager"
-#~ msgstr "Konqueror-tiedostonhallinta"
-
-#~ msgid "Manual"
-#~ msgstr "Käsikirja"
-
-#~ msgid "Mozilla Web Browser"
-#~ msgstr "Mozilla web-selain"
-
-#~ msgid "Music player"
-#~ msgstr "Musiikkisoitin"
-
-#~ msgid "Nautilus"
-#~ msgstr "Nautilus"
-
-#~ msgid "Nautilus File Manager"
-#~ msgstr "Nautilus-tiedostonhallinta"
-
-#~ msgid "Printer Management"
-#~ msgstr "Tulostuksenhallinta"
