--- a/po/gu.po
+++ b/po/gu.po
@@ -1,16 +1,14 @@
-# translation of gu.po to Gujarati
-# translation of xfce4-panel.po to Gujarati
-# This file is distributed under the same license as the PACKAGE package.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER.
-# Ankit Patel <ankit@redhat.com>, 2004, 2005.
-# Ankit Patel <ankit644@yahoo.com>, 2005.
+# Gujarati translations for xfce4-panel package.
+# Copyright (C) 2005 Jasper Huijsmans.
+# This file is distributed under the same license as the xfce4-panel package.
+# Ankit Patel <ankit644@yahoo.com>, 2004-2005.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gu\n"
+"Project-Id-Version: xfce4-panel 4.3.22\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-09-28 10:01+0200\n"
-"PO-Revision-Date: 2005-08-26 10:24+0530\n"
+"POT-Creation-Date: 2005-09-29 20:47+0900\n"
+"PO-Revision-Date: 2005-09-29 20:29+0900\n"
 "Last-Translator: Ankit Patel <ankit644@yahoo.com>\n"
 "Language-Team: Gujarati <indianoss-gujarati@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -18,10 +16,6 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.9.1\n"
 "Plural-Forms: nplurals=2; plural=(n!=1);\n"
-"\n"
-"\n"
-"\n"
-"\n"
 
 #: ../libxfce4panel/xfce-panel-external-item.c:167
 #, c-format
@@ -94,7 +88,7 @@ msgstr ""
 msgid "Restart"
 msgstr "ફરીથી શરુ કરો (_R)"
 
-#: ../panel/panel-item-manager.c:327 ../panel/panel-item-manager.c:335
+#: ../panel/panel-item-manager.c:353 ../panel/panel-item-manager.c:361
 #, fuzzy, c-format
 msgid "Could not open \"%s\" module"
 msgstr ""
@@ -639,291 +633,3 @@ msgstr "માત્ર ન્યૂનતમ કરેલ કાર્યક્
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
 msgstr ""
-
-#~ msgid "Panel Settings"
-#~ msgstr "પેનલ સુયોજનો"
-
-#~ msgid "Xfce 4 Panel Settings"
-#~ msgstr "Xfce 4 પેનલ સુયોજનો"
-
-#~ msgid "No data was found. The panel will be empty."
-#~ msgstr "કોઈ માહિતી મળી નથી. પેનલ ખાલી હશે."
-
-#~ msgid "Position:"
-#~ msgstr "જગ્યા:"
-
-#~ msgid "Command:"
-#~ msgstr "આદેશ:"
-
-#~ msgid "Use startup _notification"
-#~ msgstr "શરુઆતના સૂચનો વાપરો (_n)"
-
-#~ msgid "Other Icon"
-#~ msgstr "બીજું ચિહ્ન"
-
-#~ msgid "Drag file onto this frame to change the icon"
-#~ msgstr "ચિહ્નને બદલવા માટે આ ચોકઠામાં ફાઈલને ખેંચો"
-
-#~ msgid "%s: Successfully started without session management"
-#~ msgstr "%s: સત્ર વ્યવસ્થા વગર સફળતાપૂર્વક શરુ કરેલ છે"
-
-#~ msgid "%s: Successfully started with session management"
-#~ msgstr "%s: સત્ર વ્યવસ્થા સાથે સફળતાપૂર્વક શરુ કરેલ છે"
-
-#~ msgid "Could not create panel item \"%s\"."
-#~ msgstr "પેનલ વસ્તુ \"%s\" બનાવી શક્યા નથી."
-
-#~ msgid "_Properties..."
-#~ msgstr "ગુણધર્મો (_P)..."
-
-#~ msgid "_Remove"
-#~ msgstr "દૂર કરો (_R)"
-
-#~ msgid "This item has no configuration options"
-#~ msgstr "આ વસ્તુ પાસે કોઈ રુપરેખાંકન વિકલ્પો નથી"
-
-#~ msgid "_About Xfce"
-#~ msgstr "Xfce વિશે (_A)"
-
-#~ msgid "_Help"
-#~ msgstr "મદદ (_H)"
-
-#~ msgid "E_xit"
-#~ msgstr "બહાર નીકળો (_x)"
-
-#~ msgid "icons|Terminal"
-#~ msgstr "ટર્મિનલ"
-
-#~ msgid "Settings manager not available"
-#~ msgstr "સુયોજનો વ્યવસ્થાપક ઉપ્લબ્ધ નથી"
-
-#~ msgid "%H:%M"
-#~ msgstr "%H:%M"
-
-#~ msgid "Taskbar"
-#~ msgstr "સ્થિતિદર્શક પટ્ટી"
-
-#~ msgid "Cannot create MCS client channel"
-#~ msgstr "MCS ક્લાઈન્ટ ચેનલ બનાવી શકતા નથી"
-
-#~ msgid "_About"
-#~ msgstr "વિશે (_A)"
-
-#~ msgid "Medium"
-#~ msgstr "મધ્યમ"
-
-#~ msgid "Huge"
-#~ msgstr "વિશાળ"
-
-#~ msgid "Autohide:"
-#~ msgstr "આપોઆપ છુપાવો:"
-
-#~ msgid "Behaviour"
-#~ msgstr "વર્તણૂક"
-
-#~ msgid "_Top"
-#~ msgstr "ઉપર (_T)"
-
-#~ msgid "_Bottom"
-#~ msgstr "નીચે (_B)"
-
-#~ msgid "Alignment:"
-#~ msgstr "ગોઠવણી:"
-
-#~ msgid "_Left"
-#~ msgstr "ડાબુ (_L)"
-
-#~ msgid "_Center"
-#~ msgstr "કેન્દ્ર (_C)"
-
-#~ msgid "_Right"
-#~ msgstr "જમણુ (_R)"
-
-#~ msgid "Height:"
-#~ msgstr "ઊંચાઈ :"
-
-#~ msgid "Width:"
-#~ msgstr "પહોળાઈ:"
-
-#~ msgid "_Shrink to fit"
-#~ msgstr "બંધબેસતું સંકોચો (_S)"
-
-#~ msgid "Auto _hide taskbar"
-#~ msgstr "સ્થિતિદર્શક પટ્ટી આપોઆપ સંતાડો (_h)"
-
-#~ msgid "Show tasklist"
-#~ msgstr "ક્રિયાયાદી બતાવો"
-
-#~ msgid "Show _pager in taskbar"
-#~ msgstr "સ્થિતિદર્શક પટ્ટીમાં પેજર બતાવો (_p)"
-
-#~ msgid "Status area"
-#~ msgstr "સ્થિતિ વિસ્તાર"
-
-#~ msgid "General"
-#~ msgstr "સામાન્ય"
-
-#~ msgid "Components"
-#~ msgstr "કમ્પોનન્ટો"
-
-#~ msgid "Icon size"
-#~ msgstr "ચિહ્ન માપ"
-
-#~ msgid "%A, %d %B %Y"
-#~ msgstr "%A, %d %B %Y"
-
-#~ msgid "Clock type:"
-#~ msgstr "ઘડિયાળનો પ્રકાર:"
-
-#~ msgid "Hour mode:"
-#~ msgstr "કલાકની સ્થિતિ:"
-
-#~ msgid "24 hour"
-#~ msgstr "24 hour"
-
-#~ msgid "12 hour"
-#~ msgstr "12 hour"
-
-#~ msgid "Show seconds:"
-#~ msgstr "સેકન્ડો બતાવો:"
-
-#~ msgid "Flexible space"
-#~ msgstr "રાહતદાયક જગ્યા"
-
-#~ msgid "Development"
-#~ msgstr "વિકાસ"
-
-#~ msgid "Settings"
-#~ msgstr "સુયોજનો"
-
-#~ msgid "System"
-#~ msgstr "સિસ્ટમ"
-
-#~ msgid "Windows programs"
-#~ msgstr "Windows કાર્યક્રમો"
-
-#~ msgid "Edit launcher"
-#~ msgstr "લોન્ચરમાં ફેરફાર કરો"
-
-#~ msgid "_Edit"
-#~ msgstr "ફેરફાર કરો (_E)"
-
-#~ msgid "_Up"
-#~ msgstr "ઉપર (_U)"
-
-#~ msgid "_Down"
-#~ msgstr "નીચે (_D)"
-
-#~ msgid "_Add"
-#~ msgstr "ઉમેરો (_A)"
-
-#~ msgid "Mail box:"
-#~ msgstr "મેઈલ બોક્સ:"
-
-#~ msgid "New mail command:"
-#~ msgstr "નવો મેઈલ આદેશ:"
-
-#~ msgid "Command to run when new mail arrives"
-#~ msgstr "જ્યારે નવા મેઈલ આવે ત્યારે ચલાવવાનો આદેશ"
-
-#~ msgid "Command to run when the button on the panel is clicked"
-#~ msgstr "જ્યારે આ પેનલ પરનું બટન ક્લિક થાય ત્યારે ચલાવવાનો આદેશ"
-
-#~ msgid "Interval (sec):"
-#~ msgstr "અંતરાલ (સેકન્ડ):"
-
-#~ msgid "Mail checker"
-#~ msgstr "મેઈલ ચકાસનાર"
-
-#~ msgid "Graphical pager"
-#~ msgstr "ગ્રાફિકલ પેજર"
-
-#~ msgid "Desktop switcher"
-#~ msgstr "ડેસ્કટોપ બદલનાર"
-
-#~ msgid ""
-#~ "Access to the configuration system has been disabled.\n"
-#~ "\n"
-#~ "Ask your system administrator for more information"
-#~ msgstr ""
-#~ "રુપરેખાંકન સિસ્ટમ સાછે ચલાવવાનું નિષ્ક્રિય કરેલ છે.\n"
-#~ "\n"
-#~ "વધુ જાણકારી માટે તમારા સિસ્ટમ સંચાલકને પૂછો"
-
-#~ msgid "tip|Exit"
-#~ msgstr "બહાર નીકળો"
-
-#~ msgid "tip|Setup"
-#~ msgstr "સુયોજન"
-
-#~ msgid "tip|Info"
-#~ msgstr "જાણકારી"
-
-#~ msgid "Exit"
-#~ msgstr "બહાર નીકળો"
-
-#~ msgid "Setup"
-#~ msgstr "સુયોજન"
-
-#~ msgid "Info"
-#~ msgstr "જાણકારી"
-
-#~ msgid "Button 1:"
-#~ msgstr "બટન ૧:"
-
-#~ msgid "Button 2:"
-#~ msgstr "બટન ૨:"
-
-#~ msgid "_Hide"
-#~ msgstr "છુપાવો (_H)"
-
-#~ msgid "System buttons"
-#~ msgstr "સિસ્ટમ બટનો"
-
-#~ msgid "Iconbox Settings"
-#~ msgstr "ચિહ્નબોક્સ સુયોજનો"
-
-#~ msgid "Xfce 4 Iconbox Settings"
-#~ msgstr "Xfce 4 ચિહ્નબોક્સ સુયોજનો"
-
-#~ msgid "Taskbar Settings"
-#~ msgstr "ક્રિયાપટ્ટી સુયોજનો"
-
-#~ msgid "Xfce 4 Taskbar Settings"
-#~ msgstr "Xfce 4 કાર્યપટ્ટી સુયોજનો"
-
-#~ msgid "Appfinder"
-#~ msgstr "કાર્યક્રમશોધક"
-
-#~ msgid "Drag file to print"
-#~ msgstr "ફાઈલને છાપવા માટે ખેંચો"
-
-#~ msgid "File manager"
-#~ msgstr "ફાઈલ વ્યવસ્થાપક"
-
-#~ msgid "Find and run applications"
-#~ msgstr "શોધો અને ચલાવો કાર્યક્રમો"
-
-#~ msgid "Konqueror"
-#~ msgstr "કોન્કરર"
-
-#~ msgid "Konqueror File Manager"
-#~ msgstr "કોન્કરર ફાઈલ વ્યવસ્થાપક"
-
-#~ msgid "Manual"
-#~ msgstr "માર્ગદર્શિકા"
-
-#~ msgid "Mozilla Web Browser"
-#~ msgstr "મોઝિલ્લા વેબ બ્રાઉઝર"
-
-#~ msgid "Music player"
-#~ msgstr "મ્યુઝીક પ્લેયર"
-
-#~ msgid "Nautilus"
-#~ msgstr "નોટિલસ"
-
-#~ msgid "Nautilus File Manager"
-#~ msgstr "નોટિલસ ફાઈલ વ્યવસ્થાપક"
-
-#~ msgid "Printer Management"
-#~ msgstr "પ્રિન્ટર વ્યવસ્થાપન"
