--- a/po/he.po
+++ b/po/he.po
@@ -1,15 +1,16 @@
-# translation of he.po to Hebrew
-# This file is distributed under the same license as the PACKAGE package.
+# Hebrew translations for xfce4-panel package.
+# Copyright (C) 2005 Jasper Huijsmans.
+# This file is distributed under the same license as the xfce4-panel package.
 # Dotan Kamber <kamberd@yahoo.com>, 2004.
 # Jonatan Perry <Jonatan443@walla.co.il>, 2004.
 # Yuval Tanny <tanai@int.gov.il>, 2004.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: he\n"
+"Project-Id-Version: xfce4-panel 4.3.22\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-09-28 10:01+0200\n"
-"PO-Revision-Date: 2004-12-31 16:47+0200\n"
+"POT-Creation-Date: 2005-09-29 20:47+0900\n"
+"PO-Revision-Date: 2005-09-29 20:29+0900\n"
 "Last-Translator: Yuval Tanny <tanai@int.gov.il>\n"
 "Language-Team: Hebrew Team <xfce2004@yahoo.com>\n"
 "MIME-Version: 1.0\n"
@@ -87,7 +88,7 @@ msgstr ""
 msgid "Restart"
 msgstr "_איתחול"
 
-#: ../panel/panel-item-manager.c:327 ../panel/panel-item-manager.c:335
+#: ../panel/panel-item-manager.c:353 ../panel/panel-item-manager.c:361
 #, fuzzy, c-format
 msgid "Could not open \"%s\" module"
 msgstr "אין אפשרות ליצור פריט ללוח \"%s\"."
@@ -631,289 +632,3 @@ msgstr "הצג _שמות של יישומים"
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
 msgstr ""
-
-#~ msgid "Panel Settings"
-#~ msgstr "הגדרות לוח"
-
-#~ msgid "Xfce 4 Panel Settings"
-#~ msgstr "הגדרות לוח Xfce 4"
-
-#~ msgid "No data was found. The panel will be empty."
-#~ msgstr "לא נמצא מידע. הלוח יהיה ריק."
-
-#~ msgid "Position:"
-#~ msgstr "מיקום:"
-
-#~ msgid "Command:"
-#~ msgstr "פקודה:"
-
-#~ msgid "Use startup _notification"
-#~ msgstr "השתמש בהתראת _פתיחה"
-
-#~ msgid "Other Icon"
-#~ msgstr "צלמית אחרת"
-
-#~ msgid "Drag file onto this frame to change the icon"
-#~ msgstr "גרור קובץ למסגרת זו כדי לשנות את הצלמית"
-
-#~ msgid "%s: Successfully started without session management"
-#~ msgstr "%s הופעל בהצלחה ללא ניהול ההפעלה"
-
-#~ msgid "%s: Successfully started with session management"
-#~ msgstr "%s הופעל בהצלחה עם ניהול ההפעלה"
-
-#~ msgid "Could not create panel item \"%s\"."
-#~ msgstr "אין אפשרות ליצור פריט ללוח \"%s\"."
-
-#~ msgid "_Properties..."
-#~ msgstr "_מאפיינים..."
-
-#~ msgid "Add _new item"
-#~ msgstr "הוסף פריט _חדש"
-
-#~ msgid "This item has no configuration options"
-#~ msgstr "לפריט זה אין אפשרויות הגדרה"
-
-#~ msgid "_About Xfce"
-#~ msgstr "_אודות Xfce"
-
-#~ msgid "_Help"
-#~ msgstr "_עזרה"
-
-#~ msgid "E_xit"
-#~ msgstr "י_ציאה"
-
-#, fuzzy
-#~ msgid "icons|Terminal"
-#~ msgstr "מסוף"
-
-#~ msgid "Settings manager not available"
-#~ msgstr "מנהל ההגדרות אינו זמין"
-
-#~ msgid "Taskbar"
-#~ msgstr "שורת המשימות"
-
-#~ msgid "Cannot create MCS client channel"
-#~ msgstr "אין אפשרות ליצור ערוץ לקוח MCS"
-
-#, fuzzy
-#~ msgid "_About"
-#~ msgstr "_אודות Xfce"
-
-#~ msgid "Medium"
-#~ msgstr "בינוני"
-
-#~ msgid "Huge"
-#~ msgstr "ענק"
-
-#~ msgid "Autohide:"
-#~ msgstr "הסתרה אוטומטית:"
-
-#~ msgid "Behaviour"
-#~ msgstr "התנהגות"
-
-#~ msgid "_Top"
-#~ msgstr "_עליון"
-
-#~ msgid "_Bottom"
-#~ msgstr "_תחתון"
-
-#, fuzzy
-#~ msgid "Alignment:"
-#~ msgstr "יישור"
-
-#~ msgid "_Left"
-#~ msgstr "_שמאל"
-
-#~ msgid "_Center"
-#~ msgstr "_אמצע"
-
-#~ msgid "_Right"
-#~ msgstr "_מין"
-
-#, fuzzy
-#~ msgid "Height:"
-#~ msgstr "גובה:"
-
-#~ msgid "Width:"
-#~ msgstr "רוחב:"
-
-#~ msgid "Auto _hide taskbar"
-#~ msgstr "_הסתרה אוטומטית של שורת המשימות"
-
-#~ msgid "Show _pager in taskbar"
-#~ msgstr "הצג _מחליף סביבות עבודה בשורת המשימות"
-
-#~ msgid "%A, %d %B %Y"
-#~ msgstr "%A, %d %B %Y"
-
-#~ msgid "Clock type:"
-#~ msgstr "סוג שעון:"
-
-#~ msgid "Hour mode:"
-#~ msgstr "מצב שעה:"
-
-#~ msgid "24 hour"
-#~ msgstr "24 שעות"
-
-#~ msgid "12 hour"
-#~ msgstr "12 שעות"
-
-#~ msgid "Show seconds:"
-#~ msgstr "הצג שניות:"
-
-#, fuzzy
-#~ msgid "Settings"
-#~ msgstr "הגדרות לוח"
-
-#, fuzzy
-#~ msgid "Edit launcher"
-#~ msgstr "הוסף משגר"
-
-#, fuzzy
-#~ msgid "_Edit"
-#~ msgstr "עורך"
-
-#~ msgid "Mail box:"
-#~ msgstr "תיבת דואר:"
-
-#~ msgid "New mail command:"
-#~ msgstr "פקודת דואר חדשה:"
-
-#~ msgid "Command to run when new mail arrives"
-#~ msgstr "פקודה להרצה כאשר דואר חדש מגיע"
-
-#~ msgid "Command to run when the button on the panel is clicked"
-#~ msgstr "פקודה להרצה כאשר הלחצן על הלוח נלחץ"
-
-#~ msgid "Interval (sec):"
-#~ msgstr "משך זמן (שניות):"
-
-#~ msgid "Mail checker"
-#~ msgstr "בדיקת דואר"
-
-#~ msgid "Graphical pager"
-#~ msgstr "מחליף סביבות עבודה גרפי"
-
-#~ msgid "Desktop switcher"
-#~ msgstr "מחליף שולחנות עבודה"
-
-#~ msgid ""
-#~ "Access to the configuration system has been disabled.\n"
-#~ "\n"
-#~ "Ask your system administrator for more information"
-#~ msgstr ""
-#~ "אפשרות כניסה למערכת ההגדרות בוטלה.\n"
-#~ "\n"
-#~ "שאל את מנהל המערכת שלך למידע נוסף."
-
-#, fuzzy
-#~ msgid "tip|Exit"
-#~ msgstr "יציאה"
-
-#, fuzzy
-#~ msgid "tip|Setup"
-#~ msgstr "הגדרות"
-
-#, fuzzy
-#~ msgid "tip|Info"
-#~ msgstr "מידע"
-
-#~ msgid "Exit"
-#~ msgstr "יציאה"
-
-#~ msgid "Setup"
-#~ msgstr "הגדרות"
-
-#~ msgid "Info"
-#~ msgstr "מידע"
-
-#~ msgid "Button 1:"
-#~ msgstr "לחצן 1:"
-
-#~ msgid "Button 2:"
-#~ msgstr "לחצן 2:"
-
-#~ msgid "_Hide"
-#~ msgstr "_הסתר"
-
-#~ msgid "System buttons"
-#~ msgstr "לחצני מערכת"
-
-#~ msgid "Iconbox Settings"
-#~ msgstr "הגדרות סמלים"
-
-#~ msgid "Xfce 4 Iconbox Settings"
-#~ msgstr "הגדרות סמלים Xfce 4"
-
-#~ msgid "Taskbar Settings"
-#~ msgstr "הגדרות שורת המשימות"
-
-#~ msgid "Xfce 4 Taskbar Settings"
-#~ msgstr "הגדרות שורת המשימות Xfce 4"
-
-#, fuzzy
-#~ msgid "File manager"
-#~ msgstr "מנהל הקבצים"
-
-#, fuzzy
-#~ msgid "Printer Management"
-#~ msgstr "מנהל הקבצים"
-
-#~ msgid "Removing the item will also remove its popup menu."
-#~ msgstr "הסרת הפריט גם תסיר את כל התפריטים הקופצים."
-
-#~ msgid "Caption:"
-#~ msgstr "כותרת:"
-
-#~ msgid "Tooltip:"
-#~ msgstr "תיאור כלי:"
-
-#~ msgid "Attach menu to launcher"
-#~ msgstr "הוסף תפריט למשגר"
-
-#~ msgid "Change menu item"
-#~ msgstr "שנה פריט תפריט"
-
-#~ msgid "Click mouse button 3 to change item"
-#~ msgstr "לחץ על לחצן העכבר 3 פעמים כדי לשנות את הפריט"
-
-#~ msgid "Add launcher"
-#~ msgstr "הוסף משגר"
-
-#~ msgid "Left"
-#~ msgstr "משמאל"
-
-#~ msgid "Right"
-#~ msgstr "מימין"
-
-#~ msgid "Top"
-#~ msgstr "מעל"
-
-#~ msgid "Bottom"
-#~ msgstr "מתחת"
-
-#~ msgid "Popup position:"
-#~ msgstr "מיקום תפריט התוכניות:"
-
-#, fuzzy
-#~ msgid "Notification Area"
-#~ msgstr "איזור התראה"
-
-#~ msgid "Menu"
-#~ msgstr "תפריט"
-
-#~ msgid "Always on top:"
-#~ msgstr "תמיד בחזית:"
-
-#~ msgid "Show _system tray in taskbar"
-#~ msgstr "הצג את _מגש המערכת בשורת המשימות"
-
-#~ msgid "Cannot get initial style"
-#~ msgstr "סגנון הפתיחה אינו זמין"
-
-#~ msgid "Cannot get default screen\n"
-#~ msgstr "אין אפשרות לקבל את מסך ברירת המחדל\n"
-
-#~ msgid "Cannot connect to session manager"
-#~ msgstr "אין אפשרות להתחבר למנהל ההפעלה"
