--- a/po/hi.po
+++ b/po/hi.po
@@ -1,13 +1,13 @@
 # Hindi translations for xfce4-panel package.
-# Copyright (C) 2002-2005 The Xfce development team.
+# Copyright (C) 2005 Jasper Huijsmans.
 # This file is distributed under the same license as the xfce4-panel package.
 # G Karunakar <karunakar@freedomink.org>, 2003.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel 4.3.2\n"
+"Project-Id-Version: xfce4-panel 4.3.22\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-09-28 10:01+0200\n"
+"POT-Creation-Date: 2005-09-29 20:47+0900\n"
 "PO-Revision-Date: 2005-08-21 17:43+0900\n"
 "Last-Translator: G Karunakar <karunakar@freedomink.org>\n"
 "Language-Team: Hindi <indlinux-hindi-gnome@lists.sourceforge.net>\n"
@@ -85,7 +85,7 @@ msgstr ""
 msgid "Restart"
 msgstr "पुरानी स्थिति में लाएं (_R)"
 
-#: ../panel/panel-item-manager.c:327 ../panel/panel-item-manager.c:335
+#: ../panel/panel-item-manager.c:353 ../panel/panel-item-manager.c:361
 #, c-format
 msgid "Could not open \"%s\" module"
 msgstr ""
@@ -629,368 +629,3 @@ msgstr ""
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
 msgstr ""
-
-#, fuzzy
-#~ msgid "Panel Settings"
-#~ msgstr "Xfce पेनेल समायोजन"
-
-#, fuzzy
-#~ msgid "Xfce 4 Panel Settings"
-#~ msgstr "Xfce पेनेल समायोजन"
-
-#~ msgid "Position:"
-#~ msgstr "स्थान:"
-
-#~ msgid "Command:"
-#~ msgstr "आदेश :"
-
-#~ msgid "Other Icon"
-#~ msgstr "अन्य आईकाॅन"
-
-#, fuzzy
-#~ msgid "_Properties..."
-#~ msgstr "/विशेषताएं (_P) ..."
-
-#, fuzzy
-#~ msgid "_Remove"
-#~ msgstr "/हटाएं (_R)"
-
-#, fuzzy
-#~ msgid "Add _new item"
-#~ msgstr "/नया वस्तु जोडें (_n)"
-
-#~ msgid "This item has no configuration options"
-#~ msgstr "इस वस्तु के कोइ कॉनफिगरेशन विकल्प नहीं हैं"
-
-#, fuzzy
-#~ msgid "_About Xfce"
-#~ msgstr "/Xfce के बोरे में (_A)"
-
-#, fuzzy
-#~ msgid "_Help"
-#~ msgstr "/सहायता (_H)"
-
-#, fuzzy
-#~ msgid "E_xit"
-#~ msgstr "/बाहर निकलें (_x)"
-
-#, fuzzy
-#~ msgid "icons|Terminal"
-#~ msgstr "टर्मिनल"
-
-#~ msgid "Settings manager not available"
-#~ msgstr "समायोजन प्रभंधक उपलब्ध नहीं"
-
-#~ msgid "Taskbar"
-#~ msgstr "टास्कबार"
-
-#~ msgid "Cannot create MCS client channel"
-#~ msgstr " MCS क्लाएंट चैनल नहीं बना सकता"
-
-#, fuzzy
-#~ msgid "_About"
-#~ msgstr "/Xfce के बोरे में (_A)"
-
-#~ msgid "Medium"
-#~ msgstr "मध्य"
-
-#~ msgid "Panel size:"
-#~ msgstr "पेनेल आकार"
-
-#~ msgid "Behaviour"
-#~ msgstr "व्यावहार"
-
-#, fuzzy
-#~ msgid "_Top"
-#~ msgstr "ऊपर"
-
-# #-#-#-#-#  libgnomeprintui.HEAD.hi.po (libgnomeprintui )  #-#-#-#-#
-# libgnomeprintui/gnome-print-paper-selector.c:2013
-#, fuzzy
-#~ msgid "_Bottom"
-#~ msgstr "नीचे"
-
-#, fuzzy
-#~ msgid "Height:"
-#~ msgstr " ऊँचाई:"
-
-#, fuzzy
-#~ msgid "Auto _hide taskbar"
-#~ msgstr "टास्कबार को स्वतः छुपाएँ "
-
-#, fuzzy
-#~ msgid "Show _pager in taskbar"
-#~ msgstr "टास्कबार में पेजर दिखाएं"
-
-#, fuzzy
-#~ msgid "Status area"
-#~ msgstr "शनिवार"
-
-#, fuzzy
-#~ msgid "Icon size"
-#~ msgstr "आईकाॅन"
-
-#~ msgid "Clock type:"
-#~ msgstr "घडी प्रकार"
-
-#~ msgid "Hour mode:"
-#~ msgstr "घंटा पद्धति"
-
-#~ msgid "24 hour"
-#~ msgstr "२४ घंटे"
-
-#~ msgid "12 hour"
-#~ msgstr "१२ घंटे"
-
-#~ msgid "Show seconds:"
-#~ msgstr "क्षण दिखाएं"
-
-#, fuzzy
-#~ msgid "Settings"
-#~ msgstr "Xfce पेनेल समायोजन"
-
-#, fuzzy
-#~ msgid "Edit launcher"
-#~ msgstr "लाँचर जोडें"
-
-#, fuzzy
-#~ msgid "_Edit"
-#~ msgstr "एडीटर"
-
-#~ msgid "Mail box:"
-#~ msgstr "डाक पेटी"
-
-#, fuzzy
-#~ msgid "New mail command:"
-#~ msgstr "डाक आदेश"
-
-#, fuzzy
-#~ msgid "Command to run when new mail arrives"
-#~ msgstr "पेनेल पर बट्टन दबाने पर चलाने वाला आदेश"
-
-#~ msgid "Command to run when the button on the panel is clicked"
-#~ msgstr "पेनेल पर बट्टन दबाने पर चलाने वाला आदेश"
-
-#~ msgid "Interval (sec):"
-#~ msgstr "अंतराल (क्षण):"
-
-#, fuzzy
-#~ msgid "Mail checker"
-#~ msgstr "डाक देखो"
-
-#~ msgid "Graphical pager"
-#~ msgstr "ग्राफिकल पेजर"
-
-#~ msgid "Desktop switcher"
-#~ msgstr "डेसकटॉप प्रवर्तक"
-
-#, fuzzy
-#~ msgid "tip|Exit"
-#~ msgstr "बाहर"
-
-#, fuzzy
-#~ msgid "tip|Setup"
-#~ msgstr "सेटप"
-
-#, fuzzy
-#~ msgid "tip|Info"
-#~ msgstr "जानकारी"
-
-#~ msgid "Exit"
-#~ msgstr "बाहर"
-
-#~ msgid "Setup"
-#~ msgstr "सेटप"
-
-#~ msgid "Info"
-#~ msgstr "जानकारी"
-
-#~ msgid "Button 1:"
-#~ msgstr "बट्टन 1"
-
-#~ msgid "Button 2:"
-#~ msgstr "बट्टन 2"
-
-#, fuzzy
-#~ msgid "_Hide"
-#~ msgstr "/सहायता (_H)"
-
-#~ msgid "System buttons"
-#~ msgstr "सिसटम बट्टन"
-
-#, fuzzy
-#~ msgid "Iconbox Settings"
-#~ msgstr "Xfce पेनेल समायोजन"
-
-#, fuzzy
-#~ msgid "Xfce 4 Iconbox Settings"
-#~ msgstr "Xfce पेनेल समायोजन"
-
-#, fuzzy
-#~ msgid "Taskbar Settings"
-#~ msgstr "टास्कबार"
-
-#, fuzzy
-#~ msgid "Xfce 4 Taskbar Settings"
-#~ msgstr "Xfce पेनेल समायोजन"
-
-#, fuzzy
-#~ msgid "File manager"
-#~ msgstr "फाइल प्रभंधन"
-
-#, fuzzy
-#~ msgid "Manual"
-#~ msgstr "जनवरी"
-
-#, fuzzy
-#~ msgid "Printer Management"
-#~ msgstr "फाइल प्रभंधन"
-
-#~ msgid "Tooltip:"
-#~ msgstr "टूल टिप्पणी"
-
-#~ msgid "Attach menu to launcher"
-#~ msgstr "मेनू को लाँचर से जोडें"
-
-#~ msgid "Change menu item"
-#~ msgstr "मेनू वस्तु बदलें"
-
-#~ msgid "Click mouse button 3 to change item"
-#~ msgstr "वस्तु बदलने के लिए माउस बट्टन ३ दबाएं"
-
-#~ msgid "Add launcher"
-#~ msgstr "लाँचर जोडें"
-
-#~ msgid "Add new item"
-#~ msgstr "नया वस्तु जोडें"
-
-#~ msgid "Left"
-#~ msgstr "बांये"
-
-#~ msgid "Right"
-#~ msgstr "दायें"
-
-#~ msgid "Top"
-#~ msgstr "ऊपर"
-
-#~ msgid "Bottom"
-#~ msgstr "नीचे"
-
-#~ msgid "Popup position:"
-#~ msgstr "पॉप्प स्थिति"
-
-#~ msgid "Menu"
-#~ msgstr "मेनू"
-
-#, fuzzy
-#~ msgid "Show _system tray in taskbar"
-#~ msgstr "टास्कबार में सिस्टम ट्रे दिखाएं"
-
-#~ msgid "Cannot get initial style"
-#~ msgstr "आरंभिक स्टाइल प्राप्त नहीं कर सका!"
-
-#~ msgid "This should not happen"
-#~ msgstr "ऐसा होना नहीं चाहिए"
-
-#, fuzzy
-#~ msgid "Cannot get default screen\n"
-#~ msgstr "डेस्कटॉप हाशिया प्राप्त नहीं कर सका"
-
-#~ msgid "Cannot connect to session manager"
-#~ msgstr "सत्र प्रबंधक से जुड़ नहीं सकता"
-
-#~ msgid "Show two buttons:"
-#~ msgstr "दो बट्टन दिखाएं"
-
-#~ msgid "Change item"
-#~ msgstr "बदलें"
-
-#~ msgid "Menu:"
-#~ msgstr "मेनु:"
-
-#~ msgid "/Xfce Panel"
-#~ msgstr "/Xfce पेनेल"
-
-#~ msgid "/Add _new item"
-#~ msgstr "/नया वस्तु जोडें (_n)"
-
-#~ msgid "/_Properties..."
-#~ msgstr "/विशेषताएं (_P) ..."
-
-#~ msgid "Select icon"
-#~ msgstr "आईकाॅन चुनें"
-
-#~ msgid "/_Settings manager"
-#~ msgstr "/समायोजन प्रभंधक (_S)"
-
-#~ msgid "Tiny"
-#~ msgstr "सूक्षम"
-
-#~ msgid "Icon theme:"
-#~ msgstr "आईकन थीम"
-
-#~ msgid "Normal"
-#~ msgstr "सामान्य"
-
-#~ msgid "Center the panel:"
-#~ msgstr "पेनेल को केंद्र मे करें"
-
-#~ msgid "Set"
-#~ msgstr "सेट"
-
-#~ msgid "Sunday"
-#~ msgstr "रविवार"
-
-#~ msgid "Monday"
-#~ msgstr "सोमवार"
-
-#~ msgid "Tuesday"
-#~ msgstr "मंगलवार"
-
-#~ msgid "Wednesday"
-#~ msgstr "बुधवार"
-
-#~ msgid "Thursday"
-#~ msgstr "गुरुवार"
-
-#~ msgid "Friday"
-#~ msgstr "शुक्रवार"
-
-#~ msgid "February"
-#~ msgstr "फरवरी"
-
-#~ msgid "March"
-#~ msgstr "मार्च"
-
-#~ msgid "April"
-#~ msgstr "अप्रैल"
-
-#~ msgid "May"
-#~ msgstr "मई"
-
-#~ msgid "June"
-#~ msgstr "जून"
-
-#~ msgid "July"
-#~ msgstr "जुलाई"
-
-#~ msgid "August"
-#~ msgstr "अगस्त"
-
-#~ msgid "September"
-#~ msgstr "सितम्बर"
-
-#~ msgid "October"
-#~ msgstr "अक्टूबर"
-
-#~ msgid "November"
-#~ msgstr "नवम्बर"
-
-#~ msgid "December"
-#~ msgstr "दिसम्बर"
-
-#~ msgid "Type:"
-#~ msgstr "प्रकार:"
-
-#~ msgid "Select an item type from the list"
-#~ msgstr "सूची में से वस्तु प्रकार चुनें"
