--- a/po/it.po
+++ b/po/it.po
@@ -1,14 +1,15 @@
 # Italian translations for xfce4-panel package.
-# Copyright (C) 2002-2005 The Xfce development team.
+# Copyright (C) 2005 Jasper Huijsmans.
 # This file is distributed under the same license as the xfce4-panel package.
 # Alex Dupre <ale@FreeBSD.org>, 2004.
+# Luca Marrocco <buildup@libero.it>, 2005.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel 4.3.2\n"
+"Project-Id-Version: xfce4-panel 4.3.22\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-09-28 10:01+0200\n"
-"PO-Revision-Date: 2005-08-21 17:45+0900\n"
+"POT-Creation-Date: 2005-09-29 20:47+0900\n"
+"PO-Revision-Date: 2005-09-29 20:32+0900\n"
 "Last-Translator: Luca Marrocco <buildup@libero.it>\n"
 "Language-Team: GUFI <traduzioni@gufi.org>\n"
 "MIME-Version: 1.0\n"
@@ -85,7 +86,7 @@ msgstr ""
 msgid "Restart"
 msgstr "_Riparti"
 
-#: ../panel/panel-item-manager.c:327 ../panel/panel-item-manager.c:335
+#: ../panel/panel-item-manager.c:353 ../panel/panel-item-manager.c:361
 #, fuzzy, c-format
 msgid "Could not open \"%s\" module"
 msgstr "L'elemento \"%s\" del pannelo non puo essere creato."
@@ -625,422 +626,3 @@ msgstr ""
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
 msgstr ""
-
-#, fuzzy
-#~ msgid "Panel Settings"
-#~ msgstr "Impostazioni del Pannello di Xfce"
-
-#, fuzzy
-#~ msgid "Xfce 4 Panel Settings"
-#~ msgstr "Impostazioni del Pannello di Xfce"
-
-#~ msgid "No data was found. The panel will be empty."
-#~ msgstr "Nessun dato e' stato trovate. Il pannello deve essere vuoto."
-
-#~ msgid "Position:"
-#~ msgstr "Posizione:"
-
-#~ msgid "Command:"
-#~ msgstr "Comando:"
-
-#~ msgid "Use startup _notification"
-#~ msgstr "Usa _notifica in avvio"
-
-#~ msgid "Other Icon"
-#~ msgstr "Altra icona"
-
-#~ msgid "Drag file onto this frame to change the icon"
-#~ msgstr "Trascina i file in questo riquadro per cambiare icona"
-
-#~ msgid "%s: Successfully started without session management"
-#~ msgstr "%s: Avviato con successo senza la gestione della sessione"
-
-#~ msgid "%s: Successfully started with session management"
-#~ msgstr "%s: Avviato con successo con la gestione della sessione"
-
-#~ msgid "Could not create panel item \"%s\"."
-#~ msgstr "L'elemento \"%s\" del pannelo non puo essere creato."
-
-#, fuzzy
-#~ msgid "_Properties..."
-#~ msgstr "/_Proprietà ..."
-
-#, fuzzy
-#~ msgid "_Remove"
-#~ msgstr "/_Rimuovi"
-
-#, fuzzy
-#~ msgid "Add _new item"
-#~ msgstr "/Aggiungi un _nuovo oggetto"
-
-#~ msgid "This item has no configuration options"
-#~ msgstr "Questo oggetto non ha opzioni di configurazione"
-
-#, fuzzy
-#~ msgid "_About Xfce"
-#~ msgstr "/_Info su Xfce"
-
-#, fuzzy
-#~ msgid "_Help"
-#~ msgstr "/_Aiuto"
-
-#, fuzzy
-#~ msgid "E_xit"
-#~ msgstr "/_Esci"
-
-#, fuzzy
-#~ msgid "icons|Terminal"
-#~ msgstr "Terminale"
-
-#~ msgid "Settings manager not available"
-#~ msgstr "Il gestione delle impostazioni non è disponibile"
-
-#~ msgid "Taskbar"
-#~ msgstr "Barra dei Processi"
-
-#~ msgid "Cannot create MCS client channel"
-#~ msgstr "Impossibile creare canale client MCS"
-
-#, fuzzy
-#~ msgid "_About"
-#~ msgstr "/_Info su Xfce"
-
-#~ msgid "Medium"
-#~ msgstr "Medie"
-
-#~ msgid "Panel size:"
-#~ msgstr "Dimensioni pannello:"
-
-#~ msgid "Autohide:"
-#~ msgstr "Autoscomparsa:"
-
-#~ msgid "Behaviour"
-#~ msgstr "Comportamento"
-
-#, fuzzy
-#~ msgid "_Top"
-#~ msgstr "Alto"
-
-#, fuzzy
-#~ msgid "_Bottom"
-#~ msgstr "Basso"
-
-#, fuzzy
-#~ msgid "Alignment:"
-#~ msgstr "Allineamento"
-
-#, fuzzy
-#~ msgid "_Left"
-#~ msgstr "Sinistra"
-
-#, fuzzy
-#~ msgid "_Center"
-#~ msgstr "Centro"
-
-#, fuzzy
-#~ msgid "_Right"
-#~ msgstr "Destra"
-
-#, fuzzy
-#~ msgid "Height:"
-#~ msgstr "Altezza :"
-
-#~ msgid "Width:"
-#~ msgstr "Larghezza:"
-
-#, fuzzy
-#~ msgid "Auto _hide taskbar"
-#~ msgstr "Nascondimento automatico barra dei processi"
-
-#, fuzzy
-#~ msgid "Show _pager in taskbar"
-#~ msgstr "Mostra il pager nella barra dei processi"
-
-#, fuzzy
-#~ msgid "Status area"
-#~ msgstr "Sabato"
-
-#, fuzzy
-#~ msgid "Icon size"
-#~ msgstr "Anteprima Icona"
-
-#~ msgid "Clock type:"
-#~ msgstr "Tipo di orologio:"
-
-#~ msgid "Hour mode:"
-#~ msgstr "Modo d'ora"
-
-#~ msgid "24 hour"
-#~ msgstr "24 ore"
-
-#~ msgid "12 hour"
-#~ msgstr "12 ore"
-
-#~ msgid "Show seconds:"
-#~ msgstr "Mostra i secondi:"
-
-#, fuzzy
-#~ msgid "Settings"
-#~ msgstr "Impostazioni del Pannello di Xfce"
-
-#, fuzzy
-#~ msgid "Edit launcher"
-#~ msgstr "Aggiungi launcher"
-
-#, fuzzy
-#~ msgid "_Edit"
-#~ msgstr "Editor"
-
-#~ msgid "Mail box:"
-#~ msgstr "Casella postale:"
-
-#, fuzzy
-#~ msgid "New mail command:"
-#~ msgstr "Comando di posta:"
-
-#, fuzzy
-#~ msgid "Command to run when new mail arrives"
-#~ msgstr "Comando da eseguire quando il bottone sul pannello viene cliccato"
-
-#~ msgid "Command to run when the button on the panel is clicked"
-#~ msgstr "Comando da eseguire quando il bottone sul pannello viene cliccato"
-
-#~ msgid "Interval (sec):"
-#~ msgstr "Intervallo (sec):"
-
-#, fuzzy
-#~ msgid "Mail checker"
-#~ msgstr "Controllo posta"
-
-#~ msgid "Graphical pager"
-#~ msgstr "Pager grafico"
-
-#~ msgid "Desktop switcher"
-#~ msgstr "Selettore del desktop"
-
-#~ msgid ""
-#~ "Access to the configuration system has been disabled.\n"
-#~ "\n"
-#~ "Ask your system administrator for more information"
-#~ msgstr ""
-#~ "L'accesso alla configurazione di sistema è stato disabilitato.\n"
-#~ "\n"
-#~ "Chiedere all'amministratore di sistema per maggiori informazioni"
-
-#, fuzzy
-#~ msgid "tip|Exit"
-#~ msgstr "Esci"
-
-#, fuzzy
-#~ msgid "tip|Setup"
-#~ msgstr "Imposta"
-
-#, fuzzy
-#~ msgid "tip|Info"
-#~ msgstr "Info"
-
-#~ msgid "Exit"
-#~ msgstr "Esci"
-
-#~ msgid "Setup"
-#~ msgstr "Imposta"
-
-#~ msgid "Info"
-#~ msgstr "Info"
-
-#~ msgid "Button 1:"
-#~ msgstr "Bottone 1:"
-
-#~ msgid "Button 2:"
-#~ msgstr "Bottone 2:"
-
-#, fuzzy
-#~ msgid "_Hide"
-#~ msgstr "/_Aiuto"
-
-#~ msgid "System buttons"
-#~ msgstr "Bottoni di sistema"
-
-#, fuzzy
-#~ msgid "Iconbox Settings"
-#~ msgstr "Impostazioni del Pannello di Xfce"
-
-#, fuzzy
-#~ msgid "Xfce 4 Iconbox Settings"
-#~ msgstr "Impostazioni del Pannello di Xfce"
-
-#, fuzzy
-#~ msgid "Taskbar Settings"
-#~ msgstr "Barra dei Processi"
-
-#, fuzzy
-#~ msgid "Xfce 4 Taskbar Settings"
-#~ msgstr "Impostazioni del Pannello di Xfce"
-
-#, fuzzy
-#~ msgid "File manager"
-#~ msgstr "Gestione file"
-
-#, fuzzy
-#~ msgid "Manual"
-#~ msgstr "Gennaio"
-
-#, fuzzy
-#~ msgid "Printer Management"
-#~ msgstr "Gestione file"
-
-#, fuzzy
-#~ msgid "Removing the item will also remove its popup menu."
-#~ msgstr ""
-#~ "Rimuovere un oggetto rimuoverà anche il suo menu a scomparsa.\n"
-#~ "\n"
-#~ "Vuoi veramente rimuoverlo?"
-
-#~ msgid "Caption:"
-#~ msgstr "Etichetta:"
-
-#~ msgid "Tooltip:"
-#~ msgstr "Suggerimento:"
-
-#~ msgid "Attach menu to launcher"
-#~ msgstr "Aggiungi menu al launcher"
-
-#~ msgid "Change menu item"
-#~ msgstr "Cambia oggetto del menu"
-
-#~ msgid "Click mouse button 3 to change item"
-#~ msgstr "Clicca il terzo tasto del mouse per cambiare oggetto"
-
-#~ msgid "Add launcher"
-#~ msgstr "Aggiungi launcher"
-
-#~ msgid "Left"
-#~ msgstr "Sinistra"
-
-#~ msgid "Right"
-#~ msgstr "Destra"
-
-#~ msgid "Top"
-#~ msgstr "Alto"
-
-#~ msgid "Bottom"
-#~ msgstr "Basso"
-
-#~ msgid "Popup position:"
-#~ msgstr "Posizione Popup:"
-
-#~ msgid "Menu"
-#~ msgstr "Menu"
-
-#, fuzzy
-#~ msgid "Show _system tray in taskbar"
-#~ msgstr "Mostra la barra di sistema nella barra dei processi"
-
-#~ msgid "Cannot get initial style"
-#~ msgstr "Impossibile caricare lo stile iniziale"
-
-#~ msgid "This should not happen"
-#~ msgstr "Ciò non avrebbe dovuto verificarsi"
-
-#, fuzzy
-#~ msgid "Cannot get default screen\n"
-#~ msgstr "Impossibile determinare i bordi dello schermo"
-
-#~ msgid "Cannot connect to session manager"
-#~ msgstr "Impossibile connettersi al gestore di sessione"
-
-#~ msgid "Show two buttons:"
-#~ msgstr "Mostra due bottoni:"
-
-#~ msgid "Change item"
-#~ msgstr "Cambia oggetto"
-
-#~ msgid "Menu:"
-#~ msgstr "Menu:"
-
-#~ msgid "/Xfce Panel"
-#~ msgstr "/Xfce Panel"
-
-#~ msgid "/Add _new item"
-#~ msgstr "/Aggiungi un _nuovo oggetto"
-
-#~ msgid "/_Properties..."
-#~ msgstr "/_Proprietà ..."
-
-#~ msgid ""
-#~ "Your window manager does not seem to support the new window manager hints "
-#~ "as defined on http://www.freedesktop.org. \n"
-#~ "Some Xfce features may not work as intended."
-#~ msgstr ""
-#~ "Il tuo gestore di finestre non sembra supportare alcune delle specifiche "
-#~ "definite da http://www.freedesktop.org. \n"
-#~ "Alcune caratteristiche di Xfce potrebbero non funzionare correttamente."
-
-#~ msgid "/_Settings manager"
-#~ msgstr "/Gestione impo_stazioni"
-
-#~ msgid "Tiny"
-#~ msgstr "Minuscole"
-
-#~ msgid "Icon theme:"
-#~ msgstr "Tema delle icone:"
-
-#~ msgid "Normal"
-#~ msgstr "Normale"
-
-#~ msgid "Center the panel:"
-#~ msgstr "Centra il pannello:"
-
-#~ msgid "Set"
-#~ msgstr "Imposta"
-
-#~ msgid "Sunday"
-#~ msgstr "Domenica"
-
-#~ msgid "Monday"
-#~ msgstr "Lunedì"
-
-#~ msgid "Tuesday"
-#~ msgstr "Martedì"
-
-#~ msgid "Wednesday"
-#~ msgstr "Mercoledì"
-
-#~ msgid "Thursday"
-#~ msgstr "Giovedì"
-
-#~ msgid "Friday"
-#~ msgstr "Venerdì"
-
-#~ msgid "February"
-#~ msgstr "Febbraio"
-
-#~ msgid "March"
-#~ msgstr "Marzo"
-
-#~ msgid "April"
-#~ msgstr "Aprile"
-
-#~ msgid "May"
-#~ msgstr "Maggio"
-
-#~ msgid "June"
-#~ msgstr "Giugno"
-
-#~ msgid "July"
-#~ msgstr "Luglio"
-
-#~ msgid "August"
-#~ msgstr "Agosto"
-
-#~ msgid "September"
-#~ msgstr "Settembre"
-
-#~ msgid "October"
-#~ msgstr "Ottobre"
-
-#~ msgid "November"
-#~ msgstr "Novembre"
-
-#~ msgid "December"
-#~ msgstr "Dicembre"
