--- a/po/lt.po
+++ b/po/lt.po
@@ -1,16 +1,16 @@
-# Lithuania translation of xfce4-panel
-# Copyright (C) 2003 Free Software Foundation, Inc.
+# Lithuanian translations for xfce4-panel package.
+# Copyright (C) 2005 Jasper Huijsmans.
 # This file is distributed under the same license as the xfce4-panel package.
-# Mantas <zaz@xxx.lt>, 2003.
-# 
+# Mantas Zapolskas <mantaz@users.sf.net>, 2003-2004.
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel 3.99.2\n"
+"Project-Id-Version: xfce4-panel 4.3.22\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-09-28 10:01+0200\n"
-"PO-Revision-Date: 2004-10-29 22:44+0300\n"
-"Last-Translator: Mantas <zaz@xxx.lt>\n"
-"Language-Team: Lithuania <zaz@xxx.lt>\n"
+"POT-Creation-Date: 2005-09-29 20:47+0900\n"
+"PO-Revision-Date: 2005-09-29 20:34+0900\n"
+"Last-Translator: Mantas Zapolskas <mantaz@users.sf.net>\n"
+"Language-Team: Lithuanian <komp_lt@konferencijos.lt>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -85,7 +85,7 @@ msgstr ""
 msgid "Restart"
 msgstr "/_Perkrauti"
 
-#: ../panel/panel-item-manager.c:327 ../panel/panel-item-manager.c:335
+#: ../panel/panel-item-manager.c:353 ../panel/panel-item-manager.c:361
 #, fuzzy, c-format
 msgid "Could not open \"%s\" module"
 msgstr "Neįmanoma sukurti skydelio elemento \"%s\"."
@@ -631,413 +631,3 @@ msgstr "Rodyti progr_amų pavadinimus"
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
 msgstr ""
-
-#, fuzzy
-#~ msgid "Panel Settings"
-#~ msgstr "Xfce skydelio nustatymai"
-
-#, fuzzy
-#~ msgid "Xfce 4 Panel Settings"
-#~ msgstr "Xfce skydelio nustatymai"
-
-#~ msgid "No data was found. The panel will be empty."
-#~ msgstr "Duomenš nerasta. Skydelis bus tuščias."
-
-#~ msgid "Position:"
-#~ msgstr "Pozicija:"
-
-#~ msgid "Command:"
-#~ msgstr "Komanda:"
-
-#~ msgid "Use startup _notification"
-#~ msgstr "Naudoti paleisties pra_nešimą"
-
-#~ msgid "Other Icon"
-#~ msgstr "Kita piktograma"
-
-#~ msgid "Drag file onto this frame to change the icon"
-#~ msgstr "Norėdami pakeisti piktogramą, tempkite failą ant šio rėmo "
-
-#~ msgid "%s: Successfully started without session management"
-#~ msgstr "%s: Sėkmingai paleista be sesijų valdymo"
-
-#~ msgid "%s: Successfully started with session management"
-#~ msgstr "%s: Sėkmingai paleista su sesijų valdymu"
-
-#~ msgid "Could not create panel item \"%s\"."
-#~ msgstr "Neįmanoma sukurti skydelio elemento \"%s\"."
-
-#~ msgid "_Properties..."
-#~ msgstr "/_Savybės..."
-
-#~ msgid "_Remove"
-#~ msgstr "_Pašalinti"
-
-#~ msgid "Add _new item"
-#~ msgstr "Pridėti _naują elementą"
-
-#~ msgid "This item has no configuration options"
-#~ msgstr "Šis elementas neturi parinkties parametrų "
-
-#~ msgid "_About Xfce"
-#~ msgstr "/_Apie Xfce"
-
-#~ msgid "_Help"
-#~ msgstr "/Pa_galba"
-
-#~ msgid "E_xit"
-#~ msgstr "Iš_eiti"
-
-#, fuzzy
-#~ msgid "icons|Terminal"
-#~ msgstr "Terminalas"
-
-#~ msgid "Settings manager not available"
-#~ msgstr "Nėra nustatymų tvarkyklė"
-
-#~ msgid "Taskbar"
-#~ msgstr "Užduočių juosta"
-
-#~ msgid "Cannot create MCS client channel"
-#~ msgstr "Neįmanoma sukurti MCS kliento kanalo"
-
-#, fuzzy
-#~ msgid "_About"
-#~ msgstr "/_Apie Xfce"
-
-#~ msgid "Medium"
-#~ msgstr "Vidutinis"
-
-#~ msgid "Huge"
-#~ msgstr "Didžiulis"
-
-#~ msgid "Panel size:"
-#~ msgstr "Skydelio dydis:"
-
-#~ msgid "Autohide:"
-#~ msgstr "Autopaslėpimas"
-
-#~ msgid "Behaviour"
-#~ msgstr "Elgesys"
-
-#~ msgid "_Top"
-#~ msgstr "_Viršus"
-
-#~ msgid "_Bottom"
-#~ msgstr "_Apačia"
-
-#, fuzzy
-#~ msgid "Alignment:"
-#~ msgstr "Išdėstymas"
-
-#~ msgid "_Left"
-#~ msgstr "_Kairė"
-
-#~ msgid "_Center"
-#~ msgstr "_Centras"
-
-#~ msgid "_Right"
-#~ msgstr "_Dešinė"
-
-#, fuzzy
-#~ msgid "Height:"
-#~ msgstr "Aukštis :"
-
-#~ msgid "Width:"
-#~ msgstr "Plotis:"
-
-#~ msgid "Auto _hide taskbar"
-#~ msgstr "Automatiškai _paslėpti užduočių juostą"
-
-#~ msgid "Show _pager in taskbar"
-#~ msgstr "Rodyti _pagerį užduočių juostoje"
-
-#, fuzzy
-#~ msgid "Status area"
-#~ msgstr "ĆĀ eĆātadienis"
-
-#, fuzzy
-#~ msgid "Icon size"
-#~ msgstr "Pikrogramos PerÅ¾iÅ«ra"
-
-#~ msgid "%A, %d %B %Y"
-#~ msgstr "%A, %-d %B %Y"
-
-#~ msgid "Clock type:"
-#~ msgstr "Laikrodžio tipas:"
-
-#~ msgid "Hour mode:"
-#~ msgstr "Valandų veiksena"
-
-#~ msgid "24 hour"
-#~ msgstr "24 valandos"
-
-#~ msgid "12 hour"
-#~ msgstr "12 valandų"
-
-#~ msgid "Show seconds:"
-#~ msgstr "Rodyti sekundes:"
-
-#, fuzzy
-#~ msgid "Settings"
-#~ msgstr "Xfce skydelio nustatymai"
-
-#, fuzzy
-#~ msgid "Edit launcher"
-#~ msgstr "Įdėti leistuką"
-
-#, fuzzy
-#~ msgid "_Edit"
-#~ msgstr "Redaktorius"
-
-#~ msgid "Mail box:"
-#~ msgstr "Pašto dėžutė:"
-
-#~ msgid "New mail command:"
-#~ msgstr "Nauja pašto komanda:"
-
-#~ msgid "Command to run when new mail arrives"
-#~ msgstr "Komanda,kurią paleisti,kai naujos pašto žinutės ateina"
-
-#~ msgid "Command to run when the button on the panel is clicked"
-#~ msgstr "Komanda kurią paleisti kai skydelio mygtukas paspaustas"
-
-#~ msgid "Interval (sec):"
-#~ msgstr "Intervalas (sek):"
-
-#~ msgid "Mail checker"
-#~ msgstr "Pašto tikrinimas"
-
-#~ msgid "Graphical pager"
-#~ msgstr "Grafinis pranešimų gaviklis"
-
-#~ msgid "Desktop switcher"
-#~ msgstr "Darbalaukio perjungiklis"
-
-#~ msgid ""
-#~ "Access to the configuration system has been disabled.\n"
-#~ "\n"
-#~ "Ask your system administrator for more information"
-#~ msgstr ""
-#~ "Priega prie sistemos sąrankos išjungta.\n"
-#~ "\n"
-#~ "Paklauskite jūsų kompiuterio administratoriaus norėdami sužinoti daugiau "
-#~ "informacijos"
-
-#, fuzzy
-#~ msgid "tip|Exit"
-#~ msgstr "Išeiti"
-
-#, fuzzy
-#~ msgid "tip|Setup"
-#~ msgstr "Sąranka"
-
-#, fuzzy
-#~ msgid "tip|Info"
-#~ msgstr "Informacija"
-
-#~ msgid "Exit"
-#~ msgstr "Išeiti"
-
-#~ msgid "Setup"
-#~ msgstr "Sąranka"
-
-#~ msgid "Info"
-#~ msgstr "Informacija"
-
-#~ msgid "Button 1:"
-#~ msgstr "Mygtukas 1"
-
-#~ msgid "Button 2:"
-#~ msgstr "Mygtukas 2"
-
-#~ msgid "_Hide"
-#~ msgstr "Pa_slėpti"
-
-#~ msgid "System buttons"
-#~ msgstr "Sisteminiai mygtukai"
-
-#, fuzzy
-#~ msgid "Iconbox Settings"
-#~ msgstr "Xfce skydelio nustatymai"
-
-#, fuzzy
-#~ msgid "Xfce 4 Iconbox Settings"
-#~ msgstr "Xfce skydelio nustatymai"
-
-#, fuzzy
-#~ msgid "Taskbar Settings"
-#~ msgstr "Užduočių juosta"
-
-#, fuzzy
-#~ msgid "Xfce 4 Taskbar Settings"
-#~ msgstr "Xfce skydelio nustatymai"
-
-#, fuzzy
-#~ msgid "File manager"
-#~ msgstr "Failų valdymas"
-
-#, fuzzy
-#~ msgid "Manual"
-#~ msgstr "Sausis"
-
-#, fuzzy
-#~ msgid "Printer Management"
-#~ msgstr "Failų valdymas"
-
-#~ msgid "Removing the item will also remove its popup menu."
-#~ msgstr "Pašalindami elementą kartu pašalinsite jo išskleidžiamą meniu."
-
-#~ msgid "Caption:"
-#~ msgstr "Pavadinimas:"
-
-#~ msgid "Tooltip:"
-#~ msgstr "Patarimas:"
-
-#~ msgid "Attach menu to launcher"
-#~ msgstr "Pridėti meniu į leistuką"
-
-#~ msgid "Change menu item"
-#~ msgstr "Pakeisti meniu elementą"
-
-#~ msgid "Click mouse button 3 to change item"
-#~ msgstr "Norėdami pakeisti elementą, spauskite vidurinį pelės mygtuką"
-
-#~ msgid "Add launcher"
-#~ msgstr "Įdėti leistuką"
-
-#~ msgid "Left"
-#~ msgstr "Kairė"
-
-#~ msgid "Right"
-#~ msgstr "Dešinė"
-
-#~ msgid "Top"
-#~ msgstr "Viršutinis"
-
-#~ msgid "Bottom"
-#~ msgstr "Apatinis"
-
-#~ msgid "Popup position:"
-#~ msgstr "Išskleižiamo meniu pozicija:"
-
-#, fuzzy
-#~ msgid "Notification Area"
-#~ msgstr "Pranešimų sritis"
-
-#~ msgid "Menu"
-#~ msgstr "Meniu"
-
-#~ msgid "Always on top:"
-#~ msgstr "Visada viršuje:"
-
-#~ msgid "Show _system tray in taskbar"
-#~ msgstr "Rodyti _sisteminį skydelį užduočių juostoje"
-
-#~ msgid "Cannot get initial style"
-#~ msgstr "Neįmanoma gauti pradinio stiliaus"
-
-#~ msgid "This should not happen"
-#~ msgstr "Taip neturėtų įvykti"
-
-#~ msgid "Cannot get default screen\n"
-#~ msgstr "Neįmanoma gauti pagrindinio ekrano\n"
-
-#~ msgid "Cannot connect to session manager"
-#~ msgstr "Neįmanoma susijungti su sesijų tvarkykle"
-
-#~ msgid "Show two buttons:"
-#~ msgstr "Rodyti du mygtukus:"
-
-#~ msgid "Change item"
-#~ msgstr "Pakeisti elementÄ"
-
-#~ msgid "Menu:"
-#~ msgstr "Meniu:"
-
-#~ msgid "/Xfce Panel"
-#~ msgstr "/Xfce Skydelis"
-
-#~ msgid "/Add _new item"
-#~ msgstr "/PridÄti _naujÄ elementÄ"
-
-#~ msgid "/_Properties..."
-#~ msgstr "/_SavybÄs..."
-
-#~ msgid ""
-#~ "Your window manager does not seem to support the new window manager hints "
-#~ "as defined on http://www.freedesktop.org. \n"
-#~ "Some Xfce features may not work as intended."
-#~ msgstr ""
-#~ "Atrodo, kad jÅ«sÅ³ langÅ³ tvarkyklÄ nepalaiko naujÅ³ langÅ³ tvarkykliÅ³ "
-#~ "patarimÅ³ apibrÄÅ¾tÅ³ tinklalapyje http://www.freedesktop.org. \n"
-#~ "Keletas Xfce sudÄtiniÅ³ daliÅ³ gali neveikti kaip numatyta."
-
-#~ msgid "/_Settings manager"
-#~ msgstr "/Nuo_statÅ³ tvarkyklÄ"
-
-#~ msgid "Tiny"
-#~ msgstr "MaÅ¾ytis"
-
-#~ msgid "Icon theme:"
-#~ msgstr "Piktogramos tema"
-
-#~ msgid "Normal"
-#~ msgstr "Normalus"
-
-#~ msgid "Center the panel:"
-#~ msgstr "Centruoti skydelÄÆ"
-
-#~ msgid "Set"
-#~ msgstr "Nustatyti"
-
-#~ msgid "Sunday"
-#~ msgstr "Skemadienis"
-
-#~ msgid "Monday"
-#~ msgstr "Pirmadienis"
-
-#~ msgid "Tuesday"
-#~ msgstr "Antradienis"
-
-#~ msgid "Wednesday"
-#~ msgstr "TreĆĀiadienis"
-
-#~ msgid "Thursday"
-#~ msgstr "Ketvirtadienis"
-
-#~ msgid "Friday"
-#~ msgstr "Penktadienis"
-
-#~ msgid "February"
-#~ msgstr "Vasaris"
-
-#~ msgid "March"
-#~ msgstr "Kovas"
-
-#~ msgid "April"
-#~ msgstr "Balandis"
-
-#~ msgid "May"
-#~ msgstr "GeguĆĀ¾ĆĀ"
-
-#~ msgid "June"
-#~ msgstr "BirĆĀ¾elis"
-
-#~ msgid "July"
-#~ msgstr "Liepa"
-
-#~ msgid "August"
-#~ msgstr "RugpjĆĀ«tis"
-
-#~ msgid "September"
-#~ msgstr "RugsĆĀjis"
-
-#~ msgid "October"
-#~ msgstr "Spalis"
-
-#~ msgid "November"
-#~ msgstr "Lapkritis"
-
-#~ msgid "December"
-#~ msgstr "Gruodis"
