--- a/po/ms.po
+++ b/po/ms.po
@@ -1,13 +1,13 @@
 # Xfce4-panel Malay translation.
-# Copyright (C) 2002-2005 The Xfce development team.
+# Copyright (C) 2005 Jasper Huijsmans.
 # This file is distributed under the same license as the xfce4-panel package.
 # Harun Musa <mharun@gmx.net>, 2003.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel 4.3.2\n"
+"Project-Id-Version: xfce4-panel 4.3.22\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-09-28 10:01+0200\n"
+"POT-Creation-Date: 2005-09-29 20:47+0900\n"
 "PO-Revision-Date: 2005-08-21 17:47+0900\n"
 "Last-Translator: Harun Musa <mharun@gmx.net>\n"
 "Language-Team: Malay <translation-team-ms@list.sourceforge.net>\n"
@@ -85,7 +85,7 @@ msgstr ""
 msgid "Restart"
 msgstr "/_Ulangmula"
 
-#: ../panel/panel-item-manager.c:327 ../panel/panel-item-manager.c:335
+#: ../panel/panel-item-manager.c:353 ../panel/panel-item-manager.c:361
 #, c-format
 msgid "Could not open \"%s\" module"
 msgstr ""
@@ -623,219 +623,3 @@ msgstr ""
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
 msgstr ""
-
-#, fuzzy
-#~ msgid "Panel Settings"
-#~ msgstr "Tetapan Panel Xfce"
-
-#, fuzzy
-#~ msgid "Xfce 4 Panel Settings"
-#~ msgstr "Tetapan Panel Xfce"
-
-#~ msgid "Position:"
-#~ msgstr "Posisi:"
-
-#~ msgid "Command:"
-#~ msgstr "Arahan:"
-
-#~ msgid "Use startup _notification"
-#~ msgstr "Guna _notifikasi pemula"
-
-#~ msgid "Other Icon"
-#~ msgstr "Ikon Lain"
-
-#~ msgid "Drag file onto this frame to change the icon"
-#~ msgstr "Jatuhkan fail kedalam frame ini untuk tukar ikon"
-
-#, fuzzy
-#~ msgid "_Properties..."
-#~ msgstr "/_Perbendaharaan..."
-
-#~ msgid "This item has no configuration options"
-#~ msgstr "Item ini tiada opsyen konfigurasi"
-
-#, fuzzy
-#~ msgid "_About Xfce"
-#~ msgstr "/Perih_al Xfce"
-
-#, fuzzy
-#~ msgid "_Help"
-#~ msgstr "/_Bantuan"
-
-#, fuzzy
-#~ msgid "E_xit"
-#~ msgstr "/K_eluar"
-
-#, fuzzy
-#~ msgid "icons|Terminal"
-#~ msgstr "Terminal"
-
-#~ msgid "Settings manager not available"
-#~ msgstr "Pengurus tetapan tidak ada"
-
-#~ msgid "Taskbar"
-#~ msgstr "Taskbar"
-
-#~ msgid "Cannot create MCS client channel"
-#~ msgstr "Tak boleh cipta saluran klien MCS"
-
-#, fuzzy
-#~ msgid "_About"
-#~ msgstr "/Perih_al Xfce"
-
-#~ msgid "Medium"
-#~ msgstr "Sederhana"
-
-#~ msgid "Autohide:"
-#~ msgstr "Autosembunyi:"
-
-#~ msgid "Behaviour"
-#~ msgstr "Kelakuan"
-
-#, fuzzy
-#~ msgid "_Top"
-#~ msgstr "Atas"
-
-#, fuzzy
-#~ msgid "_Bottom"
-#~ msgstr "Bawah"
-
-#, fuzzy
-#~ msgid "Height:"
-#~ msgstr "Ketinggian :"
-
-#, fuzzy
-#~ msgid "Auto _hide taskbar"
-#~ msgstr "Auto sembunyi taskbar"
-
-#, fuzzy
-#~ msgid "Show _pager in taskbar"
-#~ msgstr "Lihat pager dalam taskbar"
-
-#, fuzzy
-#~ msgid "Icon size"
-#~ msgstr "Pralihat Ikon"
-
-#~ msgid "%A, %d %B %Y"
-#~ msgstr "%A, %d %B %Y"
-
-#~ msgid "Clock type:"
-#~ msgstr "Jenis jam:"
-
-#~ msgid "Hour mode:"
-#~ msgstr "Mod jam:"
-
-#~ msgid "24 hour"
-#~ msgstr "24 jam"
-
-#~ msgid "12 hour"
-#~ msgstr "12 jam"
-
-#~ msgid "Show seconds:"
-#~ msgstr "Lihat saat:"
-
-#, fuzzy
-#~ msgid "Settings"
-#~ msgstr "Tetapan Panel Xfce"
-
-#, fuzzy
-#~ msgid "Edit launcher"
-#~ msgstr "Tambah pelancar"
-
-#, fuzzy
-#~ msgid "_Edit"
-#~ msgstr "Editor"
-
-#~ msgid "Mail box:"
-#~ msgstr "Kotak mel:"
-
-#, fuzzy
-#~ msgid "New mail command:"
-#~ msgstr "Arahan mel:"
-
-#, fuzzy
-#~ msgid "Command to run when new mail arrives"
-#~ msgstr "Arahan untuk larikan apabila bebutang pada panel diklik"
-
-#~ msgid "Command to run when the button on the panel is clicked"
-#~ msgstr "Arahan untuk larikan apabila bebutang pada panel diklik"
-
-#~ msgid "Interval (sec):"
-#~ msgstr "Interval (saat):"
-
-#, fuzzy
-#~ msgid "Mail checker"
-#~ msgstr "Periksa mel"
-
-#~ msgid "Graphical pager"
-#~ msgstr "Pager grafik"
-
-#~ msgid "Desktop switcher"
-#~ msgstr "Pemilih Meja"
-
-#~ msgid ""
-#~ "Access to the configuration system has been disabled.\n"
-#~ "\n"
-#~ "Ask your system administrator for more information"
-#~ msgstr ""
-#~ "Akses ke konfigurasi sistem telah ditakbolehkan.\n"
-#~ "\n"
-#~ "Sila tanya pentadbir sistem untuk maklumat lanjut"
-
-#, fuzzy
-#~ msgid "tip|Exit"
-#~ msgstr "Keluar"
-
-#, fuzzy
-#~ msgid "tip|Setup"
-#~ msgstr "Tetapan"
-
-#, fuzzy
-#~ msgid "tip|Info"
-#~ msgstr "Info"
-
-#~ msgid "Exit"
-#~ msgstr "Keluar"
-
-#~ msgid "Setup"
-#~ msgstr "Tetapan"
-
-#~ msgid "Info"
-#~ msgstr "Info"
-
-#~ msgid "Button 1:"
-#~ msgstr "Bebutang 1:"
-
-#~ msgid "Button 2:"
-#~ msgstr "Bebutang 2:"
-
-#, fuzzy
-#~ msgid "_Hide"
-#~ msgstr "/_Bantuan"
-
-#~ msgid "System buttons"
-#~ msgstr "Bebutang sistem"
-
-#, fuzzy
-#~ msgid "Iconbox Settings"
-#~ msgstr "Tetapan Panel Xfce"
-
-#, fuzzy
-#~ msgid "Xfce 4 Iconbox Settings"
-#~ msgstr "Tetapan Panel Xfce"
-
-#, fuzzy
-#~ msgid "Taskbar Settings"
-#~ msgstr "Taskbar"
-
-#, fuzzy
-#~ msgid "Xfce 4 Taskbar Settings"
-#~ msgstr "Tetapan Panel Xfce"
-
-#, fuzzy
-#~ msgid "File manager"
-#~ msgstr "Pengurusan fail"
-
-#, fuzzy
-#~ msgid "Printer Management"
-#~ msgstr "Pengurusan fail"
