--- a/po/nb_NO.po
+++ b/po/nb_NO.po
@@ -1,13 +1,13 @@
 # Norwegian Bokmal translations for xfce4-panel package.
-# Copyright (C) 2002-2005 The Xfce development team.
+# Copyright (C) 2005 Jasper Huijsmans.
 # This file is distributed under the same license as the xfce4-panel package.
 # Eskild Hustvedt <eskild@goldenfiles.com>, 2004.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel 4.3.2\n"
+"Project-Id-Version: xfce4-panel 4.3.22\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-09-28 10:01+0200\n"
+"POT-Creation-Date: 2005-09-29 20:47+0900\n"
 "PO-Revision-Date: 2005-08-18 01:10+0900\n"
 "Last-Translator: Eskild Hustvedt <eskild@goldenfiles.com>\n"
 "Language-Team: Norwegian Bokmal <i18n-nb@lister.ping.uio.no>\n"
@@ -85,7 +85,7 @@ msgstr ""
 msgid "Restart"
 msgstr "/_Omstart"
 
-#: ../panel/panel-item-manager.c:327 ../panel/panel-item-manager.c:335
+#: ../panel/panel-item-manager.c:353 ../panel/panel-item-manager.c:361
 #, fuzzy, c-format
 msgid "Could not open \"%s\" module"
 msgstr "Kunne ikke opprette panelelement «%s»."
@@ -624,271 +624,3 @@ msgstr ""
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
 msgstr ""
-
-#, fuzzy
-#~ msgid "Panel Settings"
-#~ msgstr "Xfce panel instillinger"
-
-#, fuzzy
-#~ msgid "Xfce 4 Panel Settings"
-#~ msgstr "Xfce panel instillinger"
-
-#~ msgid "No data was found. The panel will be empty."
-#~ msgstr "Ingen data ble funnet. Panelet vil være tomt."
-
-#~ msgid "Position:"
-#~ msgstr "Posisjon:"
-
-#~ msgid "Command:"
-#~ msgstr "Kommando:"
-
-#~ msgid "Use startup _notification"
-#~ msgstr "Bruk oppstarts _varsel"
-
-#~ msgid "Other Icon"
-#~ msgstr "Annet ikon"
-
-#~ msgid "Drag file onto this frame to change the icon"
-#~ msgstr "Dra filen på denne rammen for å forandre ikonet"
-
-#~ msgid "%s: Successfully started without session management"
-#~ msgstr "%s: Vellykket start uten økthåndering"
-
-#~ msgid "%s: Successfully started with session management"
-#~ msgstr "%s: Vellykket start med økthåndtering"
-
-#~ msgid "Could not create panel item \"%s\"."
-#~ msgstr "Kunne ikke opprette panelelement «%s»."
-
-#, fuzzy
-#~ msgid "_Properties..."
-#~ msgstr "/_Egenskaper.."
-
-#, fuzzy
-#~ msgid "Add _new item"
-#~ msgstr "/Legg til _nytt element"
-
-#~ msgid "This item has no configuration options"
-#~ msgstr "Dette elementet har konfigurasjons alternativer"
-
-#, fuzzy
-#~ msgid "_About Xfce"
-#~ msgstr "/_Om Xfce"
-
-#, fuzzy
-#~ msgid "_Help"
-#~ msgstr "/_Hjelp"
-
-#, fuzzy
-#~ msgid "E_xit"
-#~ msgstr "/A_vslutt"
-
-#, fuzzy
-#~ msgid "icons|Terminal"
-#~ msgstr "Terminal"
-
-#~ msgid "Settings manager not available"
-#~ msgstr "Instillignshåndterer ikke tilgjengelig"
-
-#, fuzzy
-#~ msgid "_About"
-#~ msgstr "/_Om Xfce"
-
-#~ msgid "Medium"
-#~ msgstr "Medium"
-
-#~ msgid "Huge"
-#~ msgstr "Veldig stor"
-
-#~ msgid "Autohide:"
-#~ msgstr "Autogjem:"
-
-#~ msgid "Behaviour"
-#~ msgstr "Oppførsel"
-
-#, fuzzy
-#~ msgid "_Top"
-#~ msgstr "Topp"
-
-#, fuzzy
-#~ msgid "_Bottom"
-#~ msgstr "Bunn"
-
-#, fuzzy
-#~ msgid "_Left"
-#~ msgstr "Venstre"
-
-#, fuzzy
-#~ msgid "_Right"
-#~ msgstr "Høyre"
-
-#, fuzzy
-#~ msgid "Height:"
-#~ msgstr "Høyre"
-
-#, fuzzy
-#~ msgid "%A, %d %B %Y"
-#~ msgstr "%A, %-d %B %Y"
-
-#~ msgid "Clock type:"
-#~ msgstr "Klokke type:"
-
-#~ msgid "Hour mode:"
-#~ msgstr "Time modus:"
-
-#~ msgid "24 hour"
-#~ msgstr "24 timer"
-
-#~ msgid "12 hour"
-#~ msgstr "12 timer"
-
-#~ msgid "Show seconds:"
-#~ msgstr "Vis sekunder:"
-
-#, fuzzy
-#~ msgid "Settings"
-#~ msgstr "Xfce panel instillinger"
-
-#, fuzzy
-#~ msgid "Edit launcher"
-#~ msgstr "Legg til programstarter"
-
-#, fuzzy
-#~ msgid "_Edit"
-#~ msgstr "Redigerer"
-
-#~ msgid "Mail box:"
-#~ msgstr "E-mail innboks:"
-
-#, fuzzy
-#~ msgid "New mail command:"
-#~ msgstr "E-post kommando:"
-
-#, fuzzy
-#~ msgid "Command to run when new mail arrives"
-#~ msgstr "Kommando som kjøres når knappen på panelet blir klikket"
-
-#~ msgid "Command to run when the button on the panel is clicked"
-#~ msgstr "Kommando som kjøres når knappen på panelet blir klikket"
-
-#~ msgid "Interval (sec):"
-#~ msgstr "Intervall (sek):"
-
-#, fuzzy
-#~ msgid "Mail checker"
-#~ msgstr "E-post sjekk"
-
-#~ msgid "Graphical pager"
-#~ msgstr "Grafisk skrivebordsoversikt"
-
-#~ msgid "Desktop switcher"
-#~ msgstr "Skrivebordsbytter"
-
-#~ msgid ""
-#~ "Access to the configuration system has been disabled.\n"
-#~ "\n"
-#~ "Ask your system administrator for more information"
-#~ msgstr ""
-#~ "Adgang til konfigurasjons systemet har blitt deaktivert.\n"
-#~ "\n"
-#~ "Ta kontakt med din system administrator for mer informasjon"
-
-#, fuzzy
-#~ msgid "tip|Exit"
-#~ msgstr "Avslutt"
-
-#, fuzzy
-#~ msgid "tip|Setup"
-#~ msgstr "Oppsett"
-
-#, fuzzy
-#~ msgid "tip|Info"
-#~ msgstr "Info"
-
-#~ msgid "Exit"
-#~ msgstr "Avslutt"
-
-#~ msgid "Setup"
-#~ msgstr "Oppsett"
-
-#~ msgid "Info"
-#~ msgstr "Info"
-
-#~ msgid "Button 1:"
-#~ msgstr "Knapp 1:"
-
-#~ msgid "Button 2:"
-#~ msgstr "Knapp 2:"
-
-#, fuzzy
-#~ msgid "_Hide"
-#~ msgstr "/_Hjelp"
-
-#~ msgid "System buttons"
-#~ msgstr "System knapper"
-
-#, fuzzy
-#~ msgid "Iconbox Settings"
-#~ msgstr "Xfce panel instillinger"
-
-#, fuzzy
-#~ msgid "Xfce 4 Iconbox Settings"
-#~ msgstr "Xfce panel instillinger"
-
-#, fuzzy
-#~ msgid "Taskbar Settings"
-#~ msgstr "Xfce panel instillinger"
-
-#, fuzzy
-#~ msgid "Xfce 4 Taskbar Settings"
-#~ msgstr "Xfce panel instillinger"
-
-#, fuzzy
-#~ msgid "File manager"
-#~ msgstr "Fil administrasjon"
-
-#, fuzzy
-#~ msgid "Printer Management"
-#~ msgstr "Fil administrasjon"
-
-#~ msgid "Removing the item will also remove its popup menu."
-#~ msgstr "Fjerning av et element vil også fjerne popup menyen til elementet."
-
-#~ msgid "Caption:"
-#~ msgstr "Bildetekst:"
-
-#~ msgid "Tooltip:"
-#~ msgstr "Verktøytips:"
-
-#~ msgid "Attach menu to launcher"
-#~ msgstr "Fest meny til programstarter"
-
-#~ msgid "Change menu item"
-#~ msgstr "Endre meny element"
-
-#~ msgid "Click mouse button 3 to change item"
-#~ msgstr "Klikk tredje museknapp for å forandre element"
-
-#~ msgid "Add launcher"
-#~ msgstr "Legg til programstarter"
-
-#~ msgid "Left"
-#~ msgstr "Venstre"
-
-#~ msgid "Right"
-#~ msgstr "Høyre"
-
-#~ msgid "Top"
-#~ msgstr "Topp"
-
-#~ msgid "Bottom"
-#~ msgstr "Bunn"
-
-#~ msgid "Popup position:"
-#~ msgstr "Sprettopp posisjon:"
-
-#~ msgid "Menu"
-#~ msgstr "Meny"
-
-#~ msgid "Always on top:"
-#~ msgstr "Alltid øverst"
