--- a/po/pl.po
+++ b/po/pl.po
@@ -1,5 +1,5 @@
 # Polish translations for xfce4-panel package.
-# Copyright (C) 2002-2005 The Xfce development team.
+# Copyright (C) 2005 Jasper Huijsmans.
 # This file is distributed under the same license as the xfce4-panel package.
 # Paweł Pastuła <pastulap@poczta.onet.pl>, 2003.
 # Daniel Mróz <beorn@alpha.pl>, 2003.
@@ -7,9 +7,9 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel 4.3.2\n"
+"Project-Id-Version: xfce4-panel 4.3.22\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-09-28 10:01+0200\n"
+"POT-Creation-Date: 2005-09-29 20:47+0900\n"
 "PO-Revision-Date: 2005-08-17 22:58+0900\n"
 "Last-Translator: Wit Wiliński <madman@berlios.de>\n"
 "Language-Team: Polish <translation-team-pl@lists.sourceforge.net>\n"
@@ -88,7 +88,7 @@ msgstr ""
 msgid "Restart"
 msgstr "_Restart"
 
-#: ../panel/panel-item-manager.c:327 ../panel/panel-item-manager.c:335
+#: ../panel/panel-item-manager.c:353 ../panel/panel-item-manager.c:361
 #, fuzzy, c-format
 msgid "Could not open \"%s\" module"
 msgstr ""
@@ -629,282 +629,3 @@ msgstr "P_okazuj tylko zminimalizowane aplikacje"
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
 msgstr ""
-
-#~ msgid "Panel Settings"
-#~ msgstr "Ustawienia panelu"
-
-#~ msgid "Xfce 4 Panel Settings"
-#~ msgstr "Ustawienia panelu Xfce 4"
-
-#~ msgid "No data was found. The panel will be empty."
-#~ msgstr "Nie znaleziono ustawień. Panel będzie pusty."
-
-#~ msgid "Position:"
-#~ msgstr "Pozycja:"
-
-#~ msgid "Command:"
-#~ msgstr "Polecenie:"
-
-#~ msgid "Use startup _notification"
-#~ msgstr "_Powiadom o uruchomieniu"
-
-#~ msgid "Other Icon"
-#~ msgstr "Inna ikona"
-
-#~ msgid "Drag file onto this frame to change the icon"
-#~ msgstr "Przeciągnij plik do tej ramki aby zmienić ikonę"
-
-#~ msgid "%s: Successfully started without session management"
-#~ msgstr "%s: Poprawnie uruchomiony bez zarządzania sesją"
-
-#~ msgid "%s: Successfully started with session management"
-#~ msgstr "%s: Poprawnie uruchomiony z zarządzaniem sesją"
-
-#~ msgid "Could not create panel item \"%s\"."
-#~ msgstr "Nie można utworzyć elementu panelu \"%s\"."
-
-#~ msgid "_Properties..."
-#~ msgstr "_Właściwości..."
-
-#~ msgid "_Remove"
-#~ msgstr "_Usuń"
-
-#~ msgid "This item has no configuration options"
-#~ msgstr "Ten element nie ma konfigurowalnych opcji"
-
-#~ msgid "_About Xfce"
-#~ msgstr "_O Xfce"
-
-#~ msgid "_Help"
-#~ msgstr "Pomo_c"
-
-#~ msgid "E_xit"
-#~ msgstr "W_yjście"
-
-#~ msgid "icons|Terminal"
-#~ msgstr "Terminal"
-
-#~ msgid "Settings manager not available"
-#~ msgstr "Menadżer ustawień niedostępny"
-
-#~ msgid "%H:%M"
-#~ msgstr "%H:%M"
-
-#~ msgid "Taskbar"
-#~ msgstr "Pasek zadań"
-
-#~ msgid "_About"
-#~ msgstr "_O Xfce"
-
-#~ msgid "Medium"
-#~ msgstr "Średni"
-
-#~ msgid "Huge"
-#~ msgstr "Ogromny"
-
-#~ msgid "Autohide:"
-#~ msgstr "Automatyczne ukrywanie:"
-
-#~ msgid "Behaviour"
-#~ msgstr "Zachowanie"
-
-#~ msgid "_Top"
-#~ msgstr "_Góra"
-
-#~ msgid "_Bottom"
-#~ msgstr "_Dół"
-
-#~ msgid "Alignment:"
-#~ msgstr "Wyrównanie:"
-
-#~ msgid "_Left"
-#~ msgstr "_Lewo"
-
-#~ msgid "_Center"
-#~ msgstr "Śr_odek"
-
-#~ msgid "_Right"
-#~ msgstr "P_rawo"
-
-#~ msgid "Height:"
-#~ msgstr "Wysokość:"
-
-#~ msgid "Width:"
-#~ msgstr "Szerokość:"
-
-#~ msgid "_Shrink to fit"
-#~ msgstr "Zmn_iejsz, by dopasować"
-
-#~ msgid "Auto _hide taskbar"
-#~ msgstr "Automatycznie u_krywaj pasek zadań"
-
-#~ msgid "Show tasklist"
-#~ msgstr "Pokaż listę zadań"
-
-#~ msgid "Always _group tasks"
-#~ msgstr "Zawsze _grupuj zadania"
-
-#~ msgid "Show _pager in taskbar"
-#~ msgstr "Pokaż _pager na pasku zadań"
-
-#~ msgid "Status area"
-#~ msgstr "Obszar statusu"
-
-#~ msgid "Show _time"
-#~ msgstr "Pokaż ze_gar"
-
-#~ msgid "General"
-#~ msgstr "Ogólne"
-
-#~ msgid "Components"
-#~ msgstr "Składniki"
-
-#~ msgid "Icon size"
-#~ msgstr "Rozmiar ikon"
-
-#~ msgid "%A, %d %B %Y"
-#~ msgstr "%A, %e %B %Y"
-
-#~ msgid "Clock type:"
-#~ msgstr "Typ zegara:"
-
-#~ msgid "Hour mode:"
-#~ msgstr "Tryb:"
-
-#~ msgid "24 hour"
-#~ msgstr "24-godzinny"
-
-#~ msgid "12 hour"
-#~ msgstr "12-godzinny"
-
-#~ msgid "Show seconds:"
-#~ msgstr "Pokaż sekundy:"
-
-#~ msgid "Flexible space"
-#~ msgstr "Swobodny odstęp"
-
-#~ msgid "Development"
-#~ msgstr "Programowanie"
-
-#~ msgid "Settings"
-#~ msgstr "Ustawienia"
-
-#~ msgid "System"
-#~ msgstr "System"
-
-#~ msgid "Edit launcher"
-#~ msgstr "Edycja aktywatora"
-
-#~ msgid "_Edit"
-#~ msgstr "_Edycja"
-
-#~ msgid "_Up"
-#~ msgstr "_Góra"
-
-#~ msgid "_Down"
-#~ msgstr "_Dół"
-
-#~ msgid "_Add"
-#~ msgstr "Dod_aj"
-
-#~ msgid "Mail box:"
-#~ msgstr "Skrzynka pocztowa:"
-
-#~ msgid "New mail command:"
-#~ msgstr "Po nadejściu poczty:"
-
-#~ msgid "Command to run when new mail arrives"
-#~ msgstr "Polecenie do uruchomienia po otrzymaniu nowej poczty"
-
-#~ msgid "Command to run when the button on the panel is clicked"
-#~ msgstr "Polecenie do uruchomienia po naciśnieciu na przycisku panelu"
-
-#~ msgid "Interval (sec):"
-#~ msgstr "Sprawdź co (sek):"
-
-#~ msgid "Mail checker"
-#~ msgstr "Sprawdzenie poczty"
-
-#~ msgid "Graphical pager"
-#~ msgstr "Lista obszarów roboczych"
-
-#~ msgid "Desktop switcher"
-#~ msgstr "Przełącznik obszaru roboczego"
-
-#~ msgid ""
-#~ "Access to the configuration system has been disabled.\n"
-#~ "\n"
-#~ "Ask your system administrator for more information"
-#~ msgstr ""
-#~ "Dostęp do systemu konfiguracyjnego został zablokowany.\n"
-#~ "\n"
-#~ "Zapytaj administratora systemu o więcej informacji"
-
-#~ msgid "tip|Exit"
-#~ msgstr "Zakończ"
-
-#~ msgid "tip|Setup"
-#~ msgstr "Ustawienia"
-
-#~ msgid "tip|Info"
-#~ msgstr "Informacje"
-
-#~ msgid "Exit"
-#~ msgstr "Zakończ"
-
-#~ msgid "Setup"
-#~ msgstr "Ustawienia"
-
-#~ msgid "Info"
-#~ msgstr "Informacje"
-
-#~ msgid "Button 1:"
-#~ msgstr "Przycisk 1:"
-
-#~ msgid "Button 2:"
-#~ msgstr "Przycisk 2:"
-
-#~ msgid "_Hide"
-#~ msgstr "U_kryj"
-
-#~ msgid "System buttons"
-#~ msgstr "Przyciski systemowe"
-
-#~ msgid "Taskbar Settings"
-#~ msgstr "Ustawienia paska zadań"
-
-#~ msgid "Appfinder"
-#~ msgstr "Appfinder"
-
-#~ msgid "Drag file to print"
-#~ msgstr "Przeciągnij plik, aby go wydrukować"
-
-#~ msgid "File manager"
-#~ msgstr "Menadżer plików"
-
-#~ msgid "Find and run applications"
-#~ msgstr "Znajdź i uruchom aplikacje"
-
-#~ msgid "Konqueror"
-#~ msgstr "Konqueror"
-
-#~ msgid "Konqueror File Manager"
-#~ msgstr "Menadżer plików Konqueror"
-
-#~ msgid "Manual"
-#~ msgstr "Podręcznik"
-
-#~ msgid "Mozilla Web Browser"
-#~ msgstr "Przęglądarka internetowa Mozilla"
-
-#~ msgid "Music player"
-#~ msgstr "Odtwarzacz muzyki"
-
-#~ msgid "Nautilus"
-#~ msgstr "Nautilus"
-
-#~ msgid "Nautilus File Manager"
-#~ msgstr "Menadżer plików Nautilus"
-
-#~ msgid "Printer Management"
-#~ msgstr "Zarządzanie drukarkami"
