--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -1,16 +1,16 @@
-# Portuguese translations for xfce4-panel package.
-# Copyright (C) 2002-2005 The Xfce development team.
+# Brazilian Portuguese translations for xfce4-panel package.
+# Copyright (C) 2005 Jasper Huijsmans.
 # This file is distributed under the same license as the xfce4-panel package.
 # Rodrigo Coacci <rcoacci@gmail.com>, 2004.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel 4.3.2\n"
+"Project-Id-Version: xfce4-panel 4.3.22\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-09-28 10:01+0200\n"
-"PO-Revision-Date: 2005-08-18 01:14+0900\n"
+"POT-Creation-Date: 2005-09-29 20:47+0900\n"
+"PO-Revision-Date: 2005-09-29 20:37+0900\n"
 "Last-Translator: Rodrigo Coacci <rcoacci@gmail.com>\n"
-"Language-Team: Portuguese <ldp-br@bazar.conectiva.com.br>\n"
+"Language-Team: Brazilian Portuguese <ldp-br@bazar.conectiva.com.br>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -85,7 +85,7 @@ msgstr ""
 msgid "Restart"
 msgstr "_Reiniciar"
 
-#: ../panel/panel-item-manager.c:327 ../panel/panel-item-manager.c:335
+#: ../panel/panel-item-manager.c:353 ../panel/panel-item-manager.c:361
 #, fuzzy, c-format
 msgid "Could not open \"%s\" module"
 msgstr "Não foi possível criar o item de painel \"%s\"."
@@ -628,295 +628,3 @@ msgstr "Mostrar _nomes do aplicativos"
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
 msgstr ""
-
-#, fuzzy
-#~ msgid "Panel Settings"
-#~ msgstr "Configurações do painel do Xfce"
-
-#, fuzzy
-#~ msgid "Xfce 4 Panel Settings"
-#~ msgstr "Configurações do painel do Xfce"
-
-#~ msgid "No data was found. The panel will be empty."
-#~ msgstr "Nenhum dado encontrado. O painel estará vazio."
-
-#~ msgid "Position:"
-#~ msgstr "Posição:"
-
-#~ msgid "Command:"
-#~ msgstr "Comando:"
-
-#~ msgid "Use startup _notification"
-#~ msgstr "Use a _notificação de inicialização"
-
-#~ msgid "Other Icon"
-#~ msgstr "Outro ícone"
-
-#~ msgid "Drag file onto this frame to change the icon"
-#~ msgstr "Arraste o arquivo até este quadro para alterar o ícone"
-
-#~ msgid "%s: Successfully started without session management"
-#~ msgstr "%s: Iniciado com sucesso sem gerenciamento de sessão"
-
-#~ msgid "%s: Successfully started with session management"
-#~ msgstr "%s: Iniciado corretamente com gerenciamento de sessão"
-
-#~ msgid "Could not create panel item \"%s\"."
-#~ msgstr "Não foi possível criar o item de painel \"%s\"."
-
-#~ msgid "_Properties..."
-#~ msgstr "_Propriedades..."
-
-#~ msgid "Add _new item"
-#~ msgstr "Adicionar _novo item"
-
-#~ msgid "This item has no configuration options"
-#~ msgstr "Este item não possui opções de configuração"
-
-#~ msgid "_About Xfce"
-#~ msgstr "_Sobre o Xfce"
-
-#~ msgid "_Help"
-#~ msgstr "_Ajuda"
-
-#~ msgid "E_xit"
-#~ msgstr "Sai_r"
-
-#, fuzzy
-#~ msgid "icons|Terminal"
-#~ msgstr "Terminal"
-
-#~ msgid "Settings manager not available"
-#~ msgstr "Gerenciador de configurações não disponível"
-
-#~ msgid "Taskbar"
-#~ msgstr "Barra de tarefas"
-
-#~ msgid "Cannot create MCS client channel"
-#~ msgstr "Não foi possível criar o canal MCS cliente"
-
-#, fuzzy
-#~ msgid "_About"
-#~ msgstr "_Sobre o Xfce"
-
-#~ msgid "Medium"
-#~ msgstr "Médio"
-
-#~ msgid "Huge"
-#~ msgstr "Enorme"
-
-#~ msgid "Autohide:"
-#~ msgstr "Auto-Ocultar:"
-
-#~ msgid "Behaviour"
-#~ msgstr "Comportamento"
-
-#~ msgid "_Top"
-#~ msgstr "A_cima"
-
-#~ msgid "_Bottom"
-#~ msgstr "_Abaixo"
-
-#, fuzzy
-#~ msgid "Alignment:"
-#~ msgstr "Alinhamento"
-
-#~ msgid "_Left"
-#~ msgstr "_Esquerda"
-
-#~ msgid "_Center"
-#~ msgstr "_Centro"
-
-#~ msgid "_Right"
-#~ msgstr "_Direita"
-
-#, fuzzy
-#~ msgid "Height:"
-#~ msgstr "Altura :"
-
-#~ msgid "Width:"
-#~ msgstr "Largura"
-
-#~ msgid "Auto _hide taskbar"
-#~ msgstr "Auto-Ocultar barra de tarefas"
-
-#~ msgid "Show _pager in taskbar"
-#~ msgstr "Exibir _paginador na barra de tarefas"
-
-#~ msgid "%A, %d %B %Y"
-#~ msgstr "%A, %d de %B de %Y"
-
-#~ msgid "Clock type:"
-#~ msgstr "Tipo de relógio:"
-
-#~ msgid "Hour mode:"
-#~ msgstr "Estilo de hora:"
-
-#~ msgid "24 hour"
-#~ msgstr "24 horas"
-
-#~ msgid "12 hour"
-#~ msgstr "12 horas"
-
-#~ msgid "Show seconds:"
-#~ msgstr "Mostrar segundos:"
-
-#, fuzzy
-#~ msgid "Settings"
-#~ msgstr "Configurações do painel do Xfce"
-
-#, fuzzy
-#~ msgid "Edit launcher"
-#~ msgstr "Adicionar lançador"
-
-#, fuzzy
-#~ msgid "_Edit"
-#~ msgstr "Editor"
-
-#~ msgid "Mail box:"
-#~ msgstr "Caixa de correio:"
-
-#~ msgid "New mail command:"
-#~ msgstr "Novo comando de e-mail:"
-
-#~ msgid "Command to run when new mail arrives"
-#~ msgstr "Comando a executar quando novo e-mail chegar"
-
-#~ msgid "Command to run when the button on the panel is clicked"
-#~ msgstr "Comando a executar quando o botão no painel for clicado"
-
-#~ msgid "Interval (sec):"
-#~ msgstr "Intevalo (segundos):"
-
-#~ msgid "Mail checker"
-#~ msgstr "Verificador de e-mail"
-
-#~ msgid "Graphical pager"
-#~ msgstr "Paginador gráfico"
-
-#~ msgid "Desktop switcher"
-#~ msgstr "Alternador de desktop"
-
-#~ msgid ""
-#~ "Access to the configuration system has been disabled.\n"
-#~ "\n"
-#~ "Ask your system administrator for more information"
-#~ msgstr ""
-#~ "O acesso à configuração do sistema foi desabilitado.\n"
-#~ "\n"
-#~ "Peça ao administrador do sistema mais informações"
-
-#, fuzzy
-#~ msgid "tip|Exit"
-#~ msgstr "Sair"
-
-#, fuzzy
-#~ msgid "tip|Setup"
-#~ msgstr "Configurar"
-
-#, fuzzy
-#~ msgid "tip|Info"
-#~ msgstr "Informações"
-
-#~ msgid "Exit"
-#~ msgstr "Sair"
-
-#~ msgid "Setup"
-#~ msgstr "Configurar"
-
-#~ msgid "Info"
-#~ msgstr "Informações"
-
-#~ msgid "Button 1:"
-#~ msgstr "Botão 1:"
-
-#~ msgid "Button 2:"
-#~ msgstr "Botão 2:"
-
-#~ msgid "_Hide"
-#~ msgstr "_Ocultar"
-
-#~ msgid "System buttons"
-#~ msgstr "Botôes de sistema"
-
-#, fuzzy
-#~ msgid "Iconbox Settings"
-#~ msgstr "Configurações do painel do Xfce"
-
-#, fuzzy
-#~ msgid "Xfce 4 Iconbox Settings"
-#~ msgstr "Configurações do painel do Xfce"
-
-#, fuzzy
-#~ msgid "Taskbar Settings"
-#~ msgstr "Barra de tarefas"
-
-#, fuzzy
-#~ msgid "Xfce 4 Taskbar Settings"
-#~ msgstr "Configurações do painel do Xfce"
-
-#, fuzzy
-#~ msgid "File manager"
-#~ msgstr "Gerenciamento de arquivos"
-
-#, fuzzy
-#~ msgid "Printer Management"
-#~ msgstr "Gerenciamento de arquivos"
-
-#~ msgid "Removing the item will also remove its popup menu."
-#~ msgstr "Remover o item causará a remoção do respectivo menu popup."
-
-#~ msgid "Caption:"
-#~ msgstr "Etiqueta:"
-
-#~ msgid "Tooltip:"
-#~ msgstr "Dica:"
-
-#~ msgid "Attach menu to launcher"
-#~ msgstr "Adicionar menu ao lançador"
-
-#~ msgid "Change menu item"
-#~ msgstr "Mudar item do menu"
-
-#~ msgid "Click mouse button 3 to change item"
-#~ msgstr "Clique o botão 3 para mudar o item"
-
-#~ msgid "Add launcher"
-#~ msgstr "Adicionar lançador"
-
-#~ msgid "Left"
-#~ msgstr "Esquerdo"
-
-#~ msgid "Right"
-#~ msgstr "Direito"
-
-#~ msgid "Top"
-#~ msgstr "Topo"
-
-#~ msgid "Bottom"
-#~ msgstr "Abaixo"
-
-#~ msgid "Popup position:"
-#~ msgstr "Posição do Popup:"
-
-#, fuzzy
-#~ msgid "Notification Area"
-#~ msgstr "Área de notificação"
-
-#~ msgid "Menu"
-#~ msgstr "Menu"
-
-#~ msgid "Always on top:"
-#~ msgstr "Sempre no topo:"
-
-#~ msgid "Show _system tray in taskbar"
-#~ msgstr "Exibir bandeja de sistema na barra de tarefas"
-
-#~ msgid "Cannot get initial style"
-#~ msgstr "O estilo inicial não pôde ser obtido"
-
-#~ msgid "Cannot get default screen\n"
-#~ msgstr "Não foi possível obter a tela padrão\n"
-
-#~ msgid "Cannot connect to session manager"
-#~ msgstr "Não foi possível se conectar ao gerenciador de sessão"
