--- a/po/ro.po
+++ b/po/ro.po
@@ -1,15 +1,15 @@
-# Romanian translation of xfce4-panel
-# Copyright (C) 2004 Free Software Foundation.
-# This file is distributed under the same license as the xfwm4 package.
-# Mişu Moldovan <dumol@go.ro>, 2004.
+# Romanian translation of xfce4-panel.
+# Copyright (C) 2005 Jasper Huijsmans.
+# This file is distributed under the same license as the xfce4-panel package.
+# Mişu Moldovan <dumol@gnome.ro>, 2004.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel 4.2 rc1\n"
+"Project-Id-Version: xfce4-panel 4.3.22\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-09-28 10:01+0200\n"
-"PO-Revision-Date: 2004-11-14 19:01+0200\n"
-"Last-Translator: Mişu Moldovan <dumol@go.ro>\n"
+"POT-Creation-Date: 2005-09-29 20:47+0900\n"
+"PO-Revision-Date: 2005-09-29 20:39+0900\n"
+"Last-Translator: Mişu Moldovan <dumol@gnome.ro>\n"
 "Language-Team: Romanian <gnomero-list@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -86,7 +86,7 @@ msgstr ""
 msgid "Restart"
 msgstr "_Repornire"
 
-#: ../panel/panel-item-manager.c:327 ../panel/panel-item-manager.c:335
+#: ../panel/panel-item-manager.c:353 ../panel/panel-item-manager.c:361
 #, fuzzy, c-format
 msgid "Could not open \"%s\" module"
 msgstr "Nu am reuşit să creez itemul „%s”."
@@ -629,298 +629,3 @@ msgstr "Arată _numele programelor"
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
 msgstr ""
-
-#, fuzzy
-#~ msgid "Panel Settings"
-#~ msgstr "Setări Panou Xfce"
-
-#, fuzzy
-#~ msgid "Xfce 4 Panel Settings"
-#~ msgstr "Setări Panou Xfce"
-
-#~ msgid "No data was found. The panel will be empty."
-#~ msgstr "Nu s-au găsit nici un fel de date. Panoul va fi gol."
-
-#~ msgid "Position:"
-#~ msgstr "Poziţie:"
-
-#~ msgid "Command:"
-#~ msgstr "Comandă:"
-
-#~ msgid "Use startup _notification"
-#~ msgstr "Utilizează _notificare la pornire"
-
-#~ msgid "Other Icon"
-#~ msgstr "Altă iconiţă"
-
-#~ msgid "Drag file onto this frame to change the icon"
-#~ msgstr "Trageţi un fişier peste acest cadru pentru a schimba iconiţa"
-
-#~ msgid "%s: Successfully started without session management"
-#~ msgstr "%s: Am pornit cu succes fără administrare de sesiuni"
-
-#~ msgid "%s: Successfully started with session management"
-#~ msgstr "%s: Am pornit cu succes cu administrare de sesiuni"
-
-#~ msgid "Could not create panel item \"%s\"."
-#~ msgstr "Nu am reuşit să creez itemul „%s”."
-
-#~ msgid "_Properties..."
-#~ msgstr "_Proprietăţi..."
-
-#~ msgid "Add _new item"
-#~ msgstr "Adăugare item _nou"
-
-#~ msgid "This item has no configuration options"
-#~ msgstr "Acest item nu are opţiuni de configurare"
-
-#~ msgid "_About Xfce"
-#~ msgstr "_Despre Xfce"
-
-#~ msgid "_Help"
-#~ msgstr "_Ajutor"
-
-#~ msgid "E_xit"
-#~ msgstr "_Ieşire"
-
-#, fuzzy
-#~ msgid "icons|Terminal"
-#~ msgstr "Terminal"
-
-#~ msgid "Settings manager not available"
-#~ msgstr "Administratorul setărilor nu e disponibil"
-
-#~ msgid "Taskbar"
-#~ msgstr "Bară aplicaţii"
-
-#~ msgid "Cannot create MCS client channel"
-#~ msgstr "Nu am reuşit să creez canalul clientului MCS"
-
-#, fuzzy
-#~ msgid "_About"
-#~ msgstr "_Despre Xfce"
-
-#~ msgid "Medium"
-#~ msgstr "Medie"
-
-#~ msgid "Huge"
-#~ msgstr "Imensă"
-
-#~ msgid "Autohide:"
-#~ msgstr "Ascundere:"
-
-#~ msgid "Behaviour"
-#~ msgstr "Comportament"
-
-#~ msgid "_Top"
-#~ msgstr "_Sus"
-
-#~ msgid "_Bottom"
-#~ msgstr "_Jos"
-
-#, fuzzy
-#~ msgid "Alignment:"
-#~ msgstr "Aliniere"
-
-#~ msgid "_Left"
-#~ msgstr "Stân_ga"
-
-#~ msgid "_Center"
-#~ msgstr "Cen_tru"
-
-#~ msgid "_Right"
-#~ msgstr "_Dreapta"
-
-#, fuzzy
-#~ msgid "Height:"
-#~ msgstr "Înălţime:"
-
-#~ msgid "Width:"
-#~ msgstr "Lăţime:"
-
-#~ msgid "Auto _hide taskbar"
-#~ msgstr "Ascunde automat bara aplicaţiilor"
-
-#~ msgid "Show _pager in taskbar"
-#~ msgstr "Arată c_omutatorul spaţiilor de lucru"
-
-#~ msgid "%A, %d %B %Y"
-#~ msgstr "%A, %d %B %Y"
-
-#~ msgid "Clock type:"
-#~ msgstr "Tip ceas:"
-
-#~ msgid "Hour mode:"
-#~ msgstr "Stil oră:"
-
-#~ msgid "24 hour"
-#~ msgstr "24 ore"
-
-#~ msgid "12 hour"
-#~ msgstr "12 ore"
-
-#~ msgid "Show seconds:"
-#~ msgstr "Arată secundele:"
-
-#, fuzzy
-#~ msgid "Settings"
-#~ msgstr "Setări Panou Xfce"
-
-#, fuzzy
-#~ msgid "Edit launcher"
-#~ msgstr "Adăugare lansator"
-
-#, fuzzy
-#~ msgid "_Edit"
-#~ msgstr "Editor"
-
-#~ msgid "Mail box:"
-#~ msgstr "Căsuţă mail:"
-
-#~ msgid "New mail command:"
-#~ msgstr "Comandă mail nou:"
-
-#~ msgid "Command to run when new mail arrives"
-#~ msgstr "Comandă de lansat la sosirea unui mail nou"
-
-#~ msgid "Command to run when the button on the panel is clicked"
-#~ msgstr "Comandă de lansat la apăsarea butonului din panou"
-
-#~ msgid "Interval (sec):"
-#~ msgstr "Interval (sec):"
-
-#~ msgid "Mail checker"
-#~ msgstr "Verificare mail"
-
-#~ msgid "Graphical pager"
-#~ msgstr "Comutator grafic"
-
-#~ msgid "Desktop switcher"
-#~ msgstr "Comutator desktop"
-
-#~ msgid ""
-#~ "Access to the configuration system has been disabled.\n"
-#~ "\n"
-#~ "Ask your system administrator for more information"
-#~ msgstr ""
-#~ "Accesul la opţiunile de configurare v-a fost dezactivat.\n"
-#~ "\n"
-#~ "Contactaţi administratorul sistemului pentru mai multe detalii."
-
-#, fuzzy
-#~ msgid "tip|Exit"
-#~ msgstr "Ieşire"
-
-#, fuzzy
-#~ msgid "tip|Setup"
-#~ msgstr "Configurare"
-
-#, fuzzy
-#~ msgid "tip|Info"
-#~ msgstr "Info"
-
-#~ msgid "Exit"
-#~ msgstr "Ieşire"
-
-#~ msgid "Setup"
-#~ msgstr "Configurare"
-
-#~ msgid "Info"
-#~ msgstr "Info"
-
-#~ msgid "Button 1:"
-#~ msgstr "Buton 1:"
-
-#~ msgid "Button 2:"
-#~ msgstr "Buton 2:"
-
-#~ msgid "_Hide"
-#~ msgstr "_Ascunde"
-
-#~ msgid "System buttons"
-#~ msgstr "Butoane sistem"
-
-#, fuzzy
-#~ msgid "Iconbox Settings"
-#~ msgstr "Setări Panou Xfce"
-
-#, fuzzy
-#~ msgid "Xfce 4 Iconbox Settings"
-#~ msgstr "Setări Panou Xfce"
-
-#, fuzzy
-#~ msgid "Taskbar Settings"
-#~ msgstr "Bară aplicaţii"
-
-#, fuzzy
-#~ msgid "Xfce 4 Taskbar Settings"
-#~ msgstr "Setări Panou Xfce"
-
-#, fuzzy
-#~ msgid "File manager"
-#~ msgstr "Administrare fişiere"
-
-#, fuzzy
-#~ msgid "Printer Management"
-#~ msgstr "Administrare fişiere"
-
-#~ msgid "Removing the item will also remove its popup menu."
-#~ msgstr "Ştergerea itemului va duce la pierderea meniul asociat."
-
-#~ msgid "Caption:"
-#~ msgstr "Titlu:"
-
-#~ msgid "Tooltip:"
-#~ msgstr "Etichetă:"
-
-#~ msgid "Attach menu to launcher"
-#~ msgstr "Ataşează meniu lansatorului"
-
-#~ msgid "Change menu item"
-#~ msgstr "Editare item meniu"
-
-#~ msgid "Click mouse button 3 to change item"
-#~ msgstr "Apăsaţi butonul dreapta de mouse pentru editare"
-
-#~ msgid "Add launcher"
-#~ msgstr "Adăugare lansator"
-
-#~ msgid "Left"
-#~ msgstr "Stânga"
-
-#~ msgid "Right"
-#~ msgstr "Dreapta"
-
-#~ msgid "Top"
-#~ msgstr "Sus"
-
-#~ msgid "Bottom"
-#~ msgstr "Jos"
-
-#~ msgid "Popup position:"
-#~ msgstr "Poziţie popup:"
-
-#, fuzzy
-#~ msgid "Notification Area"
-#~ msgstr "Zonă de notificare"
-
-#~ msgid "Menu"
-#~ msgstr "Meniu"
-
-#~ msgid "Always on top:"
-#~ msgstr "Mereu deasupra:"
-
-#~ msgid "Show _system tray in taskbar"
-#~ msgstr "Arată _zona sistem de notificare"
-
-#~ msgid "Cannot get initial style"
-#~ msgstr "Nu am reuşit să obţin stilul iniţial"
-
-#~ msgid "This should not happen"
-#~ msgstr "Aceasta nu ar trebui să se întâmple"
-
-#~ msgid "Cannot get default screen\n"
-#~ msgstr "Nu am reuşit să obţin ecranul implicit\n"
-
-#~ msgid "Cannot connect to session manager"
-#~ msgstr "Nu am reuşit să mă conectez la administratorul sesiunii"
