--- a/po/sv.po
+++ b/po/sv.po
@@ -1,13 +1,13 @@
 # Swedish translations for xfce4-panel package.
-# Copyright (C) 2002-2005 The Xfce development team.
+# Copyright (C) 2005 Jasper Huijsmans.
 # This file is distributed under the same license as the xfce4-panel package.
 # Joakim Andreasson <joakim.andreasson@gmx.net>, 2003-2004.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel 4.3.2\n"
+"Project-Id-Version: xfce4-panel 4.3.22\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-09-28 10:01+0200\n"
+"POT-Creation-Date: 2005-09-29 20:47+0900\n"
 "PO-Revision-Date: 2005-08-21 17:48+0900\n"
 "Last-Translator: Joakim Andreasson <joakim.andreasson@gmx.net>\n"
 "Language-Team: Swedish <sv@li.org>\n"
@@ -84,7 +84,7 @@ msgstr ""
 msgid "Restart"
 msgstr ""
 
-#: ../panel/panel-item-manager.c:327 ../panel/panel-item-manager.c:335
+#: ../panel/panel-item-manager.c:353 ../panel/panel-item-manager.c:361
 #, c-format
 msgid "Could not open \"%s\" module"
 msgstr ""
@@ -621,369 +621,3 @@ msgstr ""
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
 msgstr ""
-
-#, fuzzy
-#~ msgid "Panel Settings"
-#~ msgstr "Xfce panelinställningar"
-
-#, fuzzy
-#~ msgid "Xfce 4 Panel Settings"
-#~ msgstr "Xfce panelinställningar"
-
-#~ msgid "Command:"
-#~ msgstr "Kommando:"
-
-#~ msgid "Use startup _notification"
-#~ msgstr "Använd start_notifikation"
-
-#~ msgid "Other Icon"
-#~ msgstr "Annan ikon"
-
-#~ msgid "Drag file onto this frame to change the icon"
-#~ msgstr "Drag en fil till denna ram för att ändra ikon"
-
-#, fuzzy
-#~ msgid "_Properties..."
-#~ msgstr "/_Egenskaper..."
-
-#, fuzzy
-#~ msgid "_Remove"
-#~ msgstr "/_Ta bort"
-
-#, fuzzy
-#~ msgid "Add _new item"
-#~ msgstr "/_Nytt objekt"
-
-#~ msgid "This item has no configuration options"
-#~ msgstr "Detta objekt saknar konfigurationsalternativ"
-
-#, fuzzy
-#~ msgid "_About Xfce"
-#~ msgstr "/_Om Xfce"
-
-#, fuzzy
-#~ msgid "_Help"
-#~ msgstr "/_Hjälp"
-
-#, fuzzy
-#~ msgid "E_xit"
-#~ msgstr "/_Avsluta"
-
-#~ msgid "Settings manager not available"
-#~ msgstr "Inställningshanterare inte tillgänglig"
-
-#~ msgid "Taskbar"
-#~ msgstr "Aktivitetsfält"
-
-#~ msgid "Cannot create MCS client channel"
-#~ msgstr "Kan inte skapa MCS-klintkanal"
-
-#, fuzzy
-#~ msgid "_About"
-#~ msgstr "/_Om Xfce"
-
-#~ msgid "Panel size:"
-#~ msgstr "Panelstorlek:"
-
-#~ msgid "Autohide:"
-#~ msgstr "Autogöm:"
-
-#~ msgid "Behaviour"
-#~ msgstr "Beteende"
-
-#, fuzzy
-#~ msgid "_Top"
-#~ msgstr "Överst"
-
-#, fuzzy
-#~ msgid "_Bottom"
-#~ msgstr "Underst"
-
-#, fuzzy
-#~ msgid "Height:"
-#~ msgstr "Höjd:"
-
-#, fuzzy
-#~ msgid "Auto _hide taskbar"
-#~ msgstr "Autogöm aktivitetsfältet"
-
-#, fuzzy
-#~ msgid "Show _pager in taskbar"
-#~ msgstr "Visa skrivbordsbläddrare i aktivitetsfältet"
-
-#, fuzzy
-#~ msgid "Status area"
-#~ msgstr "Lördag"
-
-#, fuzzy
-#~ msgid "Icon size"
-#~ msgstr "Förhandsvisning av ikon"
-
-#~ msgid "Clock type:"
-#~ msgstr "Klocktyp:"
-
-#~ msgid "Hour mode:"
-#~ msgstr "Timvisning:"
-
-#~ msgid "24 hour"
-#~ msgstr "24-timmars"
-
-#~ msgid "12 hour"
-#~ msgstr "12-timmars"
-
-#~ msgid "Show seconds:"
-#~ msgstr "Visa sekunder:"
-
-#, fuzzy
-#~ msgid "Settings"
-#~ msgstr "Xfce panelinställningar"
-
-#, fuzzy
-#~ msgid "Edit launcher"
-#~ msgstr "Lägg till objekt"
-
-#, fuzzy
-#~ msgid "_Edit"
-#~ msgstr "Texteditor"
-
-#~ msgid "Mail box:"
-#~ msgstr "Postbox:"
-
-#, fuzzy
-#~ msgid "New mail command:"
-#~ msgstr "Epostkommando:"
-
-#, fuzzy
-#~ msgid "Command to run when new mail arrives"
-#~ msgstr "Kommando attutföra när knappen på panelen klickas"
-
-#~ msgid "Command to run when the button on the panel is clicked"
-#~ msgstr "Kommando attutföra när knappen på panelen klickas"
-
-#~ msgid "Interval (sec):"
-#~ msgstr "Intervall (sek):"
-
-#, fuzzy
-#~ msgid "Mail checker"
-#~ msgstr "Epostkontroll"
-
-#~ msgid "Graphical pager"
-#~ msgstr "Grafisk arbetsytehanterare"
-
-#~ msgid "Desktop switcher"
-#~ msgstr "Skrivbordsväxlare"
-
-#~ msgid ""
-#~ "Access to the configuration system has been disabled.\n"
-#~ "\n"
-#~ "Ask your system administrator for more information"
-#~ msgstr ""
-#~ "Tillgång till konfigurationssystemet har stängts av.\n"
-#~ "\n"
-#~ "Fråga din systemadministratör för mer information"
-
-#, fuzzy
-#~ msgid "tip|Exit"
-#~ msgstr "Avsluta"
-
-#, fuzzy
-#~ msgid "tip|Setup"
-#~ msgstr "Inställningar"
-
-#, fuzzy
-#~ msgid "tip|Info"
-#~ msgstr "Information"
-
-#~ msgid "Exit"
-#~ msgstr "Avsluta"
-
-#~ msgid "Setup"
-#~ msgstr "Inställningar"
-
-#~ msgid "Info"
-#~ msgstr "Information"
-
-#~ msgid "Button 1:"
-#~ msgstr "Knapp 1:"
-
-#~ msgid "Button 2:"
-#~ msgstr "Knapp 2:"
-
-#, fuzzy
-#~ msgid "_Hide"
-#~ msgstr "/_Hjälp"
-
-#~ msgid "System buttons"
-#~ msgstr "Systemknappar"
-
-#, fuzzy
-#~ msgid "Iconbox Settings"
-#~ msgstr "Xfce panelinställningar"
-
-#, fuzzy
-#~ msgid "Xfce 4 Iconbox Settings"
-#~ msgstr "Xfce panelinställningar"
-
-#, fuzzy
-#~ msgid "Taskbar Settings"
-#~ msgstr "Aktivitetsfält"
-
-#, fuzzy
-#~ msgid "Xfce 4 Taskbar Settings"
-#~ msgstr "Xfce panelinställningar"
-
-#, fuzzy
-#~ msgid "File manager"
-#~ msgstr "Filhantering"
-
-#, fuzzy
-#~ msgid "Manual"
-#~ msgstr "Januari"
-
-#, fuzzy
-#~ msgid "Printer Management"
-#~ msgstr "Filhantering"
-
-#, fuzzy
-#~ msgid "Removing the item will also remove its popup menu."
-#~ msgstr ""
-#~ "Att ta bort ett objekt kommer även att ta bort dess popup-meny.\n"
-#~ "\n"
-#~ "Vill du ta bort objektet?"
-
-#~ msgid "Caption:"
-#~ msgstr "Titel:"
-
-#~ msgid "Tooltip:"
-#~ msgstr "Hjälptext:"
-
-#~ msgid "Attach menu to launcher"
-#~ msgstr "Anslut meny till programstartare"
-
-#~ msgid "Change menu item"
-#~ msgstr "Ändra menyobjekt"
-
-#~ msgid "Click mouse button 3 to change item"
-#~ msgstr "Musknapp 3 för att ändra objektet"
-
-#~ msgid "Add launcher"
-#~ msgstr "Lägg till objekt"
-
-#~ msgid "Left"
-#~ msgstr "Vänster"
-
-#~ msgid "Right"
-#~ msgstr "Höger"
-
-#~ msgid "Top"
-#~ msgstr "Överst"
-
-#~ msgid "Bottom"
-#~ msgstr "Underst"
-
-#~ msgid "Popup position:"
-#~ msgstr "Popupposition:"
-
-#~ msgid "Menu"
-#~ msgstr "Meny"
-
-#, fuzzy
-#~ msgid "Show _system tray in taskbar"
-#~ msgstr "Visa notifieringsfält i aktivitetsfältet"
-
-#~ msgid "Cannot get initial style"
-#~ msgstr "Kan inte hämta initiell stil"
-
-#~ msgid "This should not happen"
-#~ msgstr "Detta borde inte hända"
-
-#, fuzzy
-#~ msgid "Cannot get default screen\n"
-#~ msgstr "Kan inte inhämta skrivbordsmarginaler"
-
-#~ msgid "Cannot connect to session manager"
-#~ msgstr "Kan inte ansluta till sessionshanterare"
-
-#~ msgid "Show two buttons:"
-#~ msgstr "Visa två knappar"
-
-#~ msgid "Change item"
-#~ msgstr "Ändra objekt"
-
-#~ msgid "Menu:"
-#~ msgstr "Meny:"
-
-#~ msgid "/Xfce Panel"
-#~ msgstr "/Xfce-panelen"
-
-#~ msgid "/Add _new item"
-#~ msgstr "/_Nytt objekt"
-
-#~ msgid "/_Properties..."
-#~ msgstr "/_Egenskaper..."
-
-#~ msgid ""
-#~ "Your window manager does not seem to support the new window manager hints "
-#~ "as defined on http://www.freedesktop.org. \n"
-#~ "Some Xfce features may not work as intended."
-#~ msgstr ""
-#~ "din fönsterhanterare verkar inte stödja de nya fönsterhanterarledtrådarna "
-#~ "såsomdefinierade på http://www.freedesktop.org. \n"
-#~ "Detta kan begränsa Xfce:s avsedda funktionalitet."
-
-#~ msgid "/_Settings manager"
-#~ msgstr "/_Inställningshanterare"
-
-#~ msgid "Tiny"
-#~ msgstr "Minimal"
-
-#~ msgid "Icon theme:"
-#~ msgstr "Ikontema:"
-
-#~ msgid "Normal"
-#~ msgstr "Normalt"
-
-#~ msgid "Center the panel:"
-#~ msgstr "Centrera panelen:"
-
-#~ msgid "Set"
-#~ msgstr "Sätt"
-
-#~ msgid "Sunday"
-#~ msgstr "Söndag"
-
-#~ msgid "Monday"
-#~ msgstr "Måndag"
-
-#~ msgid "Tuesday"
-#~ msgstr "Tisdag"
-
-#~ msgid "Wednesday"
-#~ msgstr "Onsdag"
-
-#~ msgid "Thursday"
-#~ msgstr "Torsdag"
-
-#~ msgid "Friday"
-#~ msgstr "Fredag"
-
-#~ msgid "February"
-#~ msgstr "Februari"
-
-#~ msgid "March"
-#~ msgstr "Mars"
-
-#~ msgid "May"
-#~ msgstr "Maj"
-
-#~ msgid "June"
-#~ msgstr "Juni"
-
-#~ msgid "July"
-#~ msgstr "Juli"
-
-#~ msgid "August"
-#~ msgstr "Augusti"
-
-#~ msgid "October"
-#~ msgstr "Oktober"
