--- a/po/ta.po
+++ b/po/ta.po
@@ -1,14 +1,14 @@
-# Tamil translation of Tamil XFCE Panel.
-# Copyright (C) 2002-2005 The Xfce development team.
+# Tamil translations for xfce4-panel package.
+# Copyright (C) 2005 Jasper Huijsmans.
 # This file is distributed under the same license as the xfce4-panel package.
 # Dinesh Nadarajah <n_dinesh@yahoo.com>, 2003.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Tamil XFCE Panel 4\n"
+"Project-Id-Version: xfce4-panel 4.3.22\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-09-28 10:01+0200\n"
-"PO-Revision-Date: 2005-08-21 17:49+0900\n"
+"POT-Creation-Date: 2005-09-29 20:47+0900\n"
+"PO-Revision-Date: 2005-09-29 20:42+0900\n"
 "Last-Translator: Dinesh Nadarajah <n_dinesh@yahoo.com>\n"
 "Language-Team: Tamil <tamilinix@yahoogroups.com>\n"
 "MIME-Version: 1.0\n"
@@ -85,7 +85,7 @@ msgstr ""
 msgid "Restart"
 msgstr "_நிலைமீட்டு"
 
-#: ../panel/panel-item-manager.c:327 ../panel/panel-item-manager.c:335
+#: ../panel/panel-item-manager.c:353 ../panel/panel-item-manager.c:361
 #, c-format
 msgid "Could not open \"%s\" module"
 msgstr ""
@@ -627,224 +627,3 @@ msgstr ""
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
 msgstr ""
-
-#, fuzzy
-#~ msgid "Panel Settings"
-#~ msgstr "Xfce பலகை அமைப்புகள்"
-
-#, fuzzy
-#~ msgid "Xfce 4 Panel Settings"
-#~ msgstr "Xfce பலகை அமைப்புகள்"
-
-#~ msgid "Position:"
-#~ msgstr "இடம்:"
-
-#~ msgid "Command:"
-#~ msgstr "கட்டளை:"
-
-#~ msgid "Use startup _notification"
-#~ msgstr "தொடக்க _அறிப்பு பயன்படுத்தவும்"
-
-#~ msgid "Other Icon"
-#~ msgstr "வேரோர் குறும்படம்"
-
-#~ msgid "Drag file onto this frame to change the icon"
-#~ msgstr "குறும்படத்தை மாற்றுவதற்கு, þச்சட்டம் மேல் கோப்பு þழுத்துப் போடவும்"
-
-#, fuzzy
-#~ msgid "_Properties..."
-#~ msgstr "/_பண்புகள்..."
-
-#~ msgid "This item has no configuration options"
-#~ msgstr "þந்த உருப்படிக்கு அமைப்புத் தேர்வுகள் கிடையாது"
-
-#, fuzzy
-#~ msgid "_About Xfce"
-#~ msgstr "/_XFCE பற்றி"
-
-#, fuzzy
-#~ msgid "_Help"
-#~ msgstr "/_உதவி"
-
-#, fuzzy
-#~ msgid "E_xit"
-#~ msgstr "/வெளி_ச்செல்"
-
-#, fuzzy
-#~ msgid "icons|Terminal"
-#~ msgstr "முனையம்"
-
-#~ msgid "Settings manager not available"
-#~ msgstr "அமைப்புகள் மேலாளர் கிடையாது"
-
-#~ msgid "Taskbar"
-#~ msgstr "வேலைப் பட்டை"
-
-#~ msgid "Cannot create MCS client channel"
-#~ msgstr "MCS சேவைப்பயனர் தடம் படைக்க முடியவில்லை"
-
-#, fuzzy
-#~ msgid "_About"
-#~ msgstr "/_XFCE பற்றி"
-
-#~ msgid "Medium"
-#~ msgstr "நடுத்தரம்"
-
-#~ msgid "Autohide:"
-#~ msgstr "தானாகவே ஒளி/மறை:"
-
-#~ msgid "Behaviour"
-#~ msgstr "ஒழுக்கம்"
-
-#, fuzzy
-#~ msgid "_Top"
-#~ msgstr "மேல்"
-
-#, fuzzy
-#~ msgid "_Bottom"
-#~ msgstr "கீழ்"
-
-#, fuzzy
-#~ msgid "Height:"
-#~ msgstr "உயரம்:"
-
-#, fuzzy
-#~ msgid "Auto _hide taskbar"
-#~ msgstr "வேலைப்பட்டையை தானாகவே மறைக்கவும்"
-
-#, fuzzy
-#~ msgid "Show _pager in taskbar"
-#~ msgstr "பயனழையத்தை வேலைப்பட்டையில் காண்பிக்கவும்"
-
-#, fuzzy
-#~ msgid "Status area"
-#~ msgstr "சனி"
-
-#, fuzzy
-#~ msgid "Icon size"
-#~ msgstr "குறும்படம் முன்காட்சி"
-
-#~ msgid "Clock type:"
-#~ msgstr "கடிகாரம் வகை:"
-
-#~ msgid "Hour mode:"
-#~ msgstr "மணி வகை:"
-
-#~ msgid "24 hour"
-#~ msgstr "24 மணி"
-
-#~ msgid "12 hour"
-#~ msgstr "12 மணி"
-
-#~ msgid "Show seconds:"
-#~ msgstr "நொடிகள் காண்பிக்கவும்:"
-
-#, fuzzy
-#~ msgid "Settings"
-#~ msgstr "Xfce பலகை அமைப்புகள்"
-
-#, fuzzy
-#~ msgid "Edit launcher"
-#~ msgstr "தொடங்கர் சேர்க்கவும்"
-
-#, fuzzy
-#~ msgid "_Edit"
-#~ msgstr "பதிப்பான்"
-
-#~ msgid "Mail box:"
-#~ msgstr "அஞ்சல் பெட்டி:"
-
-#, fuzzy
-#~ msgid "New mail command:"
-#~ msgstr "அஞ்சல் கட்டளை:"
-
-#, fuzzy
-#~ msgid "Command to run when new mail arrives"
-#~ msgstr "பலகை பொத்தானை அமுத்தினால் þயக்கவேண்டிய கட்டளை"
-
-#~ msgid "Command to run when the button on the panel is clicked"
-#~ msgstr "பலகை பொத்தானை அமுத்தினால் þயக்கவேண்டிய கட்டளை"
-
-#~ msgid "Interval (sec):"
-#~ msgstr "இடைவெளி (நொடி):"
-
-#, fuzzy
-#~ msgid "Mail checker"
-#~ msgstr "அஞ்சல் சரிபார்ப்பு"
-
-#~ msgid "Graphical pager"
-#~ msgstr "வரைவியல் பயனழையம்"
-
-#~ msgid "Desktop switcher"
-#~ msgstr "வேலையிட மாற்றி"
-
-#~ msgid ""
-#~ "Access to the configuration system has been disabled.\n"
-#~ "\n"
-#~ "Ask your system administrator for more information"
-#~ msgstr ""
-#~ "அமைப்பு வடிவமைத்தலுக்கு பெறும்வழி கிடையாது.\n"
-#~ "\n"
-#~ "உங்கள் கணிப்பொறி நிர்வாகியுடன் தொடர்புகொள்ளவும்"
-
-#, fuzzy
-#~ msgid "tip|Exit"
-#~ msgstr "வெளியேறுக"
-
-#, fuzzy
-#~ msgid "tip|Setup"
-#~ msgstr "அமைப்பு"
-
-#, fuzzy
-#~ msgid "tip|Info"
-#~ msgstr "தகவல்"
-
-#~ msgid "Exit"
-#~ msgstr "வெளியேறுக"
-
-#~ msgid "Setup"
-#~ msgstr "அமைப்பு"
-
-#~ msgid "Info"
-#~ msgstr "தகவல்"
-
-#~ msgid "Button 1:"
-#~ msgstr "பொத்தான் 1:"
-
-#~ msgid "Button 2:"
-#~ msgstr "பொத்தான் 2:"
-
-#, fuzzy
-#~ msgid "_Hide"
-#~ msgstr "/_உதவி"
-
-#~ msgid "System buttons"
-#~ msgstr "அமைப்பு பொத்தான்கள்"
-
-#, fuzzy
-#~ msgid "Iconbox Settings"
-#~ msgstr "Xfce பலகை அமைப்புகள்"
-
-#, fuzzy
-#~ msgid "Xfce 4 Iconbox Settings"
-#~ msgstr "Xfce பலகை அமைப்புகள்"
-
-#, fuzzy
-#~ msgid "Taskbar Settings"
-#~ msgstr "வேலைப் பட்டை"
-
-#, fuzzy
-#~ msgid "Xfce 4 Taskbar Settings"
-#~ msgstr "Xfce பலகை அமைப்புகள்"
-
-#, fuzzy
-#~ msgid "File manager"
-#~ msgstr "கோப்பு மேலாண்மை"
-
-#, fuzzy
-#~ msgid "Manual"
-#~ msgstr "ஜனவரி"
-
-#, fuzzy
-#~ msgid "Printer Management"
-#~ msgstr "கோப்பு மேலாண்மை"
