--- a/po/tr.po
+++ b/po/tr.po
@@ -1,14 +1,14 @@
-# translation of xfce4-panel.po to Turkish
-# This file is distributed under the same license as the PACKAGE package.
-# Copyright (C) 2004 THE PACKAGE'S COPYRIGHT HOLDER
-# Erçin EKER <ercin.eker@linux.org.tr>, 2004
+# Turkish translations for xfce4-panel package.
+# Copyright (C) 2005 Jasper Huijsmans.
+# This file is distributed under the same license as the xfce4-panel package.
+# Erçin EKER <ercin.eker@linux.org.tr>, 2004.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel\n"
+"Project-Id-Version: xfce4-panel 4.3.22\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-09-28 10:01+0200\n"
-"PO-Revision-Date: 2004-10-10 11:59+0300\n"
+"POT-Creation-Date: 2005-09-29 20:47+0900\n"
+"PO-Revision-Date: 2005-09-29 20:43+0900\n"
 "Last-Translator: Erçin EKER <ercin.eker@linux.org.tr>\n"
 "Language-Team: Turkish <tr@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -85,7 +85,7 @@ msgstr ""
 msgid "Restart"
 msgstr "_Yeniden Başlat"
 
-#: ../panel/panel-item-manager.c:327 ../panel/panel-item-manager.c:335
+#: ../panel/panel-item-manager.c:353 ../panel/panel-item-manager.c:361
 #, fuzzy, c-format
 msgid "Could not open \"%s\" module"
 msgstr "Panel nesnesi \"%s\" oluşturulamıyor."
@@ -631,412 +631,3 @@ msgstr "Uygulama _isimlerini göster"
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
 msgstr ""
-
-#, fuzzy
-#~ msgid "Panel Settings"
-#~ msgstr "Xfce Panel Ayarları"
-
-#, fuzzy
-#~ msgid "Xfce 4 Panel Settings"
-#~ msgstr "Xfce Panel Ayarları"
-
-#~ msgid "No data was found. The panel will be empty."
-#~ msgstr "Hiçbir veri bulunamadı. Panel boş olacak."
-
-#~ msgid "Position:"
-#~ msgstr "Konum:"
-
-#~ msgid "Command:"
-#~ msgstr "Komut:"
-
-#~ msgid "Use startup _notification"
-#~ msgstr "Başlangıç _uyarısı kullan"
-
-#~ msgid "Other Icon"
-#~ msgstr "Diğer Simge"
-
-#~ msgid "Drag file onto this frame to change the icon"
-#~ msgstr "Simgeyi değiştirmek için bu çerçeveye bir dosya sürükleyin"
-
-#~ msgid "%s: Successfully started without session management"
-#~ msgstr "%s: Oturum yöneticimi olmadan başarıyla başladı"
-
-#~ msgid "%s: Successfully started with session management"
-#~ msgstr "%s: Oturum yönetimiyle başarıyla başladı"
-
-#~ msgid "Could not create panel item \"%s\"."
-#~ msgstr "Panel nesnesi \"%s\" oluşturulamıyor."
-
-#~ msgid "_Properties..."
-#~ msgstr "_Seçenekler..."
-
-#~ msgid "_Remove"
-#~ msgstr "_Sil"
-
-#~ msgid "Add _new item"
-#~ msgstr "Yeni nesne _ekle"
-
-#~ msgid "This item has no configuration options"
-#~ msgstr "Bu nesne ayarlanabilir seçenek sunmuyor"
-
-#~ msgid "_About Xfce"
-#~ msgstr "Xfce _Hakkında"
-
-#~ msgid "_Help"
-#~ msgstr "_Yardım"
-
-#~ msgid "E_xit"
-#~ msgstr "_Çık"
-
-#, fuzzy
-#~ msgid "icons|Terminal"
-#~ msgstr "Terminal"
-
-#~ msgid "Settings manager not available"
-#~ msgstr "Ayar yöneticisi kullanılamıyor"
-
-#~ msgid "Taskbar"
-#~ msgstr "Görev çubuğu"
-
-#~ msgid "Cannot create MCS client channel"
-#~ msgstr "MCS istemci kanalı oluşturulamıyor"
-
-#, fuzzy
-#~ msgid "_About"
-#~ msgstr "Xfce _Hakkında"
-
-#~ msgid "Medium"
-#~ msgstr "Orta"
-
-#~ msgid "Huge"
-#~ msgstr "Kocaman"
-
-#~ msgid "Panel size:"
-#~ msgstr "Panel boyutu:"
-
-#~ msgid "Autohide:"
-#~ msgstr "Otomatik Gizleme:"
-
-#~ msgid "Behaviour"
-#~ msgstr "Davranış"
-
-#~ msgid "_Top"
-#~ msgstr "Ü_st"
-
-#~ msgid "_Bottom"
-#~ msgstr "A_lt"
-
-#, fuzzy
-#~ msgid "Alignment:"
-#~ msgstr "Hizalama"
-
-#~ msgid "_Left"
-#~ msgstr "_Sol"
-
-#~ msgid "_Center"
-#~ msgstr "_Merkez"
-
-#~ msgid "_Right"
-#~ msgstr "S_ağ"
-
-#, fuzzy
-#~ msgid "Height:"
-#~ msgstr "Yükseklik:"
-
-#~ msgid "Width:"
-#~ msgstr "Genişlik:"
-
-#~ msgid "Auto _hide taskbar"
-#~ msgstr "Görev çubuğunu Oto. _gizle"
-
-#~ msgid "Show _pager in taskbar"
-#~ msgstr "Görev çubuğunda _sayfalayıcıyı göster"
-
-#, fuzzy
-#~ msgid "Status area"
-#~ msgstr "Cumartesi"
-
-#, fuzzy
-#~ msgid "Icon size"
-#~ msgstr "Simge Önizlemesi"
-
-#~ msgid "%A, %d %B %Y"
-#~ msgstr "%d %B %Y, %A"
-
-#~ msgid "Clock type:"
-#~ msgstr "Saat türü:"
-
-#~ msgid "Hour mode:"
-#~ msgstr "Saat biçimi:"
-
-#~ msgid "24 hour"
-#~ msgstr "24 saat"
-
-#~ msgid "12 hour"
-#~ msgstr "12 saat"
-
-#~ msgid "Show seconds:"
-#~ msgstr "Saniyeyi göster:"
-
-#, fuzzy
-#~ msgid "Settings"
-#~ msgstr "Xfce Panel Ayarları"
-
-#, fuzzy
-#~ msgid "Edit launcher"
-#~ msgstr "Başlatıcı ekle"
-
-#, fuzzy
-#~ msgid "_Edit"
-#~ msgstr "Düzenleyici"
-
-#~ msgid "Mail box:"
-#~ msgstr "Posta kutusu:"
-
-#~ msgid "New mail command:"
-#~ msgstr "Yeni posta komutu:"
-
-#~ msgid "Command to run when new mail arrives"
-#~ msgstr "Yeni posta geldiğinde çalıştırılacak komut"
-
-#~ msgid "Command to run when the button on the panel is clicked"
-#~ msgstr "Paneldeki düğmeye tıklandığında çalıştırılacak komut"
-
-#~ msgid "Interval (sec):"
-#~ msgstr "Gecikme (sn):"
-
-#~ msgid "Mail checker"
-#~ msgstr "Posta denetleyici"
-
-#~ msgid "Graphical pager"
-#~ msgstr "Grafik sayfalayıcı"
-
-#~ msgid "Desktop switcher"
-#~ msgstr "Masaüstü değiştirici"
-
-#~ msgid ""
-#~ "Access to the configuration system has been disabled.\n"
-#~ "\n"
-#~ "Ask your system administrator for more information"
-#~ msgstr ""
-#~ "Yapılandırma sistemine erişim iptal edilmiş.\n"
-#~ "\n"
-#~ "Daha fazla bilgi için sistem yöneticinize baş vurun"
-
-#, fuzzy
-#~ msgid "tip|Exit"
-#~ msgstr "Çıkış"
-
-#, fuzzy
-#~ msgid "tip|Setup"
-#~ msgstr "Ayarlar"
-
-#, fuzzy
-#~ msgid "tip|Info"
-#~ msgstr "Bilgi"
-
-#~ msgid "Exit"
-#~ msgstr "Çıkış"
-
-#~ msgid "Setup"
-#~ msgstr "Ayarlar"
-
-#~ msgid "Info"
-#~ msgstr "Bilgi"
-
-#~ msgid "Button 1:"
-#~ msgstr "Düğme 1:"
-
-#~ msgid "Button 2:"
-#~ msgstr "Düğme 2:"
-
-#~ msgid "_Hide"
-#~ msgstr "_Gizle"
-
-#~ msgid "System buttons"
-#~ msgstr "Sistem düğmeleri"
-
-#, fuzzy
-#~ msgid "Iconbox Settings"
-#~ msgstr "Xfce Panel Ayarları"
-
-#, fuzzy
-#~ msgid "Xfce 4 Iconbox Settings"
-#~ msgstr "Xfce Panel Ayarları"
-
-#, fuzzy
-#~ msgid "Taskbar Settings"
-#~ msgstr "Görev çubuğu"
-
-#, fuzzy
-#~ msgid "Xfce 4 Taskbar Settings"
-#~ msgstr "Xfce Panel Ayarları"
-
-#, fuzzy
-#~ msgid "File manager"
-#~ msgstr "Dosya yönetimi"
-
-#, fuzzy
-#~ msgid "Manual"
-#~ msgstr "Ocak"
-
-#, fuzzy
-#~ msgid "Printer Management"
-#~ msgstr "Dosya yönetimi"
-
-#~ msgid "Removing the item will also remove its popup menu."
-#~ msgstr "Bu bileşeni silmek ona bağlı menüyüde silecektir."
-
-#~ msgid "Caption:"
-#~ msgstr "Başlık:"
-
-#~ msgid "Tooltip:"
-#~ msgstr "İpucu:"
-
-#~ msgid "Attach menu to launcher"
-#~ msgstr "Başlatıcıya menü ekle"
-
-#~ msgid "Change menu item"
-#~ msgstr "Menü nesnesini değiştir"
-
-#~ msgid "Click mouse button 3 to change item"
-#~ msgstr "Nesneyi değiştirmek için farenin 3. tuşuna basın"
-
-#~ msgid "Add launcher"
-#~ msgstr "Başlatıcı ekle"
-
-#~ msgid "Left"
-#~ msgstr "Sol"
-
-#~ msgid "Right"
-#~ msgstr "Sağ"
-
-#~ msgid "Top"
-#~ msgstr "Üst"
-
-#~ msgid "Bottom"
-#~ msgstr "Alt"
-
-#~ msgid "Popup position:"
-#~ msgstr "Popup konumu:"
-
-#, fuzzy
-#~ msgid "Notification Area"
-#~ msgstr "Bilgilendirme bölümü"
-
-#~ msgid "Menu"
-#~ msgstr "Menü"
-
-#~ msgid "Always on top:"
-#~ msgstr "Her zaman üstte:"
-
-#~ msgid "Show _system tray in taskbar"
-#~ msgstr "Sis_tem çekmecesini görev çubuğunda göster"
-
-#~ msgid "Cannot get initial style"
-#~ msgstr "Stil elde edilemiyor"
-
-#~ msgid "This should not happen"
-#~ msgstr "Bu gerçekleşmeyecek"
-
-#~ msgid "Cannot get default screen\n"
-#~ msgstr "Öntanımlı ekran belirlenemiyor\n"
-
-#~ msgid "Cannot connect to session manager"
-#~ msgstr "Oturum yöneticisine bağlanılamıyor"
-
-#~ msgid "Show two buttons:"
-#~ msgstr "İki düğme göster:"
-
-#~ msgid "Change item"
-#~ msgstr "Nesneyi değiştir"
-
-#~ msgid "Menu:"
-#~ msgstr "Menü:"
-
-#~ msgid "/Xfce Panel"
-#~ msgstr "/Xfce Paneli"
-
-#~ msgid "/Add _new item"
-#~ msgstr "/Yeni nesne _ekle"
-
-#~ msgid "/_Properties..."
-#~ msgstr "/_Özellikler..."
-
-#~ msgid ""
-#~ "Your window manager does not seem to support the new window manager hints "
-#~ "as defined on http://www.freedesktop.org. \n"
-#~ "Some Xfce features may not work as intended."
-#~ msgstr ""
-#~ "Kullandığınız pencere yöneticisi http://www.freedesktop.org' ta "
-#~ "belirtilen ipuçlarını desteklemiyor görünüyor. \n"
-#~ "Bazı Xfce özellikleri çalışmayabilir."
-
-#~ msgid "/_Settings manager"
-#~ msgstr "/_Ayar yöneticisi"
-
-#~ msgid "Tiny"
-#~ msgstr "İnce"
-
-#~ msgid "Icon theme:"
-#~ msgstr "Simge teması:"
-
-#~ msgid "Normal"
-#~ msgstr "Normal"
-
-#~ msgid "Center the panel:"
-#~ msgstr "Paneli ortala:"
-
-#~ msgid "Set"
-#~ msgstr "Uygula"
-
-#~ msgid "Sunday"
-#~ msgstr "Pazar"
-
-#~ msgid "Monday"
-#~ msgstr "Pazartesi"
-
-#~ msgid "Tuesday"
-#~ msgstr "Salı"
-
-#~ msgid "Wednesday"
-#~ msgstr "Çarşamba"
-
-#~ msgid "Thursday"
-#~ msgstr "Perşembe"
-
-#~ msgid "Friday"
-#~ msgstr "Cuma"
-
-#~ msgid "February"
-#~ msgstr "Şubat"
-
-#~ msgid "March"
-#~ msgstr "Mart"
-
-#~ msgid "April"
-#~ msgstr "Nisan"
-
-#~ msgid "May"
-#~ msgstr "Mayıs"
-
-#~ msgid "June"
-#~ msgstr "Haziran"
-
-#~ msgid "July"
-#~ msgstr "Temmuz"
-
-#~ msgid "August"
-#~ msgstr "Ağustos"
-
-#~ msgid "September"
-#~ msgstr "Eylül"
-
-#~ msgid "October"
-#~ msgstr "Ekim"
-
-#~ msgid "November"
-#~ msgstr "Kasım"
-
-#~ msgid "December"
-#~ msgstr "Aralık"
