--- a/po/uk.po
+++ b/po/uk.po
@@ -1,16 +1,16 @@
 # Ukrainian translation of xfce4-panel.
-# Copyright (C) 2003, Free Software Foundation, Inc
+# Copyright (C) 2005 Jasper Huijsmans.
 # This file is distributed under the same license as the xfce4-panel package.
 # Maxim Dziumanenko <mvd@mylinux.com.ua>, 2003-2005.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel\n"
+"Project-Id-Version: xfce4-panel 4.3.22\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-09-28 10:01+0200\n"
-"PO-Revision-Date: 2005-01-6 00:21+0200\n"
-"Last-Translator: axim Dziumanenko <mvd@mylinux.com.ua>\n"
-"Language-Team: Ukrainian <uk@li.org>\n"
+"POT-Creation-Date: 2005-09-29 20:47+0900\n"
+"PO-Revision-Date: 2005-09-29 20:43+0900\n"
+"Last-Translator: Maxim Dziumanenko <mvd@mylinux.com.ua>\n"
+"Language-Team: Ukrainian <translation-team-uk@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -85,7 +85,7 @@ msgstr ""
 msgid "Restart"
 msgstr "_Перезапустити"
 
-#: ../panel/panel-item-manager.c:327 ../panel/panel-item-manager.c:335
+#: ../panel/panel-item-manager.c:353 ../panel/panel-item-manager.c:361
 #, fuzzy, c-format
 msgid "Could not open \"%s\" module"
 msgstr "Не вдається створити елемент панелі \"%s\"."
@@ -624,281 +624,3 @@ msgstr ""
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
 msgstr ""
-
-#, fuzzy
-#~ msgid "Panel Settings"
-#~ msgstr "Параметри панелі Xfce"
-
-#, fuzzy
-#~ msgid "Xfce 4 Panel Settings"
-#~ msgstr "Параметри панелі Xfce"
-
-#~ msgid "No data was found. The panel will be empty."
-#~ msgstr "Дані не знайдено. Панель буде порожня."
-
-#~ msgid "Position:"
-#~ msgstr "Позиція:"
-
-#~ msgid "Command:"
-#~ msgstr "Команда:"
-
-#~ msgid "Use startup _notification"
-#~ msgstr "Використовувати _сповіщення про запуск"
-
-#~ msgid "Other Icon"
-#~ msgstr "Інший значок"
-
-#~ msgid "Drag file onto this frame to change the icon"
-#~ msgstr "Перетягніть сюди файл, щоб змінити значок"
-
-#~ msgid "%s: Successfully started without session management"
-#~ msgstr "%s: Успішно запущено без керування сеансами"
-
-#~ msgid "%s: Successfully started with session management"
-#~ msgstr "%s: Успішно запущено. Керування сеансами увімкнено."
-
-#~ msgid "Could not create panel item \"%s\"."
-#~ msgstr "Не вдається створити елемент панелі \"%s\"."
-
-#~ msgid "_Properties..."
-#~ msgstr "В_ластивості..."
-
-#~ msgid "Add _new item"
-#~ msgstr "Додати _новий об'єкт"
-
-#~ msgid "This item has no configuration options"
-#~ msgstr "Об'єкт не має параметрів"
-
-#~ msgid "_About Xfce"
-#~ msgstr "_Про Xfce"
-
-#~ msgid "_Help"
-#~ msgstr "_Довідка"
-
-#~ msgid "E_xit"
-#~ msgstr "Ви_йти"
-
-#, fuzzy
-#~ msgid "icons|Terminal"
-#~ msgstr "Термінал"
-
-#~ msgid "Settings manager not available"
-#~ msgstr "Менеджер параметрів відсутній"
-
-#~ msgid "Taskbar"
-#~ msgstr "Панель задач"
-
-#~ msgid "Cannot create MCS client channel"
-#~ msgstr "Неможливо створити канал до MCS клієнта"
-
-#, fuzzy
-#~ msgid "_About"
-#~ msgstr "_Про Xfce"
-
-#~ msgid "Medium"
-#~ msgstr "Середній"
-
-#~ msgid "Huge"
-#~ msgstr "Величезний"
-
-#~ msgid "Autohide:"
-#~ msgstr "Автоматично приховувати:"
-
-#~ msgid "Behaviour"
-#~ msgstr "Поведінка"
-
-#, fuzzy
-#~ msgid "_Top"
-#~ msgstr "Згори"
-
-#, fuzzy
-#~ msgid "_Bottom"
-#~ msgstr "Знизу"
-
-#, fuzzy
-#~ msgid "Height:"
-#~ msgstr "Висота:"
-
-#, fuzzy
-#~ msgid "Auto _hide taskbar"
-#~ msgstr "Автоматично приховувати панель задач"
-
-#, fuzzy
-#~ msgid "Show _pager in taskbar"
-#~ msgstr "Показувати пейджер на панелі задач"
-
-#~ msgid "%A, %d %B %Y"
-#~ msgstr "%A, %d %B %Y"
-
-#~ msgid "Clock type:"
-#~ msgstr "Тип годинника:"
-
-#~ msgid "Hour mode:"
-#~ msgstr "Режим годинника:"
-
-#~ msgid "24 hour"
-#~ msgstr "24 години"
-
-#~ msgid "12 hour"
-#~ msgstr "12 години"
-
-#~ msgid "Show seconds:"
-#~ msgstr "Показувати секунди:"
-
-#, fuzzy
-#~ msgid "Settings"
-#~ msgstr "Параметри панелі Xfce"
-
-#, fuzzy
-#~ msgid "Edit launcher"
-#~ msgstr "Додати запуск"
-
-#, fuzzy
-#~ msgid "_Edit"
-#~ msgstr "Редактор"
-
-#~ msgid "Mail box:"
-#~ msgstr "Поштова скринька:"
-
-#~ msgid "New mail command:"
-#~ msgstr "При отриманні нової пошти виконувати:"
-
-#~ msgid "Command to run when new mail arrives"
-#~ msgstr "Команда, що виконується при отриманні нової пошти"
-
-#~ msgid "Command to run when the button on the panel is clicked"
-#~ msgstr "Команда, що виконується при натисканні кнопки на панелі"
-
-#~ msgid "Interval (sec):"
-#~ msgstr "Інтервал (сек):"
-
-#~ msgid "Mail checker"
-#~ msgstr "Перевірка почти"
-
-#~ msgid "Graphical pager"
-#~ msgstr "Графічний пейджер"
-
-#~ msgid "Desktop switcher"
-#~ msgstr "Перемикач робочих стільниць"
-
-#~ msgid ""
-#~ "Access to the configuration system has been disabled.\n"
-#~ "\n"
-#~ "Ask your system administrator for more information"
-#~ msgstr ""
-#~ "Доступ до параметрів системи заборонено.\n"
-#~ "\n"
-#~ "Зверніться до системного адміністратора."
-
-#, fuzzy
-#~ msgid "tip|Exit"
-#~ msgstr "Вийти"
-
-#, fuzzy
-#~ msgid "tip|Setup"
-#~ msgstr "Параметри"
-
-#, fuzzy
-#~ msgid "tip|Info"
-#~ msgstr "Інформація"
-
-#~ msgid "Exit"
-#~ msgstr "Вийти"
-
-#~ msgid "Setup"
-#~ msgstr "Параметри"
-
-#~ msgid "Info"
-#~ msgstr "Інформація"
-
-#~ msgid "Button 1:"
-#~ msgstr "Кнопка 1:"
-
-#~ msgid "Button 2:"
-#~ msgstr "Кнопка 2:"
-
-#~ msgid "_Hide"
-#~ msgstr "С_ховати"
-
-#~ msgid "System buttons"
-#~ msgstr "Системні кнопки"
-
-#, fuzzy
-#~ msgid "Iconbox Settings"
-#~ msgstr "Параметри панелі Xfce"
-
-#, fuzzy
-#~ msgid "Xfce 4 Iconbox Settings"
-#~ msgstr "Параметри панелі Xfce"
-
-#, fuzzy
-#~ msgid "Taskbar Settings"
-#~ msgstr "Панель задач"
-
-#, fuzzy
-#~ msgid "Xfce 4 Taskbar Settings"
-#~ msgstr "Параметри панелі Xfce"
-
-#, fuzzy
-#~ msgid "File manager"
-#~ msgstr "Менеджер файлів"
-
-#, fuzzy
-#~ msgid "Printer Management"
-#~ msgstr "Менеджер файлів"
-
-#~ msgid "Removing the item will also remove its popup menu."
-#~ msgstr "При видаленні об'єкта також буде видало його підменю."
-
-#~ msgid "Caption:"
-#~ msgstr "Назва:"
-
-#~ msgid "Tooltip:"
-#~ msgstr "Підказка:"
-
-#~ msgid "Attach menu to launcher"
-#~ msgstr "Додати меню до об'єкта"
-
-#~ msgid "Change menu item"
-#~ msgstr "Зміна елемента меню"
-
-#~ msgid "Click mouse button 3 to change item"
-#~ msgstr "Клацніть середньою кнопкою миші щоб змінити об'єкт"
-
-#~ msgid "Add launcher"
-#~ msgstr "Додати запуск"
-
-#~ msgid "Left"
-#~ msgstr "Зліва"
-
-#~ msgid "Right"
-#~ msgstr "Справа"
-
-#~ msgid "Top"
-#~ msgstr "Згори"
-
-#~ msgid "Bottom"
-#~ msgstr "Знизу"
-
-#~ msgid "Popup position:"
-#~ msgstr "Кнопка меню:"
-
-#~ msgid "Menu"
-#~ msgstr "Меню"
-
-#, fuzzy
-#~ msgid "Show _system tray in taskbar"
-#~ msgstr "Показувати системний лоток на панелі задач"
-
-#~ msgid "Cannot get initial style"
-#~ msgstr "Помилка отримання початкового стилю"
-
-#~ msgid "This should not happen"
-#~ msgstr "Цього не повинно бути"
-
-#, fuzzy
-#~ msgid "Cannot get default screen\n"
-#~ msgstr "Неможливо визначити поля робочої стільниці"
-
-#~ msgid "Cannot connect to session manager"
-#~ msgstr "Помилка підключення до менеджера сеансів"
