--- a/po/ar.po
+++ b/po/ar.po
@@ -1,15 +1,15 @@
 # Arabic translations for xfce4-panel package.
-# Copyright (C) 2002-2005 The Xfce development team.
+# Copyright (C) 2005 Jasper Huijsmans.
 # This file is distributed under the same license as the xfce4-panel package.
-# saleh alhathal <hathalsal@hotmail.com>, 2004.
+# Saleh Alhathal <hathalsal@hotmail.com>, 2004.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel 4.3.2\n"
+"Project-Id-Version: xfce4-panel 4.3.22\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-09-28 10:01+0200\n"
-"PO-Revision-Date: 2005-08-21 17:26+0900\n"
-"Last-Translator: saleh alhathal <hathalsal@hotmail.com>\n"
+"POT-Creation-Date: 2005-09-29 20:47+0900\n"
+"PO-Revision-Date: 2005-09-29 20:15+0900\n"
+"Last-Translator: Saleh Alhathal <hathalsal@hotmail.com>\n"
 "Language-Team: Arabic <lumina@silverpen.de>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -85,7 +85,7 @@ msgstr ""
 msgid "Restart"
 msgstr "/_إعادة التشغيل"
 
-#: ../panel/panel-item-manager.c:327 ../panel/panel-item-manager.c:335
+#: ../panel/panel-item-manager.c:353 ../panel/panel-item-manager.c:361
 #, c-format
 msgid "Could not open \"%s\" module"
 msgstr ""
@@ -623,219 +623,3 @@ msgstr ""
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
 msgstr ""
-
-#, fuzzy
-#~ msgid "Panel Settings"
-#~ msgstr "إعدادات شريط Xfce"
-
-#, fuzzy
-#~ msgid "Xfce 4 Panel Settings"
-#~ msgstr "إعدادات شريط Xfce"
-
-#~ msgid "Position:"
-#~ msgstr "موقع:"
-
-#~ msgid "Command:"
-#~ msgstr "أمر :"
-
-#~ msgid "Use startup _notification"
-#~ msgstr "أستخدم _تنبية بدأ التشغيل"
-
-#~ msgid "Other Icon"
-#~ msgstr "أيقونة أخرى"
-
-#~ msgid "Drag file onto this frame to change the icon"
-#~ msgstr "إسحب الملف لهذا اﻹطار لتغير أيقونته"
-
-#, fuzzy
-#~ msgid "_Properties..."
-#~ msgstr "/_خصائص..."
-
-#~ msgid "This item has no configuration options"
-#~ msgstr "ﻻ يحوي على خيرات أعداد"
-
-#, fuzzy
-#~ msgid "_About Xfce"
-#~ msgstr "/_حول Xfce"
-
-#, fuzzy
-#~ msgid "_Help"
-#~ msgstr "/_مساعدة"
-
-#, fuzzy
-#~ msgid "E_xit"
-#~ msgstr "/خ_روج"
-
-#, fuzzy
-#~ msgid "icons|Terminal"
-#~ msgstr "سطر اﻷوامر"
-
-#~ msgid "Settings manager not available"
-#~ msgstr "مدير اﻹعدادات غير متوفر"
-
-#~ msgid "Taskbar"
-#~ msgstr "شريط المهام"
-
-#~ msgid "Cannot create MCS client channel"
-#~ msgstr "لم أستطع تكوين قناة عميل MCS"
-
-#, fuzzy
-#~ msgid "_About"
-#~ msgstr "/_حول Xfce"
-
-#~ msgid "Medium"
-#~ msgstr "متوسط"
-
-#~ msgid "Autohide:"
-#~ msgstr "إخفاء تلقائي"
-
-#~ msgid "Behaviour"
-#~ msgstr "سلوك"
-
-#, fuzzy
-#~ msgid "_Top"
-#~ msgstr "أعلى"
-
-#, fuzzy
-#~ msgid "_Bottom"
-#~ msgstr "أسفل"
-
-#, fuzzy
-#~ msgid "Height:"
-#~ msgstr "إرتفاع :"
-
-#, fuzzy
-#~ msgid "Auto _hide taskbar"
-#~ msgstr "إخفاء ذاتي لشريط المهام"
-
-#, fuzzy
-#~ msgid "Show _pager in taskbar"
-#~ msgstr "أظهر مراقب المهام على الشريط"
-
-#, fuzzy
-#~ msgid "Icon size"
-#~ msgstr "عرض أيقونات"
-
-#~ msgid "%A, %d %B %Y"
-#~ msgstr "%A, %d %B %Y"
-
-#~ msgid "Clock type:"
-#~ msgstr "نوع الساعة:"
-
-#~ msgid "Hour mode:"
-#~ msgstr "نظام الساعة:"
-
-#~ msgid "24 hour"
-#~ msgstr "24 ساعة"
-
-#~ msgid "12 hour"
-#~ msgstr "12 ساعة"
-
-#~ msgid "Show seconds:"
-#~ msgstr "إضهار الثواني :"
-
-#, fuzzy
-#~ msgid "Settings"
-#~ msgstr "إعدادات شريط Xfce"
-
-#, fuzzy
-#~ msgid "Edit launcher"
-#~ msgstr "أضف برنامج"
-
-#, fuzzy
-#~ msgid "_Edit"
-#~ msgstr "محرر"
-
-#~ msgid "Mail box:"
-#~ msgstr "حاوي البريد:"
-
-#, fuzzy
-#~ msgid "New mail command:"
-#~ msgstr "أمر البريد:"
-
-#, fuzzy
-#~ msgid "Command to run when new mail arrives"
-#~ msgstr "عند الضغط علي الزر يتم تنفيذ اﻷمر"
-
-#~ msgid "Command to run when the button on the panel is clicked"
-#~ msgstr "عند الضغط علي الزر يتم تنفيذ اﻷمر"
-
-#~ msgid "Interval (sec):"
-#~ msgstr "فترة بثانية :"
-
-#, fuzzy
-#~ msgid "Mail checker"
-#~ msgstr "مراقبة البريد"
-
-#~ msgid "Graphical pager"
-#~ msgstr "مراقب المهام"
-
-#~ msgid "Desktop switcher"
-#~ msgstr "محول سطح المكتب"
-
-#~ msgid ""
-#~ "Access to the configuration system has been disabled.\n"
-#~ "\n"
-#~ "Ask your system administrator for more information"
-#~ msgstr ""
-#~ "تم رفض دخولك ﻹعدادات النظام\n"
-#~ "\n"
-#~ "لمزيد من المعلومات إسأل مدير الجهاز"
-
-#, fuzzy
-#~ msgid "tip|Exit"
-#~ msgstr "خروج"
-
-#, fuzzy
-#~ msgid "tip|Setup"
-#~ msgstr "إعدادات"
-
-#, fuzzy
-#~ msgid "tip|Info"
-#~ msgstr "معلومات"
-
-#~ msgid "Exit"
-#~ msgstr "خروج"
-
-#~ msgid "Setup"
-#~ msgstr "إعدادات"
-
-#~ msgid "Info"
-#~ msgstr "معلومات"
-
-#~ msgid "Button 1:"
-#~ msgstr "زر 1:"
-
-#~ msgid "Button 2:"
-#~ msgstr "زر 2:"
-
-#, fuzzy
-#~ msgid "_Hide"
-#~ msgstr "/_مساعدة"
-
-#~ msgid "System buttons"
-#~ msgstr "زر النظام"
-
-#, fuzzy
-#~ msgid "Iconbox Settings"
-#~ msgstr "إعدادات شريط Xfce"
-
-#, fuzzy
-#~ msgid "Xfce 4 Iconbox Settings"
-#~ msgstr "إعدادات شريط Xfce"
-
-#, fuzzy
-#~ msgid "Taskbar Settings"
-#~ msgstr "شريط المهام"
-
-#, fuzzy
-#~ msgid "Xfce 4 Taskbar Settings"
-#~ msgstr "إعدادات شريط Xfce"
-
-#, fuzzy
-#~ msgid "File manager"
-#~ msgstr "متصفح الملفات"
-
-#, fuzzy
-#~ msgid "Printer Management"
-#~ msgstr "متصفح الملفات"
