--- a/po/ca.po
+++ b/po/ca.po
@@ -1,13 +1,13 @@
 # xfce4-panel for XFce desktop environment.
-# Copyright (C) 2002-2005 The Xfce development team.
+# Copyright (C) 2005 Jasper Huijsmans.
 # This file is distributed under the same license as the xfce4-panel package.
 # Carles Muñoz Gorriz <carlesmu@internuatas.org>, 2003-2004.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: XFce 4\n"
+"Project-Id-Version: xfce4-panel 4.3.22\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-09-28 10:01+0200\n"
+"POT-Creation-Date: 2005-09-29 20:47+0900\n"
 "PO-Revision-Date: 2005-08-21 17:41+0900\n"
 "Last-Translator: Carles Munoz Gorriz <carlesmu@internautas.org>\n"
 "Language-Team: Catalan <ca@dodds.net>\n"
@@ -86,7 +86,7 @@ msgstr ""
 msgid "Restart"
 msgstr "/_Reinicia"
 
-#: ../panel/panel-item-manager.c:327 ../panel/panel-item-manager.c:335
+#: ../panel/panel-item-manager.c:353 ../panel/panel-item-manager.c:361
 #, c-format
 msgid "Could not open \"%s\" module"
 msgstr ""
@@ -625,337 +625,3 @@ msgstr ""
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
 msgstr ""
-
-#, fuzzy
-#~ msgid "Panel Settings"
-#~ msgstr "Ajustaments del Plafó XFce"
-
-#, fuzzy
-#~ msgid "Xfce 4 Panel Settings"
-#~ msgstr "Ajustaments del Plafó XFce"
-
-#~ msgid "Position:"
-#~ msgstr "Posició:"
-
-#~ msgid "Command:"
-#~ msgstr "Ordre:"
-
-#~ msgid "Use startup _notification"
-#~ msgstr "Utilitzeu _notificació d'inicialització"
-
-#~ msgid "Other Icon"
-#~ msgstr "Una altra icona"
-
-#~ msgid "Drag file onto this frame to change the icon"
-#~ msgstr "Arrossega el fitxer dins d'aquest marc per canviar la icona"
-
-#, fuzzy
-#~ msgid "_Properties..."
-#~ msgstr "/_Propietats..."
-
-#, fuzzy
-#~ msgid "_Remove"
-#~ msgstr "/_Elimina"
-
-#, fuzzy
-#~ msgid "Add _new item"
-#~ msgstr "/Afegir _nou element"
-
-#~ msgid "This item has no configuration options"
-#~ msgstr "Aquest element no té opcions de configuració"
-
-#, fuzzy
-#~ msgid "_About Xfce"
-#~ msgstr "/_Quant a XFce"
-
-#, fuzzy
-#~ msgid "_Help"
-#~ msgstr "/_Ajuda"
-
-#, fuzzy
-#~ msgid "E_xit"
-#~ msgstr "/S_urt"
-
-#, fuzzy
-#~ msgid "icons|Terminal"
-#~ msgstr "Terminal"
-
-#~ msgid "Settings manager not available"
-#~ msgstr "El gestor d'ajustaments no està disponible"
-
-#~ msgid "Taskbar"
-#~ msgstr "Barra de tasques"
-
-#~ msgid "Cannot create MCS client channel"
-#~ msgstr "No es pot crear el canal del client MCS"
-
-#, fuzzy
-#~ msgid "_About"
-#~ msgstr "/_Quant a XFce"
-
-#~ msgid "Medium"
-#~ msgstr "Mitjà"
-
-#~ msgid "Panel size:"
-#~ msgstr "Tamany del plafó:"
-
-#~ msgid "Autohide:"
-#~ msgstr "Ocultació automàtica:"
-
-#~ msgid "Behaviour"
-#~ msgstr "Comportament"
-
-#, fuzzy
-#~ msgid "_Top"
-#~ msgstr "A dalt"
-
-#, fuzzy
-#~ msgid "_Bottom"
-#~ msgstr "A baix"
-
-#, fuzzy
-#~ msgid "Height:"
-#~ msgstr "Alçada:"
-
-#, fuzzy
-#~ msgid "Auto _hide taskbar"
-#~ msgstr "Ocultar automàticament la barra de tasques"
-
-#, fuzzy
-#~ msgid "Show _pager in taskbar"
-#~ msgstr "Mostra el paginador en la barra de tasques"
-
-#, fuzzy
-#~ msgid "Icon size"
-#~ msgstr "Previsualització d'icona"
-
-#, fuzzy
-#~ msgid "%A, %d %B %Y"
-#~ msgstr "%A, %-d %B %Y"
-
-#~ msgid "Clock type:"
-#~ msgstr "Tipus de rellotge:"
-
-#~ msgid "Hour mode:"
-#~ msgstr "Format d'hora:"
-
-#~ msgid "24 hour"
-#~ msgstr "24 hores"
-
-#~ msgid "12 hour"
-#~ msgstr "12 hores"
-
-#~ msgid "Show seconds:"
-#~ msgstr "Mostra els segons:"
-
-#, fuzzy
-#~ msgid "Settings"
-#~ msgstr "Ajustaments del Plafó XFce"
-
-#, fuzzy
-#~ msgid "Edit launcher"
-#~ msgstr "Afegir llançador"
-
-#, fuzzy
-#~ msgid "_Edit"
-#~ msgstr "Editor"
-
-#~ msgid "Mail box:"
-#~ msgstr "Bústia del correu:"
-
-#, fuzzy
-#~ msgid "New mail command:"
-#~ msgstr "Programa de correu:"
-
-#, fuzzy
-#~ msgid "Command to run when new mail arrives"
-#~ msgstr "Programa a executar quan cliqueu el butó del plafó"
-
-#~ msgid "Command to run when the button on the panel is clicked"
-#~ msgstr "Programa a executar quan cliqueu el butó del plafó"
-
-#~ msgid "Interval (sec):"
-#~ msgstr "Interval (seg):"
-
-#, fuzzy
-#~ msgid "Mail checker"
-#~ msgstr "Comprovació de correu"
-
-#~ msgid "Graphical pager"
-#~ msgstr "Paginador gràfic"
-
-#~ msgid "Desktop switcher"
-#~ msgstr "Canviador d'escriptori"
-
-#~ msgid ""
-#~ "Access to the configuration system has been disabled.\n"
-#~ "\n"
-#~ "Ask your system administrator for more information"
-#~ msgstr ""
-#~ "L'acces a la configuració del sistema ha estat inhabilitada.\n"
-#~ "\n"
-#~ "Demaneu al vostre administrador del sistema més informació"
-
-#, fuzzy
-#~ msgid "tip|Exit"
-#~ msgstr "Sortir"
-
-#, fuzzy
-#~ msgid "tip|Setup"
-#~ msgstr "Configuració"
-
-#, fuzzy
-#~ msgid "tip|Info"
-#~ msgstr "Informació"
-
-#~ msgid "Exit"
-#~ msgstr "Sortir"
-
-#~ msgid "Setup"
-#~ msgstr "Configuració"
-
-#~ msgid "Info"
-#~ msgstr "Informació"
-
-#~ msgid "Button 1:"
-#~ msgstr "Butó 1:"
-
-#~ msgid "Button 2:"
-#~ msgstr "Butó 2:"
-
-#, fuzzy
-#~ msgid "_Hide"
-#~ msgstr "/_Ajuda"
-
-#~ msgid "System buttons"
-#~ msgstr "Butons del sistema"
-
-#, fuzzy
-#~ msgid "Iconbox Settings"
-#~ msgstr "Ajustaments del Plafó XFce"
-
-#, fuzzy
-#~ msgid "Xfce 4 Iconbox Settings"
-#~ msgstr "Ajustaments del Plafó XFce"
-
-#, fuzzy
-#~ msgid "Taskbar Settings"
-#~ msgstr "Barra de tasques"
-
-#, fuzzy
-#~ msgid "Xfce 4 Taskbar Settings"
-#~ msgstr "Ajustaments del Plafó XFce"
-
-#, fuzzy
-#~ msgid "File manager"
-#~ msgstr "Gestió de fitxers"
-
-#, fuzzy
-#~ msgid "Printer Management"
-#~ msgstr "Gestió de fitxers"
-
-#, fuzzy
-#~ msgid "Removing the item will also remove its popup menu."
-#~ msgstr ""
-#~ "Suprimir un element també suprimeix el seu menú emergent.\n"
-#~ "\n"
-#~ "Vols suprimir l'element?"
-
-#~ msgid "Caption:"
-#~ msgstr "Llegenda:"
-
-#~ msgid "Tooltip:"
-#~ msgstr "Rètol indicador:"
-
-#~ msgid "Attach menu to launcher"
-#~ msgstr "Afegir un menú al llançador"
-
-#~ msgid "Change menu item"
-#~ msgstr "Canvia l'element del menú"
-
-#~ msgid "Click mouse button 3 to change item"
-#~ msgstr "Cliqueu el botó 3 del ratolí per canviar l'element"
-
-#~ msgid "Add launcher"
-#~ msgstr "Afegir llançador"
-
-#~ msgid "Left"
-#~ msgstr "Esquerra"
-
-#~ msgid "Right"
-#~ msgstr "Dreta"
-
-#~ msgid "Top"
-#~ msgstr "Superior"
-
-#~ msgid "Bottom"
-#~ msgstr "Inferior"
-
-#~ msgid "Popup position:"
-#~ msgstr "Posició emergent:"
-
-#~ msgid "Menu"
-#~ msgstr "Menú"
-
-#, fuzzy
-#~ msgid "Show _system tray in taskbar"
-#~ msgstr "Mostra la safata del sistema a la barra de tasques"
-
-#~ msgid "Cannot get initial style"
-#~ msgstr "No es pot obtenir l'estil inicial"
-
-#~ msgid "This should not happen"
-#~ msgstr "Això no hauria de succeir"
-
-#, fuzzy
-#~ msgid "Cannot get default screen\n"
-#~ msgstr "No es pot obtenir els marges de l'escriptori"
-
-#~ msgid "Cannot connect to session manager"
-#~ msgstr "No es pot connectar al gestor de sessions"
-
-#~ msgid "Show two buttons:"
-#~ msgstr "Mostra dos butons:"
-
-#~ msgid "Change item"
-#~ msgstr "Canviar element"
-
-#~ msgid "Menu:"
-#~ msgstr "Menú:"
-
-#, fuzzy
-#~ msgid "/Xfce Panel"
-#~ msgstr "/Plafó XFce"
-
-#~ msgid "/Add _new item"
-#~ msgstr "/Afegir _nou element"
-
-#~ msgid "/_Properties..."
-#~ msgstr "/_Propietats..."
-
-#~ msgid ""
-#~ "Your window manager does not seem to support the new window manager hints "
-#~ "as defined on http://www.freedesktop.org. \n"
-#~ "Some XFce features may not work as intended."
-#~ msgstr ""
-#~ "El teu gestor de finestres sembla no suportar els consells del nou gestor "
-#~ "de finestras tal com estan definits a http://www..freedesktop.org. \n"
-#~ "Algunes funcionalitats poden no funcionar tal com es van preveure."
-
-#~ msgid "/_Settings manager"
-#~ msgstr "/_Gestor d'ajustaments"
-
-#~ msgid "Tiny"
-#~ msgstr "Diminut"
-
-#~ msgid "Icon theme:"
-#~ msgstr "Tema d'icones:"
-
-#~ msgid "Normal"
-#~ msgstr "Normal"
-
-#~ msgid "Center the panel:"
-#~ msgstr "Centra el plafó:"
-
-#~ msgid "Set"
-#~ msgstr "Estableix"
