--- a/po/cs.po
+++ b/po/cs.po
@@ -1,18 +1,17 @@
-# translation of cs.po to Czech
-# Czech translation for xfdesktop
-# This file is distributed under the same license as the PACKAGE package.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER.
+# Czech translation for xfce4-panel package.
+# Copyright (C) 2005 Jasper Huijsmans.
+# This file is distributed under the same license as the xfce4-panel package.
 # Lukáš Konarovský <daeltar@daeltar.org>, 2003.
 # Alois Nespor <Alois.Nespor@seznam.cz>, 2004.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: cs\n"
+"Project-Id-Version: xfce4-panel 4.3.22\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-09-28 10:01+0200\n"
-"PO-Revision-Date: 2004-10-28 10:34+0000\n"
+"POT-Creation-Date: 2005-09-29 20:47+0900\n"
+"PO-Revision-Date: 2005-09-29 20:19+0900\n"
 "Last-Translator: Alois Nespor <Alois.Nespor@seznam.cz>\n"
-"Language-Team: Czech <cs@li.org>\n"
+"Language-Team: Czech <translation-team-cs@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -88,7 +87,7 @@ msgstr ""
 msgid "Restart"
 msgstr "_Restartovat"
 
-#: ../panel/panel-item-manager.c:327 ../panel/panel-item-manager.c:335
+#: ../panel/panel-item-manager.c:353 ../panel/panel-item-manager.c:361
 #, fuzzy, c-format
 msgid "Could not open \"%s\" module"
 msgstr "Nelze vytvořit položku panelu \"%s\"."
@@ -631,298 +630,3 @@ msgstr "Ukázat _jména aplikací"
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
 msgstr ""
-
-#, fuzzy
-#~ msgid "Panel Settings"
-#~ msgstr "Nastavení panelu Xfce"
-
-#, fuzzy
-#~ msgid "Xfce 4 Panel Settings"
-#~ msgstr "Nastavení panelu Xfce"
-
-#~ msgid "No data was found. The panel will be empty."
-#~ msgstr "Nenalezeny žádné data. Panel bude prázdný."
-
-#~ msgid "Position:"
-#~ msgstr "Pozice:"
-
-#~ msgid "Command:"
-#~ msgstr "Příkaz:"
-
-#~ msgid "Use startup _notification"
-#~ msgstr "Použij  _oznámení při startu"
-
-#~ msgid "Other Icon"
-#~ msgstr "Jiná ikona"
-
-#~ msgid "Drag file onto this frame to change the icon"
-#~ msgstr "Táhni soubor na tento rám ke změně ikony"
-
-#~ msgid "%s: Successfully started without session management"
-#~ msgstr "%s: Úspešně spustěno bez správy relace"
-
-#~ msgid "%s: Successfully started with session management"
-#~ msgstr "%s: Úspešně spustěno se správou relace"
-
-#~ msgid "Could not create panel item \"%s\"."
-#~ msgstr "Nelze vytvořit položku panelu \"%s\"."
-
-#~ msgid "_Properties..."
-#~ msgstr "_Vlastnosti..."
-
-#~ msgid "Add _new item"
-#~ msgstr "Přidat _novou položku"
-
-#~ msgid "This item has no configuration options"
-#~ msgstr "Tato položka nemá žádná nastavitelné vlastnosti"
-
-#~ msgid "_About Xfce"
-#~ msgstr "_O Xfce"
-
-#~ msgid "_Help"
-#~ msgstr "_Nápověda"
-
-#~ msgid "E_xit"
-#~ msgstr "_Ukončit práci"
-
-#, fuzzy
-#~ msgid "icons|Terminal"
-#~ msgstr "Terminál"
-
-#~ msgid "Settings manager not available"
-#~ msgstr "Správce nastavení není dostupný"
-
-#~ msgid "Taskbar"
-#~ msgstr "Panel úloh"
-
-#~ msgid "Cannot create MCS client channel"
-#~ msgstr "Nelze vytvořit kanál MCS klienta"
-
-#, fuzzy
-#~ msgid "_About"
-#~ msgstr "_O Xfce"
-
-#~ msgid "Medium"
-#~ msgstr "Střední"
-
-#~ msgid "Huge"
-#~ msgstr "Obrovský"
-
-#~ msgid "Autohide:"
-#~ msgstr "Automaticky skrývat:"
-
-#~ msgid "Behaviour"
-#~ msgstr "Chování"
-
-#~ msgid "_Top"
-#~ msgstr "_Nahoře"
-
-#~ msgid "_Bottom"
-#~ msgstr "_Dole"
-
-#, fuzzy
-#~ msgid "Alignment:"
-#~ msgstr "Zarovnat"
-
-#~ msgid "_Left"
-#~ msgstr "_Vlevo"
-
-#~ msgid "_Center"
-#~ msgstr "_Na střed"
-
-#~ msgid "_Right"
-#~ msgstr "_Napravo"
-
-#, fuzzy
-#~ msgid "Height:"
-#~ msgstr "Výška"
-
-#~ msgid "Width:"
-#~ msgstr "Šířka:"
-
-#~ msgid "Auto _hide taskbar"
-#~ msgstr "Automatické skrývání panelu úloh"
-
-#~ msgid "Show _pager in taskbar"
-#~ msgstr "Zobrazit přepínač ploch v panelu úloh"
-
-#~ msgid "%A, %d %B %Y"
-#~ msgstr "%A, %d %B %Y"
-
-#~ msgid "Clock type:"
-#~ msgstr "Typ hodin:"
-
-#~ msgid "Hour mode:"
-#~ msgstr "Hodinový mód:"
-
-#~ msgid "24 hour"
-#~ msgstr "24 hodinový"
-
-#~ msgid "12 hour"
-#~ msgstr "12 hodinový"
-
-#~ msgid "Show seconds:"
-#~ msgstr "Ukázat sekundy:"
-
-#, fuzzy
-#~ msgid "Settings"
-#~ msgstr "Nastavení panelu Xfce"
-
-#, fuzzy
-#~ msgid "Edit launcher"
-#~ msgstr "Přidej spoušteč"
-
-#, fuzzy
-#~ msgid "_Edit"
-#~ msgstr "Editor"
-
-#~ msgid "Mail box:"
-#~ msgstr "Poštovní schránka"
-
-#~ msgid "New mail command:"
-#~ msgstr "Příkaz nové pošty:"
-
-#~ msgid "Command to run when new mail arrives"
-#~ msgstr "Při obdržení nové pošty spustit příkaz"
-
-#~ msgid "Command to run when the button on the panel is clicked"
-#~ msgstr "Při stiknutí tlačítka na panelu spustit příkaz"
-
-#~ msgid "Interval (sec):"
-#~ msgstr "Interval (sek)"
-
-#~ msgid "Mail checker"
-#~ msgstr "Kontrola pošty"
-
-#~ msgid "Graphical pager"
-#~ msgstr "Grafický přepínač ploch"
-
-#~ msgid "Desktop switcher"
-#~ msgstr "Tlačítkový přepínač ploch"
-
-#~ msgid ""
-#~ "Access to the configuration system has been disabled.\n"
-#~ "\n"
-#~ "Ask your system administrator for more information"
-#~ msgstr ""
-#~ "Přístup k systémové konfiguraci byl zakázán.\n"
-#~ "\n"
-#~ "Zeptejte se svého administrátora pro více informací"
-
-#, fuzzy
-#~ msgid "tip|Exit"
-#~ msgstr "Konec"
-
-#, fuzzy
-#~ msgid "tip|Setup"
-#~ msgstr "Nastavení"
-
-#, fuzzy
-#~ msgid "tip|Info"
-#~ msgstr "Info"
-
-#~ msgid "Exit"
-#~ msgstr "Konec"
-
-#~ msgid "Setup"
-#~ msgstr "Nastavení"
-
-#~ msgid "Info"
-#~ msgstr "Info"
-
-#~ msgid "Button 1:"
-#~ msgstr "Tlačítko 1"
-
-#~ msgid "Button 2:"
-#~ msgstr "Tlačítko 2"
-
-#~ msgid "_Hide"
-#~ msgstr "_Skrýt"
-
-#~ msgid "System buttons"
-#~ msgstr "Systémová tlačítka"
-
-#, fuzzy
-#~ msgid "Iconbox Settings"
-#~ msgstr "Nastavení panelu Xfce"
-
-#, fuzzy
-#~ msgid "Xfce 4 Iconbox Settings"
-#~ msgstr "Nastavení panelu Xfce"
-
-#, fuzzy
-#~ msgid "Taskbar Settings"
-#~ msgstr "Panel úloh"
-
-#, fuzzy
-#~ msgid "Xfce 4 Taskbar Settings"
-#~ msgstr "Nastavení panelu Xfce"
-
-#, fuzzy
-#~ msgid "File manager"
-#~ msgstr "Správa souborů"
-
-#, fuzzy
-#~ msgid "Printer Management"
-#~ msgstr "Správa souborů"
-
-#~ msgid "Removing the item will also remove its popup menu."
-#~ msgstr "Odstranením položky odstraníte také její vyskakovací menu."
-
-#~ msgid "Caption:"
-#~ msgstr "Nadpis:"
-
-#~ msgid "Tooltip:"
-#~ msgstr "Rada:"
-
-#~ msgid "Attach menu to launcher"
-#~ msgstr "Pridej menu k spušteči"
-
-#~ msgid "Change menu item"
-#~ msgstr "Změnit položku menu"
-
-#~ msgid "Click mouse button 3 to change item"
-#~ msgstr "Klikni třetím tlačítkem ke změně položky"
-
-#~ msgid "Add launcher"
-#~ msgstr "Přidej spoušteč"
-
-#~ msgid "Left"
-#~ msgstr "Vlevo"
-
-#~ msgid "Right"
-#~ msgstr "Vpravo"
-
-#~ msgid "Top"
-#~ msgstr "Nahoře"
-
-#~ msgid "Bottom"
-#~ msgstr "Dole"
-
-#~ msgid "Popup position:"
-#~ msgstr "Pozice pro vyskakovací okno:"
-
-#, fuzzy
-#~ msgid "Notification Area"
-#~ msgstr "Upozorňovací oblast"
-
-#~ msgid "Menu"
-#~ msgstr "Menu"
-
-#~ msgid "Always on top:"
-#~ msgstr "Vždy nahoře:"
-
-#~ msgid "Show _system tray in taskbar"
-#~ msgstr "Ukázat systémový panel v panelu úloh"
-
-#~ msgid "Cannot get initial style"
-#~ msgstr "Nemohu získat výchozí styl"
-
-#~ msgid "This should not happen"
-#~ msgstr "Toto se nemělo stát"
-
-#~ msgid "Cannot get default screen\n"
-#~ msgstr "Nemohu získat standartní obraz\n"
-
-#~ msgid "Cannot connect to session manager"
-#~ msgstr "Nemohu se připojit ke správci sezení"
