--- a/po/de.po
+++ b/po/de.po
@@ -1,15 +1,16 @@
-# Xfce4-panel German translation
-# Copyright (C) 2003 Olivier Fourdan
+# German translations for xfce4-panel package.
+# Copyright (C) 2005 Jasper Huijsmans.
 # This file is distributed under the same license as the xfce4-panel package.
 # Moritz Heiber <moe@xfce.org>, 2003, 2004, 2005
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel 1.0.0\n"
+"Project-Id-Version: xfce4-panel 4.3.22\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-09-28 10:01+0200\n"
-"PO-Revision-Date: 2005-01-05 00:19+0100\n"
+"POT-Creation-Date: 2005-09-29 20:47+0900\n"
+"PO-Revision-Date: 2005-09-29 20:20+0900\n"
 "Last-Translator: Moritz Heiber <moe@xfce.org>\n"
-"Language-Team: none <none@none>\n"
+"Language-Team: German <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -84,7 +85,7 @@ msgstr ""
 msgid "Restart"
 msgstr "_Neu starten"
 
-#: ../panel/panel-item-manager.c:327 ../panel/panel-item-manager.c:335
+#: ../panel/panel-item-manager.c:353 ../panel/panel-item-manager.c:361
 #, fuzzy, c-format
 msgid "Could not open \"%s\" module"
 msgstr "Konnte Panelobjekt \"%s\" nicht erzeugen."
@@ -626,307 +627,3 @@ msgstr "Programmnamen _anzeigen"
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
 msgstr ""
-
-#, fuzzy
-#~ msgid "Panel Settings"
-#~ msgstr "Xfce Paneleinstellungen"
-
-#, fuzzy
-#~ msgid "Xfce 4 Panel Settings"
-#~ msgstr "Xfce Paneleinstellungen"
-
-#~ msgid "No data was found. The panel will be empty."
-#~ msgstr "Keine Daten gefunden. Das Panel wird leer sein"
-
-#~ msgid "Position:"
-#~ msgstr "Position:"
-
-#~ msgid "Command:"
-#~ msgstr "Kommando:"
-
-#~ msgid "Use startup _notification"
-#~ msgstr "Benutze Startup _Notifikation"
-
-#~ msgid "Other Icon"
-#~ msgstr "Anderes Icon"
-
-#~ msgid "Drag file onto this frame to change the icon"
-#~ msgstr "Dateien auf diesen Rahmen ziehen, um das Icon zu verändern"
-
-#~ msgid "%s: Successfully started without session management"
-#~ msgstr "%s: Erfolgreich ohne Sessionmanagement gestartet"
-
-#~ msgid "%s: Successfully started with session management"
-#~ msgstr "%s: Erfolgreich mit Sessionmanagement gestartet"
-
-#~ msgid "Could not create panel item \"%s\"."
-#~ msgstr "Konnte Panelobjekt \"%s\" nicht erzeugen."
-
-#~ msgid "_Properties..."
-#~ msgstr "_Eigenschaften..."
-
-#~ msgid "Add _new item"
-#~ msgstr "Neues _Objekt hinzufügen"
-
-#~ msgid "This item has no configuration options"
-#~ msgstr "Dieses Objekt hat keine Optionen"
-
-#~ msgid "_About Xfce"
-#~ msgstr "_Über Xfce"
-
-#~ msgid "_Help"
-#~ msgstr "_Hilfe"
-
-#~ msgid "E_xit"
-#~ msgstr "B_eenden"
-
-#, fuzzy
-#~ msgid "icons|Terminal"
-#~ msgstr "Terminal"
-
-#~ msgid "Settings manager not available"
-#~ msgstr "Einstellungsmanager nicht verfügbar"
-
-#~ msgid "Taskbar"
-#~ msgstr "Taskbar"
-
-#~ msgid "Cannot create MCS client channel"
-#~ msgstr "Kann MCS Kanal nicht erstellen"
-
-#, fuzzy
-#~ msgid "_About"
-#~ msgstr "_Über Xfce"
-
-#~ msgid "Medium"
-#~ msgstr "Mittel"
-
-#~ msgid "Huge"
-#~ msgstr "Riesig"
-
-#~ msgid "Autohide:"
-#~ msgstr "Autom. Ausblenden:"
-
-#~ msgid "Behaviour"
-#~ msgstr "Verhalten"
-
-#~ msgid "_Top"
-#~ msgstr "_Oben"
-
-#~ msgid "_Bottom"
-#~ msgstr "_Unten"
-
-#, fuzzy
-#~ msgid "Alignment:"
-#~ msgstr "Ausrichtung"
-
-#~ msgid "_Left"
-#~ msgstr "_Links"
-
-#~ msgid "_Center"
-#~ msgstr "_Mittig"
-
-#~ msgid "_Right"
-#~ msgstr "_Rechts"
-
-#, fuzzy
-#~ msgid "Height:"
-#~ msgstr "Höhe :"
-
-#~ msgid "Width:"
-#~ msgstr "Breite:"
-
-#~ msgid "Auto _hide taskbar"
-#~ msgstr "Taskbar _automatisch ausblenden"
-
-#~ msgid "Show _pager in taskbar"
-#~ msgstr "_Pager in Taskbar anzeigen"
-
-#~ msgid "%A, %d %B %Y"
-#~ msgstr "%A, %d %B %Y"
-
-#~ msgid "Clock type:"
-#~ msgstr "Uhrentyp:"
-
-#~ msgid "Hour mode:"
-#~ msgstr "Stundenmodus:"
-
-#~ msgid "24 hour"
-#~ msgstr "24 Std."
-
-#~ msgid "12 hour"
-#~ msgstr "12 Std."
-
-#~ msgid "Show seconds:"
-#~ msgstr "Sekunden anzeigen:"
-
-#~ msgid "Settings"
-#~ msgstr "Einstellungen"
-
-#, fuzzy
-#~ msgid "Edit launcher"
-#~ msgstr "Starter hinzufügen"
-
-#, fuzzy
-#~ msgid "_Edit"
-#~ msgstr "Editor"
-
-#~ msgid "Mail box:"
-#~ msgstr "Mailbox:"
-
-#~ msgid "New mail command:"
-#~ msgstr "Neues Mailkommando"
-
-#~ msgid "Command to run when new mail arrives"
-#~ msgstr "Dieses Kommando bei neuer Mail ausführen"
-
-#~ msgid "Command to run when the button on the panel is clicked"
-#~ msgstr "Kommando, welches beim Klicken auf das Panel ausgeführt wird"
-
-#~ msgid "Interval (sec):"
-#~ msgstr "Intervall (Sek.):"
-
-#~ msgid "Mail checker"
-#~ msgstr "Mailchecker"
-
-#~ msgid "Graphical pager"
-#~ msgstr "Grafischer Pager"
-
-#~ msgid "Desktop switcher"
-#~ msgstr "Desktop-Umschalter"
-
-#~ msgid ""
-#~ "Access to the configuration system has been disabled.\n"
-#~ "\n"
-#~ "Ask your system administrator for more information"
-#~ msgstr ""
-#~ "Der Zugriff auf das Konfigurationssystem wurde deaktiviert.\n"
-#~ "\n"
-#~ "Fragen Sie Ihren Systemadministrator für mehr Informationen"
-
-#, fuzzy
-#~ msgid "tip|Exit"
-#~ msgstr "Beenden"
-
-#, fuzzy
-#~ msgid "tip|Setup"
-#~ msgstr "Setup"
-
-#, fuzzy
-#~ msgid "tip|Info"
-#~ msgstr "Info"
-
-#~ msgid "Exit"
-#~ msgstr "Beenden"
-
-#~ msgid "Setup"
-#~ msgstr "Setup"
-
-#~ msgid "Info"
-#~ msgstr "Info"
-
-#~ msgid "Button 1:"
-#~ msgstr "Button 1:"
-
-#~ msgid "Button 2:"
-#~ msgstr "Button 2:"
-
-#~ msgid "_Hide"
-#~ msgstr "_Verstecken"
-
-#~ msgid "System buttons"
-#~ msgstr "Systembuttons"
-
-#, fuzzy
-#~ msgid "Iconbox Settings"
-#~ msgstr "Xfce Paneleinstellungen"
-
-#, fuzzy
-#~ msgid "Xfce 4 Iconbox Settings"
-#~ msgstr "Xfce Paneleinstellungen"
-
-#, fuzzy
-#~ msgid "Taskbar Settings"
-#~ msgstr "Taskbar"
-
-#, fuzzy
-#~ msgid "Xfce 4 Taskbar Settings"
-#~ msgstr "Xfce Paneleinstellungen"
-
-#~ msgid "File manager"
-#~ msgstr "Dateimanager"
-
-#~ msgid "Konqueror File Manager"
-#~ msgstr "Konqueror Dateimanager"
-
-#~ msgid "Manual"
-#~ msgstr "Benutzerhandbuch"
-
-#~ msgid "Music player"
-#~ msgstr "Medienwiedergabe"
-
-#~ msgid "Nautilus File Manager"
-#~ msgstr "Nautilus Dateimanager"
-
-#~ msgid "Printer Management"
-#~ msgstr "Druckerverwaltung"
-
-#~ msgid "Removing the item will also remove its popup menu."
-#~ msgstr "Das Entfernen des Objektes entfernt auch sein Menü."
-
-#~ msgid "Caption:"
-#~ msgstr "Bezeichnung:"
-
-#~ msgid "Tooltip:"
-#~ msgstr "Tooltip:"
-
-#~ msgid "Attach menu to launcher"
-#~ msgstr "Menü für Starter"
-
-#~ msgid "Change menu item"
-#~ msgstr "Menüobjekt verändern"
-
-#~ msgid "Click mouse button 3 to change item"
-#~ msgstr "Maustaste 3 zum Verändern benutzen"
-
-#~ msgid "Add launcher"
-#~ msgstr "Starter hinzufügen"
-
-#~ msgid "Left"
-#~ msgstr "Links"
-
-#~ msgid "Right"
-#~ msgstr "Rechts"
-
-#~ msgid "Top"
-#~ msgstr "Oben"
-
-#~ msgid "Bottom"
-#~ msgstr "Unten"
-
-#~ msgid "Popup position:"
-#~ msgstr "Popup Position"
-
-#, fuzzy
-#~ msgid "Notification Area"
-#~ msgstr "Status Icons"
-
-#~ msgid "Menu"
-#~ msgstr "Menü"
-
-#~ msgid "Always on top:"
-#~ msgstr "Immer obenauf"
-
-#~ msgid "Show _system tray in taskbar"
-#~ msgstr "_Systemtray in Taskbar anzeigen"
-
-#~ msgid "Cannot get initial style"
-#~ msgstr "Kann Eingangsstil nicht finden"
-
-#~ msgid "This should not happen"
-#~ msgstr "Das sollte nicht passieren"
-
-#~ msgid "Cannot get default screen\n"
-#~ msgstr "Kann Desktop nicht finden\n"
-
-#~ msgid "Cannot connect to session manager"
-#~ msgstr "Keinen Sitzungsmanager gefunden"
