--- a/po/et.po
+++ b/po/et.po
@@ -1,15 +1,17 @@
-# Estonian translation of xfce4-panel.
-# Copyright (C) 2004 THE PACKAGE'S COPYRIGHT HOLDER
+# Estonian translations for xfce4-panel package.
+# Copyright (C) 2005 Jasper Huijsmans.
 # This file is distributed under the same license as the xfce4-panel package.
 # peeter <Peeter.Vois@mail.ee>, 2004.
+# Mart Tõnso <mart.tonso@ttu.ee>, 2004.
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel VERSION\n"
+"Project-Id-Version: xfce4-panel 4.3.22\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-09-28 10:01+0200\n"
-"PO-Revision-Date: 2004-12-09 01:36+0300\n"
+"POT-Creation-Date: 2005-09-29 20:47+0900\n"
+"PO-Revision-Date: 2005-09-29 20:23+0900\n"
 "Last-Translator: Mart Tõnso <mart.tonso@ttu.ee>\n"
-"Language-Team: \n"
+"Language-Team: Estonian <et@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -84,7 +86,7 @@ msgstr ""
 msgid "Restart"
 msgstr "_Käivita uuesti"
 
-#: ../panel/panel-item-manager.c:327 ../panel/panel-item-manager.c:335
+#: ../panel/panel-item-manager.c:353 ../panel/panel-item-manager.c:361
 #, fuzzy, c-format
 msgid "Could not open \"%s\" module"
 msgstr "Ei suuda luua paneeli asja \"%s\"."
@@ -629,292 +631,3 @@ msgstr "Näita rakenduste _nimesid"
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
 msgstr ""
-
-#~ msgid "Panel Settings"
-#~ msgstr "Paneeli seaded"
-
-#~ msgid "Xfce 4 Panel Settings"
-#~ msgstr "Xfce 4 paneeli seaded"
-
-#~ msgid "No data was found. The panel will be empty."
-#~ msgstr "Mingeid andmeid ei leitud. Paneel on tühi."
-
-#~ msgid "Position:"
-#~ msgstr "Positsioon:"
-
-#~ msgid "Command:"
-#~ msgstr "Käsklus:"
-
-#~ msgid "Use startup _notification"
-#~ msgstr "Kasuta _stardi teavitust"
-
-#~ msgid "Other Icon"
-#~ msgstr "Teine ikoon"
-
-#~ msgid "Drag file onto this frame to change the icon"
-#~ msgstr "Tiri fail sellesse raami, et ikooni muuta"
-
-#~ msgid "%s: Successfully started without session management"
-#~ msgstr "%s: Õnnelikult käivitunud ilma sessioonihaldurita"
-
-#~ msgid "%s: Successfully started with session management"
-#~ msgstr "%s: Õnnelikult käivitunud koos sessioonihalduriga"
-
-#~ msgid "Could not create panel item \"%s\"."
-#~ msgstr "Ei suuda luua paneeli asja \"%s\"."
-
-#~ msgid "_Properties..."
-#~ msgstr "_Omadused..."
-
-#~ msgid "Add _new item"
-#~ msgstr "Lisa _uus asi"
-
-#~ msgid "This item has no configuration options"
-#~ msgstr "Sellel asjal ei ole midagi sättida"
-
-#~ msgid "_About Xfce"
-#~ msgstr "_Xfce-st"
-
-#~ msgid "_Help"
-#~ msgstr "_Abi"
-
-#~ msgid "E_xit"
-#~ msgstr "V_älja"
-
-#, fuzzy
-#~ msgid "icons|Terminal"
-#~ msgstr "Terminal"
-
-#~ msgid "Settings manager not available"
-#~ msgstr "Seadistuste haldur ei ole kättesaadav"
-
-#~ msgid "Taskbar"
-#~ msgstr "Tegumiriba"
-
-#~ msgid "Cannot create MCS client channel"
-#~ msgstr "Ei suutnud luua MCS kliendi kanalit"
-
-#, fuzzy
-#~ msgid "_About"
-#~ msgstr "_Xfce-st"
-
-#~ msgid "Medium"
-#~ msgstr "Keskmine"
-
-#~ msgid "Huge"
-#~ msgstr "Väga suur"
-
-#~ msgid "Autohide:"
-#~ msgstr "Automaatne varjamine:"
-
-#~ msgid "Behaviour"
-#~ msgstr "Käitumine"
-
-#~ msgid "_Top"
-#~ msgstr "_Üleval"
-
-#~ msgid "_Bottom"
-#~ msgstr "_All"
-
-#, fuzzy
-#~ msgid "Alignment:"
-#~ msgstr "Asetus"
-
-#~ msgid "_Left"
-#~ msgstr "_Vasakul"
-
-#~ msgid "_Center"
-#~ msgstr "_Keskel"
-
-#~ msgid "_Right"
-#~ msgstr "_Paremal"
-
-#, fuzzy
-#~ msgid "Height:"
-#~ msgstr "Kõrgus :"
-
-#~ msgid "Width:"
-#~ msgstr "Laius:"
-
-#~ msgid "Auto _hide taskbar"
-#~ msgstr "_Varja tegumiriba automaatselt"
-
-#~ msgid "Show _pager in taskbar"
-#~ msgstr "Näita _lehitsejat tegumiribal"
-
-#~ msgid "%A, %d %B %Y"
-#~ msgstr "%A, %d %B %Y"
-
-#~ msgid "Clock type:"
-#~ msgstr "Kella tüüp:"
-
-#~ msgid "Hour mode:"
-#~ msgstr "Režiim:"
-
-#~ msgid "24 hour"
-#~ msgstr "24 tundi"
-
-#~ msgid "12 hour"
-#~ msgstr "12 tundi"
-
-#~ msgid "Show seconds:"
-#~ msgstr "Näita sekundeid"
-
-#, fuzzy
-#~ msgid "Settings"
-#~ msgstr "Paneeli seaded"
-
-#, fuzzy
-#~ msgid "Edit launcher"
-#~ msgstr "Lisa startija"
-
-#, fuzzy
-#~ msgid "_Edit"
-#~ msgstr "Redaktor"
-
-#~ msgid "Mail box:"
-#~ msgstr "Kirjakast:"
-
-#~ msgid "New mail command:"
-#~ msgstr "Uue kirja käsklus:"
-
-#~ msgid "Command to run when new mail arrives"
-#~ msgstr "Käsklus, mida käivitada, kui saabub uus kiri"
-
-#~ msgid "Command to run when the button on the panel is clicked"
-#~ msgstr "Käsklus, mida käivitada, kui paneelil asuvat nuppu vajutatakse"
-
-#~ msgid "Interval (sec):"
-#~ msgstr "Intervall (sec):"
-
-#~ msgid "Mail checker"
-#~ msgstr "Kirjade kontrollija"
-
-#~ msgid "Graphical pager"
-#~ msgstr "Graafiline töölaua vahetaja"
-
-#~ msgid "Desktop switcher"
-#~ msgstr "Töölaua vahetaja"
-
-#~ msgid ""
-#~ "Access to the configuration system has been disabled.\n"
-#~ "\n"
-#~ "Ask your system administrator for more information"
-#~ msgstr ""
-#~ "Juurdepääs konfiguratsioonisüsteemile on keelatud.\n"
-#~ "\n"
-#~ "Küsi oma süsteemiadministraatorilt rohkem infot!"
-
-#, fuzzy
-#~ msgid "tip|Exit"
-#~ msgstr "Välju"
-
-#, fuzzy
-#~ msgid "tip|Setup"
-#~ msgstr "Seaded"
-
-#, fuzzy
-#~ msgid "tip|Info"
-#~ msgstr "Info"
-
-#~ msgid "Exit"
-#~ msgstr "Välju"
-
-#~ msgid "Setup"
-#~ msgstr "Seaded"
-
-#~ msgid "Info"
-#~ msgstr "Info"
-
-#~ msgid "Button 1:"
-#~ msgstr "Nupp 1:"
-
-#~ msgid "Button 2:"
-#~ msgstr "Nupp 2:"
-
-#~ msgid "_Hide"
-#~ msgstr "_Varja"
-
-#~ msgid "System buttons"
-#~ msgstr "Süsteemi nupud"
-
-#~ msgid "Iconbox Settings"
-#~ msgstr "Ikoonikasti seaded"
-
-#~ msgid "Xfce 4 Iconbox Settings"
-#~ msgstr "Xfce 4 ikoonikasti seaded"
-
-#~ msgid "Taskbar Settings"
-#~ msgstr "Tegumiriba seaded"
-
-#~ msgid "Xfce 4 Taskbar Settings"
-#~ msgstr "Xfce 4 tegumiriba seaded"
-
-#, fuzzy
-#~ msgid "File manager"
-#~ msgstr "Failide haldamine"
-
-#, fuzzy
-#~ msgid "Printer Management"
-#~ msgstr "Failide haldamine"
-
-#~ msgid "Removing the item will also remove its popup menu."
-#~ msgstr "Asja eemaldamine eemaldab ka selle küljes oleva menüü."
-
-#~ msgid "Caption:"
-#~ msgstr "Silt:"
-
-#~ msgid "Tooltip:"
-#~ msgstr "Tutvustus:"
-
-#~ msgid "Attach menu to launcher"
-#~ msgstr "Lisa käivitajale menüü"
-
-#~ msgid "Change menu item"
-#~ msgstr "Muuda menüü asja"
-
-#~ msgid "Click mouse button 3 to change item"
-#~ msgstr "Vajuta hiire keskmist muppu, et asja muuta"
-
-#~ msgid "Add launcher"
-#~ msgstr "Lisa startija"
-
-#~ msgid "Left"
-#~ msgstr "Vasak"
-
-#~ msgid "Right"
-#~ msgstr "Parem"
-
-#~ msgid "Top"
-#~ msgstr "Ülal"
-
-#~ msgid "Bottom"
-#~ msgstr "All"
-
-#~ msgid "Popup position:"
-#~ msgstr "Menüü positsioon:"
-
-#, fuzzy
-#~ msgid "Notification Area"
-#~ msgstr "Teadete ala"
-
-#~ msgid "Menu"
-#~ msgstr "Menüü"
-
-#~ msgid "Always on top:"
-#~ msgstr "Alati kõige peal:"
-
-#~ msgid "Show _system tray in taskbar"
-#~ msgstr "Näita süsteemi _teateala tegumiribal"
-
-#~ msgid "Cannot get initial style"
-#~ msgstr "Ei suutnud võtta algstiili"
-
-#~ msgid "This should not happen"
-#~ msgstr "Seda ei tohiks juhtuda"
-
-#~ msgid "Cannot get default screen\n"
-#~ msgstr "Ei suuda võtta vaikimisi ekraani\n"
-
-#~ msgid "Cannot connect to session manager"
-#~ msgstr "Ei suutnud ühenduda sessioonihalduriga"
