--- a/po/fr.po
+++ b/po/fr.po
@@ -1,18 +1,16 @@
-# translation of xfce4.
-# Copyright (C) 2004 THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# French translations for xfce4-panel package.
+# Copyright (C) 2005 Jasper Huijsmans.
+# This file is distributed under the same license as the xfce4-panel package.
 # Olivier Fourdan <fourdan@xfce.org>, 2004.
-# , fuzzy
-# 
-# 
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4 1.0.0\n"
+"Project-Id-Version: xfce4-panel 4.3.22\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-09-28 10:01+0200\n"
-"PO-Revision-Date: 2004-08-07 15:07+0200\n"
+"POT-Creation-Date: 2005-09-29 20:47+0900\n"
+"PO-Revision-Date: 2005-09-29 20:28+0900\n"
 "Last-Translator: Olivier Fourdan <fourdan@xfce.org>\n"
-"Language-Team: \n"
+"Language-Team: French <traduc@traduc.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -87,7 +85,7 @@ msgstr ""
 msgid "Restart"
 msgstr "_Redémarrer"
 
-#: ../panel/panel-item-manager.c:327 ../panel/panel-item-manager.c:335
+#: ../panel/panel-item-manager.c:353 ../panel/panel-item-manager.c:361
 #, fuzzy, c-format
 msgid "Could not open \"%s\" module"
 msgstr "Impossible de créer l'élément du panneau \"%s\"."
@@ -634,298 +632,3 @@ msgstr "Afficher le _nom des applications"
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
 msgstr ""
-
-#~ msgid "Panel Settings"
-#~ msgstr "Paramétrage du panneau"
-
-#~ msgid "Xfce 4 Panel Settings"
-#~ msgstr "Paramètres du panneau Xfce 4"
-
-#~ msgid "No data was found. The panel will be empty."
-#~ msgstr "Aucune donnée n'a été trouvée. Le panneau sera vide"
-
-#~ msgid "Position:"
-#~ msgstr "Position :"
-
-#~ msgid "Command:"
-#~ msgstr "Commande :"
-
-#~ msgid "Use startup _notification"
-#~ msgstr "Utiliser la _notification de démarrage"
-
-#~ msgid "Other Icon"
-#~ msgstr "Autre icône"
-
-#~ msgid "Drag file onto this frame to change the icon"
-#~ msgstr "Déposer un fichier dans cette zone pour changer l'icône"
-
-#~ msgid "%s: Successfully started without session management"
-#~ msgstr "%s: Démarrage réussit sans gestion de session"
-
-#~ msgid "%s: Successfully started with session management"
-#~ msgstr "%s: Démarrage réussit avec gestion de session"
-
-#~ msgid "Could not create panel item \"%s\"."
-#~ msgstr "Impossible de créer l'élément du panneau \"%s\"."
-
-#~ msgid "_Properties..."
-#~ msgstr "_Propriétés..."
-
-#~ msgid "Add _new item"
-#~ msgstr "Ajouter un _nouvel élément"
-
-#~ msgid "This item has no configuration options"
-#~ msgstr "Cette entrée n'a pas d'option de configuration"
-
-#~ msgid "_About Xfce"
-#~ msgstr "À propos de _Xfce"
-
-#~ msgid "_Help"
-#~ msgstr "_Aide"
-
-#~ msgid "E_xit"
-#~ msgstr "Sor_tir"
-
-#, fuzzy
-#~ msgid "icons|Terminal"
-#~ msgstr "Terminal"
-
-#~ msgid "Settings manager not available"
-#~ msgstr "Gestionnaire de paramètres non disponible"
-
-#~ msgid "Taskbar"
-#~ msgstr "Barre des tâches"
-
-#~ msgid "Cannot create MCS client channel"
-#~ msgstr "Impossible de créer le canal pour le client MCS"
-
-#, fuzzy
-#~ msgid "_About"
-#~ msgstr "À propos de _Xfce"
-
-#~ msgid "Medium"
-#~ msgstr "Moyen"
-
-#~ msgid "Huge"
-#~ msgstr "Énorme"
-
-#~ msgid "Autohide:"
-#~ msgstr "Masquer automatiquement :"
-
-#~ msgid "Behaviour"
-#~ msgstr "Comportement"
-
-#~ msgid "_Top"
-#~ msgstr "_Haut"
-
-#~ msgid "_Bottom"
-#~ msgstr "_Bas"
-
-#, fuzzy
-#~ msgid "Alignment:"
-#~ msgstr "Alignement"
-
-#~ msgid "_Left"
-#~ msgstr "_Gauche"
-
-#~ msgid "_Center"
-#~ msgstr "_Centre"
-
-#~ msgid "_Right"
-#~ msgstr "_Droite"
-
-#, fuzzy
-#~ msgid "Height:"
-#~ msgstr "Hauteur :"
-
-#~ msgid "Width:"
-#~ msgstr "Largeur :"
-
-#~ msgid "Auto _hide taskbar"
-#~ msgstr ""
-#~ "_Masquer automatiquement\n"
-#~ "la barre des tâches"
-
-#~ msgid "Show _pager in taskbar"
-#~ msgstr ""
-#~ "Afficher les _bureaux dans\n"
-#~ "la barre des tâches"
-
-#~ msgid "%A, %d %B %Y"
-#~ msgstr "%A, %d %B %Y"
-
-#~ msgid "Clock type:"
-#~ msgstr "Type d'horloge:"
-
-#~ msgid "Hour mode:"
-#~ msgstr "Mode horaire :"
-
-#~ msgid "24 hour"
-#~ msgstr "24 heures"
-
-#~ msgid "12 hour"
-#~ msgstr "12 heures"
-
-#~ msgid "Show seconds:"
-#~ msgstr "Afficher les secondes :"
-
-#, fuzzy
-#~ msgid "Settings"
-#~ msgstr "Paramétrage du panneau"
-
-#, fuzzy
-#~ msgid "Edit launcher"
-#~ msgstr "Ajouter un lanceur"
-
-#, fuzzy
-#~ msgid "_Edit"
-#~ msgstr "Éditeur"
-
-#~ msgid "Mail box:"
-#~ msgstr "Boîte aux lettres :"
-
-#~ msgid "New mail command:"
-#~ msgstr "Commande de nouveau message :"
-
-#~ msgid "Command to run when new mail arrives"
-#~ msgstr "Commande à exécuter lorsque un nouveau message arrive"
-
-#~ msgid "Command to run when the button on the panel is clicked"
-#~ msgstr "Commande à exécuter lorsque le bouton est activé"
-
-#~ msgid "Interval (sec):"
-#~ msgstr "Intervale (sec.) :"
-
-#~ msgid "Mail checker"
-#~ msgstr "Contrôle de courrier"
-
-#~ msgid "Graphical pager"
-#~ msgstr "Changeur de bureaux graphique"
-
-#~ msgid "Desktop switcher"
-#~ msgstr "Changeur de bureaux"
-
-#~ msgid ""
-#~ "Access to the configuration system has been disabled.\n"
-#~ "\n"
-#~ "Ask your system administrator for more information"
-#~ msgstr ""
-#~ "L'accès à la configuration du système a été désactivé.\n"
-#~ "\n"
-#~ "Contactez votre administrateur système pour plus d'informations"
-
-#, fuzzy
-#~ msgid "tip|Exit"
-#~ msgstr "Quitter"
-
-#, fuzzy
-#~ msgid "tip|Setup"
-#~ msgstr "Paramètres"
-
-#, fuzzy
-#~ msgid "tip|Info"
-#~ msgstr "Information"
-
-#~ msgid "Exit"
-#~ msgstr "Quitter"
-
-#~ msgid "Setup"
-#~ msgstr "Paramètres"
-
-#~ msgid "Info"
-#~ msgstr "Information"
-
-#~ msgid "Button 1:"
-#~ msgstr "Bouton 1 :"
-
-#~ msgid "Button 2:"
-#~ msgstr "Bouton 2 :"
-
-#~ msgid "_Hide"
-#~ msgstr "_Masquer"
-
-#~ msgid "System buttons"
-#~ msgstr "Boutons système"
-
-#~ msgid "Iconbox Settings"
-#~ msgstr "Paramétrage de la boite à icônes"
-
-#~ msgid "Xfce 4 Iconbox Settings"
-#~ msgstr "Paramètres de la boite à icônes de Xfce 4"
-
-#~ msgid "Taskbar Settings"
-#~ msgstr "Paramétrage de la barre de tâches"
-
-#~ msgid "Xfce 4 Taskbar Settings"
-#~ msgstr "Paramètres de la barre de tâches Xfce 4"
-
-#, fuzzy
-#~ msgid "File manager"
-#~ msgstr "Gestionnaire de fichiers"
-
-#, fuzzy
-#~ msgid "Printer Management"
-#~ msgstr "Gestionnaire de fichiers"
-
-#~ msgid "Removing the item will also remove its popup menu."
-#~ msgstr "Supprimer cet élément va supprimer le menu associé."
-
-#~ msgid "Caption:"
-#~ msgstr "Légende :"
-
-#~ msgid "Tooltip:"
-#~ msgstr "Bulle d'aide :"
-
-#~ msgid "Attach menu to launcher"
-#~ msgstr "Associer un menu au lanceur"
-
-#~ msgid "Change menu item"
-#~ msgstr "Changer un élément du menu"
-
-#~ msgid "Click mouse button 3 to change item"
-#~ msgstr "Cliquer avec le bouton 3 pour modifier un élément"
-
-#~ msgid "Add launcher"
-#~ msgstr "Ajouter un lanceur"
-
-#~ msgid "Left"
-#~ msgstr "Gauche"
-
-#~ msgid "Right"
-#~ msgstr "Droite"
-
-#~ msgid "Top"
-#~ msgstr "Haut"
-
-#~ msgid "Bottom"
-#~ msgstr "Bas"
-
-#~ msgid "Popup position:"
-#~ msgstr "Position du bouton d'ouverture :"
-
-#, fuzzy
-#~ msgid "Notification Area"
-#~ msgstr "Zone de notification"
-
-#~ msgid "Menu"
-#~ msgstr "Menu"
-
-#~ msgid "Always on top:"
-#~ msgstr "Toujours au dessus :"
-
-#~ msgid "Show _system tray in taskbar"
-#~ msgstr ""
-#~ "Afficher les icônes _systèmes\n"
-#~ "dans la barre des tâches"
-
-#~ msgid "Cannot get initial style"
-#~ msgstr "Impossible de récupérer le style initial"
-
-#~ msgid "This should not happen"
-#~ msgstr "Ça ne devrait pas se produire"
-
-#~ msgid "Cannot get default screen\n"
-#~ msgstr "Impossible de déterminer l'écran par défaut\n"
-
-#~ msgid "Cannot connect to session manager"
-#~ msgstr "Impossible de se connecter au gestionnaire de session"
