--- a/po/hy.po
+++ b/po/hy.po
@@ -1,15 +1,16 @@
-# translation of xfce4-panel.hy.po to 
-# This file is distributed under the same license as the PACKAGE package.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER, 2005.
+# Armenian translations for xfce4-panel package.
+# Copyright (C) 2005 Jasper Huijsmans.
+# This file is distributed under the same license as the xfce4-panel package.
+# Norayr Chilingaryan <norik@freenet.am>, 2005.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel.hy\n"
+"Project-Id-Version: xfce4-panel 4.3.22\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-09-28 10:01+0200\n"
-"PO-Revision-Date: 2005-08-04 19:36+0500\n"
-"Last-Translator: \n"
-"Language-Team:  <en@li.org>\n"
+"POT-Creation-Date: 2005-09-29 20:47+0900\n"
+"PO-Revision-Date: 2005-09-29 20:31+0900\n"
+"Last-Translator: Norayr Chilingaryan <norik@freenet.am>\n"
+"Language-Team: Armenian <en@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -85,7 +86,7 @@ msgstr ""
 msgid "Restart"
 msgstr "_վերաբեռնել"
 
-#: ../panel/panel-item-manager.c:327 ../panel/panel-item-manager.c:335
+#: ../panel/panel-item-manager.c:353 ../panel/panel-item-manager.c:361
 #, c-format
 msgid "Could not open \"%s\" module"
 msgstr ""
@@ -623,161 +624,3 @@ msgstr ""
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
 msgstr ""
-
-#, fuzzy
-#~ msgid "Panel Settings"
-#~ msgstr "Xfce Վահանակի հատկություններ"
-
-#, fuzzy
-#~ msgid "Xfce 4 Panel Settings"
-#~ msgstr "Xfce Վահանակի հատկություններ"
-
-#~ msgid "No data was found. The panel will be empty."
-#~ msgstr "Տեղեկություններ գտնված չէն։ Վահանակը դատարկ է մնալու։"
-
-#~ msgid "Removing the item will also remove its popup menu."
-#~ msgstr "Միացվորը վերացնելը կհանգեցնի իր բացվող ցանկերի վերացմանը"
-
-#~ msgid "Other Icon"
-#~ msgstr "Այլ պատկերակ"
-
-#~ msgid "Drag file onto this frame to change the icon"
-#~ msgstr "Քաշեք ֆայլը այս շրջանակի մեջ պատկերակը փոխելու համար"
-
-#~ msgid "Caption:"
-#~ msgstr "Վարնագիր՝"
-
-#~ msgid "Tooltip:"
-#~ msgstr "Ակնարկ՝"
-
-#~ msgid "Attach menu to launcher"
-#~ msgstr "Փակցնել ցանկ պիտակին"
-
-#~ msgid "Change menu item"
-#~ msgstr "Փոխել ցանկի միավորը"
-
-#~ msgid "Click mouse button 3 to change item"
-#~ msgstr "Կտացրեք մկնիկի 3–րդ ստեղնը միավորը փոխելու համար"
-
-#~ msgid "Add launcher"
-#~ msgstr "Ավելացնել պիտակ"
-
-#~ msgid "%s: Successfully started without session management"
-#~ msgstr "%s՝ Հաջովել է միանալ առանց նիստի կառավարման"
-
-#~ msgid "%s: Successfully started with session management"
-#~ msgstr "%s՝ Հաջովել է միանալ նիստի կառավարմամբ"
-
-#~ msgid "_Properties..."
-#~ msgstr "_Հատկություններ…"
-
-#~ msgid "Add _new item"
-#~ msgstr "Ավելացնել _նոր միավոր"
-
-#~ msgid "_About Xfce"
-#~ msgstr "Xfce միջավայրի _մասին"
-
-#~ msgid "_Help"
-#~ msgstr "_Ձեռնարկ"
-
-#~ msgid "E_xit"
-#~ msgstr "Ե_լք"
-
-#~ msgid "Settings manager not available"
-#~ msgstr "Նախընտրանքների կառավարիչը մատչելի չէ"
-
-#~ msgid "Menu"
-#~ msgstr "Ցանկ"
-
-#~ msgid "Medium"
-#~ msgstr "Միջին"
-
-#~ msgid "Huge"
-#~ msgstr "Հսկայական"
-
-#~ msgid "Left"
-#~ msgstr "Ձախ"
-
-#~ msgid "Right"
-#~ msgstr "Աջ"
-
-#~ msgid "Top"
-#~ msgstr "Կատար"
-
-#~ msgid "Bottom"
-#~ msgstr "Հատակ"
-
-#~ msgid "Popup position:"
-#~ msgstr "Բացվելու դիրքը՝"
-
-#~ msgid "Behaviour"
-#~ msgstr "Վարքագիծ"
-
-#~ msgid "Clock type:"
-#~ msgstr "Ժամացույցի տեսակը՝"
-
-#~ msgid "Hour mode:"
-#~ msgstr "Ժամի ռեժիմ՝"
-
-#~ msgid "24 hour"
-#~ msgstr "24 ժամ"
-
-#~ msgid "12 hour"
-#~ msgstr "12 ժամ"
-
-#~ msgid "Show seconds:"
-#~ msgstr "Ցուցադրել վայրկյանները՝"
-
-#~ msgid "Graphical pager"
-#~ msgstr "Պատկերային փեյջեր"
-
-#~ msgid "Desktop switcher"
-#~ msgstr "Աշխատասեղանի անջատիչ"
-
-#~ msgid ""
-#~ "Access to the configuration system has been disabled.\n"
-#~ "\n"
-#~ "Ask your system administrator for more information"
-#~ msgstr ""
-#~ "Համակարգի կարգավորմանն հնարավորությունը չեզոքացված է։\n"
-#~ "\n"
-#~ "Տեղեկությունների համար դիմեք Ձեր ադմինիստրատորին"
-
-#~ msgid "Exit"
-#~ msgstr "Ելք"
-
-#~ msgid "Setup"
-#~ msgstr "Կարգավորում"
-
-#~ msgid "Info"
-#~ msgstr "Տեղեկություններ"
-
-#~ msgid "Button 1:"
-#~ msgstr "Ստեղն 1՝"
-
-#~ msgid "Button 2:"
-#~ msgstr "Ստեղն 2՝"
-
-#~ msgid "_Hide"
-#~ msgstr "_Թակցնել"
-
-#~ msgid "System buttons"
-#~ msgstr "Համակարգի ստեղներ"
-
-#~ msgid "Mail box:"
-#~ msgstr "Փոստարկղ՝"
-
-#~ msgid "New mail command:"
-#~ msgstr "Նոր փոստային հրաման՝"
-
-#~ msgid "Command to run when new mail arrives"
-#~ msgstr "Հրաման, որը աշխատացվելու է երբ նոր նամակ ժամանի"
-
-#~ msgid "Command to run when the button on the panel is clicked"
-#~ msgstr "Հրաման, որը աշխատացվելու է երբ վահանակի վր գտնվող ստեղնը սեղմվի"
-
-#~ msgid "Interval (sec):"
-#~ msgstr "Դադար (վայրկյաններով)՝"
-
-#~ msgid "Mail checker"
-#~ msgstr "Փոստային ստուգիչ"
