--- a/po/ko.po
+++ b/po/ko.po
@@ -1,15 +1,15 @@
-# Xfce4-panel German translation
-# Copyright (C) 2003 Olivier Fourdan
+# Korean translations for Xfce4-panel package.
+# Copyright (C) 2005 Jasper Huijsmans.
 # This file is distributed under the same license as the xfce4-panel package.
-# Moritz Heiber <mistermoe@hackerboard.de>, 2003
+# ByungHyun Choi<byunghyun.choi@gmail.com>, 2005.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel 1.0.0\n"
+"Project-Id-Version: xfce4-panel 4.3.22\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-09-28 10:01+0200\n"
-"PO-Revision-Date: 2005-07-02 00:25:02+0900\n"
-"Last-Translator: ByungHyun Choi<byunghyun.choi@gmail.com>\n"
+"POT-Creation-Date: 2005-09-29 20:47+0900\n"
+"PO-Revision-Date: 2005-09-29 20:33+0900\n"
+"Last-Translator: ByungHyun Choi <byunghyun.choi@gmail.com>\n"
 "Language-Team: xfce4-users-kr-i18n <xfce4-users-kr-i18n@lists.sourceforge."
 "net>\n"
 "MIME-Version: 1.0\n"
@@ -87,7 +87,7 @@ msgstr ""
 msgid "Restart"
 msgstr "다시 시작(_R)"
 
-#: ../panel/panel-item-manager.c:327 ../panel/panel-item-manager.c:335
+#: ../panel/panel-item-manager.c:353 ../panel/panel-item-manager.c:361
 #, fuzzy, c-format
 msgid "Could not open \"%s\" module"
 msgstr ""
@@ -631,275 +631,3 @@ msgstr "최소화된 것만 보이기(_S)"
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
 msgstr ""
-
-#~ msgid "Panel Settings"
-#~ msgstr "패널 설정"
-
-#~ msgid "Xfce 4 Panel Settings"
-#~ msgstr "Xfce 4 패널 설정"
-
-#~ msgid "No data was found. The panel will be empty."
-#~ msgstr "데이터를 찾지 못했기 때문에 패널에는 아무 것도 보이지 않습니다."
-
-#~ msgid "Position:"
-#~ msgstr "위치:"
-
-#~ msgid "Command:"
-#~ msgstr "명령:"
-
-#~ msgid "Use startup _notification"
-#~ msgstr "시작과 동시에 알림(_n)"
-
-#~ msgid "Other Icon"
-#~ msgstr "다른 아이콘"
-
-#~ msgid "Drag file onto this frame to change the icon"
-#~ msgstr "아이콘을 변경하려면 이 프레임에 화일을 끌어다 놓으세요."
-
-#~ msgid "%s: Successfully started without session management"
-#~ msgstr "세션관리 없이 %s를(을) 시작했습니다."
-
-#~ msgid "%s: Successfully started with session management"
-#~ msgstr "세션을 관리하면서 %s를(을) 시작했습니다."
-
-#~ msgid "Could not create panel item \"%s\"."
-#~ msgstr "패널 항목 \"%s\"를(을) 생성하지 못 했습니다."
-
-#~ msgid "_Properties..."
-#~ msgstr "속성(_P)"
-
-#~ msgid "_Remove"
-#~ msgstr "삭제(_R)"
-
-#~ msgid "This item has no configuration options"
-#~ msgstr "이 아이템은 속성을 정의할 수 없습니다."
-
-#~ msgid "_About Xfce"
-#~ msgstr "Xfce는(_A)..."
-
-#~ msgid "_Help"
-#~ msgstr "도움말(_H)"
-
-#~ msgid "E_xit"
-#~ msgstr "종료(_x)"
-
-#~ msgid "icons|Terminal"
-#~ msgstr "터미널"
-
-#~ msgid "Settings manager not available"
-#~ msgstr "설정 도구 모음을 실행시킬 수 없군요."
-
-#~ msgid "%H:%M"
-#~ msgstr "%H:%M"
-
-#~ msgid "Taskbar"
-#~ msgstr "태스크바"
-
-#~ msgid "Cannot create MCS client channel"
-#~ msgstr "MCS 클라이언트 채널을 생성하지 못 했습니다."
-
-#~ msgid "_About"
-#~ msgstr "Xfce는(_A)..."
-
-#~ msgid "Medium"
-#~ msgstr "중간"
-
-#~ msgid "Huge"
-#~ msgstr "아주 크게"
-
-#~ msgid "Autohide:"
-#~ msgstr "자동 숨김:"
-
-#~ msgid "Behaviour"
-#~ msgstr "동작"
-
-#~ msgid "_Top"
-#~ msgstr "위(_T)"
-
-#~ msgid "_Bottom"
-#~ msgstr "아래(_B)"
-
-#~ msgid "Alignment:"
-#~ msgstr "배치"
-
-#~ msgid "_Left"
-#~ msgstr "왼쪽(_L)"
-
-#~ msgid "_Center"
-#~ msgstr "가운데(_C)"
-
-#~ msgid "_Right"
-#~ msgstr "오른쪽(_R)"
-
-#~ msgid "Height:"
-#~ msgstr "높이 :"
-
-#~ msgid "Width:"
-#~ msgstr "폭:"
-
-#~ msgid "_Shrink to fit"
-#~ msgstr "크기에 맞게 줄임(_S)"
-
-#~ msgid "Auto _hide taskbar"
-#~ msgstr "태스크바 자동 숨김(_h)"
-
-#~ msgid "Show tasklist"
-#~ msgstr "태스크 목록 보이기"
-
-#~ msgid "Show _pager in taskbar"
-#~ msgstr "태스크바에 페이저 보이기(_p)"
-
-#~ msgid "Status area"
-#~ msgstr "상태 영역"
-
-#~ msgid "Icon size"
-#~ msgstr "아이콘 크기"
-
-#~ msgid "%A, %d %B %Y"
-#~ msgstr "%Y-%m-%d %A"
-
-#~ msgid "Clock type:"
-#~ msgstr "시계 형태:"
-
-#~ msgid "Hour mode:"
-#~ msgstr "시간 표시:"
-
-#~ msgid "24 hour"
-#~ msgstr "24시간"
-
-#~ msgid "12 hour"
-#~ msgstr "12시간"
-
-#~ msgid "Show seconds:"
-#~ msgstr "초:"
-
-#~ msgid "Development"
-#~ msgstr "만든이"
-
-#~ msgid "Settings"
-#~ msgstr "설정"
-
-#~ msgid "Edit launcher"
-#~ msgstr "실행기 편집"
-
-#~ msgid "_Edit"
-#~ msgstr "수정(_E)"
-
-#~ msgid "_Up"
-#~ msgstr "위로(_U)"
-
-#~ msgid "_Down"
-#~ msgstr "아래오(_D)"
-
-#~ msgid "_Add"
-#~ msgstr "추가(_A)"
-
-#~ msgid "Mail box:"
-#~ msgstr "우편함:"
-
-#~ msgid "New mail command:"
-#~ msgstr "메일 명령:"
-
-#~ msgid "Command to run when new mail arrives"
-#~ msgstr "새로운 편지가 왔을 때 실행할 명령"
-
-#~ msgid "Command to run when the button on the panel is clicked"
-#~ msgstr "패널의 버튼을 클릭할 때 실행할 명령"
-
-#~ msgid "Interval (sec):"
-#~ msgstr "확인주기(초):"
-
-#~ msgid "Mail checker"
-#~ msgstr "메일 확인"
-
-#~ msgid "Graphical pager"
-#~ msgstr "페이저"
-
-#~ msgid "Desktop switcher"
-#~ msgstr "데스크탑 전환기"
-
-#~ msgid ""
-#~ "Access to the configuration system has been disabled.\n"
-#~ "\n"
-#~ "Ask your system administrator for more information"
-#~ msgstr ""
-#~ "설정 시스템을 사용하지 못하도록 설정되어 있으니,\n"
-#~ "상세한 내용은 시스템 관리자에게 질문하십시오."
-
-#~ msgid "tip|Exit"
-#~ msgstr "tip|종료"
-
-#~ msgid "tip|Setup"
-#~ msgstr "tip|설정"
-
-#~ msgid "tip|Info"
-#~ msgstr "tip|정보"
-
-#~ msgid "Exit"
-#~ msgstr "종료"
-
-#~ msgid "Setup"
-#~ msgstr "설정"
-
-#~ msgid "Info"
-#~ msgstr "정보"
-
-#~ msgid "Button 1:"
-#~ msgstr "버튼 1:"
-
-#~ msgid "Button 2:"
-#~ msgstr "버튼 2:"
-
-#~ msgid "_Hide"
-#~ msgstr "도움말(_H)"
-
-#~ msgid "System buttons"
-#~ msgstr "시스템 버튼"
-
-#~ msgid "Iconbox Settings"
-#~ msgstr "아이콘박스 설정"
-
-#~ msgid "Xfce 4 Iconbox Settings"
-#~ msgstr "Xfce 4 아이콘박스 설정"
-
-#~ msgid "Taskbar Settings"
-#~ msgstr "태스크바 설정"
-
-#~ msgid "Xfce 4 Taskbar Settings"
-#~ msgstr "Xfce 4 태스크바 설정"
-
-#~ msgid "Appfinder"
-#~ msgstr "응용프로그램 찾기"
-
-#~ msgid "Drag file to print"
-#~ msgstr "화일을 끌어다 놓으면 출력됩니다."
-
-#~ msgid "File manager"
-#~ msgstr "화일 관리자"
-
-#~ msgid "Find and run applications"
-#~ msgstr "응용프로그램을 찾아서 실행하기"
-
-#~ msgid "Konqueror"
-#~ msgstr "컹커러"
-
-#~ msgid "Konqueror File Manager"
-#~ msgstr "컹커러 화일 관리자"
-
-#~ msgid "Manual"
-#~ msgstr "설명서"
-
-#~ msgid "Mozilla Web Browser"
-#~ msgstr "모질라 웹 브라우져"
-
-#~ msgid "Music player"
-#~ msgstr "음악 연주"
-
-#~ msgid "Nautilus"
-#~ msgstr "노틸러스"
-
-#~ msgid "Nautilus File Manager"
-#~ msgstr "노틸러스 화일 관리자"
-
-#~ msgid "Printer Management"
-#~ msgstr "프린터 관리"
