--- a/po/mr.po
+++ b/po/mr.po
@@ -1,17 +1,16 @@
-# translation of xfce4-panel.po to 
-# Marathi Translation of xfce4-panel
+# Marathi Translation of xfce4-panel.
+# Copyright (C) 2005 Jasper Huijsmans.
 # This file is distributed under the same license as the xfce4-panel package.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER.
 # Pallavi Nikam <pallavi_edu@rediffmail.com>, 2005.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel\n"
+"Project-Id-Version: xfce4-panel 4.3.22\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-09-28 10:01+0200\n"
-"PO-Revision-Date: 2005-05-06 18:43+0530\n"
-"Last-Translator: \n"
-"Language-Team:  <en@li.org>\n"
+"POT-Creation-Date: 2005-09-29 20:47+0900\n"
+"PO-Revision-Date: 2005-09-29 20:35+0900\n"
+"Last-Translator: Pallavi Nikam <pallavi_edu@rediffmail.com>\n"
+"Language-Team: Marathi <en@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -87,7 +86,7 @@ msgstr ""
 msgid "Restart"
 msgstr " पुनः सुरुवात (_R)"
 
-#: ../panel/panel-item-manager.c:327 ../panel/panel-item-manager.c:335
+#: ../panel/panel-item-manager.c:353 ../panel/panel-item-manager.c:361
 #, fuzzy, c-format
 msgid "Could not open \"%s\" module"
 msgstr ""
@@ -629,334 +628,3 @@ msgstr "फक्त लहान केलेल्या ऍँप्लिक
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
 msgstr ""
-
-#~ msgid "Panel Settings"
-#~ msgstr "पॅनेल रचना"
-
-#~ msgid "Xfce 4 Panel Settings"
-#~ msgstr "Xfce ४ पॅनेल रचना"
-
-#~ msgid "No data was found. The panel will be empty."
-#~ msgstr "डाटा सापडला नाही. पॅनेल रीकामे राहील."
-
-#~ msgid "Position:"
-#~ msgstr "जागा:"
-
-#~ msgid "Command:"
-#~ msgstr "आज्ञा:"
-
-#~ msgid "Use startup _notification"
-#~ msgstr "सुरुवातीची सुचना वापरा (_n)"
-
-#~ msgid "Other Icon"
-#~ msgstr "बाकीचे आयकॉन"
-
-#~ msgid "Drag file onto this frame to change the icon"
-#~ msgstr "आयकॉन बदलण्यासाठी फाईलला या चौकटीत ओढा"
-
-#~ msgid "%s: Successfully started without session management"
-#~ msgstr "%s: सत्र व्यवस्थापनाशीवाय यशस्वी सुरु झाले"
-
-#~ msgid "%s: Successfully started with session management"
-#~ msgstr "%s: सत्र व्यवस्थापनासह यशस्वी सुरु झाले"
-
-#~ msgid "Could not create panel item \"%s\"."
-#~ msgstr "पॅनेल आयटम तयार करु शकत नाही\"%s\"."
-
-#~ msgid "_Properties..."
-#~ msgstr "गुणधर्म (_P)..."
-
-#~ msgid "Add _new item"
-#~ msgstr "नविन आयटम मिळवा (_n)"
-
-#~ msgid "This item has no configuration options"
-#~ msgstr "या आयटमला कॉनफीग्युरेशन पर्याय उपलब्ध नाहीत"
-
-#~ msgid "_About Xfce"
-#~ msgstr "Xfce च्या बद्दल (_A)"
-
-#~ msgid "_Help"
-#~ msgstr "मदत (_H)"
-
-#~ msgid "E_xit"
-#~ msgstr "बाहेर (_x)"
-
-#~ msgid "icons|Terminal"
-#~ msgstr "आयकॉनस|टर्मिनल"
-
-#~ msgid "Settings manager not available"
-#~ msgstr "रचना व्यवस्थापक उपलब्ध नाही"
-
-#~ msgid "%H:%M"
-#~ msgstr "%एच:%एम"
-
-#~ msgid "Taskbar"
-#~ msgstr "कार्य दांडा"
-
-#~ msgid "Cannot create MCS client channel"
-#~ msgstr "MCS पक्षकार माध्यम तयार करु शकत नाही"
-
-#~ msgid "_About"
-#~ msgstr "च्य़ा बद्दल (_A)"
-
-#~ msgid "Medium"
-#~ msgstr "मध्यम"
-
-#~ msgid "Huge"
-#~ msgstr "प्रचंड"
-
-#~ msgid "Autohide:"
-#~ msgstr "स्वयंलुप्त:"
-
-#~ msgid "Behaviour"
-#~ msgstr "स्वभाव"
-
-#~ msgid "_Top"
-#~ msgstr "शिखर (_T)"
-
-#~ msgid "_Bottom"
-#~ msgstr "तळ (_B)"
-
-#~ msgid "Alignment:"
-#~ msgstr "मांडणी:"
-
-#~ msgid "_Left"
-#~ msgstr "डावा (_L)"
-
-#~ msgid "_Center"
-#~ msgstr "मध्य(_C)"
-
-#~ msgid "_Right"
-#~ msgstr "उजवा (_R)"
-
-#~ msgid "Height:"
-#~ msgstr "उंची:"
-
-#~ msgid "Width:"
-#~ msgstr "रुंदी:"
-
-#~ msgid "_Shrink to fit"
-#~ msgstr "योग्यतेनुसार आकुंचन (_S)"
-
-#~ msgid "Auto _hide taskbar"
-#~ msgstr "स्वंयलुप्त कार्य दांडा (_h)"
-
-#~ msgid "Show tasklist"
-#~ msgstr "कार्य यादी दाखवा"
-
-#~ msgid "Show _pager in taskbar"
-#~ msgstr "कार्य दांड्यामध्ये पेजर दाखवा (_p)"
-
-#~ msgid "Status area"
-#~ msgstr "स्थिती भाग"
-
-#~ msgid "General"
-#~ msgstr "सर्वसामान्य"
-
-#~ msgid "Components"
-#~ msgstr "घटक"
-
-#~ msgid "Icon size"
-#~ msgstr "आयकॉनचा आकार"
-
-#~ msgid "%A, %d %B %Y"
-#~ msgstr "%ए, %d %बी %वाय"
-
-#~ msgid "Clock type:"
-#~ msgstr "घड्याळाचे प्रकार:"
-
-#~ msgid "Hour mode:"
-#~ msgstr "तासाची पद्धत:"
-
-#~ msgid "24 hour"
-#~ msgstr "२४ तास"
-
-#~ msgid "12 hour"
-#~ msgstr "१२ तास"
-
-#~ msgid "Show seconds:"
-#~ msgstr "सेकंद:"
-
-#~ msgid "Flexible space"
-#~ msgstr "लवचीक जागा"
-
-#~ msgid "Development"
-#~ msgstr "विकास"
-
-#~ msgid "Settings"
-#~ msgstr "रचना"
-
-#~ msgid "System"
-#~ msgstr "प्रणाली"
-
-#~ msgid "Windows programs"
-#~ msgstr "विण्डो चे कार्यक्रम"
-
-#~ msgid "Edit launcher"
-#~ msgstr "लॉनचंर संपादित करा"
-
-#~ msgid "_Edit"
-#~ msgstr "संपादक"
-
-#~ msgid "_Up"
-#~ msgstr "वर (_U)"
-
-#~ msgid "_Down"
-#~ msgstr "खाली (_D)"
-
-#~ msgid "_Add"
-#~ msgstr "मिसळणे (_A)"
-
-#~ msgid "Mail box:"
-#~ msgstr "मेल बॉक्स:"
-
-#~ msgid "New mail command:"
-#~ msgstr "नविन मेल बॉक्स:"
-
-#~ msgid "Command to run when new mail arrives"
-#~ msgstr "नविन मेल आल्यानंतर सुरु होणारी आज्ञा"
-
-#~ msgid "Command to run when the button on the panel is clicked"
-#~ msgstr "पॅनेलचे बटन दाबल्यानंतर सुरु होणारी आज्ञा"
-
-#~ msgid "Interval (sec):"
-#~ msgstr "मध्यातंर (सेक):"
-
-#~ msgid "Mail checker"
-#~ msgstr "मेल तपासनारा"
-
-#~ msgid "Graphical pager"
-#~ msgstr "पेजरचे चित्र"
-
-#~ msgid "Desktop switcher"
-#~ msgstr "डेस्कटॉप स्विचर"
-
-#~ msgid ""
-#~ "Access to the configuration system has been disabled.\n"
-#~ "\n"
-#~ "Ask your system administrator for more information"
-#~ msgstr ""
-#~ "कॉनफीग्युरेशन प्रणालीचा मार्ग अकार्यक्षम झालेला आहे.\n"
-#~ "\n"
-#~ "अधीक माहीतीसाठी प्रणाली व्यवस्थापकास विचारा"
-
-#~ msgid "tip|Exit"
-#~ msgstr "tip| बाहेर"
-
-#~ msgid "tip|Setup"
-#~ msgstr "tip| उभारणे "
-
-#~ msgid "tip|Info"
-#~ msgstr "tip| माहिती"
-
-#~ msgid "Exit"
-#~ msgstr "बाहेर"
-
-#~ msgid "Setup"
-#~ msgstr "उभारणे"
-
-#~ msgid "Info"
-#~ msgstr "माहिती"
-
-#~ msgid "Button 1:"
-#~ msgstr "बटन १:"
-
-#~ msgid "Button 2:"
-#~ msgstr "बटन २:"
-
-#~ msgid "_Hide"
-#~ msgstr "लुप्त (_H)"
-
-#~ msgid "System buttons"
-#~ msgstr "प्रणाली बटन"
-
-#~ msgid "Iconbox Settings"
-#~ msgstr "आयकॉनबॉक्स रचना"
-
-#~ msgid "Xfce 4 Iconbox Settings"
-#~ msgstr "Xfce ४ आयकॉन रचना"
-
-#~ msgid "Taskbar Settings"
-#~ msgstr "कार्य दांडा रचना"
-
-#~ msgid "Xfce 4 Taskbar Settings"
-#~ msgstr "Xfce ४ कार्य दांडा रचना"
-
-#~ msgid "Appfinder"
-#~ msgstr "ऍपफाईनडंर"
-
-#~ msgid "Drag file to print"
-#~ msgstr "प्रिंट करण्यासाठी फाईल ओढा"
-
-#~ msgid "File manager"
-#~ msgstr "फाईल व्यवस्थापक"
-
-#~ msgid "Find and run applications"
-#~ msgstr "ऍप्लिकेशनस शोधा आणि सुरु करा"
-
-#~ msgid "Konqueror"
-#~ msgstr "कॉनकरर"
-
-#~ msgid "Konqueror File Manager"
-#~ msgstr "कॉनकरर फाईल व्यवस्थापक "
-
-#~ msgid "Manual"
-#~ msgstr "हस्तलिखित"
-
-#~ msgid "Mozilla Web Browser"
-#~ msgstr "मॉझिला वेब ब्राउझर"
-
-#~ msgid "Music player"
-#~ msgstr "संगीत वाजवणारा"
-
-#~ msgid "Nautilus"
-#~ msgstr "नॉटिलस"
-
-#~ msgid "Nautilus File Manager"
-#~ msgstr "नॉटिलस फाईल व्यवस्थापक "
-
-#~ msgid "Printer Management"
-#~ msgstr "प्रिंण्टर व्यवस्थापन "
-
-#, fuzzy
-#~ msgid "Panel Item and Menu"
-#~ msgstr "पॅनेल आयटम आणि यादी आयटमस"
-
-#~ msgid "Removing the item will also remove its popup menu."
-#~ msgstr "आयटम काढूण टाकताना त्याची अनपक्षीत उद्भवणारी यादी काढून टाकण्यात येइल."
-
-#~ msgid "Caption:"
-#~ msgstr "शीर्षक:"
-
-#~ msgid "Tooltip:"
-#~ msgstr "साधन सुचना:"
-
-#~ msgid "Attach menu to launcher"
-#~ msgstr "लॉनचंरला यादी जोडा"
-
-#~ msgid "Change menu item"
-#~ msgstr "आयटम यादी बदला"
-
-#~ msgid "Click mouse button 3 to change item"
-#~ msgstr "आयटम बदलण्यासाठी माऊस बटन ३ दाबा"
-
-#~ msgid "Add launcher"
-#~ msgstr "लॉनचंर मिळवा"
-
-#~ msgid "Left"
-#~ msgstr "डावा"
-
-#~ msgid "Right"
-#~ msgstr "उजवा"
-
-#~ msgid "Top"
-#~ msgstr "शिखर"
-
-#~ msgid "Bottom"
-#~ msgstr "तळ"
-
-#~ msgid "Popup position:"
-#~ msgstr "पॉपअपची जागा:"
-
-#~ msgid "Notification Area"
-#~ msgstr "सूचनेचा भाग"
