--- a/po/pa.po
+++ b/po/pa.po
@@ -1,14 +1,14 @@
-# translation of xfce4-panel.po to Punjabi
-# This file is distributed under the same license as the PACKAGE package.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER.
+# Punjabi translations for xfce4-panel package.
+# Copyright (C) 2005 Jasper Huijsmans.
+# This file is distributed under the same license as the xfce4-panel package.
 # Amanpreet Singh Alam <aalam@redhat.com>, 2004.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel\n"
+"Project-Id-Version: xfce4-panel 4.3.22\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-09-28 10:01+0200\n"
-"PO-Revision-Date: 2004-09-20 12:56+0530\n"
+"POT-Creation-Date: 2005-09-29 20:47+0900\n"
+"PO-Revision-Date: 2005-09-29 20:36+0900\n"
 "Last-Translator: Amanpreet Singh Alam <aalam@redhat.com>\n"
 "Language-Team: Punjabi <fedora-trans-pa@redhat.com>\n"
 "MIME-Version: 1.0\n"
@@ -88,7 +88,7 @@ msgstr ""
 msgid "Restart"
 msgstr "_ਮੁੜ ਚਾਲੂ"
 
-#: ../panel/panel-item-manager.c:327 ../panel/panel-item-manager.c:335
+#: ../panel/panel-item-manager.c:353 ../panel/panel-item-manager.c:361
 #, fuzzy, c-format
 msgid "Could not open \"%s\" module"
 msgstr "ਪੈਨਲ ਇਕਾਈ \"%s\" ਬਣਾਈ ਨਹੀਂ ਜਾ ਸਕੀ ਹੈ"
@@ -631,298 +631,3 @@ msgstr "ਕਾਰਜ _ਨਾਂ ਵਿਖਾਓ"
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
 msgstr ""
-
-#, fuzzy
-#~ msgid "Panel Settings"
-#~ msgstr "Xfce ਪੈਨਲ ਵਿਵਸਥਾ"
-
-#, fuzzy
-#~ msgid "Xfce 4 Panel Settings"
-#~ msgstr "Xfce ਪੈਨਲ ਵਿਵਸਥਾ"
-
-#~ msgid "No data was found. The panel will be empty."
-#~ msgstr "ਕੋਈ ਡਾਟਾ ਨਹੀਂ ਲੱਭਾ ਹੈ। ਪੈਨਲ ਖਾਲੀ ਹੋਵੇਗਾ।"
-
-#~ msgid "Position:"
-#~ msgstr "ਸਥਿਤੀ:"
-
-#~ msgid "Command:"
-#~ msgstr "ਕਮਾਂਡ:"
-
-#~ msgid "Use startup _notification"
-#~ msgstr "ਸ਼ੁਰੂਆਤੀ _ਇਸ਼ਾਰਾ ਵਰਤੋਂ"
-
-#~ msgid "Other Icon"
-#~ msgstr "ਹੋਰ ਆਈਕਾਨ"
-
-#~ msgid "Drag file onto this frame to change the icon"
-#~ msgstr "ਆਈਕਾਨ ਤਬਦੀਲ ਕਰਨ ਲਈ ਇਸ ਫਰੇਮ ਵਿੱਚ ਫਾਇਲ ਸੁੱਟੋ"
-
-#~ msgid "%s: Successfully started without session management"
-#~ msgstr "%s: ਅਜਲਾਸ ਪ੍ਰਬੰਧਕ ਬਿਨਾਂ ਸਫਲਤਾਪੂਰਕ ਸ਼ੁਰੂ ਹੋਇਆ"
-
-#~ msgid "%s: Successfully started with session management"
-#~ msgstr "%s: ਅਜਲਾਸ ਪ੍ਰਬੰਧਕ ਨਾਲ ਸਫਲਤਾਪੂਰਕ ਸ਼ੁਰੂ ਹੋਇਆ"
-
-#~ msgid "Could not create panel item \"%s\"."
-#~ msgstr "ਪੈਨਲ ਇਕਾਈ \"%s\" ਬਣਾਈ ਨਹੀਂ ਜਾ ਸਕੀ ਹੈ"
-
-#~ msgid "_Properties..."
-#~ msgstr "_ਵਿਸ਼ੇਸਤਾ..."
-
-#~ msgid "Add _new item"
-#~ msgstr "_ਨਵੀਂ ਇਕਾਈ ਸ਼ਾਮਿਲ"
-
-#~ msgid "This item has no configuration options"
-#~ msgstr "ਇਸ ਇਕਾਈ ਲਈ ਕੋਈ ਸੰਰਚਨਾ ਚੋਣ ਸ਼ਾਮਿਲ ਨਹੀਂ ਹੈ"
-
-#~ msgid "_About Xfce"
-#~ msgstr "Xfce _ਬਾਰੇ"
-
-#~ msgid "_Help"
-#~ msgstr "_ਸਹਾਇਤਾ"
-
-#~ msgid "E_xit"
-#~ msgstr "ਬੰ_ਦ"
-
-#, fuzzy
-#~ msgid "icons|Terminal"
-#~ msgstr "ਟਰਮੀਨਲ"
-
-#~ msgid "Settings manager not available"
-#~ msgstr "ਵਿਵਸਥਾ ਪ੍ਰਬੰਧਕ ਉਪਲੱਬਧ ਨਹੀਂ ਹੈ"
-
-#~ msgid "Taskbar"
-#~ msgstr "ਦਰਜਾ-ਪੱਟੀ"
-
-#~ msgid "Cannot create MCS client channel"
-#~ msgstr "MCS ਕਲਾਂਈਟ ਚੈਨਲ ਬਣਾ ਨਹੀਂ ਸਕਿਆ"
-
-#, fuzzy
-#~ msgid "_About"
-#~ msgstr "Xfce _ਬਾਰੇ"
-
-#~ msgid "Medium"
-#~ msgstr "ਮੱਧਮ"
-
-#~ msgid "Huge"
-#~ msgstr "ਵਿਸ਼ਾਲ"
-
-#~ msgid "Autohide:"
-#~ msgstr "ਸਵੈ-ਓਹਲੇ:"
-
-#~ msgid "Behaviour"
-#~ msgstr "ਵਿਵਹਾਰ"
-
-#~ msgid "_Top"
-#~ msgstr "_ਸਿਖਰ"
-
-#~ msgid "_Bottom"
-#~ msgstr "_ਹੇਠਾਂ"
-
-#, fuzzy
-#~ msgid "Alignment:"
-#~ msgstr "ਅਨੁਕੂਲਤਾ"
-
-#~ msgid "_Left"
-#~ msgstr "_ਖੱਬੇ"
-
-#~ msgid "_Center"
-#~ msgstr "_ਵਿਚਕਾਰ"
-
-#~ msgid "_Right"
-#~ msgstr "ਸੱਜੇ"
-
-#, fuzzy
-#~ msgid "Height:"
-#~ msgstr "ਉਚਾਈਃ"
-
-#~ msgid "Width:"
-#~ msgstr "ਚੌੜਾਈਃ"
-
-#~ msgid "Auto _hide taskbar"
-#~ msgstr "ਸਵੈ ਲੁਕਵੀਂ ਦਰਜਾ ਪੱਟੀ"
-
-#~ msgid "Show _pager in taskbar"
-#~ msgstr "ਦਰਜਾ-ਪੱਟੀ ਵਿੱਚ ਪੇਜ਼ਰ ਵਿਖਾਓ"
-
-#~ msgid "%A, %d %B %Y"
-#~ msgstr "%A, %d %B %Y"
-
-#~ msgid "Clock type:"
-#~ msgstr "ਘੜੀ ਕਿਸਮ:"
-
-#~ msgid "Hour mode:"
-#~ msgstr "ਸਮਾਂ ਢੰਗ:"
-
-#~ msgid "24 hour"
-#~ msgstr "੨੪ ਘੰਟੇ"
-
-#~ msgid "12 hour"
-#~ msgstr "੧੨ ਘੰਟੇ"
-
-#~ msgid "Show seconds:"
-#~ msgstr "ਸਕਿੰਟ ਵਿਖਾਓ:"
-
-#, fuzzy
-#~ msgid "Settings"
-#~ msgstr "Xfce ਪੈਨਲ ਵਿਵਸਥਾ"
-
-#, fuzzy
-#~ msgid "Edit launcher"
-#~ msgstr "ਸ਼ੁਰੂਆਤੀ ਸ਼ਾਮਿਲ ਕਰੋ"
-
-#, fuzzy
-#~ msgid "_Edit"
-#~ msgstr "ਸੰਪਾਦਕ"
-
-#~ msgid "Mail box:"
-#~ msgstr "ਪੱਤਰ ਬਕਸਾ:"
-
-#~ msgid "New mail command:"
-#~ msgstr "ਨਵੀਂ ਪੱਤਰ ਕਮਾਂਡ:"
-
-#~ msgid "Command to run when new mail arrives"
-#~ msgstr "ਨਵੇਂ ਪੱਤਰ ਆਉਣ ਤੇ ਚੱਲਣ ਵਾਲੀ ਕਮਾਂਡ"
-
-#~ msgid "Command to run when the button on the panel is clicked"
-#~ msgstr "ਪੈਨਲ ਦੇ ਬਟਨ ਨੂੰ ਦਬਾਉਣ ਤੇ ਚੱਲਣ ਵਾਲੀ ਕਮਾਂਡ"
-
-#~ msgid "Interval (sec):"
-#~ msgstr "ਅੰਤਰਾਲ (ਸਕਿੰਟ):"
-
-#~ msgid "Mail checker"
-#~ msgstr "ਪੱਤਰ ਜਾਂਚਕਾਰ"
-
-#~ msgid "Graphical pager"
-#~ msgstr "ਗਰਾਫਿਕਲ ਪੇਜ਼ਰ"
-
-#~ msgid "Desktop switcher"
-#~ msgstr "ਵਿਹੜਾ ਤਬਦੀਲੀਕਾਰ"
-
-#~ msgid ""
-#~ "Access to the configuration system has been disabled.\n"
-#~ "\n"
-#~ "Ask your system administrator for more information"
-#~ msgstr ""
-#~ "ਸੰਰਚਨਾ ਸਿਸਟਮ ਲਈ ਪਹੁੰਚ ਆਯੋਗ ਹੈ।\n"
-#~ "\n"
-#~ "ਆਪਣੇ ਸਿਸਟਮ ਪ੍ਰਬੰਧਕ ਨੂੰ ਵਧੇਰੇ ਜਾਣਕਾਰੀ ਲਈ ਪੁੱਛੋ।"
-
-#, fuzzy
-#~ msgid "tip|Exit"
-#~ msgstr "ਬੰਦ"
-
-#, fuzzy
-#~ msgid "tip|Setup"
-#~ msgstr "ਸੈੱਟਅਪ"
-
-#, fuzzy
-#~ msgid "tip|Info"
-#~ msgstr "ਜਾਣਕਾਰੀ"
-
-#~ msgid "Exit"
-#~ msgstr "ਬੰਦ"
-
-#~ msgid "Setup"
-#~ msgstr "ਸੈੱਟਅਪ"
-
-#~ msgid "Info"
-#~ msgstr "ਜਾਣਕਾਰੀ"
-
-#~ msgid "Button 1:"
-#~ msgstr "ਬਟਨ ੧:"
-
-#~ msgid "Button 2:"
-#~ msgstr "ਬਟਨ ੨:"
-
-#~ msgid "_Hide"
-#~ msgstr "ਓ_ਹਲੇ"
-
-#~ msgid "System buttons"
-#~ msgstr "ਸਿਸਟਮ ਬਟਨ"
-
-#, fuzzy
-#~ msgid "Iconbox Settings"
-#~ msgstr "Xfce ਪੈਨਲ ਵਿਵਸਥਾ"
-
-#, fuzzy
-#~ msgid "Xfce 4 Iconbox Settings"
-#~ msgstr "Xfce ਪੈਨਲ ਵਿਵਸਥਾ"
-
-#, fuzzy
-#~ msgid "Taskbar Settings"
-#~ msgstr "ਦਰਜਾ-ਪੱਟੀ"
-
-#, fuzzy
-#~ msgid "Xfce 4 Taskbar Settings"
-#~ msgstr "Xfce ਪੈਨਲ ਵਿਵਸਥਾ"
-
-#, fuzzy
-#~ msgid "File manager"
-#~ msgstr "ਫਾਇਲ ਪ੍ਰਬੰਧਨ"
-
-#, fuzzy
-#~ msgid "Printer Management"
-#~ msgstr "ਫਾਇਲ ਪ੍ਰਬੰਧਨ"
-
-#~ msgid "Removing the item will also remove its popup menu."
-#~ msgstr "ਇਕਾਈ ਨੂੰ ਹਟਾਉਣ ਨਾਲ ਇਸ ਦਾ ਮੇਨੂ ਵੀ ਹਟਾਇਆ ਜਾਵੇਗਾ।"
-
-#~ msgid "Caption:"
-#~ msgstr "ਸਿਰਲੇਖ:"
-
-#~ msgid "Tooltip:"
-#~ msgstr "ਸੰਦ-ਸੰਕੇਤ:"
-
-#~ msgid "Attach menu to launcher"
-#~ msgstr "ਸ਼ੁਰੂਆਤੀ ਨਾਲ ਮੇਨੂ ਸ਼ਾਮਿਲ ਕਰੋ"
-
-#~ msgid "Change menu item"
-#~ msgstr "ਮੇਨੂ ਇਕਾਈ ਤਬਦੀਲ"
-
-#~ msgid "Click mouse button 3 to change item"
-#~ msgstr "ਇਕਾਈ ਤਬਦੀਲ ਕਰਨ ਲਈ ਮਾਊਸ ਬਟਨ ੩ ਕਲਿੱਕ ਕਰੋ"
-
-#~ msgid "Add launcher"
-#~ msgstr "ਸ਼ੁਰੂਆਤੀ ਸ਼ਾਮਿਲ ਕਰੋ"
-
-#~ msgid "Left"
-#~ msgstr "ਖੱਬਾ"
-
-#~ msgid "Right"
-#~ msgstr "ਸੱਜਾ"
-
-#~ msgid "Top"
-#~ msgstr "ਉੱਪਰ"
-
-#~ msgid "Bottom"
-#~ msgstr "ਹੇਠਾਂ"
-
-#~ msgid "Popup position:"
-#~ msgstr "ਪੌਪ-ਅੱਪ ਸਥਿਤੀ:"
-
-#, fuzzy
-#~ msgid "Notification Area"
-#~ msgstr "ਐਲਾਨ ਖੇਤਰ"
-
-#~ msgid "Menu"
-#~ msgstr "ਮੇਨੂ"
-
-#~ msgid "Always on top:"
-#~ msgstr "ਹਮੇਸ਼ਾ ਉੱਪਰ:"
-
-#~ msgid "Show _system tray in taskbar"
-#~ msgstr "ਦਰਜਾ-ਪੱਟੀ ਵਿੱਚ ਸਿਸਟਮ ਟਰੇ ਵਿਖਾਓ"
-
-#~ msgid "Cannot get initial style"
-#~ msgstr "ਸ਼ੁਰੂਆਤੀ ਸ਼ੈਲੀ ਪ੍ਰਾਪਤ ਨਹੀ ਕਰ ਸਕਿਆ"
-
-#~ msgid "This should not happen"
-#~ msgstr "ਅਜਿਹਾ ਨਹੀਂ ਵਾਪਰਨਾ ਚਾਹੀਦਾਆ"
-
-#~ msgid "Cannot get default screen\n"
-#~ msgstr "ਮੂਲ ਪਰਦਾ ਪ੍ਰਾਪਤ ਨਹੀਂ ਕਰ ਸਕਿਆ\n"
-
-#~ msgid "Cannot connect to session manager"
-#~ msgstr "ਅਜਲਾਸ ਮੈਨੇਜਰ ਨਾਲ ਜੁੜ ਨਹੀਂ ਸਕਿਆ"
