--- a/po/pt_PT.po
+++ b/po/pt_PT.po
@@ -1,16 +1,16 @@
 # Portuguese translation of xfce4-panel.
-# Copyright (C) 2003 THE xfce4-panel'S COPYRIGHT HOLDER
+# Copyright (C) 2005 Jasper Huijsmans.
 # This file is distributed under the same license as the xfce4-panel package.
 # Nuno Donato <nunodonato@gmail.com.pt>, 2004.
-# 
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel 4.2\n"
+"Project-Id-Version: xfce4-panel 4.3.22\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-09-28 10:01+0200\n"
-"PO-Revision-Date: 2004-10-09 22:00+0100\n"
+"POT-Creation-Date: 2005-09-29 20:47+0900\n"
+"PO-Revision-Date: 2005-09-29 20:38+0900\n"
 "Last-Translator: Nuno Donato <nunodonato@gmail.com>\n"
-"Language-Team: Portuguese <pt@li.org>\n"
+"Language-Team: Portuguese <translation-team-pt@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -85,7 +85,7 @@ msgstr ""
 msgid "Restart"
 msgstr "_Reiniciar"
 
-#: ../panel/panel-item-manager.c:327 ../panel/panel-item-manager.c:335
+#: ../panel/panel-item-manager.c:353 ../panel/panel-item-manager.c:361
 #, fuzzy, c-format
 msgid "Could not open \"%s\" module"
 msgstr "Não foi possível criar o item \"%s\" do painel."
@@ -631,412 +631,3 @@ msgstr "Mostrar _nomes das aplicações"
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
 msgstr ""
-
-#, fuzzy
-#~ msgid "Panel Settings"
-#~ msgstr "Definições do Painel Xfce"
-
-#, fuzzy
-#~ msgid "Xfce 4 Panel Settings"
-#~ msgstr "Definições do Painel Xfce"
-
-#~ msgid "No data was found. The panel will be empty."
-#~ msgstr "Não foram encontrados dados. O painel estará vazio."
-
-#~ msgid "Position:"
-#~ msgstr "Posição:"
-
-#~ msgid "Command:"
-#~ msgstr "Comando:"
-
-#~ msgid "Use startup _notification"
-#~ msgstr "Usar notificação de arranque"
-
-#~ msgid "Other Icon"
-#~ msgstr "Outro Ícone"
-
-#~ msgid "Drag file onto this frame to change the icon"
-#~ msgstr "Arrastar ficheiro para esta frame para mudar o ícone"
-
-#~ msgid "%s: Successfully started without session management"
-#~ msgstr "%s: Iniciado com sucesso sem a gestão de sessões"
-
-#~ msgid "%s: Successfully started with session management"
-#~ msgstr "%s: Iniciado com sucesso com a gestão de sessões"
-
-#~ msgid "Could not create panel item \"%s\"."
-#~ msgstr "Não foi possível criar o item \"%s\" do painel."
-
-#~ msgid "_Properties..."
-#~ msgstr "_Propriedades..."
-
-#~ msgid "_Remove"
-#~ msgstr "_Remover"
-
-#~ msgid "Add _new item"
-#~ msgstr "Adicionar _novo item"
-
-#~ msgid "This item has no configuration options"
-#~ msgstr "Este item não tem opções para configurar"
-
-#~ msgid "_About Xfce"
-#~ msgstr "_Sobre o Xfce"
-
-#~ msgid "_Help"
-#~ msgstr "_Ajuda"
-
-#~ msgid "E_xit"
-#~ msgstr "_Sair"
-
-#, fuzzy
-#~ msgid "icons|Terminal"
-#~ msgstr "Consola"
-
-#~ msgid "Settings manager not available"
-#~ msgstr "Gestor de Definições não disponível"
-
-#~ msgid "Taskbar"
-#~ msgstr "Barra de Tarefas"
-
-#~ msgid "Cannot create MCS client channel"
-#~ msgstr "Não foi possível criar o canal cliente MCS"
-
-#, fuzzy
-#~ msgid "_About"
-#~ msgstr "_Sobre o Xfce"
-
-#~ msgid "Medium"
-#~ msgstr "Médio"
-
-#~ msgid "Huge"
-#~ msgstr "Enorme"
-
-#~ msgid "Panel size:"
-#~ msgstr "Tamanho do Painel:"
-
-#~ msgid "Autohide:"
-#~ msgstr "Esconder automáticamente:"
-
-#~ msgid "Behaviour"
-#~ msgstr "Comportamento"
-
-#~ msgid "_Top"
-#~ msgstr "_Topo"
-
-#~ msgid "_Bottom"
-#~ msgstr "_Fundo"
-
-#, fuzzy
-#~ msgid "Alignment:"
-#~ msgstr "Alinhamento"
-
-#~ msgid "_Left"
-#~ msgstr "_Esquerda"
-
-#~ msgid "_Center"
-#~ msgstr "_Centro"
-
-#~ msgid "_Right"
-#~ msgstr "_Direita"
-
-#, fuzzy
-#~ msgid "Height:"
-#~ msgstr "Altura:"
-
-#~ msgid "Width:"
-#~ msgstr "Largura:"
-
-#~ msgid "Auto _hide taskbar"
-#~ msgstr "Esconder _automáticamente a barra de tarefas"
-
-#~ msgid "Show _pager in taskbar"
-#~ msgstr "Mostrar o a_lternador na barra de tarefas"
-
-#, fuzzy
-#~ msgid "Status area"
-#~ msgstr "Sábado"
-
-#, fuzzy
-#~ msgid "Icon size"
-#~ msgstr "Previsão do Ícon"
-
-#~ msgid "%A, %d %B %Y"
-#~ msgstr "%A, %d %B %Y"
-
-#~ msgid "Clock type:"
-#~ msgstr "Tipo do relógio:"
-
-#~ msgid "Hour mode:"
-#~ msgstr "Modo Horário"
-
-#~ msgid "24 hour"
-#~ msgstr "24 horas"
-
-#~ msgid "12 hour"
-#~ msgstr "12 horas"
-
-#~ msgid "Show seconds:"
-#~ msgstr "Mostrar segundos:"
-
-#, fuzzy
-#~ msgid "Settings"
-#~ msgstr "Definições do Painel Xfce"
-
-#, fuzzy
-#~ msgid "Edit launcher"
-#~ msgstr "Adicionar Lançador"
-
-#, fuzzy
-#~ msgid "_Edit"
-#~ msgstr "Editor"
-
-#~ msgid "Mail box:"
-#~ msgstr "Caixa de Correio:"
-
-#~ msgid "New mail command:"
-#~ msgstr "Comando para nova mensagem:"
-
-#~ msgid "Command to run when new mail arrives"
-#~ msgstr "Comando a executar quando chega uma nova mensagem"
-
-#~ msgid "Command to run when the button on the panel is clicked"
-#~ msgstr "Comando a executar quando o botão no painel é clicado"
-
-#~ msgid "Interval (sec):"
-#~ msgstr "Intervalo (segundos):"
-
-#~ msgid "Mail checker"
-#~ msgstr "Verificador de email"
-
-#~ msgid "Graphical pager"
-#~ msgstr "Alternador Gráfico das Áreas de Trabalho"
-
-#~ msgid "Desktop switcher"
-#~ msgstr "Alternador das Areas de Trabalho"
-
-#~ msgid ""
-#~ "Access to the configuration system has been disabled.\n"
-#~ "\n"
-#~ "Ask your system administrator for more information"
-#~ msgstr ""
-#~ "O acesso à configuraçao do sistema foi desactivado.\n"
-#~ "\n"
-#~ "Peça ao seu administrador de sistema para mais informações."
-
-#, fuzzy
-#~ msgid "tip|Exit"
-#~ msgstr "Sair"
-
-#, fuzzy
-#~ msgid "tip|Setup"
-#~ msgstr "Configurar"
-
-#, fuzzy
-#~ msgid "tip|Info"
-#~ msgstr "Informação"
-
-#~ msgid "Exit"
-#~ msgstr "Sair"
-
-#~ msgid "Setup"
-#~ msgstr "Configurar"
-
-#~ msgid "Info"
-#~ msgstr "Informação"
-
-#~ msgid "Button 1:"
-#~ msgstr "Botão 1:"
-
-#~ msgid "Button 2:"
-#~ msgstr "Botão 2:"
-
-#~ msgid "_Hide"
-#~ msgstr "_Esconder"
-
-#~ msgid "System buttons"
-#~ msgstr "Botões de Sistema"
-
-#, fuzzy
-#~ msgid "Iconbox Settings"
-#~ msgstr "Definições do Painel Xfce"
-
-#, fuzzy
-#~ msgid "Xfce 4 Iconbox Settings"
-#~ msgstr "Definições do Painel Xfce"
-
-#, fuzzy
-#~ msgid "Taskbar Settings"
-#~ msgstr "Barra de Tarefas"
-
-#, fuzzy
-#~ msgid "Xfce 4 Taskbar Settings"
-#~ msgstr "Definições do Painel Xfce"
-
-#, fuzzy
-#~ msgid "File manager"
-#~ msgstr "Gestor de Ficheiros"
-
-#, fuzzy
-#~ msgid "Manual"
-#~ msgstr "Janeiro"
-
-#, fuzzy
-#~ msgid "Printer Management"
-#~ msgstr "Gestor de Ficheiros"
-
-#~ msgid "Removing the item will also remove its popup menu."
-#~ msgstr "Removendo o item também irá remover o seu menu de pop-up."
-
-#~ msgid "Caption:"
-#~ msgstr "Título:"
-
-#~ msgid "Tooltip:"
-#~ msgstr "Dica:"
-
-#~ msgid "Attach menu to launcher"
-#~ msgstr "Anexar menu ao lançador"
-
-#~ msgid "Change menu item"
-#~ msgstr "Mudar o item do menu"
-
-#~ msgid "Click mouse button 3 to change item"
-#~ msgstr "Clicar com o botão 3 do rato para alterar este item"
-
-#~ msgid "Add launcher"
-#~ msgstr "Adicionar Lançador"
-
-#~ msgid "Left"
-#~ msgstr "Esquerda"
-
-#~ msgid "Right"
-#~ msgstr "Direita"
-
-#~ msgid "Top"
-#~ msgstr "Cima"
-
-#~ msgid "Bottom"
-#~ msgstr "Baixo"
-
-#~ msgid "Popup position:"
-#~ msgstr "Posição do popup:"
-
-#, fuzzy
-#~ msgid "Notification Area"
-#~ msgstr "Area de notificação"
-
-#~ msgid "Menu"
-#~ msgstr "Menú"
-
-#~ msgid "Always on top:"
-#~ msgstr "Sempre no topo:"
-
-#~ msgid "Show _system tray in taskbar"
-#~ msgstr "Mostrar os ícones de _sistema na barra de tarefas"
-
-#~ msgid "Cannot get initial style"
-#~ msgstr "Nao foi possível obter o estilo inicial"
-
-#~ msgid "This should not happen"
-#~ msgstr "Isto não devia acontecer"
-
-#~ msgid "Cannot get default screen\n"
-#~ msgstr "Não foi possível obter o ecrã por omissão\n"
-
-#~ msgid "Cannot connect to session manager"
-#~ msgstr "Não foi possível establecer ligação com o gestor de sessão"
-
-#~ msgid "Show two buttons:"
-#~ msgstr "Mostrar dois butões:"
-
-#~ msgid "Change item"
-#~ msgstr "Editar Item"
-
-#~ msgid "Menu:"
-#~ msgstr "Menu:"
-
-#~ msgid "/Xfce Panel"
-#~ msgstr "/Painel do Xfce"
-
-#~ msgid "/Add _new item"
-#~ msgstr "/Adicionar _novo item"
-
-#~ msgid "/_Properties..."
-#~ msgstr "/_Propriedades"
-
-#~ msgid ""
-#~ "Your window manager does not seem to support the new window manager hints "
-#~ "as defined on http://www.freedesktop.org. \n"
-#~ "Some Xfce features may not work as intended."
-#~ msgstr ""
-#~ "O seu gestor de janelas parece não suportar as novas dicas de janelas "
-#~ "como está definido em http://www.freedesktop.org.\n"
-#~ "Algumas funcionalidades do Xfce poderão não funcionar como esperado."
-
-#~ msgid "/_Settings manager"
-#~ msgstr "/_Gestor de Definições"
-
-#~ msgid "Tiny"
-#~ msgstr "Minusculo"
-
-#~ msgid "Icon theme:"
-#~ msgstr "Tema dos Ícones:"
-
-#~ msgid "Normal"
-#~ msgstr "Normal"
-
-#~ msgid "Center the panel:"
-#~ msgstr "Centrar o Painel:"
-
-#~ msgid "Set"
-#~ msgstr "Aplicar"
-
-#~ msgid "Sunday"
-#~ msgstr "Domingo"
-
-#~ msgid "Monday"
-#~ msgstr "Segunda-feira"
-
-#~ msgid "Tuesday"
-#~ msgstr "Terça-feira"
-
-#~ msgid "Wednesday"
-#~ msgstr "Quarta-feira"
-
-#~ msgid "Thursday"
-#~ msgstr "Quinta-feira"
-
-#~ msgid "Friday"
-#~ msgstr "Sexta-feira"
-
-#~ msgid "February"
-#~ msgstr "Fevereiro"
-
-#~ msgid "March"
-#~ msgstr "Março"
-
-#~ msgid "April"
-#~ msgstr "Abril"
-
-#~ msgid "May"
-#~ msgstr "Maio"
-
-#~ msgid "June"
-#~ msgstr "Junho"
-
-#~ msgid "July"
-#~ msgstr "Julho"
-
-#~ msgid "August"
-#~ msgstr "Agosto"
-
-#~ msgid "September"
-#~ msgstr "Setembro"
-
-#~ msgid "October"
-#~ msgstr "Outubro"
-
-#~ msgid "November"
-#~ msgstr "Novembro"
-
-#~ msgid "December"
-#~ msgstr "Dezembro"
