--- a/po/ru.po
+++ b/po/ru.po
@@ -1,18 +1,17 @@
-# translation of xfce4-panel.po to Russian
-# translation of ru.po to Russian
-# This file is distributed under the same license as the PACKAGE package.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER.
+# Russian translations for xfce4-panel package.
+# Copyright (C) 2005 Jasper Huijsmans.
+# This file is distributed under the same license as the xfce4-panel package.
 # Poul Ionkin <wizzard@nmg.lv>, 2003.
 # Anthony Ivanoff <a-i@bk.ru>, 2004, 2005.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel\n"
+"Project-Id-Version: xfce4-panel 4.3.22\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-09-28 10:01+0200\n"
-"PO-Revision-Date: 2005-01-08 11:37+0500\n"
+"POT-Creation-Date: 2005-09-29 20:47+0900\n"
+"PO-Revision-Date: 2005-09-29 20:40+0900\n"
 "Last-Translator: Anthony Ivanoff <a-i@bk.ru>\n"
-"Language-Team: Russian\n"
+"Language-Team: Russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -90,7 +89,7 @@ msgstr ""
 msgid "Restart"
 msgstr "Перезагрузить"
 
-#: ../panel/panel-item-manager.c:327 ../panel/panel-item-manager.c:335
+#: ../panel/panel-item-manager.c:353 ../panel/panel-item-manager.c:361
 #, fuzzy, c-format
 msgid "Could not open \"%s\" module"
 msgstr "Невозможно создать элемент панели \"%s\"."
@@ -631,257 +630,3 @@ msgstr ""
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
 msgstr ""
-
-#~ msgid "Panel Settings"
-#~ msgstr "Настройки панели"
-
-#~ msgid "Xfce 4 Panel Settings"
-#~ msgstr "Настройки панели Xfce 4"
-
-#~ msgid "No data was found. The panel will be empty."
-#~ msgstr "Данные не найдены. Панель будет пуста."
-
-#~ msgid "Position:"
-#~ msgstr "Позиция:"
-
-#~ msgid "Command:"
-#~ msgstr "Команда:"
-
-#~ msgid "Use startup _notification"
-#~ msgstr "Использовать уведомление о запуске"
-
-#~ msgid "Other Icon"
-#~ msgstr "Другой значок"
-
-#~ msgid "Drag file onto this frame to change the icon"
-#~ msgstr "Перетащите сюда файл, чтобы изменить значок"
-
-#~ msgid "%s: Successfully started without session management"
-#~ msgstr "%s: Успешно запущено без управления сеансами"
-
-#~ msgid "%s: Successfully started with session management"
-#~ msgstr "%s: Успешно запущено; управление сеансами включено"
-
-#~ msgid "Could not create panel item \"%s\"."
-#~ msgstr "Невозможно создать элемент панели \"%s\"."
-
-#~ msgid "_Properties..."
-#~ msgstr "Свойства..."
-
-#~ msgid "Add _new item"
-#~ msgstr "Добавить новый объект"
-
-#~ msgid "This item has no configuration options"
-#~ msgstr "Обьект не имеет настраиваемых параметров"
-
-#~ msgid "_About Xfce"
-#~ msgstr "Об Xfce"
-
-#~ msgid "_Help"
-#~ msgstr "Помощь"
-
-#~ msgid "E_xit"
-#~ msgstr "Выход"
-
-#, fuzzy
-#~ msgid "icons|Terminal"
-#~ msgstr "Терминал"
-
-#~ msgid "Settings manager not available"
-#~ msgstr "Диспетчер настроек недоступен"
-
-#, fuzzy
-#~ msgid "_About"
-#~ msgstr "Об Xfce"
-
-#~ msgid "Medium"
-#~ msgstr "Средний"
-
-#~ msgid "Huge"
-#~ msgstr "Огромный"
-
-#~ msgid "Autohide:"
-#~ msgstr "Автоматически скрывать:"
-
-#~ msgid "Behaviour"
-#~ msgstr "Поведение"
-
-#, fuzzy
-#~ msgid "_Top"
-#~ msgstr "Сверху"
-
-#, fuzzy
-#~ msgid "_Bottom"
-#~ msgstr "Снизу"
-
-#, fuzzy
-#~ msgid "_Left"
-#~ msgstr "Слева"
-
-#, fuzzy
-#~ msgid "_Right"
-#~ msgstr "Справа"
-
-#, fuzzy
-#~ msgid "Height:"
-#~ msgstr "Справа"
-
-#~ msgid "%A, %d %B %Y"
-#~ msgstr "%A, %d %B %Y"
-
-#~ msgid "Clock type:"
-#~ msgstr "Тип часов:"
-
-#~ msgid "Hour mode:"
-#~ msgstr "Стиль:"
-
-#~ msgid "24 hour"
-#~ msgstr "24 часа"
-
-#~ msgid "12 hour"
-#~ msgstr "12 часов"
-
-#~ msgid "Show seconds:"
-#~ msgstr "Показывать секунды:"
-
-#, fuzzy
-#~ msgid "Settings"
-#~ msgstr "Настройки панели"
-
-#, fuzzy
-#~ msgid "Edit launcher"
-#~ msgstr "Добавить запуск"
-
-#, fuzzy
-#~ msgid "_Edit"
-#~ msgstr "Редактор"
-
-#~ msgid "Mail box:"
-#~ msgstr "Почтовый ящик:"
-
-#~ msgid "New mail command:"
-#~ msgstr "Запустить по получении новой почты:"
-
-#~ msgid "Command to run when new mail arrives"
-#~ msgstr "Команда, выполняемая при приходе новой почты"
-
-#~ msgid "Command to run when the button on the panel is clicked"
-#~ msgstr "Команда, выполняемая при нажатии кнопки на панели"
-
-#~ msgid "Interval (sec):"
-#~ msgstr "Интервал (сек):"
-
-#~ msgid "Mail checker"
-#~ msgstr "Проверка почты"
-
-#~ msgid "Graphical pager"
-#~ msgstr "Графический пейджер"
-
-#~ msgid "Desktop switcher"
-#~ msgstr "Переключатель рабочих мест"
-
-#~ msgid ""
-#~ "Access to the configuration system has been disabled.\n"
-#~ "\n"
-#~ "Ask your system administrator for more information"
-#~ msgstr ""
-#~ "Доступ к системе конфигурации закрыт.\n"
-#~ "\n"
-#~ "Обратитесь к системному администратору."
-
-#, fuzzy
-#~ msgid "tip|Exit"
-#~ msgstr "Выход"
-
-#, fuzzy
-#~ msgid "tip|Setup"
-#~ msgstr "Настройка"
-
-#, fuzzy
-#~ msgid "tip|Info"
-#~ msgstr "Информация"
-
-#~ msgid "Exit"
-#~ msgstr "Выход"
-
-#~ msgid "Setup"
-#~ msgstr "Настройка"
-
-#~ msgid "Info"
-#~ msgstr "Информация"
-
-#~ msgid "Button 1:"
-#~ msgstr "Кнопка 1:"
-
-#~ msgid "Button 2:"
-#~ msgstr "Кнопка 2:"
-
-#~ msgid "_Hide"
-#~ msgstr "Скрыть"
-
-#~ msgid "System buttons"
-#~ msgstr "Системные кнопки"
-
-#~ msgid "Iconbox Settings"
-#~ msgstr "Настройки панели значков"
-
-#~ msgid "Xfce 4 Iconbox Settings"
-#~ msgstr "Настройки панели значков Xfce 4"
-
-#, fuzzy
-#~ msgid "Taskbar Settings"
-#~ msgstr "Настройки панели"
-
-#, fuzzy
-#~ msgid "Xfce 4 Taskbar Settings"
-#~ msgstr "Настройки панели Xfce 4"
-
-#, fuzzy
-#~ msgid "File manager"
-#~ msgstr "Работа с файлами"
-
-#, fuzzy
-#~ msgid "Printer Management"
-#~ msgstr "Работа с файлами"
-
-#~ msgid "Removing the item will also remove its popup menu."
-#~ msgstr "При удалении объекта будет также удалено его подменю."
-
-#~ msgid "Caption:"
-#~ msgstr "Название:"
-
-#~ msgid "Tooltip:"
-#~ msgstr "Подсказка:"
-
-#~ msgid "Attach menu to launcher"
-#~ msgstr "Добавить подменю к обьекту"
-
-#~ msgid "Change menu item"
-#~ msgstr "Изменение элемента меню"
-
-#~ msgid "Click mouse button 3 to change item"
-#~ msgstr "Щелкните средней кнопкой мыши, чтобы изменить объект"
-
-#~ msgid "Add launcher"
-#~ msgstr "Добавить запуск"
-
-#~ msgid "Left"
-#~ msgstr "Слева"
-
-#~ msgid "Right"
-#~ msgstr "Справа"
-
-#~ msgid "Top"
-#~ msgstr "Сверху"
-
-#~ msgid "Bottom"
-#~ msgstr "Снизу"
-
-#~ msgid "Popup position:"
-#~ msgstr "Положению меню:"
-
-#~ msgid "Menu"
-#~ msgstr "Меню"
-
-#~ msgid "Always on top:"
-#~ msgstr "Поверх всех окон:"
