--- a/po/sk.po
+++ b/po/sk.po
@@ -1,16 +1,16 @@
-# translation of xfce4-panel.po to Slovak
-# This file is distributed under the same license as the PACKAGE package.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER.
-# Juraj Brosz <Juraj.Brosz@pobox.sk>, 2004.
+# Slovak translations for xfce4-panel package.
+# Copyright (C) 2005 Jasper Huijsmans.
+# This file is distributed under the same license as the xfce4-panel package.
+# Juraj Brosz <juro@jurajbrosz.info>, 2004.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel\n"
+"Project-Id-Version: xfce4-panel 4.3.22\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-09-28 10:01+0200\n"
-"PO-Revision-Date: 2004-08-26 21:04+0200\n"
-"Last-Translator: Juraj Brosz <Juraj.Brosz@pobox.sk>\n"
-"Language-Team: Slovak <sk@li.org>\n"
+"POT-Creation-Date: 2005-09-29 20:47+0900\n"
+"PO-Revision-Date: 2005-09-29 20:41+0900\n"
+"Last-Translator: Juraj Brosz <juro@jurajbrosz.info>\n"
+"Language-Team: Slovak <sk-i18n@lists.linux.sk>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -86,7 +86,7 @@ msgstr ""
 msgid "Restart"
 msgstr "_Reštartovať"
 
-#: ../panel/panel-item-manager.c:327 ../panel/panel-item-manager.c:335
+#: ../panel/panel-item-manager.c:353 ../panel/panel-item-manager.c:361
 #, fuzzy, c-format
 msgid "Could not open \"%s\" module"
 msgstr "Nemôžem vytvoriť položku panelu \"%s\"."
@@ -629,305 +629,3 @@ msgstr "Zobraziť _názvy aplikácií"
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
 msgstr ""
-
-#, fuzzy
-#~ msgid "Panel Settings"
-#~ msgstr "Nastavenia panelu Xfce"
-
-#, fuzzy
-#~ msgid "Xfce 4 Panel Settings"
-#~ msgstr "Nastavenia panelu Xfce"
-
-#~ msgid "No data was found. The panel will be empty."
-#~ msgstr "Nenašli sa žiadne údaje. Panel bude prázdny"
-
-#~ msgid "Position:"
-#~ msgstr "Pozícia:"
-
-#~ msgid "Command:"
-#~ msgstr "Príkaz:"
-
-#~ msgid "Use startup _notification"
-#~ msgstr "Použiť štartovaciu _notifikáciu"
-
-#~ msgid "Other Icon"
-#~ msgstr "Iná ikona"
-
-#~ msgid "Drag file onto this frame to change the icon"
-#~ msgstr "Ťahajte súbor na tento rám k zmene ikony"
-
-#~ msgid "%s: Successfully started without session management"
-#~ msgstr "%s: Úspešne spustené bez správy sedení"
-
-#~ msgid "%s: Successfully started with session management"
-#~ msgstr "%s: Úspešne spustené so správou sedení"
-
-#~ msgid "Could not create panel item \"%s\"."
-#~ msgstr "Nemôžem vytvoriť položku panelu \"%s\"."
-
-#~ msgid "_Properties..."
-#~ msgstr "_Vlastnosti..."
-
-#~ msgid "_Remove"
-#~ msgstr "_Odstrániť"
-
-#~ msgid "Add _new item"
-#~ msgstr "Pridať _novú položku"
-
-#~ msgid "This item has no configuration options"
-#~ msgstr "Táto položka nemá žiadne nastaviteľné vlastnosti"
-
-#~ msgid "_About Xfce"
-#~ msgstr "_O Xfce"
-
-#~ msgid "_Help"
-#~ msgstr "_Pomocník"
-
-#~ msgid "E_xit"
-#~ msgstr "_Ukončiť prácu s Xfce"
-
-#, fuzzy
-#~ msgid "icons|Terminal"
-#~ msgstr "Terminál"
-
-#~ msgid "Settings manager not available"
-#~ msgstr "Správca nastavení nie je dostupný"
-
-#~ msgid "Taskbar"
-#~ msgstr "Panel úloh"
-
-#~ msgid "Cannot create MCS client channel"
-#~ msgstr "Nemôžem vytvoriť kanál MCS klienta"
-
-#, fuzzy
-#~ msgid "_About"
-#~ msgstr "_O Xfce"
-
-#~ msgid "Medium"
-#~ msgstr "Stredná"
-
-#~ msgid "Huge"
-#~ msgstr "Obrovská"
-
-#~ msgid "Autohide:"
-#~ msgstr "Automaticky skrývať:"
-
-#~ msgid "Behaviour"
-#~ msgstr "Chovanie"
-
-#~ msgid "_Top"
-#~ msgstr "_Hore"
-
-#~ msgid "_Bottom"
-#~ msgstr "_Dole"
-
-#, fuzzy
-#~ msgid "Alignment:"
-#~ msgstr "Zarovnanie"
-
-#~ msgid "_Left"
-#~ msgstr "_Vľavo"
-
-#~ msgid "_Center"
-#~ msgstr "V _strede"
-
-#~ msgid "_Right"
-#~ msgstr "Vp_ravo"
-
-#, fuzzy
-#~ msgid "Height:"
-#~ msgstr "Výška :"
-
-#~ msgid "Width:"
-#~ msgstr "Šírka:"
-
-#~ msgid "Auto _hide taskbar"
-#~ msgstr "Automatické s_krývanie panelu úloh"
-
-#~ msgid "Show _pager in taskbar"
-#~ msgstr "Zobraziť pr_epínač plôch v panely úloh"
-
-#~ msgid "%A, %d %B %Y"
-#~ msgstr "%A, %-d. %B %Y"
-
-#~ msgid "Clock type:"
-#~ msgstr "Typ hodín:"
-
-#~ msgid "Hour mode:"
-#~ msgstr "Mód hodín:"
-
-#~ msgid "24 hour"
-#~ msgstr "24 hodinový"
-
-#~ msgid "12 hour"
-#~ msgstr "12 hodinový"
-
-#~ msgid "Show seconds:"
-#~ msgstr "Ukazovať sekundy:"
-
-#, fuzzy
-#~ msgid "Settings"
-#~ msgstr "Nastavenia panelu Xfce"
-
-#, fuzzy
-#~ msgid "Edit launcher"
-#~ msgstr "Pridať spúšťač"
-
-#, fuzzy
-#~ msgid "_Edit"
-#~ msgstr "Editor"
-
-#~ msgid "Mail box:"
-#~ msgstr "Poštová schránka:"
-
-#~ msgid "New mail command:"
-#~ msgstr "Príkaz novej pošty:"
-
-#~ msgid "Command to run when new mail arrives"
-#~ msgstr "Po príchode novej pošty spustiť príkaz"
-
-#~ msgid "Command to run when the button on the panel is clicked"
-#~ msgstr "Po kliknutí na panelové tlačidlo spustiť príkaz"
-
-#~ msgid "Interval (sec):"
-#~ msgstr "Interval (sek):"
-
-#~ msgid "Mail checker"
-#~ msgstr "Kontrola pošty"
-
-#~ msgid "Graphical pager"
-#~ msgstr "Grafický stránkovač"
-
-#~ msgid "Desktop switcher"
-#~ msgstr "Tlačidlový prepínač plôch"
-
-#~ msgid ""
-#~ "Access to the configuration system has been disabled.\n"
-#~ "\n"
-#~ "Ask your system administrator for more information"
-#~ msgstr ""
-#~ "Prístup ku konfigurácií systému bol zakázaný.\n"
-#~ "\n"
-#~ "Opýtajte sa svojho administrátora pre viac informácií"
-
-#, fuzzy
-#~ msgid "tip|Exit"
-#~ msgstr "Ukončiť prácu s Xfce"
-
-#, fuzzy
-#~ msgid "tip|Setup"
-#~ msgstr "Nastavenie"
-
-#, fuzzy
-#~ msgid "tip|Info"
-#~ msgstr "Informácie"
-
-#~ msgid "Exit"
-#~ msgstr "Ukončiť prácu s Xfce"
-
-#~ msgid "Setup"
-#~ msgstr "Nastavenie"
-
-#~ msgid "Info"
-#~ msgstr "Informácie"
-
-#~ msgid "Button 1:"
-#~ msgstr "Tlačidlo 1:"
-
-#~ msgid "Button 2:"
-#~ msgstr "Tlačidlo 2:"
-
-#, fuzzy
-#~ msgid "_Hide"
-#~ msgstr "_Pomocník"
-
-#~ msgid "System buttons"
-#~ msgstr "Systémové tlačidla"
-
-#, fuzzy
-#~ msgid "Iconbox Settings"
-#~ msgstr "Nastavenia panelu Xfce"
-
-#, fuzzy
-#~ msgid "Xfce 4 Iconbox Settings"
-#~ msgstr "Nastavenia panelu Xfce"
-
-#, fuzzy
-#~ msgid "Taskbar Settings"
-#~ msgstr "Panel úloh"
-
-#, fuzzy
-#~ msgid "Xfce 4 Taskbar Settings"
-#~ msgstr "Nastavenia panelu Xfce"
-
-#, fuzzy
-#~ msgid "File manager"
-#~ msgstr "Správa súborov"
-
-#, fuzzy
-#~ msgid "Printer Management"
-#~ msgstr "Správa súborov"
-
-#~ msgid "Removing the item will also remove its popup menu."
-#~ msgstr "Odstránením položky odstránite aj jej vyskakovacie menu."
-
-#~ msgid "Caption:"
-#~ msgstr "Nadpis:"
-
-#~ msgid "Tooltip:"
-#~ msgstr "Rada:"
-
-#~ msgid "Attach menu to launcher"
-#~ msgstr "Pridať menu k spúšťaču"
-
-#~ msgid "Change menu item"
-#~ msgstr "Zmeniť položku menu"
-
-#~ msgid "Click mouse button 3 to change item"
-#~ msgstr "Kliknite tretím tlačítkom myši k zmene položky"
-
-#~ msgid "Add launcher"
-#~ msgstr "Pridať spúšťač"
-
-#~ msgid "Left"
-#~ msgstr "Vľavo"
-
-#~ msgid "Right"
-#~ msgstr "Vpravo"
-
-#~ msgid "Top"
-#~ msgstr "Hore"
-
-#~ msgid "Bottom"
-#~ msgstr "Dole"
-
-#~ msgid "Popup position:"
-#~ msgstr "Pozícia pre vyskakovacie okno:"
-
-#, fuzzy
-#~ msgid "Notification Area"
-#~ msgstr "Upozorňovacia oblasť"
-
-#~ msgid "Menu"
-#~ msgstr "Menu"
-
-#~ msgid "Always on top:"
-#~ msgstr "Vždy na vrchu:"
-
-#~ msgid "Show _system tray in taskbar"
-#~ msgstr "Zobraziť sys_témovú lištu v panely úloh"
-
-#~ msgid "Cannot get initial style"
-#~ msgstr "Nemôžem získať východzí štýl"
-
-#~ msgid "This should not happen"
-#~ msgstr "Nemusí sa to podariť"
-
-#~ msgid "Cannot get default screen\n"
-#~ msgstr "Nemôžem získať prednastavenú obrazovku\n"
-
-#~ msgid "Cannot connect to session manager"
-#~ msgstr "Nemôžem sa pripojiť ku správcovi sedení"
-
-#~ msgid "Show two buttons:"
-#~ msgstr "Ukázať dve tlačidla:"
