--- a/po/vi.po
+++ b/po/vi.po
@@ -1,16 +1,16 @@
-# xfce4-panel for XFCE
-# Copyright (C) 2003 THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the xfwm4 package.
+# Vietnamese translations for xfce4-panel package.
+# Copyright (C) 2005 Jasper Huijsmans.
+# This file is distributed under the same license as the xfce4-panel package.
 # Lâm Vĩnh Niên <nienvl@yahoo.ca>, 2004.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: xfwm4 1.0.0\n"
+"Project-Id-Version: xfce4-panel 4.3.22\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-09-28 10:01+0200\n"
-"PO-Revision-Date: 2004-09-08 15:40+9\n"
+"POT-Creation-Date: 2005-09-29 20:47+0900\n"
+"PO-Revision-Date: 2005-09-29 20:44+0900\n"
 "Last-Translator: Lâm Vĩnh Niên <nienvl@yahoo.ca>\n"
-"Language-Team: none <LL@li.org>\n"
+"Language-Team: Vietnamese <gnomevi-list@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -85,7 +85,7 @@ msgstr ""
 msgid "Restart"
 msgstr "Khở_i động lại"
 
-#: ../panel/panel-item-manager.c:327 ../panel/panel-item-manager.c:335
+#: ../panel/panel-item-manager.c:353 ../panel/panel-item-manager.c:361
 #, fuzzy, c-format
 msgid "Could not open \"%s\" module"
 msgstr "Không thể tạo đề mục panel \"%s\"."
@@ -628,302 +628,3 @@ msgstr "Hiển thị _tên ứng dụng"
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
 msgstr ""
-
-#, fuzzy
-#~ msgid "Panel Settings"
-#~ msgstr "Các thiết lập Panel Xfce"
-
-#, fuzzy
-#~ msgid "Xfce 4 Panel Settings"
-#~ msgstr "Các thiết lập Panel Xfce"
-
-#~ msgid "No data was found. The panel will be empty."
-#~ msgstr "Không tìm thấy dữ liệu"
-
-#~ msgid "Position:"
-#~ msgstr "Vị trí:"
-
-#~ msgid "Command:"
-#~ msgstr "Lệnh"
-
-#~ msgid "Use startup _notification"
-#~ msgstr "Dùng thô_ng báo lúc khởi động"
-
-#~ msgid "Other Icon"
-#~ msgstr "Biểu tượng khác"
-
-#~ msgid "Drag file onto this frame to change the icon"
-#~ msgstr "Kéo tập tin vào khung này để đổi biểu tượng"
-
-#~ msgid "%s: Successfully started without session management"
-#~ msgstr "%s: Khởi động thành công không quản lí phiên làm việc"
-
-#~ msgid "%s: Successfully started with session management"
-#~ msgstr "%s: Khởi động thành công quản lí phiên làm việc"
-
-#~ msgid "Could not create panel item \"%s\"."
-#~ msgstr "Không thể tạo đề mục panel \"%s\"."
-
-#~ msgid "_Properties..."
-#~ msgstr "Đặ_c tính"
-
-#~ msgid "Add _new item"
-#~ msgstr "Thêm đề mục _mới"
-
-#~ msgid "This item has no configuration options"
-#~ msgstr "Đề mục này không có tuỳ chọn cấu hình"
-
-#~ msgid "_About Xfce"
-#~ msgstr "_Về Xfce"
-
-#~ msgid "_Help"
-#~ msgstr "_Giúp đỡ"
-
-#~ msgid "E_xit"
-#~ msgstr "_Thoát"
-
-#, fuzzy
-#~ msgid "icons|Terminal"
-#~ msgstr "Trạm cuối"
-
-#~ msgid "Settings manager not available"
-#~ msgstr "Không có trình quản lí các thiết lập"
-
-#~ msgid "Taskbar"
-#~ msgstr "Thanh tác vụ"
-
-#~ msgid "Cannot create MCS client channel"
-#~ msgstr "Không thể tạo kênh khách MCS"
-
-#, fuzzy
-#~ msgid "_About"
-#~ msgstr "_Về Xfce"
-
-#~ msgid "Medium"
-#~ msgstr "Trung"
-
-#~ msgid "Huge"
-#~ msgstr "Khổng lồ"
-
-#~ msgid "Autohide:"
-#~ msgstr "Tự động ẩn:"
-
-#~ msgid "Behaviour"
-#~ msgstr "Hành xử"
-
-#~ msgid "_Top"
-#~ msgstr "Đỉ_nh"
-
-#~ msgid "_Bottom"
-#~ msgstr "Đá_y"
-
-#, fuzzy
-#~ msgid "Alignment:"
-#~ msgstr "Canh hàng"
-
-#~ msgid "_Left"
-#~ msgstr "T_rái"
-
-#~ msgid "_Center"
-#~ msgstr "Giữ_a"
-
-#~ msgid "_Right"
-#~ msgstr "_Phải"
-
-#, fuzzy
-#~ msgid "Height:"
-#~ msgstr "Chiều cao :"
-
-#~ msgid "Width:"
-#~ msgstr "Bề rộng:"
-
-#~ msgid "Auto _hide taskbar"
-#~ msgstr "Tự động ẩn t_hanh tác vụ"
-
-#~ msgid "Show _pager in taskbar"
-#~ msgstr "Hiển thị trình chu_yển trang trên thanh tác vụ"
-
-#~ msgid "%A, %d %B %Y"
-#~ msgstr "%A, %d %B %Y"
-
-#~ msgid "Clock type:"
-#~ msgstr "Kiểu đồng hồ:"
-
-#~ msgid "Hour mode:"
-#~ msgstr "Chế độ giờ"
-
-#~ msgid "24 hour"
-#~ msgstr "24 giờ"
-
-#~ msgid "12 hour"
-#~ msgstr "12 giờ"
-
-#~ msgid "Show seconds:"
-#~ msgstr "Hiện giây"
-
-#, fuzzy
-#~ msgid "Settings"
-#~ msgstr "Các thiết lập Panel Xfce"
-
-#, fuzzy
-#~ msgid "Edit launcher"
-#~ msgstr "Thêm trình gọi"
-
-#, fuzzy
-#~ msgid "_Edit"
-#~ msgstr "Trình biên tập"
-
-#~ msgid "Mail box:"
-#~ msgstr "Hộp thư:"
-
-#~ msgid "New mail command:"
-#~ msgstr "Lệnh thư mới:"
-
-#~ msgid "Command to run when new mail arrives"
-#~ msgstr "Lệnh thi hành khi có thư mới đến"
-
-#~ msgid "Command to run when the button on the panel is clicked"
-#~ msgstr "Lệnh thi hành khi nhấp vào nút trên panel"
-
-#~ msgid "Interval (sec):"
-#~ msgstr "Thời khoảng (giây):"
-
-#~ msgid "Mail checker"
-#~ msgstr "Kiểm thư"
-
-#~ msgid "Graphical pager"
-#~ msgstr "Trình chuyển trang đồ hoạ"
-
-#~ msgid "Desktop switcher"
-#~ msgstr "Trình chuyển desktop"
-
-#~ msgid ""
-#~ "Access to the configuration system has been disabled.\n"
-#~ "\n"
-#~ "Ask your system administrator for more information"
-#~ msgstr ""
-#~ "Truy nhập hệ thống cấu hình đã bị bất hoạt.\n"
-#~ "\n"
-#~ "Hỏi nhà quản trị hệ thống để có thêm thông tin"
-
-#, fuzzy
-#~ msgid "tip|Exit"
-#~ msgstr "Thoát"
-
-#, fuzzy
-#~ msgid "tip|Setup"
-#~ msgstr "Thiết lập"
-
-#, fuzzy
-#~ msgid "tip|Info"
-#~ msgstr "Thông tin"
-
-#~ msgid "Exit"
-#~ msgstr "Thoát"
-
-#~ msgid "Setup"
-#~ msgstr "Thiết lập"
-
-#~ msgid "Info"
-#~ msgstr "Thông tin"
-
-#~ msgid "Button 1:"
-#~ msgstr "Nút 1:"
-
-#~ msgid "Button 2:"
-#~ msgstr "Nút 2:"
-
-#, fuzzy
-#~ msgid "_Hide"
-#~ msgstr "_Giúp đỡ"
-
-#~ msgid "System buttons"
-#~ msgstr "Các nút hệ thống"
-
-#, fuzzy
-#~ msgid "Iconbox Settings"
-#~ msgstr "Các thiết lập Panel Xfce"
-
-#, fuzzy
-#~ msgid "Xfce 4 Iconbox Settings"
-#~ msgstr "Các thiết lập Panel Xfce"
-
-#, fuzzy
-#~ msgid "Taskbar Settings"
-#~ msgstr "Thanh tác vụ"
-
-#, fuzzy
-#~ msgid "Xfce 4 Taskbar Settings"
-#~ msgstr "Các thiết lập Panel Xfce"
-
-#, fuzzy
-#~ msgid "File manager"
-#~ msgstr "Quản lí tập tin"
-
-#, fuzzy
-#~ msgid "Printer Management"
-#~ msgstr "Quản lí tập tin"
-
-#~ msgid "Removing the item will also remove its popup menu."
-#~ msgstr "Gỡ bỏ đề mục cũng sẽ gỡ bỏ thực đơn tắt của nó."
-
-#~ msgid "Caption:"
-#~ msgstr "Chú thích:"
-
-#~ msgid "Tooltip:"
-#~ msgstr "Lời chú."
-
-#~ msgid "Attach menu to launcher"
-#~ msgstr "Thêm vào trình gọi"
-
-#~ msgid "Change menu item"
-#~ msgstr "Chuyển đề mục thực đơn"
-
-#~ msgid "Click mouse button 3 to change item"
-#~ msgstr "Nhấp nút chuột 3 để đổi đề mục"
-
-#~ msgid "Add launcher"
-#~ msgstr "Thêm trình gọi"
-
-#~ msgid "Left"
-#~ msgstr "Trái"
-
-#~ msgid "Right"
-#~ msgstr "Phải"
-
-#~ msgid "Top"
-#~ msgstr "Đỉnh"
-
-#~ msgid "Bottom"
-#~ msgstr "Đáy"
-
-#~ msgid "Popup position:"
-#~ msgstr "Vị trí bật"
-
-#, fuzzy
-#~ msgid "Notification Area"
-#~ msgstr "Vùng thông báo"
-
-#~ msgid "Menu"
-#~ msgstr "Thực đơn"
-
-#~ msgid "Always on top:"
-#~ msgstr "Luôn luôn trên đỉnh:"
-
-#~ msgid "Show _system tray in taskbar"
-#~ msgstr "Hiển thị _khay hệ thống trên thanh tác vụ"
-
-#~ msgid "Cannot get initial style"
-#~ msgstr "Không thể lấy kiểu khởi đầu"
-
-#~ msgid "This should not happen"
-#~ msgstr "Điều này không nên xảy ra"
-
-#~ msgid "Cannot get default screen\n"
-#~ msgstr "Không thể lấy được màn hình mặc định\n"
-
-#~ msgid "Cannot connect to session manager"
-#~ msgstr "Không thể nối vào trình quản lí phiên"
-
-#~ msgid "Show two buttons:"
-#~ msgstr "Hiển thị hai nút:"
