--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -1,17 +1,17 @@
-# #-#-#-#-#  zh_CN.po (xfce4-panel 4.3.2)  #-#-#-#-#
-# Chinese translations for xfce-mcs-plugins package.
-# Copyright (C) 2002-2005 The Xfce development team.
+# #-#-#-#-#  zh_CN.po (xfce4-panel 4.3.22)  #-#-#-#-#
+# Simplified Chinese translations for xfce-mcs-plugins package.
+# Copyright (C) 2005 Jasper Huijsmans.
 # This file is distributed under the same license as the xfce4-panel package.
 # Yongtao Yang <yongtao.yang@telia.com>, 2004.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel 4.3.2\n"
+"Project-Id-Version: xfce4-panel 4.3.22\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-09-28 10:01+0200\n"
-"PO-Revision-Date: 2005-08-18 01:18+0900\n"
+"POT-Creation-Date: 2005-09-29 20:47+0900\n"
+"PO-Revision-Date: 2005-09-29 20:45+0900\n"
 "Last-Translator: Yongtao Yang <yongtao.yang@telia.com>\n"
-"Language-Team: Chinese <i18n-translation@lists.linux.net.cn>\n"
+"Language-Team: Simplified Chinese <i18n-translation@lists.linux.net.cn>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -86,7 +86,7 @@ msgstr ""
 msgid "Restart"
 msgstr "重新启动(_R)"
 
-#: ../panel/panel-item-manager.c:327 ../panel/panel-item-manager.c:335
+#: ../panel/panel-item-manager.c:353 ../panel/panel-item-manager.c:361
 #, fuzzy, c-format
 msgid "Could not open \"%s\" module"
 msgstr "无法创建条目 “%s ”。"
@@ -624,247 +624,3 @@ msgstr ""
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
 msgstr ""
-
-#, fuzzy
-#~ msgid "Panel Settings"
-#~ msgstr "Xfce面板配置"
-
-#, fuzzy
-#~ msgid "Xfce 4 Panel Settings"
-#~ msgstr "Xfce面板配置"
-
-#~ msgid "No data was found. The panel will be empty."
-#~ msgstr "未发现数据，面板内容将是空的。"
-
-#~ msgid "Position:"
-#~ msgstr "位置："
-
-#~ msgid "Command:"
-#~ msgstr "命令："
-
-#~ msgid "Use startup _notification"
-#~ msgstr "使用启动提示(_N)"
-
-#~ msgid "Other Icon"
-#~ msgstr "其它图标"
-
-#~ msgid "Drag file onto this frame to change the icon"
-#~ msgstr "拖拽文件到该框架中以改变图标"
-
-#~ msgid "%s: Successfully started without session management"
-#~ msgstr "%s：不带会话管理方式启动成功"
-
-#~ msgid "%s: Successfully started with session management"
-#~ msgstr "%s：带会话管理方式启动成功"
-
-#~ msgid "Could not create panel item \"%s\"."
-#~ msgstr "无法创建条目 “%s ”。"
-
-#~ msgid "_Properties..."
-#~ msgstr "属性(_P)..."
-
-#~ msgid "Add _new item"
-#~ msgstr "添加新条目(_N)"
-
-#~ msgid "This item has no configuration options"
-#~ msgstr "该条目没有配置选项"
-
-#~ msgid "_About Xfce"
-#~ msgstr "关于Xfce(_A)"
-
-#~ msgid "_Help"
-#~ msgstr "帮助(_H)"
-
-#~ msgid "E_xit"
-#~ msgstr "退出(_X)"
-
-#, fuzzy
-#~ msgid "icons|Terminal"
-#~ msgstr "终端"
-
-#~ msgid "Settings manager not available"
-#~ msgstr "配置管理器不可用"
-
-#, fuzzy
-#~ msgid "_About"
-#~ msgstr "关于Xfce(_A)"
-
-#~ msgid "Medium"
-#~ msgstr "中"
-
-#~ msgid "Huge"
-#~ msgstr "巨大"
-
-#~ msgid "Autohide:"
-#~ msgstr "自动隐藏："
-
-#~ msgid "Behaviour"
-#~ msgstr "行为"
-
-#, fuzzy
-#~ msgid "_Top"
-#~ msgstr "顶部"
-
-#, fuzzy
-#~ msgid "_Bottom"
-#~ msgstr "底部"
-
-#, fuzzy
-#~ msgid "_Left"
-#~ msgstr "左侧"
-
-#, fuzzy
-#~ msgid "_Right"
-#~ msgstr "右侧"
-
-#, fuzzy
-#~ msgid "Height:"
-#~ msgstr "右侧"
-
-#~ msgid "Clock type:"
-#~ msgstr "钟表类型:"
-
-#~ msgid "Hour mode:"
-#~ msgstr "小时显示模式："
-
-#~ msgid "24 hour"
-#~ msgstr "24小时"
-
-#~ msgid "12 hour"
-#~ msgstr "12小时"
-
-#~ msgid "Show seconds:"
-#~ msgstr "显示秒:"
-
-#, fuzzy
-#~ msgid "Edit launcher"
-#~ msgstr "添加启动器"
-
-#, fuzzy
-#~ msgid "_Edit"
-#~ msgstr "编辑器"
-
-#~ msgid "Mail box:"
-#~ msgstr "邮件箱:"
-
-#~ msgid "New mail command:"
-#~ msgstr "新邮件命令:"
-
-#~ msgid "Command to run when new mail arrives"
-#~ msgstr "当新邮件到达时所执行的命令"
-
-#~ msgid "Command to run when the button on the panel is clicked"
-#~ msgstr "在面板上点击该按钮时所执行的命令"
-
-#~ msgid "Interval (sec):"
-#~ msgstr "间隔(秒):"
-
-#~ msgid "Mail checker"
-#~ msgstr "邮件检查程序"
-
-#~ msgid "Graphical pager"
-#~ msgstr "图形化的窗口切换器"
-
-#~ msgid "Desktop switcher"
-#~ msgstr "桌面切换器"
-
-#~ msgid ""
-#~ "Access to the configuration system has been disabled.\n"
-#~ "\n"
-#~ "Ask your system administrator for more information"
-#~ msgstr ""
-#~ "配置系统的使用已被禁止。\n"
-#~ "\n"
-#~ "请向你的系统管理员咨询以得到更多的信息"
-
-#, fuzzy
-#~ msgid "tip|Exit"
-#~ msgstr "退出"
-
-#, fuzzy
-#~ msgid "tip|Setup"
-#~ msgstr "设置"
-
-#, fuzzy
-#~ msgid "tip|Info"
-#~ msgstr "信息"
-
-#~ msgid "Exit"
-#~ msgstr "退出"
-
-#~ msgid "Setup"
-#~ msgstr "设置"
-
-#~ msgid "Info"
-#~ msgstr "信息"
-
-#~ msgid "Button 1:"
-#~ msgstr "按钮1:"
-
-#~ msgid "Button 2:"
-#~ msgstr "按钮2:"
-
-#~ msgid "_Hide"
-#~ msgstr "隐藏(_H)"
-
-#~ msgid "System buttons"
-#~ msgstr "系统按钮"
-
-#, fuzzy
-#~ msgid "Iconbox Settings"
-#~ msgstr "Xfce面板配置"
-
-#, fuzzy
-#~ msgid "Xfce 4 Iconbox Settings"
-#~ msgstr "Xfce面板配置"
-
-#, fuzzy
-#~ msgid "Xfce 4 Taskbar Settings"
-#~ msgstr "Xfce面板配置"
-
-#, fuzzy
-#~ msgid "File manager"
-#~ msgstr "文件管理"
-
-#, fuzzy
-#~ msgid "Printer Management"
-#~ msgstr "文件管理"
-
-#~ msgid "Removing the item will also remove its popup menu."
-#~ msgstr "删除一个条目将同时删除其弹出菜单。"
-
-#~ msgid "Caption:"
-#~ msgstr "标题:"
-
-#~ msgid "Tooltip:"
-#~ msgstr "工具提示:"
-
-#~ msgid "Attach menu to launcher"
-#~ msgstr "将菜单附加到启动器"
-
-#~ msgid "Change menu item"
-#~ msgstr "改变菜单条目"
-
-#~ msgid "Click mouse button 3 to change item"
-#~ msgstr "点击鼠标右键以改变条目"
-
-#~ msgid "Add launcher"
-#~ msgstr "添加启动器"
-
-#~ msgid "Left"
-#~ msgstr "左侧"
-
-#~ msgid "Right"
-#~ msgstr "右侧"
-
-#~ msgid "Top"
-#~ msgstr "顶部"
-
-#~ msgid "Bottom"
-#~ msgstr "底部"
-
-#~ msgid "Popup position:"
-#~ msgstr "弹出菜单位置："
-
-#~ msgid "Menu"
-#~ msgstr "菜单"
