--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -1,4 +1,5 @@
-# Copyright (C) 2003 THE PACKAGE'S COPYRIGHT HOLDER
+# Traditional Chinese translations for xfce4-panel package.
+# Copyright (C) 2005 Jasper Huijsmans.
 # This file is distributed under the same license as the xfce4-panel package.
 # umm <umm@pchome.com.tw>, 2003.
 # Ambrose Li <acli@ada.dhs.org>, 2004.
@@ -6,12 +7,12 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel\n"
+"Project-Id-Version: xfce4-panel 4.3.22\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-09-28 10:01+0200\n"
-"PO-Revision-Date: 2005-09-08 23:20+0800\n"
+"POT-Creation-Date: 2005-09-29 20:47+0900\n"
+"PO-Revision-Date: 2005-09-29 20:46+0900\n"
 "Last-Translator: Hydonsingore Cia <hydonsingore@mail.educities.edu.tw>\n"
-"Language-Team: \n"
+"Language-Team: Traditional Chinese <zh-l10n@linux.org.tw>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -87,7 +88,7 @@ msgstr ""
 msgid "Restart"
 msgstr "重新啟動(_R)"
 
-#: ../panel/panel-item-manager.c:327 ../panel/panel-item-manager.c:335
+#: ../panel/panel-item-manager.c:353 ../panel/panel-item-manager.c:361
 #, fuzzy, c-format
 msgid "Could not open \"%s\" module"
 msgstr ""
@@ -641,295 +642,3 @@ msgstr "只顯示最小化的應用程式(_S)"
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
 msgstr ""
-
-#~ msgid "Panel Settings"
-#~ msgstr "設定面板"
-
-#~ msgid "Xfce 4 Panel Settings"
-#~ msgstr "Xfce 4 面板設定"
-
-#~ msgid "No data was found. The panel will be empty."
-#~ msgstr "找不到任何資料，面板將會留空。"
-
-#~ msgid "Position:"
-#~ msgstr "位置："
-
-#~ msgid "Command:"
-#~ msgstr "指令："
-
-#~ msgid "Use startup _notification"
-#~ msgstr "使用啟動提示(_N)"
-
-#~ msgid "Other Icon"
-#~ msgstr "其他圖示"
-
-# NOTE 譯文改動by Ambrose
-#~ msgid "Drag file onto this frame to change the icon"
-#~ msgstr "要改變圖示，拖曳檔案到此框架內即可"
-
-#~ msgid "%s: Successfully started without session management"
-#~ msgstr "%s: 成功啟動，但無法使用工作階段管理"
-
-#~ msgid "%s: Successfully started with session management"
-#~ msgstr "%s: 成功啟動，並使用工作階段管理"
-
-#~ msgid "Could not create panel item \"%s\"."
-#~ msgstr "無法建立面板項目「%s」。"
-
-#~ msgid "_Properties..."
-#~ msgstr "屬性(_P)..."
-
-#~ msgid "_Remove"
-#~ msgstr "移除(_R)"
-
-#~ msgid "This item has no configuration options"
-#~ msgstr "該項目沒有設定選項"
-
-#~ msgid "_About Xfce"
-#~ msgstr "關於 Xfce(_A)"
-
-#~ msgid "_Help"
-#~ msgstr "說明(_H)"
-
-#~ msgid "E_xit"
-#~ msgstr "離開(_X)"
-
-#~ msgid "icons|Terminal"
-#~ msgstr "圖示|終端機"
-
-#~ msgid "Settings manager not available"
-#~ msgstr "設定管理程式無法使用"
-
-#~ msgid "%H:%M"
-#~ msgstr "%H:%M"
-
-#~ msgid "Taskbar"
-#~ msgstr "工作列"
-
-#~ msgid "Cannot create MCS client channel"
-#~ msgstr "無法建立 MCS 用戶通道"
-
-#~ msgid "_About"
-#~ msgstr "關於(_A)"
-
-#~ msgid "Medium"
-#~ msgstr "中"
-
-#~ msgid "Huge"
-#~ msgstr "巨大"
-
-#~ msgid "Autohide:"
-#~ msgstr "自動隱藏："
-
-#~ msgid "Behaviour"
-#~ msgstr "特性"
-
-#~ msgid "_Top"
-#~ msgstr "頂部(_T)"
-
-#~ msgid "_Bottom"
-#~ msgstr "底部(_B)"
-
-#~ msgid "Alignment:"
-#~ msgstr "對齊"
-
-#~ msgid "_Left"
-#~ msgstr "左邊(_L)"
-
-#~ msgid "_Center"
-#~ msgstr "中間(_C)"
-
-#~ msgid "_Right"
-#~ msgstr "右邊(_R)"
-
-#~ msgid "Height:"
-#~ msgstr "高度："
-
-#~ msgid "Width:"
-#~ msgstr "闊度："
-
-#~ msgid "_Shrink to fit"
-#~ msgstr "適度縮小(_S)"
-
-#~ msgid "Auto _hide taskbar"
-#~ msgstr "自動隱藏工作列(_H)"
-
-#~ msgid "Show tasklist"
-#~ msgstr "顯示工作列表"
-
-#~ msgid "Show _pager in taskbar"
-#~ msgstr "在工作列中顯示頁面切換器(_P)"
-
-#~ msgid "Status area"
-#~ msgstr "狀態區"
-
-#~ msgid "General"
-#~ msgstr "一般"
-
-#~ msgid "Components"
-#~ msgstr "元件"
-
-#~ msgid "Icon size"
-#~ msgstr "圖示大小"
-
-# NOTE 假如中文內碼為UTF8, 日期格式是「xxxx年xx月xx日　星期ｘ」
-# NOTE 但如果中文內碼為五大碼，GTK會無法顯示星期，變成只有「xxxx年xx月xx日」
-# NOTE 詳情請參見 http://bugzilla.xfce.org/show_bug.cgi?id=332
-#~ msgid "%A, %d %B %Y"
-#~ msgstr "%Y年%B月%d日　%A"
-
-#~ msgid "Clock type:"
-#~ msgstr "時鐘樣式："
-
-#~ msgid "Hour mode:"
-#~ msgstr "時間模式："
-
-#~ msgid "24 hour"
-#~ msgstr "24 小時"
-
-#~ msgid "12 hour"
-#~ msgstr "12 小時"
-
-#~ msgid "Show seconds:"
-#~ msgstr "顯示秒："
-
-#~ msgid "Flexible space"
-#~ msgstr "彈性空間"
-
-#~ msgid "Development"
-#~ msgstr "開發"
-
-#~ msgid "Settings"
-#~ msgstr "設定"
-
-#~ msgid "System"
-#~ msgstr "系統"
-
-#~ msgid "Windows programs"
-#~ msgstr "Windows程式"
-
-#~ msgid "Edit launcher"
-#~ msgstr "編輯啟動器"
-
-#~ msgid "_Edit"
-#~ msgstr "編輯(_E)"
-
-#~ msgid "_Up"
-#~ msgstr "上(_U)"
-
-#~ msgid "_Down"
-#~ msgstr "下(_D)"
-
-#~ msgid "_Add"
-#~ msgstr "新增(_A)"
-
-#~ msgid "Mail box:"
-#~ msgstr "郵件箱："
-
-#~ msgid "New mail command:"
-#~ msgstr "新郵件指令："
-
-#~ msgid "Command to run when new mail arrives"
-#~ msgstr "有新郵件時所執行的指令"
-
-#~ msgid "Command to run when the button on the panel is clicked"
-#~ msgstr "在面板上點選該按鈕時所執行的指令"
-
-#~ msgid "Interval (sec):"
-#~ msgstr "間隔（秒）："
-
-#~ msgid "Mail checker"
-#~ msgstr "檢查郵件"
-
-#~ msgid "Graphical pager"
-#~ msgstr "圖形化視窗切換器"
-
-#~ msgid "Desktop switcher"
-#~ msgstr "桌面切換器"
-
-#~ msgid ""
-#~ "Access to the configuration system has been disabled.\n"
-#~ "\n"
-#~ "Ask your system administrator for more information"
-#~ msgstr ""
-#~ "設定系統的作業已被禁止。\n"
-#~ "\n"
-#~ "詳情請向你的系統管理員諮詢"
-
-#~ msgid "tip|Exit"
-#~ msgstr "退出"
-
-#~ msgid "tip|Setup"
-#~ msgstr "設定"
-
-#~ msgid "tip|Info"
-#~ msgstr "資訊"
-
-#~ msgid "Exit"
-#~ msgstr "退出"
-
-#~ msgid "Setup"
-#~ msgstr "設定"
-
-#~ msgid "Info"
-#~ msgstr "資訊"
-
-#~ msgid "Button 1:"
-#~ msgstr "按鈕 1："
-
-#~ msgid "Button 2:"
-#~ msgstr "按鈕 2："
-
-#~ msgid "_Hide"
-#~ msgstr "隱藏(_H)"
-
-#~ msgid "System buttons"
-#~ msgstr "系統按鈕"
-
-#~ msgid "Iconbox Settings"
-#~ msgstr "設定圖示盒"
-
-#~ msgid "Xfce 4 Iconbox Settings"
-#~ msgstr "Xfce 4 圖示盒設定"
-
-#~ msgid "Taskbar Settings"
-#~ msgstr "設定 Xfce 4 的工作列"
-
-#~ msgid "Xfce 4 Taskbar Settings"
-#~ msgstr "Xfce 4 工作列設定"
-
-#~ msgid "Appfinder"
-#~ msgstr "程式搜尋器"
-
-#~ msgid "Drag file to print"
-#~ msgstr "拖弋檔案去列印"
-
-#~ msgid "File manager"
-#~ msgstr "檔案管理器"
-
-#~ msgid "Find and run applications"
-#~ msgstr "尋找並執行應用程式"
-
-#~ msgid "Konqueror"
-#~ msgstr "Konqueror"
-
-#~ msgid "Konqueror File Manager"
-#~ msgstr "Konqueror檔案管理器"
-
-#~ msgid "Manual"
-#~ msgstr "手冊"
-
-#~ msgid "Mozilla Web Browser"
-#~ msgstr "Mozilla網頁瀏覽器"
-
-#~ msgid "Music player"
-#~ msgstr "音樂播放程式"
-
-#~ msgid "Nautilus"
-#~ msgstr "Nautilus"
-
-#~ msgid "Nautilus File Manager"
-#~ msgstr "Nautilus檔案管理器"
-
-#~ msgid "Printer Management"
-#~ msgstr "列印管理"
